--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/00/intro/1/01.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/00/intro/1/01.md
@@ -4,51 +4,51 @@ title = "01 Part 1 - The Present Work"
 +++
 ## 1. General History of the Study
 
-Since the West came to know of the Sanskrit literature through William Jones’s translation of the Śakuntalā[^1], the nature and origin of the ancient Indian theatre have always interested scholars, especially the Sanskritists, all over the world. H. H. Wilson who published in 1826 the first volume of his famous work on the subject[^2] deplored that the Nātyaśāstra, mentioned and quoted in several commentaries and other works, had been lost for ever[^3]. F. Hall who published in 1865 his edition of the Daśarūpa[^4], a medieval work on the Hindu dramaturgy, did not see any Ms. of the Nāṭyaśāstra till his work had greatly advanced[^5]. And for the time being he printed the relevant chapters of the Nāṭyaśāstra as an appendix to his Daśarūpa. Later on he undertook to critically edit the Ms. of the Nāṭyaśāstra he acquired; but this venture was subsequently given up, due perhaps to an insufficiency of materials which consisted of one unique Ms. full of numerous *lacunae*.[^6] But even if the work could not be brought out by Hall, his very important discovery soon helped others to trace similar Mss. elsewhere. And in 1874 Heymann, a German scholar, published on the basis of Mss. discovered up till that date a valuable article[^7] on the contents of the Nāṭyaśāstra. This seems to have been instrumental in attracting competent scholars to the study of this very important text. The French Sanskritist P. Regnaud published in 1880 chapter XVII[^8] and in 1884 chapter XV (in part) and the chapter XVI[^9] of the Nāṭyaśāstra. This was soon followed by his publication of chapters VI and VII in 1884.[^10] And J. Grosset another French scholar and a pupil of Regnaud, published later on (in 1888) chapter XXVIII[^11] of the Nāṭyaśāstra which treated of the general theory of Hindu music.
+Since the West came to know of the Sanskrit literature through William Jones’s translation of the Śakuntalā[^mg1], the nature and origin of the ancient Indian theatre have always interested scholars, especially the Sanskritists, all over the world. H. H. Wilson who published in 1826 the first volume of his famous work on the subject[^mg2] deplored that the Nātyaśāstra, mentioned and quoted in several commentaries and other works, had been lost for ever[^mg3]. F. Hall who published in 1865 his edition of the Daśarūpa[^mg4], a medieval work on the Hindu dramaturgy, did not see any Ms. of the Nāṭyaśāstra till his work had greatly advanced[^mg5]. And for the time being he printed the relevant chapters of the Nāṭyaśāstra as an appendix to his Daśarūpa. Later on he undertook to critically edit the Ms. of the Nāṭyaśāstra he acquired; but this venture was subsequently given up, due perhaps to an insufficiency of materials which consisted of one unique Ms. full of numerous *lacunae*.[^mg6] But even if the work could not be brought out by Hall, his very important discovery soon helped others to trace similar Mss. elsewhere. And in 1874 Heymann, a German scholar, published on the basis of Mss. discovered up till that date a valuable article[^mg7] on the contents of the Nāṭyaśāstra. This seems to have been instrumental in attracting competent scholars to the study of this very important text. The French Sanskritist P. Regnaud published in 1880 chapter XVII[^mg8] and in 1884 chapter XV (in part) and the chapter XVI[^mg9] of the Nāṭyaśāstra. This was soon followed by his publication of chapters VI and VII in 1884.[^mg10] And J. Grosset another French scholar and a pupil of Regnaud, published later on (in 1888) chapter XXVIII[^mg11] of the Nāṭyaśāstra which treated of the general theory of Hindu music.
 
 
-[^11]:  Contribution a l'étude de la musique hindou, Lyons, 1888.
+[^mg11]:  Contribution a l'étude de la musique hindou, Lyons, 1888.
 
 
-[^10]:  Rhetorique sanscrite, Paris, 1814.
+[^mg10]:  Rhetorique sanscrite, Paris, 1814.
 
 
-[^9]:  La metrique de Bharata, texte Sanscrit de deux chapitres du Nāṭyaśāstra public pour premier fois et suivi d’une, interpretation francaise, Annales due Musee Guimet, Tome, II, 1884, pp. 65 ff.
+[^mg9]:  La metrique de Bharata, texte Sanscrit de deux chapitres du Nāṭyaśāstra public pour premier fois et suivi d’une, interpretation francaise, Annales due Musee Guimet, Tome, II, 1884, pp. 65 ff.
 
 
-[^8]:  Le dix-septieme chapitre du Bhāratīya-naṭyaśātra. Annales du Musee Guimet; Tome, l. 1880, pp. 85 ff.
+[^mg8]:  Le dix-septieme chapitre du Bhāratīya-naṭyaśātra. Annales du Musee Guimet; Tome, l. 1880, pp. 85 ff.
 
 
-[^7]:  Ueber Bharata’s Naṭyaśāstram in Nachrichten von der Koeniglischen Gesellschaft der Wissenschaften, Goetingen 1874, pp. 86 ff. Ref, Grosset, Introduction p x; ID. pp 2-3.
+[^mg7]:  Ueber Bharata’s Naṭyaśāstram in Nachrichten von der Koeniglischen Gesellschaft der Wissenschaften, Goetingen 1874, pp. 86 ff. Ref, Grosset, Introduction p x; ID. pp 2-3.
 
 
-[^6]:  See note 5 above.
+[^mg6]:  See note 5 above.
 
 
-[^5]:  Grosset, Introduction, v. iij.
+[^mg5]:  Grosset, Introduction, v. iij.
 
 
-[^4]:  The Daśarūpa by Dhananjaya (Bibliotheca Indica), Calcutta, 1861-1865.
+[^mg4]:  The Daśarūpa by Dhananjaya (Bibliotheca Indica), Calcutta, 1861-1865.
 
 
-[^3]:  Wilson, p. 37. Grosset, Introduction, p. iij.
+[^mg3]:  Wilson, p. 37. Grosset, Introduction, p. iij.
 
 
-[^2]:  H. H. Wilson, Select Specimens of the Theatre of the Hindus (3 vols), Calcutta. 1826-1827.
+[^mg2]:  H. H. Wilson, Select Specimens of the Theatre of the Hindus (3 vols), Calcutta. 1826-1827.
 
 
-[^1]:  Sacontalā, or the Fatal Ring. Translated from the original Sanskrit and Pracrita, Calcutta 1789.
+[^mg1]:  Sacontalā, or the Fatal Ring. Translated from the original Sanskrit and Pracrita, Calcutta 1789.
 
-But the different chapters of the work and studies on them, which were published up till 1888, though very helpful for the understanding of some aspects of the ancient Indian dramatic works cannot be said to have thrown any considerable light on the exact nature of the ancient Hindu plays, especially the manner of their production on the stage. Sylvain Lévi’s Théatre indien (1890) in which he discussed comprehensively the contribution of his predecessors in the field and added to it greatly by his own researches, made unfortunately no great progress in this specific direction. Though he had access to three more or less complete Mss. of the Nāṭyaśāstra, Lévi does not seem to have made any serious attempt to make a close study of the entire work except its chapters XVII-XX (XVIII-XXII of our text) and XXXIV. The reason for his relative indifference to the contents of the major portion (nearly nine-tenths) of the work, seem to be principally the corrupt nature of his Ms. materials, like his predecessors, Lévi paid greater attention to the study of the literary form of the ancient Hindu plays with the difference that he utilised for the first time the relevant chapters of the Nāṭyaśāstra,[^12] to check the accuracy of the statements of later writers on the subject like Dhanañjaya[^13] and Viśvanātha[^14] who professed their dependence on the Nāṭyaśāstra. But whatever may be the drawback of Lévis magnificient work, it did an excellent service to the history of ancient Indian drama by focussing the attention of scholars on the great importance of the Nāṭyaśāstra. Almost simultaneously two Sanskritists in India as well as one in the West were planning its publication. In 1894 Pandits Shivadatta and Kashinath Pandurang Parab published from Bombay the original Sanskrit text of the work.[^15] This was followed in 1898 by J. Grosset’s[^16] critical edition of its chapters I-XIV based on all the Mss. available up till that date.
-
-
-[^16]:  Treats du Bharata sur le Theatre. Tex to sanscrit, Edition critique. Tome 1. Partie, 1. (Annales de I’Universite de Lyons, Fasc. 40, 1898)
+But the different chapters of the work and studies on them, which were published up till 1888, though very helpful for the understanding of some aspects of the ancient Indian dramatic works cannot be said to have thrown any considerable light on the exact nature of the ancient Hindu plays, especially the manner of their production on the stage. Sylvain Lévi’s Théatre indien (1890) in which he discussed comprehensively the contribution of his predecessors in the field and added to it greatly by his own researches, made unfortunately no great progress in this specific direction. Though he had access to three more or less complete Mss. of the Nāṭyaśāstra, Lévi does not seem to have made any serious attempt to make a close study of the entire work except its chapters XVII-XX (XVIII-XXII of our text) and XXXIV. The reason for his relative indifference to the contents of the major portion (nearly nine-tenths) of the work, seem to be principally the corrupt nature of his Ms. materials, like his predecessors, Lévi paid greater attention to the study of the literary form of the ancient Hindu plays with the difference that he utilised for the first time the relevant chapters of the Nāṭyaśāstra,[^mg12] to check the accuracy of the statements of later writers on the subject like Dhanañjaya[^mg13] and Viśvanātha[^mg14] who professed their dependence on the Nāṭyaśāstra. But whatever may be the drawback of Lévis magnificient work, it did an excellent service to the history of ancient Indian drama by focussing the attention of scholars on the great importance of the Nāṭyaśāstra. Almost simultaneously two Sanskritists in India as well as one in the West were planning its publication. In 1894 Pandits Shivadatta and Kashinath Pandurang Parab published from Bombay the original Sanskrit text of the work.[^mg15] This was followed in 1898 by J. Grosset’s[^mg16] critical edition of its chapters I-XIV based on all the Mss. available up till that date.
 
 
-[^15]:  Śrī Bharatamuni-praṇītam, Nāṭyaśāstram, (Karyamala, 42) Bombay, 1894.
+[^mg16]:  Treats du Bharata sur le Theatre. Tex to sanscrit, Edition critique. Tome 1. Partie, 1. (Annales de I’Universite de Lyons, Fasc. 40, 1898)
 
 
-[^14]:  The author of the Sāhityadarpaṇa. See below.
+[^mg15]:  Śrī Bharatamuni-praṇītam, Nāṭyaśāstram, (Karyamala, 42) Bombay, 1894.
+
+
+[^mg14]:  The author of the Sāhityadarpaṇa. See below.
 
 
 [^13]:  The author of the Dasarūpa. See above note 4.
