--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/00/intro/1/02.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/00/intro/1/02.md
@@ -6,39 +6,39 @@ title = "02 Part 2 - The Ancient Indian Theory of Drama"
 
 The word “Nāṭya” has often been translated as ‘drama’ and the plays of ancient India have indeed some points of similarity with those of the Greeks. But on a closer examination of the technique of their production as described in the Nāṭyaśāstra, the Hindu dramas represented by the available specimens, will appear to be considerably different. Unless this important fact is borne in mind any discussion on the subject is liable to create a wrong impression. As early as 1890 Sylvain Lévi (pp. 423-424) noticed that Indian Nāṭya differed from the Greek drama from which the Westerners derived their early conception of the art. Though it is not possible to agree with Lévi on all points about the various aspects of this difference and the causes which he attributed to them, no one can possibly have any serious objection against his finding that, “Le *nāṭaka* par se nature autant que par son nom se rapproache de la dance scenique; le *drame* est l’action même” (*loc, cit*), Lévi however did not for reasons stated above fully utilize in this connection the Nāṭyaśāstra which contains ample materials for clarifying his conclusion.
 
-The essential nature of the (Nāṭya) derived from its etymology cannot by any means be called fanciful. For in the Harivaṃśa[^1] (c. 200 A.C) we meet with an expression like *nāṭakaṃ nanṛtuḥ* (they danced a play) and the Karpūramañjarī[^2] (c. 1000 A. C.) has an expression like *saṭṭaṃ naccidavvaṃ* (a Saṭṭaka is to be danced or acted).
+The essential nature of the (Nāṭya) derived from its etymology cannot by any means be called fanciful. For in the Harivaṃśa[^mg1] (c. 200 A.C) we meet with an expression like *nāṭakaṃ nanṛtuḥ* (they danced a play) and the Karpūramañjarī[^mg2] (c. 1000 A. C.) has an expression like *saṭṭaṃ naccidavvaṃ* (a Saṭṭaka is to be danced or acted).
 
 
-[^2]:  Ed. M. Ghosh, p. 80.
+[^mg2]:  Ed. M. Ghosh, p. 80.
 
 
-[^1]:  Viṣṇuparvan, Ch. 93.81.28.
+[^mg1]:  Viṣṇuparvan, Ch. 93.81.28.
 
 The terms like *rūpaka* or *rūpa* (representation) and *prekṣā* (spectacle), all denoting dramatic works, also characterise the Hindu dramas and show their difference from the drama of the Greeks who laid emphasis on action and not on the spectacle. Of the sir parts of the tragedy, the most typical of the Greek dramatic productions, Aristotle puts emphasis on the fable or the plot and considers decoration to be unimportant. On tips point the philosopher says:
 
-“Terror and pity may be raised by decoration—the mere spectacle; but they may also arise from the circumstance of the action itself, which is far preferable and shows a superior poet, For the fable should be so constructed that without the assistance of the sight its incidents may excite horror and commisseration in those who hear them only; \* \* \* \* But to produce this effect by means of the decoration discovers want of art in the poet; who must also be supplied with an expensive apparatus” (II.XIII).[^3]
+“Terror and pity may be raised by decoration—the mere spectacle; but they may also arise from the circumstance of the action itself, which is far preferable and shows a superior poet, For the fable should be so constructed that without the assistance of the sight its incidents may excite horror and commisseration in those who hear them only; \* \* \* \* But to produce this effect by means of the decoration discovers want of art in the poet; who must also be supplied with an expensive apparatus” (II.XIII).[^mg3]
 
-But in case of the Hindu dramas the decoration (*i.e*., the costumes and make-up) mostly plays an important part. Equally with five other elements such as gestures and postures (*āṅgika*), words (*vācika*), the representation of the Temperament (*sattva*), it gives the Nāṭya its characteristic form. But in the theatre of the Greeks, it was not the case. In the performance of the tragedies, for example, they did not care much for the spectcale, if the declamation was properly made. For Aristotle himself says that, “the power of tragedy is felt without representation and actors” (II.III).[^4]
-
-
-
-[^4]:  ibid. p. 17.
-
-[^3]:  Poetics (Everymans Library), p. 27.
-
-Another peculiarity of the Hindu dramas was their general dependence on dance (*nṛtya*), song (*gīta*), and instrumental music (*vādya*). Though the chorus of the Greek tragedy introduced in it some sort of dance and songs, the function of these elements seem to have been considerably different in the Hindu drama. The ancient Indian play was produced through words, gestures, postures, costumes, make-up, songs and dances of actors, and the instrumental music was played during the performance whenever necessary. But these different elements did not play an equal part in all the plays or different types of play. According as the emphasis was to be put on words, music, or dance, a play or its individual part partook of the nature of what the moderns would call ‘drama’, ‘opera’, ‘ballet’ or ‘dramatic spectacle’[^5]. Due to this nature the Hindu dramas which connected themselves in many ways with song, dance and instrumental music, had a literary form which was to some extent different from that of the ancient Greeks. But it was not so much due to this literary form as to the technique of their production on the stage that the Hindu dramas received their special character.
+But in case of the Hindu dramas the decoration (*i.e*., the costumes and make-up) mostly plays an important part. Equally with five other elements such as gestures and postures (*āṅgika*), words (*vācika*), the representation of the Temperament (*sattva*), it gives the Nāṭya its characteristic form. But in the theatre of the Greeks, it was not the case. In the performance of the tragedies, for example, they did not care much for the spectcale, if the declamation was properly made. For Aristotle himself says that, “the power of tragedy is felt without representation and actors” (II.III).[^mg4]
 
 
-[^5]:  H.H. Wilson, On the Dramatic System of the Hindus, Calcutta, 1827, pp. 16.20.
+
+[^mg4]:  ibid. p. 17.
+
+[^mg3]:  Poetics (Everymans Library), p. 27.
+
+Another peculiarity of the Hindu dramas was their general dependence on dance (*nṛtya*), song (*gīta*), and instrumental music (*vādya*). Though the chorus of the Greek tragedy introduced in it some sort of dance and songs, the function of these elements seem to have been considerably different in the Hindu drama. The ancient Indian play was produced through words, gestures, postures, costumes, make-up, songs and dances of actors, and the instrumental music was played during the performance whenever necessary. But these different elements did not play an equal part in all the plays or different types of play. According as the emphasis was to be put on words, music, or dance, a play or its individual part partook of the nature of what the moderns would call ‘drama’, ‘opera’, ‘ballet’ or ‘dramatic spectacle’[^mg5]. Due to this nature the Hindu dramas which connected themselves in many ways with song, dance and instrumental music, had a literary form which was to some extent different from that of the ancient Greeks. But it was not so much due to this literary form as to the technique of their production on the stage that the Hindu dramas received their special character.
+
+
+[^mg5]:  H.H. Wilson, On the Dramatic System of the Hindus, Calcutta, 1827, pp. 16.20.
 
 After forming a general idea of this Nāṭya, from the various terms used to denote it, one should enquire what the ancient Indian theorists exactly meant by the term (Nāṭya) or what they regarded as being the essence of the dramatic art as opposed to the arts of poetry, fiction or painting. To satisfy, our curiosity on this point the Nāṭyaśāstra gives us the following passage which may pass for a definition of the Nāṭya.
 
 “A mimicry of the exploits of gods, the Asuras, kings as well as of householders in this world, is called drama” (1.120).
 
-This description seems to fall in a line with Cicero’s view that “drama is a copy of life, a mirror of custom, a reflection of truth”. In this statement Cicero evidently takes his cue from Aristotle who considered that the art in general consisted of imitation (*mimesis*). But this does not help us very much to ascertain the nature of drama as an example of ‘imitation’. For the Greek philosopher nowhere defines this very essentially important term. So when he declares that “epic poetry, tragedy, comedy, dythrambics as also for the most part the music of the flute and of the lyre all these are in the most general view of them imitations”[^6], one can at best guess how drama imitates. There seems to be no such difficulty about understanding the view of the Hindu theorists. The Nāṭyaśāstra lays down very elaborate rules as to how the drama is to make mimicry of the exploits of men and their divine or semi-divine counterparts. It is due to rules of representation that the Hindu drama has been cal led by the later theorists ‘a poem to be seen’ (SD. 270-271). By this term epic or narrative poetry and fiction etc. are at once distinguished from drama which is preminently a spectacle including a mimicry of activities of mortals, gods or demigods. It may now be asked what exactly was meant by the word mimicry (*anukaraṇa*) used by the Indian theorists. Did this mean a perfect reproduction of the reality? For an answer to this question we are to look into the conventions of the Hindu drama.
+This description seems to fall in a line with Cicero’s view that “drama is a copy of life, a mirror of custom, a reflection of truth”. In this statement Cicero evidently takes his cue from Aristotle who considered that the art in general consisted of imitation (*mimesis*). But this does not help us very much to ascertain the nature of drama as an example of ‘imitation’. For the Greek philosopher nowhere defines this very essentially important term. So when he declares that “epic poetry, tragedy, comedy, dythrambics as also for the most part the music of the flute and of the lyre all these are in the most general view of them imitations”[^mg6], one can at best guess how drama imitates. There seems to be no such difficulty about understanding the view of the Hindu theorists. The Nāṭyaśāstra lays down very elaborate rules as to how the drama is to make mimicry of the exploits of men and their divine or semi-divine counterparts. It is due to rules of representation that the Hindu drama has been cal led by the later theorists ‘a poem to be seen’ (SD. 270-271). By this term epic or narrative poetry and fiction etc. are at once distinguished from drama which is preminently a spectacle including a mimicry of activities of mortals, gods or demigods. It may now be asked what exactly was meant by the word mimicry (*anukaraṇa*) used by the Indian theorists. Did this mean a perfect reproduction of the reality? For an answer to this question we are to look into the conventions of the Hindu drama.
 
 
-[^6]:  Poetics, p. 5.
+[^mg6]:  Poetics, p. 5.
 
 
 
@@ -50,10 +50,10 @@ That the Hindu theorists turned their attention very early to the problem of dra
 
 ## 3. Time and place in Drama
 
-Hindu playwrights, unlike the majority of Greek tragedians, did never make any attempt to restrict the fictional action to a length of time roughly similar to that taken up by the production of a drama on the stage. In developing plots they had not much restriction on the length of time, provided that individual Acts were to include incidents that could take place in course of a single day, and nothing could be put in there to interrupt the routine duties such as saying prayers or taking meals (XX 23), and the lapse of time between two Acts, which might be a month or a year (but never more than a year)[^7] was to be indicated by an Introductory Scene (*praveśaka*) preceding the last one (XX. 27-28).
+Hindu playwrights, unlike the majority of Greek tragedians, did never make any attempt to restrict the fictional action to a length of time roughly similar to that taken up by the production of a drama on the stage. In developing plots they had not much restriction on the length of time, provided that individual Acts were to include incidents that could take place in course of a single day, and nothing could be put in there to interrupt the routine duties such as saying prayers or taking meals (XX 23), and the lapse of time between two Acts, which might be a month or a year (but never more than a year)[^mg7] was to be indicated by an Introductory Scene (*praveśaka*) preceding the last one (XX. 27-28).
 
 
-[^7]:  Bhavabhūti however violates the rule in his Uttara, in letting many years pass between Acts I and II.
+[^mg7]:  Bhavabhūti however violates the rule in his Uttara, in letting many years pass between Acts I and II.
 
 Similarly there was almost no restriction about the locality to which individual Actors, and gods in their human roles were to be assigned, except that the human characters were always to be placed in India *i.e*. Bhāratavarṣa (XX. 97).
 
@@ -71,7 +71,7 @@ An Act was not to present too many incidents (XX.24), and such subsidiary events
 
 ## 5. Criticism of Drama
 
-Indians from very early times considered plays to be essentially ‘spectacle’ (*prekṣā*) or ‘things’ to be visualised; hence persons attending the performance of a play were always referred to (XXVII. 48-57) as ‘spectators’ or ‘observers’ (*prekṣaka*)[^8] and never as audience (*śrotṛ*), although there was always the speech element in it, which was a tiling to be heard. This disposes of the question of judging the value of a drama except in connection with its production on the stage This importance of the representational aspect of a play has possibly behind it an historical reason. Though in historical times we find written dramas produced on the stage, this was probably not the case in very early times, and the dialogues which contribute an important part of the drama were often improvised on the stage by the actors[^9], and this practice seems to have continued in certain classes of folk-plays till the late medieval times[^10]. Hence the drama naturally continued to bo looked upon by Indians as spectacles even after great playwright creators like Bhāsa, Kālidāsa, Śūdraka, and Bhavabhūti had written their dramas which in spite of their traditional form were literary master-pieces.
+Indians from very early times considered plays to be essentially ‘spectacle’ (*prekṣā*) or ‘things’ to be visualised; hence persons attending the performance of a play were always referred to (XXVII. 48-57) as ‘spectators’ or ‘observers’ (*prekṣaka*)[^mg8] and never as audience (*śrotṛ*), although there was always the speech element in it, which was a tiling to be heard. This disposes of the question of judging the value of a drama except in connection with its production on the stage This importance of the representational aspect of a play has possibly behind it an historical reason. Though in historical times we find written dramas produced on the stage, this was probably not the case in very early times, and the dialogues which contribute an important part of the drama were often improvised on the stage by the actors[^9], and this practice seems to have continued in certain classes of folk-plays till the late medieval times[^10]. Hence the drama naturally continued to bo looked upon by Indians as spectacles even after great playwright creators like Bhāsa, Kālidāsa, Śūdraka, and Bhavabhūti had written their dramas which in spite of their traditional form were literary master-pieces.
 
 
 [^10]:  The Kṛṣṇakirtana, a collection of Middle Bengali songs on Kṛṣṇa and Rādhā’s love-affairs, seems to have been the musical framework of a drama. We saw in our early boyhood that extemporised dialogues wore a special feature of the old type Bengali Yātrās. These have totally disappeared now under the influence of modern theatre which depend on thoroughly written plays.
