--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/00/intro/1/03.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/00/intro/1/03.md
@@ -4,10 +4,10 @@ title = "03 Part 3 - Literary Structure of the Drama"
 +++
 ## 1. Ten Types of Play
 
-*The Nāṭaka*. To understand the literary structure of the Hindu drama, it will be convenient to take up first of all the Nāṭaka which is the most important of the ten kinds of play described in the Nāṭyaśāstra[^1].
+*The Nāṭaka*. To understand the literary structure of the Hindu drama, it will be convenient to take up first of all the Nāṭaka which is the most important of the ten kinds of play described in the Nāṭyaśāstra[^mg1].
 
 
-[^1]:  NŚ. ignores the Uparūpakas. For these see SD. NL. and BhP. etc.
+[^mg1]:  NŚ. ignores the Uparūpakas. For these see SD. NL. and BhP. etc.
 
 ### (a) Subject-matter and division into Acts.
 
@@ -17,10 +17,10 @@ As the exploits of the Hero of the Nāṭaka have been restricted to his success
 
 The first thing that attracts the attention of reader on opening a Nāṭaka, is its Prologue (*sthāpanā* or *prastavanā*). But according to the Nāṭyaśāstra this was a part of the Preliminaries (*pūrvaraṅga*) and was outside the scope of the play proper (V.171). That famous playwrights like Bhāsa, Kālidāsa and others wrote it themselves and made it the formal beginning of their dramas, seems to show that they made in this matter an innovation which as great creative geniuses they were fully entitled to.
 
-But unlike the Greek plays the Hindu Nāṭakas are divided into Acts the number of which must not be less than five or more than ten (XX.57). These Acts, however, are not a set of clearly divided scenes as they usually are in modern western compositions of this category. An Act of the Hindu drama consists of a series of more or less loosely connected scenes[^2] which due to its peculiar technique could not be separated from one another. It has three important characteristics.
+But unlike the Greek plays the Hindu Nāṭakas are divided into Acts the number of which must not be less than five or more than ten (XX.57). These Acts, however, are not a set of clearly divided scenes as they usually are in modern western compositions of this category. An Act of the Hindu drama consists of a series of more or less loosely connected scenes[^mg2] which due to its peculiar technique could not be separated from one another. It has three important characteristics.
 
 
-[^2]:  See note 2 in IV. below.
+[^mg2]:  See note 2 in IV. below.
 
 \(i\) Only the royal Hero, his queen, minister, and similar other important personages are to be made prominent in it and not any minor character (XX.18). This rule seems to be meant for securing the unity of impression which has been referred to before.
 
@@ -52,17 +52,17 @@ And these have been further subdivided and described to give detailed hints as t
 
 Kālidāsa’s Śakuntalā and Bhāsa’s Svapna-vāsavadattā are well-known examples of the Nāṭaka.
 
-*The Prakaraṇa*. The second species of Hindu play, is the Prakaraṇa which resembles the Nāṭaka in all respects except that “it takes a rather less elevated range”. Its Plot is to be original and drawn from real life and the most appropriate theme is love. The Hero may be a Brahmin, merchant, minister, priest, an officer of the king or a leader of the army (XX.49-51). The female characters include a courtezan or a depraved woman of good family (XX.53)[^3]. But the courtezan should not meet the Hero when he is in the company of a lady or gentleman of high family, and if the courtezans and respectable ladies must meet on any account they are to keep their language and manners undistorted (XX.55-56). From these and other features, the Prakaraṇa has been called a bourgeois comedy or comedy of manners of a rank below royalty.
+*The Prakaraṇa*. The second species of Hindu play, is the Prakaraṇa which resembles the Nāṭaka in all respects except that “it takes a rather less elevated range”. Its Plot is to be original and drawn from real life and the most appropriate theme is love. The Hero may be a Brahmin, merchant, minister, priest, an officer of the king or a leader of the army (XX.49-51). The female characters include a courtezan or a depraved woman of good family (XX.53)[^mg3]. But the courtezan should not meet the Hero when he is in the company of a lady or gentleman of high family, and if the courtezans and respectable ladies must meet on any account they are to keep their language and manners undistorted (XX.55-56). From these and other features, the Prakaraṇa has been called a bourgeois comedy or comedy of manners of a rank below royalty.
 
 
-[^3]:  Wilson who did not see the N.Ś., said, “We may however observe to the honour of the Hindu drama that the parakīyā or she who is the wife of another is ne??r to be mate the object of dramatic intrigue, a prohibition which could sadly have cooled the imagination and curbed the wit of Dryden and Congreve (Select S pecimens of Hindu Theatre, Vol. I. p. xiv.).
+[^mg3]:  Wilson who did not see the N.Ś., said, “We may however observe to the honour of the Hindu drama that the parakīyā or she who is the wife of another is ne??r to be mate the object of dramatic intrigue, a prohibition which could sadly have cooled the imagination and curbed the wit of Dryden and Congreve (Select S pecimens of Hindu Theatre, Vol. I. p. xiv.).
 
 Śūdrakas Mṛcchakaṭika and Bhavabhūti’s Mālatīmādhava are well-known examples of the Prakaraṇa.
 
-*The Samavakāra*. The Samavakāra is the dramatic representation of some mythological story which relates to gods and some well-known Asura, who must be its Hero. It should consist of three Acts which are to take for their performance eighteen Nāḍikās (seven hours and twelve minutes).[^4] Of these the first Act is to take twelve and the second four and the third two Nāḍikās only. The subject-matter of the Samuvakāra should present deception, excitement or love, and the number of characters allowed in it are twelve. And besides this, metres used in it should be of the complex kind (XX.63-76).
+*The Samavakāra*. The Samavakāra is the dramatic representation of some mythological story which relates to gods and some well-known Asura, who must be its Hero. It should consist of three Acts which are to take for their performance eighteen Nāḍikās (seven hours and twelve minutes).[^mg4] Of these the first Act is to take twelve and the second four and the third two Nāḍikās only. The subject-matter of the Samuvakāra should present deception, excitement or love, and the number of characters allowed in it are twelve. And besides this, metres used in it should be of the complex kind (XX.63-76).
 
 
-[^4]:  See H.H. Wilson, On the Dramatic System of the Hindus, Calcutta, 1827, p. 16.
+[^mg4]:  See H.H. Wilson, On the Dramatic System of the Hindus, Calcutta, 1827, p. 16.
 
 No old specimen of this type of drama has reached us. From the description given in the Nāṭyaśāstra it seems that the Samavakāra was not a fully developed drama, but only a dramatic spectacle on the sasis (basis?) of a mythological story. It naturally became extinct with the development and production of full fledged literary dramas such as those of Bhāsa and Kālidāsa.
 
