--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/00/intro/1/04.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/00/intro/1/04.md
@@ -56,10 +56,10 @@ Avadhuta: When the head is once turned down it is called the Avadhuta. (Uses): i
 
 Añcita: When the neck is slightly bent on one side the Añcita head is the result. (Uses): It is applicable in sickness, swoon, intoxication anxiety and sorrow.
 
-Nihañcita: when two shoulders are raised up with the nock bent on one side the Nihañcita head is produced. (Uses): It is to be used by women in pride, Amorousness (*vilāsa*), Light-heartedness (*lalita*). Affected Indifffírence (*bibboka*), Hysterical Mood (*kilakiñcita*). Silent Expression of Affection (*moṭṭāyita*), Pretented Anger (*kuṭṭamita*)[^1]; Paralysis (*stambha*) and Jealous Anger (*māna*).
+Nihañcita: when two shoulders are raised up with the nock bent on one side the Nihañcita head is produced. (Uses): It is to be used by women in pride, Amorousness (*vilāsa*), Light-heartedness (*lalita*). Affected Indifffírence (*bibboka*), Hysterical Mood (*kilakiñcita*). Silent Expression of Affection (*moṭṭāyita*), Pretented Anger (*kuṭṭamita*)[^mg1]; Paralysis (*stambha*) and Jealous Anger (*māna*).
 
 
-[^1]:  For the definition of all these terms together with the preceding ones see NŚ. XXLV.15, 18-22.
+[^mg1]:  For the definition of all these terms together with the preceding ones see NŚ. XXLV.15, 18-22.
 
 Parāvṛtta: when the face is turned round, the Parāvṛtta head is the result. (Uses): It is to be used in turning away the face, and looking back and the like.
 
@@ -95,15 +95,15 @@ The production of an impression by means of painted scenery would have been alie
 
 There being no scenery of any kind in the Hindu theatre which made no effort at realism, the spectators were required to use their imagination to the utmost. The demand on the spectator’s imagination made by the ancient Indian producers of plays was further testified by their rules of conventional Zonal division (*kakṣā-vibhāga*) of the stage (XIV.1-15), Some of these are as follows:
 
-A Zone might change with the actor walking a few steps over the stage.[^2] Any ancient Hindu play will furnish numerous examples of this convention. For example in the first Act of the Śakuntalā the king appears for the first time at a distance from Kaṇva’s hermitage, but shortly afterwards he enters it by simply taking a few steps over the stage, looking around and saying. “This is the entrance of hermitage and let me enter it”.
+A Zone might change with the actor walking a few steps over the stage.[^mg2] Any ancient Hindu play will furnish numerous examples of this convention. For example in the first Act of the Śakuntalā the king appears for the first time at a distance from Kaṇva’s hermitage, but shortly afterwards he enters it by simply taking a few steps over the stage, looking around and saying. “This is the entrance of hermitage and let me enter it”.
 
 
-[^2]:  Due to this kind of convention, scenes of the Hindu plays were not clearly separated as they are in a modern drama. This puzzled F. Hall who says: “So far as is known, Hindu dramas have always been parted into acts; but never have they had scenes. It is somewhat to be wondered at, that the Hindus, with their ?nordinate love for subdivision, should have left those univented. (Introduction to Daśarūpa, pp. 28-20.”
+[^mg2]:  Due to this kind of convention, scenes of the Hindu plays were not clearly separated as they are in a modern drama. This puzzled F. Hall who says: “So far as is known, Hindu dramas have always been parted into acts; but never have they had scenes. It is somewhat to be wondered at, that the Hindus, with their ?nordinate love for subdivision, should have left those univented. (Introduction to Daśarūpa, pp. 28-20.”
 
-By the same kind of convention the inside and outside of a house was simultaneously presented.[^3] The rule relating to this was as follows: According to the Zonal division, those who entered the stage earlier should be taken as being inside [a house] while those entering it later are known to be as remaining outside it. He who enters the stage with the intention of seeing them (*i.e*. those entering earlier) should report himself after turning to the right. To indicate going to a distant locality one is to walk a good few steps over the stage and to indicate going to a place near by, a short walk only is needed, while a walk of medium duration will indicate going to a place of medium distance, But in case a person leaves one country and goes to a distant land, this is to bo indicated by closing the Act in which such an event occurs, and mentioning again the same fact in an Explanatory Scene at the beginning of the next Act.
+By the same kind of convention the inside and outside of a house was simultaneously presented.[^mg3] The rule relating to this was as follows: According to the Zonal division, those who entered the stage earlier should be taken as being inside [a house] while those entering it later are known to be as remaining outside it. He who enters the stage with the intention of seeing them (*i.e*. those entering earlier) should report himself after turning to the right. To indicate going to a distant locality one is to walk a good few steps over the stage and to indicate going to a place near by, a short walk only is needed, while a walk of medium duration will indicate going to a place of medium distance, But in case a person leaves one country and goes to a distant land, this is to bo indicated by closing the Act in which such an event occurs, and mentioning again the same fact in an Explanatory Scene at the beginning of the next Act.
 
 
-[^3]:  See note 2 above.
+[^mg3]:  See note 2 above.
 
 An example of some of these conventional rules occurs in the ninth Act of the Mṛcchakaṭika where Śodhanaka appears first as being at the gate of the court of justice and enters it by making a pantomimic movement; then again he goes out to receive the judge and re-enters, the courtroom after him by simply walking over the same stage. And when the judge has started work, Śodhanaka again goes out to call for the complainants. This going out also consists of actually walking a few steps over the stage.
 
