--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/00/intro/1/05.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/00/intro/1/05.md
@@ -14,50 +14,50 @@ After Śilālin and Kṛśāśva come the writers whose names have been included
 
 ### (a) *Kohala*
 
-Among the writers on drama who wrote after Śilālin and Kṛśāśva, Kohala seems to be the most important. In the extant version of the Nāṭyaśāstra (XXXVI.63), it is given in the form of a prophecy that Kohala will discuss in a supplementary treatise all those topics on drama that have not been touched by Bharata. From quotations of his works made by Abhinava[^1] and another commentator,[^2] as well as from their references to his opinion, it appears that Kohala wrote on dance and dramaturgy as well as historionics and music.
+Among the writers on drama who wrote after Śilālin and Kṛśāśva, Kohala seems to be the most important. In the extant version of the Nāṭyaśāstra (XXXVI.63), it is given in the form of a prophecy that Kohala will discuss in a supplementary treatise all those topics on drama that have not been touched by Bharata. From quotations of his works made by Abhinava[^mg1] and another commentator,[^mg2] as well as from their references to his opinion, it appears that Kohala wrote on dance and dramaturgy as well as historionics and music.
 
 
-[^2]:  BhP. pp. 204, 210, 236, 245, 251.
+[^mg2]:  BhP. pp. 204, 210, 236, 245, 251.
 
 
-[^1]:  Ag I. pp. 173, 182, 183-184; II p. 26, 55, 130, 133, 142, 146, 148. 151, 155, 407, 416-417, 421,434, 438-439, 413, 452,459; De Ms. p. 413, 436, 496, 521, 680.
+[^mg1]:  Ag I. pp. 173, 182, 183-184; II p. 26, 55, 130, 133, 142, 146, 148. 151, 155, 407, 416-417, 421,434, 438-439, 413, 452,459; De Ms. p. 413, 436, 496, 521, 680.
 
 ### (b) *Dattila*, *Śāṇḍilyā*, and *Vātsya*
 
-Dattila seems to be identical with Dantila or Dhūrtila mentioned in the Nāṭyaśāstra (I.26). Abhinava too quotes from one Dattilācārya[^3] and it is likely that he is not other than this Dattila. From these quotations it appears that he wrote on histrionics and music. Śāṇḍilya and Vātsya mentioned in the Nāṭyaśāstra (XXXVI.63) along with Dattila (Dhūrtila) are to us nothing but mere names. It is possible that they were writers on some aspects of drama and theatre.
+Dattila seems to be identical with Dantila or Dhūrtila mentioned in the Nāṭyaśāstra (I.26). Abhinava too quotes from one Dattilācārya[^mg3] and it is likely that he is not other than this Dattila. From these quotations it appears that he wrote on histrionics and music. Śāṇḍilya and Vātsya mentioned in the Nāṭyaśāstra (XXXVI.63) along with Dattila (Dhūrtila) are to us nothing but mere names. It is possible that they were writers on some aspects of drama and theatre.
 
 
-[^3]:  Ag. I. p. 205, Besides this Ag. quotes and refers to Dattila no less than 14 times while commenting on chapter on music. Sea De’s Ms. pp. 544, 573, 576, 580, 583, 588, 590 624, 625, 628, 633, 638? 640, 642, 644, 650, 656. See also Kuṭṭa śl. 123.
+[^mg3]:  Ag. I. p. 205, Besides this Ag. quotes and refers to Dattila no less than 14 times while commenting on chapter on music. Sea De’s Ms. pp. 544, 573, 576, 580, 583, 588, 590 624, 625, 628, 633, 638? 640, 642, 644, 650, 656. See also Kuṭṭa śl. 123.
 
 ### (c) *Śātakarṇi* (*Śātakarṇa*, *Śālikarṇa*).
 
-Śātakarṇi as a proper name is found in inscriptions from the first century B.C. to 149 A.C. Hence it is possible (though not quite certain) that Śātakarṇi the writer on drama flourished about the first century A.C.[^4] Like kings in later times who were sometimes found to take interest among other subjects in drama and poetics and to write treatises on them, this Śātakarṇi might well have been a king or a person of royal descent. From the quotations made by later writers[^5] from him it appears he wrote on dramaturgy.
+Śātakarṇi as a proper name is found in inscriptions from the first century B.C. to 149 A.C. Hence it is possible (though not quite certain) that Śātakarṇi the writer on drama flourished about the first century A.C.[^mg4] Like kings in later times who were sometimes found to take interest among other subjects in drama and poetics and to write treatises on them, this Śātakarṇi might well have been a king or a person of royal descent. From the quotations made by later writers[^mg5] from him it appears he wrote on dramaturgy.
 
 
-[^5]:  NL. 1101-1102, Rucipati’s Comm, on AR. p. 7.
+[^mg5]:  NL. 1101-1102, Rucipati’s Comm, on AR. p. 7.
 
 
-[^4]:  Solect Inscriptions, pp. 191-207.
+[^mg4]:  Solect Inscriptions, pp. 191-207.
 
 ### (d) *Aśmakuṭṭa* and *Nakhakuṭṭa*.
 
-These two writers from their names appear to have been contemporaries, probably belonged to the same locality. Sāgaranandin[^6] and Viśvanātha[^7] quote from Nakhakuṭṭa, and Sāgara only is known to have quoted from Aśmakuṭṭa[^8], From these quotations it appears that Aśmakuṭṭa and Nakhakuṭṭa wrote on dramaturgy.
+These two writers from their names appear to have been contemporaries, probably belonged to the same locality. Sāgaranandin[^mg6] and Viśvanātha[^mg7] quote from Nakhakuṭṭa, and Sāgara only is known to have quoted from Aśmakuṭṭa[^mg8], From these quotations it appears that Aśmakuṭṭa and Nakhakuṭṭa wrote on dramaturgy.
 
 
-[^8]:  83, 437. 2766-2767, 2774-2775.
+[^mg8]:  83, 437. 2766-2767, 2774-2775.
 
 
-[^7]:  SD. 294, Nakhakuṭṭa has also been mentioned by Bahurūpa in his Comm, on Dasarūpa (Indian and Iranian Studies presented to D. Ross, Bombay, p. 201), p. 201 f.n.
+[^mg7]:  SD. 294, Nakhakuṭṭa has also been mentioned by Bahurūpa in his Comm, on Dasarūpa (Indian and Iranian Studies presented to D. Ross, Bombay, p. 201), p. 201 f.n.
 
 
-[^6]:  NL. 2768-2769, 2904-2905.
+[^mg6]:  NL. 2768-2769, 2904-2905.
 
 ### (e) *Bādarāyaṇa* (*Bādari*).
 
-Sāgara quotes from Bādarāyaṇa twice[^9] and possibly names him once as Bādari, and from the extracts quoted it seems that this early writer discussed dramaturgy.
+Sāgara quotes from Bādarāyaṇa twice[^mg9] and possibly names him once as Bādari, and from the extracts quoted it seems that this early writer discussed dramaturgy.
 
 
-[^9]:  NL. 1092-1094, 2770-2771.
+[^mg9]:  NL. 1092-1094, 2770-2771.
 
 
 
