--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/00/intro/1/08.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/00/intro/1/08.md
@@ -2,10 +2,10 @@
 title = "08 Part 8 - The Date of the Nāṭyaśāstra"
 
 +++
-More than sixteen years ago, a careful investigation of the linguistic, metrical, geographical and ethnographic data, of the evidence to be drawn from the history of poetics and music, of the Kāmaśāstra and the Arthaśāstra, and from inscriptions the present writer came to the conclusion that the available text of the Nāṭyaśāstra existed in the second century after Christ, while the tradition which it recorded may go back to a period as early as 100B.C. (The Date of Bharata-Nāṭyaśāstra, in the JDL. Vol. XXV. 1934).[^1] Since this conclusion was made, a more intensive study of the text as well as accession of fresh data has confirmed the writer’s belief in its soundness. These additional materials are being discussed below.
+More than sixteen years ago, a careful investigation of the linguistic, metrical, geographical and ethnographic data, of the evidence to be drawn from the history of poetics and music, of the Kāmaśāstra and the Arthaśāstra, and from inscriptions the present writer came to the conclusion that the available text of the Nāṭyaśāstra existed in the second century after Christ, while the tradition which it recorded may go back to a period as early as 100B.C. (The Date of Bharata-Nāṭyaśāstra, in the JDL. Vol. XXV. 1934).[^mg1] Since this conclusion was made, a more intensive study of the text as well as accession of fresh data has confirmed the writer’s belief in its soundness. These additional materials are being discussed below.
 
 
-[^1]:  For a bibliography on the Date of the NŚ. see this paper p. 1.
+[^mg1]:  For a bibliography on the Date of the NŚ. see this paper p. 1.
 
 
 
@@ -69,10 +69,10 @@ The cumulative effect of all these data seems to be that they may enable us to p
 
 ## 6. The Nāṭyaśāstra earlier than Bhāsa
 
-Lack of conformity to the dramaturgic rules of the Nātyaśāstra has sometimes been cited as an evidence of the antiquity of Bhāsa, the argument being that as he wrote before the rules were formulated, he could not observe them. This view however, seems to be mistaken. For the rules occurring in the Nāṭyaśāstra cannot, for obvious reasons, be the author's fabrication without relation to any pre-existent literature.[^2] If the Nāṭyaśāstra was written after Bhāsa’s plays, its rules had every chance of having been a generalisation from them as well as from numerous other dramatic works existing at the time, while the contrary being the case (*i.e*., Bhāsa being later than the Nāṭyaśāstra) some novelties are likely to be introduced by the dramatist in disregard of the existing rules. It is on this line of argument that the chronological relation between Bhāsa and the Nāṭyśāstra, will be judged below.
+Lack of conformity to the dramaturgic rules of the Nātyaśāstra has sometimes been cited as an evidence of the antiquity of Bhāsa, the argument being that as he wrote before the rules were formulated, he could not observe them. This view however, seems to be mistaken. For the rules occurring in the Nāṭyaśāstra cannot, for obvious reasons, be the author's fabrication without relation to any pre-existent literature.[^mg2] If the Nāṭyaśāstra was written after Bhāsa’s plays, its rules had every chance of having been a generalisation from them as well as from numerous other dramatic works existing at the time, while the contrary being the case (*i.e*., Bhāsa being later than the Nāṭyaśāstra) some novelties are likely to be introduced by the dramatist in disregard of the existing rules. It is on this line of argument that the chronological relation between Bhāsa and the Nāṭyśāstra, will be judged below.
 
 
-[^2]:  F. Hall in his Introduction (p. 12) to the Daśarūpa says: At all events, he (Bharata).would hardly have elaborated them (the rules) except as inductions, from actual compositions.
+[^mg2]:  F. Hall in his Introduction (p. 12) to the Daśarūpa says: At all events, he (Bharata).would hardly have elaborated them (the rules) except as inductions, from actual compositions.
 
 **(a)** On no less than three points, Bhāsa seems to have disregarded the rules of the Nāṭyaśāstra. These are as follows:
 
@@ -96,9 +96,9 @@ Hence it may be assumed that the Nāṭyaśāstra was completed before the adven
 
 On the basis of all these it may be assumed that Bhāsa was acquainted with the contents of the present text of the Nāṭyaśāstra. Hence it may be placed in the 2nd centuary A.C. ie. one century before the time generally assigned to Bhāsa’s works. (Jolly, Introduction to AŚ. p. 10, but according to Konow Bhāsa’s date may bo the 2nd century A.C. See ID. p. 51).
 
-From the foregoing discussions it may be reasonable to assume the existence of the Nāṭyaśāstra in the 2nd century A.C., though it must not be supposed that the work remained uninterfered with by interpolators of later ages. Such an interpolation may exist more or less in all the ancient texts. For example, Aristotle’s Poetics too, in its received text, has been suspected to have interpolated passages in it. There are indeed interpolated passages in the Nāṭyaśāstra and some of these have been pointed out[^3] and a few more may by some chance be discovered afterwards. But this may not bring down the work as a whole to later times.
+From the foregoing discussions it may be reasonable to assume the existence of the Nāṭyaśāstra in the 2nd century A.C., though it must not be supposed that the work remained uninterfered with by interpolators of later ages. Such an interpolation may exist more or less in all the ancient texts. For example, Aristotle’s Poetics too, in its received text, has been suspected to have interpolated passages in it. There are indeed interpolated passages in the Nāṭyaśāstra and some of these have been pointed out[^mg3] and a few more may by some chance be discovered afterwards. But this may not bring down the work as a whole to later times.
 
 
-[^3]:  See notes on XVIII.6, 48; XX.63. Besides these cases, the seventeen couplets after XV.101 and the five couplets after XVI.169 are spurious. For these do not give any important information regarding the art of the theatre or dramaturgy and may be merely scholastic additions. The passage on pravṛttis XIV.36-55 may also bo spurious.
+[^mg3]:  See notes on XVIII.6, 48; XX.63. Besides these cases, the seventeen couplets after XV.101 and the five couplets after XVI.169 are spurious. For these do not give any important information regarding the art of the theatre or dramaturgy and may be merely scholastic additions. The passage on pravṛttis XIV.36-55 may also bo spurious.
 
 
