--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/00/intro/2/02.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/00/intro/2/02.md
@@ -4,13 +4,13 @@ title = "02 Part 2 - The Ancient Indian Theory and Practice of Music"
 +++
 ## 1. *The Indian Conception of Music*
 
-Though music occupied a very important place in the life of Indians of ancient time, one single word such as “Gāndharva” denoting all its different aspects (vocal as well as instrumental) appears only in the middle of the 4th century B.C.[^1] This word occurs in the Jātakas. For according to the Guttila Jātaka (no.243) the legendary Brahmadatta was born in a family of Gandharvas (musicians), and after gaining a great proficiency in the art of music he came to be known as a Gandharva. As this Jātaka mentions playing of a Vīnā, and the two kinds of Mūrchanā[^2] in this connection, the word Gāndharva in the sense of music may well be pre-Buddhistic. And it is certainly not later than 200 B.C. For it occurs in the Hāthigumphā inscription of Khārvela. In earlier times, *gīta* (song) and *vādya* (instrumental music) were separately mentioned, or the compound word *gītavāditra* (Pali, *gītavāditta*) represented music in its totality. But dance and drama (*nṛtta*, *nṛtya* and *nāṭya*) were very closely associated with music vocal and instrumental, from ancient times, possibly long before the time of Buddha. For *prekṣā* (Pali, *pekkhā*) was an equivalent of “Nāṭya” which included *nṛtta*, *gīta* and *vāditra*. Buddha forbade the monks to witness it (*pekkha*) as well as the separate performances of *nṛtta*, *gīta* and *vāditra*. Due to this very close association of the three arts, there came into vogue in about the 3rd century A.C. the word “Saṃgīta” for signifying by means of a single term all the different phases of music including dance. For, according to Indian conception, dance (*nṛtta, nṛtya*) owing its origin to rhythm like its vocal and instrumental counterparts, was a kind of music, the vehicle of rhythm in this case being human body with its different limbs. The Nāṭya also depending on *nṛtta*, *nṛtya* and *abhinaya* (gesture) belonged to the category of dance. Probably these facts led dance especially in its connexion with all kinds of dramatic spectacles, to a substantial union with music.
+Though music occupied a very important place in the life of Indians of ancient time, one single word such as “Gāndharva” denoting all its different aspects (vocal as well as instrumental) appears only in the middle of the 4th century B.C.[^mg1] This word occurs in the Jātakas. For according to the Guttila Jātaka (no.243) the legendary Brahmadatta was born in a family of Gandharvas (musicians), and after gaining a great proficiency in the art of music he came to be known as a Gandharva. As this Jātaka mentions playing of a Vīnā, and the two kinds of Mūrchanā[^mg2] in this connection, the word Gāndharva in the sense of music may well be pre-Buddhistic. And it is certainly not later than 200 B.C. For it occurs in the Hāthigumphā inscription of Khārvela. In earlier times, *gīta* (song) and *vādya* (instrumental music) were separately mentioned, or the compound word *gītavāditra* (Pali, *gītavāditta*) represented music in its totality. But dance and drama (*nṛtta*, *nṛtya* and *nāṭya*) were very closely associated with music vocal and instrumental, from ancient times, possibly long before the time of Buddha. For *prekṣā* (Pali, *pekkhā*) was an equivalent of “Nāṭya” which included *nṛtta*, *gīta* and *vāditra*. Buddha forbade the monks to witness it (*pekkha*) as well as the separate performances of *nṛtta*, *gīta* and *vāditra*. Due to this very close association of the three arts, there came into vogue in about the 3rd century A.C. the word “Saṃgīta” for signifying by means of a single term all the different phases of music including dance. For, according to Indian conception, dance (*nṛtta, nṛtya*) owing its origin to rhythm like its vocal and instrumental counterparts, was a kind of music, the vehicle of rhythm in this case being human body with its different limbs. The Nāṭya also depending on *nṛtta*, *nṛtya* and *abhinaya* (gesture) belonged to the category of dance. Probably these facts led dance especially in its connexion with all kinds of dramatic spectacles, to a substantial union with music.
 
 
-[^2]:  In the Śatapatha Brāhmaṇa the Uttaramandrā Mūrchanā has been mentioned. See JAOS Vol. 50, 53 and Journal Univ. of Baroda Vol. II, pp. 263ff.
+[^mg2]:  In the Śatapatha Brāhmaṇa the Uttaramandrā Mūrchanā has been mentioned. See JAOS Vol. 50, 53 and Journal Univ. of Baroda Vol. II, pp. 263ff.
 
 
-[^1]:  Though some of the Jātakas may be as old as the time of Buddha, all of them may not reach back to such antiquity. But it may be that they were in existence in the 4th century B.C., cf. Winternitz, Vol. II. p. 121.
+[^mg1]:  Though some of the Jātakas may be as old as the time of Buddha, all of them may not reach back to such antiquity. But it may be that they were in existence in the 4th century B.C., cf. Winternitz, Vol. II. p. 121.
 
 ## 2. *The Vocal Music*
 
@@ -18,31 +18,31 @@ Though the vocal music was perhaps the oldest of human arts, its analytical stud
 
 ### (a) *Śrutis*.
 
-Though the ancient Indian authorities differ from one another about the meaning of the word, it may be translated as “inervals” or “musical intervals”[^3] which make up the notes of the octave (corresponding to Indian *saptaka*) in its different Grāmas.[^4] The number of Śrutis in the Ṣaḍja Grāma are as follows: three in Ṛṣabha (ri), two in Gāndhāra (ga), four in Madhyama (ma), four in Pañcama (pa), three in Dhaivata (dha), two in the Niṣāda (ni) and four in Ṣaḍja (sa)[^5] And the number of Śrutis in the Madhyama Grāma are as follows: four in Madhyama (ma), three in Pañcama (pa), four in Dhaivata (dha), two in Niṣāda (ni), four in the Ṣaḍja, three in Ṛṣabha (ri) and two in Gāndhāra (ga).[^6]
+Though the ancient Indian authorities differ from one another about the meaning of the word, it may be translated as “inervals” or “musical intervals”[^mg3] which make up the notes of the octave (corresponding to Indian *saptaka*) in its different Grāmas.[^mg4] The number of Śrutis in the Ṣaḍja Grāma are as follows: three in Ṛṣabha (ri), two in Gāndhāra (ga), four in Madhyama (ma), four in Pañcama (pa), three in Dhaivata (dha), two in the Niṣāda (ni) and four in Ṣaḍja (sa)[^mg5] And the number of Śrutis in the Madhyama Grāma are as follows: four in Madhyama (ma), three in Pañcama (pa), four in Dhaivata (dha), two in Niṣāda (ni), four in the Ṣaḍja, three in Ṛṣabha (ri) and two in Gāndhāra (ga).[^mg6]
 
 
 
-[^6]:  See XXVIII. 27. 28.
+[^mg6]:  See XXVIII. 27. 28.
 
-[^5]:  See XXVIII. 25. 26.
-
-
-[^4]:  See XXVIII. 24.
+[^mg5]:  See XXVIII. 25. 26.
 
 
-[^3]:  See p. 7. footnote 4
+[^mg4]:  See XXVIII. 24.
+
+
+[^mg3]:  See p. 7. footnote 4
 
 ### (b) *Mutual Relation of Notes*.
 
-According as they relate to an interval of more or less Śrutis, the notes in different Grāmas are called Consonant (*saṃvādin*), Assonant (*anuvādin*) and Dissonant (*vivādin*) with reference to the Sonant (*vādin*) note which has been described as “the melodic centre of the melody”[^7]. For example, those two notes which are at an interval of nine or thirteen Śrutis from each other are mutually Consonant, e.g. Ṣaḍja and
+According as they relate to an interval of more or less Śrutis, the notes in different Grāmas are called Consonant (*saṃvādin*), Assonant (*anuvādin*) and Dissonant (*vivādin*) with reference to the Sonant (*vādin*) note which has been described as “the melodic centre of the melody”[^mg7]. For example, those two notes which are at an interval of nine or thirteen Śrutis from each other are mutually Consonant, e.g. Ṣaḍja and
 
 
-[^7]:  See XXVIII 22 fn. 1.
+[^mg7]:  See XXVIII 22 fn. 1.
 
-Madhyama, Ṣaḍja and Pañcama, Ṛṣabha and Dhaivata, Gāndhāra and Niṣāda in the Ṣaḍja Grāma. Such is the case in the Madhyama Grāma except that Ṣaḍja and Pañcama are not Consonant while Pañcama and Ṛṣabha are so.[^8].
+Madhyama, Ṣaḍja and Pañcama, Ṛṣabha and Dhaivata, Gāndhāra and Niṣāda in the Ṣaḍja Grāma. Such is the case in the Madhyama Grāma except that Ṣaḍja and Pañcama are not Consonant while Pañcama and Ṛṣabha are so.[^mg8].
 
 
-[^8]:  See XXVIII 22-23.
+[^mg8]:  See XXVIII 22-23.
 
 ### (c) *Different Gramas*.
 
@@ -50,12 +50,12 @@ The Grāma may be translated as “scale”. There are three Grāmas in Indian m
 
 ### (d) *The Mūrchanās*.
 
-According to the Hindu theorists, each of the Grāmas is the source of seven Mūrchanās. About the meaning of the term Mūrchanā which is now generally considered to be equivalent to mode of the Greeks, there is some obscurity. The Ṣaḍja Grāma gives rise to seven Mūrchanās such as Uttara-maudrā, Rajanī, Uttarāyatā, Śuddhaṣaḍjā, Matsarīkṛtā, Aśvakrāntā and Abhirudgatā.[^9] These are constituted as shown below.
+According to the Hindu theorists, each of the Grāmas is the source of seven Mūrchanās. About the meaning of the term Mūrchanā which is now generally considered to be equivalent to mode of the Greeks, there is some obscurity. The Ṣaḍja Grāma gives rise to seven Mūrchanās such as Uttara-maudrā, Rajanī, Uttarāyatā, Śuddhaṣaḍjā, Matsarīkṛtā, Aśvakrāntā and Abhirudgatā.[^mg9] These are constituted as shown below.
 
 
-[^9]:  See XXVIII. 29.
+[^mg9]:  See XXVIII. 29.
 
-> sa-ri-ga-ma-pa-dha-ni Uttaramandrā[^10]  
+> sa-ri-ga-ma-pa-dha-ni Uttaramandrā[^mg10]  
 > ri-ga-ma-pa-dha-ni-sa  Rajanī  
 > ga-ma-pa-dha-ni-sa-ri Uttarāyatā  
 > ma-pa-dha-ni-sa-ri-ga Śuddhaṣaḍjā  
@@ -64,12 +64,12 @@ According to the Hindu theorists, each of the Grāmas is the source of seven Mū
 > ni-sa-ri-ga-ma-pa-dha Abhirudgatā
 
 
-[^10]:  See note 2 above.
+[^mg10]:  See note 2 above.
 
-The first six of these have a striking resemblance with the Greek[^11] modes which having eight notes including the first note repeated at the end, are as follows:—
+The first six of these have a striking resemblance with the Greek[^mg11] modes which having eight notes including the first note repeated at the end, are as follows:—
 
 
-[^11]:  These Greek modes were modified by St. Ambrose (c. 4th century) and partly by St. Gregory (604 A.C.). See ERE.
+[^mg11]:  These Greek modes were modified by St. Ambrose (c. 4th century) and partly by St. Gregory (604 A.C.). See ERE.
 
 > sa-ri-ga-ma-pa-dha-ni-sa  Ionian mode  
 > ri-ga-ma-pa-dha-ni-sa-ri  Dorian mode  
@@ -78,7 +78,7 @@ The first six of these have a striking resemblance with the Greek[^11] modes whi
 > pa-dha-ni-sa-ri-ga-ma-pa  Mixolydian mode  
 > dha-ni-pa-ri-ga-ma-pa-dha Aeolian mode
 
-The Madhyama Grāma[^12] gives rise to the following seven Mūrchanās: Sauvīrī, Hariṇāśvā, Kalopanatā, Śuddhamadhyā, Mārgavī, Pauravī and Hṛṣyakā. These are constituted as shown below.
+The Madhyama Grāma[^mg12] gives rise to the following seven Mūrchanās: Sauvīrī, Hariṇāśvā, Kalopanatā, Śuddhamadhyā, Mārgavī, Pauravī and Hṛṣyakā. These are constituted as shown below.
 
 
 [^12]:  Sec XXVIII. 30.
