--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/00/intro/2/03.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/00/intro/2/03.md
@@ -6,14 +6,14 @@ title = "03 Part 3 - Literature on Ancient Indian Music"
 
 ### (a) *Nārada*.
 
-Nārada mentioned repeatedly in later literature on music, seems to be the earliest writer on the subject, and the Śikṣā named after him[^1] appears, apart from its interpolated passages, to be a very old work, and it may be as old as 600 B.C., and its teachings may be earlier still. As one couplet[^2] from it has been quoted by Patañjali with a slight variation, it is not later than 200 B.C. Like the Pāṇinīya Śikṣa (c. 600 B.C.) it is written chiefly in the Anuṣṭubh metre; and it treats of musical theories in connexion with the singing of Sāmas. The fact that it describes the Gāndhāra Grāma in detail (together with its Mūrchanās) shows clearly that it is much anterior to the NŚ which ignores altogether this Grāma and was written when they become obsolete. The NŚ quotes the NāŚ. (1.3.13) at least once (XXXIII. 227) without naming it. As this śiksā discusses the seven notes in the three Grāmas and the Mūrchanas and Tānas connected with them, the Indian Music seems to have been pretty advanced at the time when this work was composed.
+Nārada mentioned repeatedly in later literature on music, seems to be the earliest writer on the subject, and the Śikṣā named after him[^mg1] appears, apart from its interpolated passages, to be a very old work, and it may be as old as 600 B.C., and its teachings may be earlier still. As one couplet[^mg2] from it has been quoted by Patañjali with a slight variation, it is not later than 200 B.C. Like the Pāṇinīya Śikṣa (c. 600 B.C.) it is written chiefly in the Anuṣṭubh metre; and it treats of musical theories in connexion with the singing of Sāmas. The fact that it describes the Gāndhāra Grāma in detail (together with its Mūrchanās) shows clearly that it is much anterior to the NŚ which ignores altogether this Grāma and was written when they become obsolete. The NŚ quotes the NāŚ. (1.3.13) at least once (XXXIII. 227) without naming it. As this śiksā discusses the seven notes in the three Grāmas and the Mūrchanas and Tānas connected with them, the Indian Music seems to have been pretty advanced at the time when this work was composed.
 
 
-[^2]:  “mantro hīnaḥ svarato varṇato vā mithyā prayakto na tamarthamāha | 
+[^mg2]:  “mantro hīnaḥ svarato varṇato vā mithyā prayakto na tamarthamāha | 
 sa vāgavajro yajamānaṃ hinasti yathendrśatruḥ svaratoparādhāt ||”
 
 
-[^1]:  NāS (Nāradiya-śíkṣā).
+[^mg1]:  NāS (Nāradiya-śíkṣā).
 
 ### (b) *Svāti*.
 
@@ -23,23 +23,23 @@ Svāti has been mentioned in the NŚ along with Nārada, but not even a fragment
 
 In the NŚ (I. 26) Kohala has been mentioned as one of the hundred sons of Bharata and as such he was anterior to the author of this work. From another passage in the NŚ (XXXVI 61) we learn that “*śeṣem uttaratantreṇa Kohalaḥ kathayiṣyati*” ‘Kohala will speak of the remaining (teachings) on dramaturgy in a supplementary treatise.’ Hence it may be presumed that Kohala was not widely separated in time from the author of the NŚ. Kohala’s opinion has been referred to in Dattila’s work in connexion with Tāla. This is perhaps the earliest reference to his teaching. The Bṛhaddeśi also refers to Kohala’s views no less than five times while discussing notes, Tāna and Jāti. The author of the Saṃgītamakaranda also mentions him twice in the chapter on dance (*nṛtya*), Pārśvadeva in his Saṃgītasamayasāra names Kohala in the beginning of his chapter on Tāla. In his commentary of the chapters on music, Abhivavagupta while discussing Tāla, refers at least twice to Kohala. From Abhinava’s commentary, it is further learnt that Kohala wrote a work named the Saṃgīta-meru. Hence it is natural that Śārṅgadeva has named him as one of the old masters.
 
-Two other works the Tāla-lakṣaṇa and the Kohala-rahasya, have also been ascribed to Kohala[^3]. These may genuinely reflect the the teachings of Kohala. From all these it appears that Kohala was a very important early writer on music.
+Two other works the Tāla-lakṣaṇa and the Kohala-rahasya, have also been ascribed to Kohala[^mg3]. These may genuinely reflect the the teachings of Kohala. From all these it appears that Kohala was a very important early writer on music.
 
 
-[^3]:  Svāmi Prajñānānanda—Saṃgīta-O-Saṃskṛti (Bengali) vol. II. pp. 347f.
+[^mg3]:  Svāmi Prajñānānanda—Saṃgīta-O-Saṃskṛti (Bengali) vol. II. pp. 347f.
 
 ### (d) *Śāṇḍilya* and *Vātsya*.
 
 The NŚ has twice mentioned Vātsya and Śāṇḍilya together. Śāṇḍilya not being included amongst the hundred Sons of Bharata, seems to be somewhat later. But one cannot be sure on this point. Śāṇḍilya has not been quoted in an early work. Only the author of the commentary “Tilaka” on the Rāmāyaṇa, mentions him twice in connexion
 
-with the Mūrchanā and the Jāti[^4]. And Vātsya is not known to have been quoted by any work.
+with the Mūrchanā and the Jāti[^mg4]. And Vātsya is not known to have been quoted by any work.
 
 
-[^4]:  Ibid. pp. 352-353.
+[^mg4]:  Ibid. pp. 352-353.
 
 ### (e) *Viśākhila*:
 
-Dattilam is the earliest work to mention Viśākhila.[^5] As we have already seen that Dattila was anterior to the NŚ. Viśākhila was also a very old writer on music. The Bṛhaddeśī also once refers to him.[^6] The passage in question being somewhat corrupt it has escaped the notice of other writers. It is as follows:
+Dattilam is the earliest work to mention Viśākhila.[^mg5] As we have already seen that Dattila was anterior to the NŚ. Viśākhila was also a very old writer on music. The Bṛhaddeśī also once refers to him.[^mg6] The passage in question being somewhat corrupt it has escaped the notice of other writers. It is as follows:
 
 
 [^6]:  See page 26.
