--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/00/intro/2/04.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/00/intro/2/04.md
@@ -4,92 +4,92 @@ title = "04 Part 4 - More About the Ancient Indian Theory and Practice of Drama"
 +++
 ## 1. *The Three Types of Character*
 
-Characters of all kinds male, female and hermaphrodite in the ancient Indian plays, were classified into three types: superior, inferior and middling[^1], for the purpose of distinguishing them by assigning to them special movements to be followed by appropriate music and drumming. Division of Heroes (*nāyaka*) and Heroines (*nāyikā*) into four classes, had also included the same purpose.
+Characters of all kinds male, female and hermaphrodite in the ancient Indian plays, were classified into three types: superior, inferior and middling[^mg1], for the purpose of distinguishing them by assigning to them special movements to be followed by appropriate music and drumming. Division of Heroes (*nāyaka*) and Heroines (*nāyikā*) into four classes, had also included the same purpose.
 
 
-[^1]:  See XXXIV. 2ff.
+[^mg1]:  See XXXIV. 2ff.
 
 ## 2. *The Prominent Position of the Nāṭaka*
 
-From the very detailed description given in the NŚ of the various types of character such as the king and his entourage, inside and outside the royal palace[^2], it appears that the Nāṭaka which usually include such characters, was the most prominent among the ten kinds of play. The special purpose of the description seems to have been to help the playwrights who cannot always be expected to possess a first-hand knowledge of habits and customs of such characters.
+From the very detailed description given in the NŚ of the various types of character such as the king and his entourage, inside and outside the royal palace[^mg2], it appears that the Nāṭaka which usually include such characters, was the most prominent among the ten kinds of play. The special purpose of the description seems to have been to help the playwrights who cannot always be expected to possess a first-hand knowledge of habits and customs of such characters.
 
 
-[^2]:  See XXXIV. 29ff.
+[^mg2]:  See XXXIV. 29ff.
 
 ## 3. *The Typical Theatrical Troupe*
 
-From a detailed description of the various members of theatrical troupes[^3], it appears that such troupes moved from place to place just like the Bengali *Jātrâwālās*, to give performance before people of different regions. It is only on the assumption of this kind that we may easily explain inclusion into the troupe, of such members as makers of headgears (*mukuṭakāraka*) and of ornaments, the dyer (*rajaka*), the painter and craftsmen of various kinds. If like the members of modern theatres of India they were restricted in their activity to any particular place, there might not have been any necessity of counting them as members of theatrical troupes. As communication and transport at that ancient time were not easy, the theatrical parties did not
+From a detailed description of the various members of theatrical troupes[^mg3], it appears that such troupes moved from place to place just like the Bengali *Jātrâwālās*, to give performance before people of different regions. It is only on the assumption of this kind that we may easily explain inclusion into the troupe, of such members as makers of headgears (*mukuṭakāraka*) and of ornaments, the dyer (*rajaka*), the painter and craftsmen of various kinds. If like the members of modern theatres of India they were restricted in their activity to any particular place, there might not have been any necessity of counting them as members of theatrical troupes. As communication and transport at that ancient time were not easy, the theatrical parties did not
 
 
-[^3]:  See XXXV. 89-99.
+[^mg3]:  See XXXV. 89-99.
 
 probably like to add to their luggage in the shape costumes and other paraphernalia of a dramatic performance. Skilled persons who accompanied them prepared these anew in every region, and these were used for a number of performances held in places not very distant from one another. The Arthaśāstra of Kauṭilya seems to envisage this kind of itinerant theatrical troupes.
 
 ## 4. *The Playwright as a Member of the Theatrical Troupe*
 
-The playwright (*nāṭyakāraka*)[^4] appearing as one of the members probably shows also that theatrical troupes moved from place to place and did not depend exclusively on a fixed repertoire, but often constructed special plays based on local history or popular legends, to suit the taste and interest of the people before whom they were called upon to give a performance.
+The playwright (*nāṭyakāraka*)[^mg4] appearing as one of the members probably shows also that theatrical troupes moved from place to place and did not depend exclusively on a fixed repertoire, but often constructed special plays based on local history or popular legends, to suit the taste and interest of the people before whom they were called upon to give a performance.
 
 
-[^4]:  See XXXV. 99.
+[^mg4]:  See XXXV. 99.
 
 The position of the playwrights was probably analogous to some extent to their modern counterparts attached to some urban theatres of modern India, which employ them for salary with the purpose of making their dramatic compositions the exclusive property.
 
 ## 5. *Distribution of Roles*
 
-The NŚ lays down some general principles for the distribution of roles in a play.[^5] For example, it says:
+The NŚ lays down some general principles for the distribution of roles in a play.[^mg5] For example, it says:
 
 
-[^5]:  See XXXV.
+[^mg5]:  See XXXV.
 
-“After considering together their gait, speech and movement of the limbs, as well as their strength and nature, the experts are to employ actors to represent different roles [in a play]”[^6]
+“After considering together their gait, speech and movement of the limbs, as well as their strength and nature, the experts are to employ actors to represent different roles [in a play]”[^mg6]
 
 “Hence the selection of actors should be preceded by an enquiry into their merits. The Director will have no difficulty over the choice [if such a procedure is followed]. After ascertaining their natural aptitudes, he is to distribute roles to different actors”.
 
 
-[^6]:  See XXXV. XXXV. 5-6.
+[^mg6]:  See XXXV. XXXV. 5-6.
 
 To clarify further these principles, the NŚ adds:
 
 “Persons who have all the limbs intact, well-formed and thick-set, who are full-grown, not fat or lean, or tall or large, who
 
-have vivacity, pleasant voice and good appearance, should be employed to represent the role of gods.[^7]
+have vivacity, pleasant voice and good appearance, should be employed to represent the role of gods.[^mg7]
 
-“Persons who are fat, and have a large body, a voice like the peal of thunder, furious looking eyes, and naturally knit eye-brows should be employed to represent the role of Rākṣasas, Dānavas and Daityas; for the performance of the male actors [should be] in conformity with their limbs and movements”.[^8]
-
-
-
-[^8]:  XXXV. 7-8.
-
-[^7]:  XXXV. 5-6.
-
-“Actors of the best kind who have beautiful eyes, eye-brows, forehead, nose, lips, cheeks, face, neck and every other limb beautiful, and who are tall, possessed of pleasant appearance and dignified gait, and are well-behaved, wise, steady by nature, should be employed to represent the role of kings and princes.[^9]
-
-In a similar manner the NŚ gives directions about assigning roles of army-leaders, councillors (ministers and secretaries) Kañcukins, the Śrotriyas[^10] as well as minor characters.[^11] The directions about the representation of fatigued and healthy characters show how careful the ancients were about the assignment of roles. For the NŚ says.
-
-
-[^11]:  XXXV. 15-17.
-
-
-[^10]:  XXXV. 12-14.
-
-
-[^9]:  XXXV. 9-11.
-
-“A person who is naturally thin should be employed in a play to represent tired characters.”[^12]
-
-“A fat man should be employed to represent persons without any disease”.[^13]
+“Persons who are fat, and have a large body, a voice like the peal of thunder, furious looking eyes, and naturally knit eye-brows should be employed to represent the role of Rākṣasas, Dānavas and Daityas; for the performance of the male actors [should be] in conformity with their limbs and movements”.[^mg8]
 
 
 
-[^13]:  Ibid.
+[^mg8]:  XXXV. 7-8.
 
-[^12]:  XXXV. 18.
+[^mg7]:  XXXV. 5-6.
+
+“Actors of the best kind who have beautiful eyes, eye-brows, forehead, nose, lips, cheeks, face, neck and every other limb beautiful, and who are tall, possessed of pleasant appearance and dignified gait, and are well-behaved, wise, steady by nature, should be employed to represent the role of kings and princes.[^mg9]
+
+In a similar manner the NŚ gives directions about assigning roles of army-leaders, councillors (ministers and secretaries) Kañcukins, the Śrotriyas[^mg10] as well as minor characters.[^mg11] The directions about the representation of fatigued and healthy characters show how careful the ancients were about the assignment of roles. For the NŚ says.
+
+
+[^mg11]:  XXXV. 15-17.
+
+
+[^mg10]:  XXXV. 12-14.
+
+
+[^mg9]:  XXXV. 9-11.
+
+“A person who is naturally thin should be employed in a play to represent tired characters.”[^mg12]
+
+“A fat man should be employed to represent persons without any disease”.[^mg13]
+
+
+
+[^mg13]:  Ibid.
+
+[^mg12]:  XXXV. 18.
 
 From the very elaborate rules quoted above, it appears that the author of the NŚ was very careful in the assignment of roles. His rules were often found difficult to be carried into practice. But in spite of this, he was not a doctrinaire in this regard, and permitted the Directors of theatres to train up properly persons available, even when they did not come up to the standard. On this point he says:
 
 “If however, such persons are not available, the Director should exercise discretion to employ [some one] after a consideration of the latter’s nature and movement as well as all the States [to be represented].”
 
-“Such persons’ natural movements whether good, bad or. middling, should be regulated by a contact with the Director and then they will properly represent all the States”[^14].
+“Such persons’ natural movements whether good, bad or. middling, should be regulated by a contact with the Director and then they will properly represent all the States”[^mg14].
 
 
 [^14]:  XXXV. 19-20.
