--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/01.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/01.md
@@ -4,97 +4,97 @@ title = "01 Origin of Drama (nāṭya)"
 +++
 ## *Salutation*
 
-1\. With a bow to Pitāmaha[^1] (Brahmā) and Maheśvara[^2] (Śiva) I shall relate the Canons of Drama[^3], as these were uttered by Brahmā.
+1\. With a bow to Pitāmaha[^mg1] (Brahmā) and Maheśvara[^mg2] (Śiva) I shall relate the Canons of Drama[^mg3], as these were uttered by Brahmā.
 
 
-[^3]:  By drama’ in this connexion is to be understood any play in its theatrical and literary character. For on this point Ag. (I. p. 7) says that the NŚ. is meant for the producer (of a play) as well as the poet (=playwright).
+[^mg3]:  By 'drama’ in this connexion is to be understood any play in its theatrical and literary character. For on this point Ag. (I. p. 7) says that the NŚ. is meant for the producer (of a play) as well as the poet (=playwright).
 
 
-[^2]:  Maheśvara (the Great God) is another name of Śīva, who is originally a pre-Vedic deity. Salutation to Śiva along with Brahmā, is very rare in Indian literature.
+[^mg2]:  Maheśvara (the Great God) is another name of Śīva, who is originally a pre-Vedic deity. Salutation to Śiva along with Brahmā, is very rare in Indian literature.
 
 
-[^1]:  Pitāmaha (the Grand-father) is a Purāṇic epithet of the Vedic god Brahmā. For the Pitṛs (the Fathers) such as Aṅgiras, Bhṛgu, Dakṣa and Marīci and others, whose descendants peopled this earth, were his progeny. In the later literature and religion of India, Brahmā gradually recedes in the background and practically vanishes. His place is taken by Śiva, and Viṣṇu.
+[^mg1]:  Pitāmaha (the Grand-father) is a Purāṇic epithet of the Vedic god Brahmā. For the Pitṛs (the Fathers) such as Aṅgiras, Bhṛgu, Dakṣa and Marīci and others, whose descendants peopled this earth, were his progeny. In the later literature and religion of India, Brahmā gradually recedes in the background and practically vanishes. His place is taken by Śiva, and Viṣṇu.
 
 ## *Sages question*.
 
-2-5. Once in the days of yore, high-souled sages such as, Ātreya[^4] and others who had subdued their senses, approached the pious Bharata[^5], the master of dramatic art during an intermission of studies. He (Bharata) then just finished the muttering [of Mantras] and was surrounded by his sons. The high-souled sages who controlled their senses, respectfully said to him, “O Brahmin, how did originate the Nāṭyaveda[^6] similar to the Vedas, which you have properly composed? And for whom is it meant, how many limbs does it possess, what is its extent[^7] and how is it to be applied? Please speak to us in detail about it all[^8]”.
+2-5. Once in the days of yore, high-souled sages such as, Ātreya[^mg4] and others who had subdued their senses, approached the pious Bharata[^mg5], the master of dramatic art during an intermission of studies. He (Bharata) then just finished the muttering [of Mantras] and was surrounded by his sons. The high-souled sages who controlled their senses, respectfully said to him, “O Brahmin, how did originate the Nāṭyaveda[^mg6] similar to the Vedas, which you have properly composed? And for whom is it meant, how many limbs does it possess, what is its extent[^mg7] and how is it to be applied? Please speak to us in detail about it all[^mg8]”.
 
 
-[^8]:  From the five questions put in here, it is not to be assumed that the treatment of subjects mentioned will follow the order of these.
+[^mg8]:  From the five questions put in here, it is not to be assumed that the treatment of subjects mentioned will follow the order of these.
 
 
-[^7]:  pramāṇa= extent. Ag. takes the word in the sense of proof (pramāṇam atra niścaya-janakatvam), but he cites another view as well, which takes the word to mean ‘number’,
+[^mg7]:  pramāṇa= extent. Ag. takes the word in the sense of proof (pramāṇam atra niścaya-janakatvam), but he cites another view as well, which takes the word to mean ‘number’,
 
 
-[^6]:  Nāṭyaveda—The ‘Nāṭyaveda’ according to Ag, is a synonym for the ‘Nāṭyaśāstra’, and is no Vedic work.
+[^mg6]:  Nāṭyaveda—The ‘Nāṭyaveda’ according to Ag, is a synonym for the ‘Nāṭyaśāstra’, and is no Vedic work.
 
 
-[^5]:  Purāṇas, except the Matsya (34.28-30) are silent on this Bharata.
+[^mg5]:  Purāṇas, except the Matsya (34.28-30) are silent on this Bharata.
 
 
-[^4]:  Ātreya—There are two Ātreyas. One is a disciple of Yājñavalkya (Mbh.) and another that of Vāmadeva (Brahma P.), See Vidyalankar, Jīvanīkoṣa, sub voce.
+[^mg4]:  Ātreya—There are two Ātreyas. One is a disciple of Yājñavalkya (Mbh.) and another that of Vāmadeva (Brahma P.), See Vidyalankar, Jīvanīkoṣa, sub voce.
 
 ## *Bharata Answers*.
 
 6\. Hearing these words of the sages, Bharata spoke thus in reply about the Nāṭyaveda:
 
-7-12. “Get yourselves cleansed, be attentive and hear about the origin of the Nāṭyaveda devised by Brahmā[^9]. O Brahmins, in the days of yore when the Golden Age (*Kṛtayuga*) passed with the reign of Svāyambhuva [Manu], and the Silver Age (*Tretāyuga*) commenced with the career of Vaivasvata Manu, and people became addicted to sensual pleasures[^10], were under the sway of desire and greed, became affected with jealousy and anger and [thus] found their happiness mixed with sorrow, and Jambudvīpā[^11] protected by the Lokapālas (guardians of the worlds) was full of gods, Dānavas, Gandharvas, Yakṣas, Rākṣasas and great Uragas (Nāgas), the gods with the great Indra as their head, [approached] Brahmā and spoke to him, “We want an object diversion, which must be audible as well as visible. As the [existing] of Vedas are not to be listened to by those born as Śūdras, be pleased to create another Veda which will belong [equally] to all the Colour-groups[^12] (*varṇa*).”
+7-12. “Get yourselves cleansed, be attentive and hear about the origin of the Nāṭyaveda devised by Brahmā[^mg9]. O Brahmins, in the days of yore when the Golden Age (*Kṛtayuga*) passed with the reign of Svāyambhuva [Manu], and the Silver Age (*Tretāyuga*) commenced with the career of Vaivasvata Manu, and people became addicted to sensual pleasures[^mg10], were under the sway of desire and greed, became affected with jealousy and anger and [thus] found their happiness mixed with sorrow, and Jambudvīpā[^mg11] protected by the Lokapālas (guardians of the worlds) was full of gods, Dānavas, Gandharvas, Yakṣas, Rākṣasas and great Uragas (Nāgas), the gods with the great Indra as their head, [approached] Brahmā and spoke to him, “We want an object diversion, which must be audible as well as visible. As the [existing] of Vedas are not to be listened to by those born as Śūdras, be pleased to create another Veda which will belong [equally] to all the Colour-groups[^mg12] (*varṇa*).”
 
 
-[^12]:  This relates to the four classes such as Brāhmaṇa, Kṣatriya, Vaiśya and Śūdra.
+[^mg12]:  This relates to the four classes such as Brāhmaṇa, Kṣatriya, Vaiśya and Śūdra.
 
 
-[^11]:  According to ancient Indian geography, the earth was divided first into four and then into seven dvīpas (continents). Jambudvīpa is one of them. It included Bhārata-varṣa or Bharata-varṣa, known at present as ‘India’. Viṣṇu P. (ch. 1-12). See H. Lüders, Varuṇa, Goetingen, 1951, pp. 288-292 and Winternitz, Hist, of Indian Literature, Vol. I. p. 548.
+[^mg11]:  According to ancient Indian geography, the earth was divided first into four and then into seven dvīpas (continents). Jambudvīpa is one of them. It included Bhārata-varṣa or Bharata-varṣa, known at present as ‘India’. Viṣṇu P. (ch. 1-12). See H. Lüders, Varuṇa, Goetingen, 1951, pp. 288-292 and Winternitz, Hist, of Indian Literature, Vol. I. p. 548.
 
 
-[^10]:  grāmyadharma—Ag. explains the word differently.
+[^mg10]:  grāmyadharma—Ag. explains the word differently.
 
 
-[^9]:  The reference here is to the Nāṭyaveda alleged to have been composed by Brahmā in about 36000 ślokas. See Preface to NŚ. (B.) pp. 6-7., also Ag. (I, p. 8).
+[^mg9]:  The reference here is to the Nāṭyaveda alleged to have been composed by Brahmā in about 36000 ślokas. See Preface to NŚ. (B.) pp. 6-7., also Ag. (I, p. 8).
 
-13\. “Let it be so,” said he in reply and then having dismissed the king of gods (Indra) he resorted to yoga[^13] and recalled to mind the four Vedas.[^14]
-
-
-
-[^14]:  After 13, B. reads one additional couplet. But G. considers this passage to be spurious and puts it in the footnote.
-
-[^13]:  Yoga has been defined in Patañjali’s work as cittavṛttinirodhaḥ, It however begins with the concentration of mind.
-
-14-15. He then thought: “I shall make a fifth[^15] Veda on the Nāṭya with the Semi-historical Tales (*itihāsa*),[^16] which will conduce to duty (*dharma*),[^17] wealth (*artha*) as well as fame, will contain good counsel and collection [of traditional maxims], will give guidance to people of the future as well, in all their actions, will be enriched by the teaching of all authoritative works (*śāstra*) and will give a review of all arts and crafts.”[^18]
+13\. “Let it be so,” said he in reply and then having dismissed the king of gods (Indra) he resorted to yoga[^mg13] and recalled to mind the four Vedas.[^mg14]
 
 
 
-[^18]:  The word śilpa is very often synonymous with kalā. As the 64 kalās enumerated in different works include different arts and crafts, these two words may be translated as ‘arts and crafts.’ Śilpa, however, is sometimes to be distinguished from kalā, and then it may mean merely ‘a craft.’
+[^mg14]:  After 13, B. reads one additional couplet. But G. considers this passage to be spurious and puts it in the footnote.
 
-[^17]:  dharma also means virtue, law and custom etc.
+[^mg13]:  Yoga has been defined in Patañjali’s work as cittavṛttinirodhaḥ, It however begins with the concentration of mind.
+
+14-15. He then thought: “I shall make a fifth[^mg15] Veda on the Nāṭya with the Semi-historical Tales (*itihāsa*),[^mg16] which will conduce to duty (*dharma*),[^mg17] wealth (*artha*) as well as fame, will contain good counsel and collection [of traditional maxims], will give guidance to people of the future as well, in all their actions, will be enriched by the teaching of all authoritative works (*śāstra*) and will give a review of all arts and crafts.”[^mg18]
 
 
-[^16]:  On itihāsa see below.
+
+[^mg18]:  The word śilpa is very often synonymous with kalā. As the 64 kalās enumerated in different works include different arts and crafts, these two words may be translated as ‘arts and crafts.’ Śilpa, however, is sometimes to be distinguished from kalā, and then it may mean merely ‘a craft.’
+
+[^mg17]:  dharma also means virtue, law and custom etc.
 
 
-[^15]:  In the early Indian literature the itihāsa alone was considered as the fifth Veda. See Chāndogya Up. VII.?f. and 7., and Sutta-nipāta, II, 7 (sella-sutta). Kauṭilya too gives the same position to the itihāsas. See Winternitz, Vol. I. p. 313.
+[^mg16]:  On itihāsa see below.
+
+
+[^mg15]:  In the early Indian literature the itihāsa alone was considered as the fifth Veda. See Chāndogya Up. VII.?f. and 7., and Sutta-nipāta, II, 7 (sella-sutta). Kauṭilya too gives the same position to the itihāsas. See Winternitz, Vol. I. p. 313.
 
 16\. With this resolve the Holy One from his memory of all the Vedas, shaped this Nāṭyaveda compiled from the four of them.
 
-17-18. The recitative (*pāṭhya*) he took from the Ṛgveda, the song from the Sāma[veda], the Histrionic Representation (*abhinaya*) from the Yajur[veda] and Sentiments (*rasa*) from the Atharvaveda, [and] thus was created the Nāṭyaveda connected with the Vedas principal and subsidiary (*vedopaveda*),[^19] by the holy Brahmā who is omniscient.
+17-18. The recitative (*pāṭhya*) he took from the Ṛgveda, the song from the Sāma[veda], the Histrionic Representation (*abhinaya*) from the Yajur[veda] and Sentiments (*rasa*) from the Atharvaveda, [and] thus was created the Nāṭyaveda connected with the Vedas principal and subsidiary (*vedopaveda*),[^mg19] by the holy Brahmā who is omniscient.
 
 
-[^19]:  The Vedas are all well-known, and there are at least four Upavedas, one being attached to each of the Vedas. They are as follow: the Ayurveda (the Science of Medicine) to the Ṛgveda, Dhanur-veda (the Science of Arms) to the Yajurveda, Gāndharva-veda (Musical Science) to the Sāmaveda, and Sthāpatya-śāstra (the Science of Architecture) to the Atharvaveda.
+[^mg19]:  The Vedas are all well-known, and there are at least four Upavedas, one being attached to each of the Vedas. They are as follow: the Ayurveda (the Science of Medicine) to the Ṛgveda, Dhanur-veda (the Science of Arms) to the Yajurveda, Gāndharva-veda (Musical Science) to the Sāmaveda, and Sthāpatya-śāstra (the Science of Architecture) to the Atharvaveda.
 
-19-20. After the creation of the Nāṭyaveda, Brahmā said to Indra (lit. the lord of the gods), “Semi-historical Tales[^20] have been composed by me; you are to get them [dramatized and] acted[^21] by gods. Pass on this Nāṭyaveda to those of the gods who are skilful, learned, bold in speech and inured to hard work.”
-
-
-[^21]:  See note on 14-15 above.
+19-20. After the creation of the Nāṭyaveda, Brahmā said to Indra (lit. the lord of the gods), “Semi-historical Tales[^mg20] have been composed by me; you are to get them [dramatized and] acted[^mg21] by gods. Pass on this Nāṭyaveda to those of the gods who are skilful, learned, bold in speech and inured to hard work.”
 
 
-[^20]:  Kauṭilya in his definition of itihāsa enumerates purāṇa and itivṛtta as belonging to its contents. An itivṛtta, according to Winternitz, can only mean an “historical event” and purāṇa probably means “mythological and legendary lore.” Vol. I. p. 518. Pargiter has, however, extracted solid historical facts from some of the extant Purāṇas (See his Ancient Indian Historical Traditions, London, 1922). According to the Indian tradition itihāsa is said to be an account of events that occured in the past, carrying in it instructions about duty, wealth, enjoyment of pleasure, and salvation. The same tradition assigns the position of itihāsa to the Mahābhārata the great Indian epic. It is possibly this itihāsa that has been connected with the Nāṭyaveda by the author of the śāstra. Hence it appears that Oldenberg’s theory about the original connexion between epic and dramatic poetry, is worthy of serious consideration. Nāṭyākhyaṃ pañcamaṃ vedaṃ setihāsaṃ karomy aham (15) seems to be very significant. Ag. (I. p. 13) explains setihāsam as itihāsopadeśakarūpaṃ saprabbedam. See Winternitz, Vol. I. pp. 100 ff, 312 n,
+[^mg21]:  See note on 14-15 above.
+
+
+[^mg20]:  Kauṭilya in his definition of itihāsa enumerates purāṇa and itivṛtta as belonging to its contents. An itivṛtta, according to Winternitz, can only mean an “historical event” and purāṇa probably means “mythological and legendary lore.” Vol. I. p. 518. Pargiter has, however, extracted solid historical facts from some of the extant Purāṇas (See his Ancient Indian Historical Traditions, London, 1922). According to the Indian tradition itihāsa is said to be an account of events that occured in the past, carrying in it instructions about duty, wealth, enjoyment of pleasure, and salvation. The same tradition assigns the position of itihāsa to the Mahābhārata the great Indian epic. It is possibly this itihāsa that has been connected with the Nāṭyaveda by the author of the śāstra. Hence it appears that Oldenberg’s theory about the original connexion between epic and dramatic poetry, is worthy of serious consideration. Nāṭyākhyaṃ pañcamaṃ vedaṃ setihāsaṃ karomy aham (15) seems to be very significant. Ag. (I. p. 13) explains setihāsam as itihāsopadeśakarūpaṃ saprabbedam. See Winternitz, Vol. I. pp. 100 ff, 312 n,
 
 21-22. At these words of Brahmā, Indra bowed to him with folded palms and said in reply, “O the best and holy one, gods are neither able to receive it and to maintain it, nor are they fit to understand it and to make use of it; they are unfit to do anything with the drama.
 
-23.[^22] “The sages who know the mystery of the Vedas and have fulfilled their vows, are capable of maintaining this (Nāṭyaveda) and putting it into practice.”
+23.[^mg22] “The sages who know the mystery of the Vedas and have fulfilled their vows, are capable of maintaining this (Nāṭyaveda) and putting it into practice.”
 
 
-[^22]:  The word muni is evidently to be derived from the Pkt. root muṇa ‘to know’ which is most probably not of Sanskritic origin.
+[^mg22]:  The word muni is evidently to be derived from the Pkt. root muṇa ‘to know’ which is most probably not of Sanskritic origin.
 
 ## *Brahmā’s command and Bharata’s instruction to his sons*
 
@@ -104,37 +104,37 @@ title = "01 Origin of Drama (nāṭya)"
 
 ## *Names of Bharata’s one hundred sons*
 
-26-33.[^23] [Names of my sons are] Śāṇḍilya, Vātsya, Kohala,[^24] Dattila,[^25] Jaṭila, Ambaṣṭhaka, Taṇḍu, Agniśikha, Saindhava, Pulomā, Śāḍvali, Vipula, Kapiñjala, Bādari, Yama, Dhūmrāyaṇa, Jambudhvaja, Kākajaṅgha, Svarṇaka, Tāpasa, Kedāri, Śālikarṇa,[^26] Dīrghagātra, Śālika, Kautsa, Tāṇḍāyaṇi, Piṅgala, Citraka, Bandhula, Bhallaka, Muṣṭika, Saindavāyana, Taitila, Bhārgava, Śuci, Bahula, Abudha, Budhasena, Pāṇḍukarṇa, Kerala, Ṛjuka, Maṇḍaka, Śambara, Vañjula, Māgadha, Sarala, Kartā, Ugra, Tuṣāra, Pārṣada, Gautama, Bādarāyaṇa,[^27] Viśāla, Śabala, Sunābha, Meṣa, Kāliya, Bhramara, Pīṭhamukha, Muni, Nakhakuṭṭa,[^28] Aśmakuṭṭa,[^29] Ṣaṭpada, Uttama, Pāduka, Upānat, Śruti, Cāṣasvara, Agnikuṇḍa, Ājyakuṇḍa, Vitaṇḍya, Tāṇḍya, Kartarākṣa, Hiraṇyākṣa, Kuśala, Duḥsaha, Lāja, Bhayānaka, Bībhatsa, Vicakṣaṇa, Puṇḍrākṣa, Puṇḍranāsa, Asita, Sita, Vidyujjihva, Mahājihva, Śālaṅkāyana, Śyāmāyana, Māṭhara, Lohitāṅga, Saṃvartaka, Pañcaśikha,[^30] Triśikha, Śikha, Śaṅkhavarṇamukha, Ṣaṇḍa, Śaṅkukarṇa, Śakranemi, Gabhasti, Aṃśumālī, Śaṭha, Vidyut, Śātajaṅgha, Raudra and Vīra.
+26-33.[^mg23] [Names of my sons are] Śāṇḍilya, Vātsya, Kohala,[^mg24] Dattila,[^mg25] Jaṭila, Ambaṣṭhaka, Taṇḍu, Agniśikha, Saindhava, Pulomā, Śāḍvali, Vipula, Kapiñjala, Bādari, Yama, Dhūmrāyaṇa, Jambudhvaja, Kākajaṅgha, Svarṇaka, Tāpasa, Kedāri, Śālikarṇa,[^mg26] Dīrghagātra, Śālika, Kautsa, Tāṇḍāyaṇi, Piṅgala, Citraka, Bandhula, Bhallaka, Muṣṭika, Saindavāyana, Taitila, Bhārgava, Śuci, Bahula, Abudha, Budhasena, Pāṇḍukarṇa, Kerala, Ṛjuka, Maṇḍaka, Śambara, Vañjula, Māgadha, Sarala, Kartā, Ugra, Tuṣāra, Pārṣada, Gautama, Bādarāyaṇa,[^mg27] Viśāla, Śabala, Sunābha, Meṣa, Kāliya, Bhramara, Pīṭhamukha, Muni, Nakhakuṭṭa,[^mg28] Aśmakuṭṭa,[^mg29] Ṣaṭpada, Uttama, Pāduka, Upānat, Śruti, Cāṣasvara, Agnikuṇḍa, Ājyakuṇḍa, Vitaṇḍya, Tāṇḍya, Kartarākṣa, Hiraṇyākṣa, Kuśala, Duḥsaha, Lāja, Bhayānaka, Bībhatsa, Vicakṣaṇa, Puṇḍrākṣa, Puṇḍranāsa, Asita, Sita, Vidyujjihva, Mahājihva, Śālaṅkāyana, Śyāmāyana, Māṭhara, Lohitāṅga, Saṃvartaka, Pañcaśikha,[^mg30] Triśikha, Śikha, Śaṅkhavarṇamukha, Ṣaṇḍa, Śaṅkukarṇa, Śakranemi, Gabhasti, Aṃśumālī, Śaṭha, Vidyut, Śātajaṅgha, Raudra and Vīra.
 
 
-[^30]:  In 200 B. C. one Pañcaśikha was considered to be Indra’s musician. See IHQ, XXXII (1956) p. 122.
+[^mg30]:  In 200 B. C. one Pañcaśikha was considered to be Indra’s musician. See IHQ, XXXII (1956) p. 122.
 
 
-[^29]:  The N L. (pp. 4, 19, 144, 115) refers to and quotes from this authority.
+[^mg29]:  The N L. (pp. 4, 19, 144, 115) refers to and quotes from this authority.
 
 
-[^28]:  The Nāṭakalakṣaṇa (pp. 114, 121) refers to and quotes from this authority. So does SD (294).
+[^mg28]:  The Nāṭakalakṣaṇa (pp. 114, 121) refers to and quotes from this authority. So does SD (294).
 
 
-[^27]:  The N L. (pp. 46, 114) refers to and quotes from him.
+[^mg27]:  The N L. (pp. 46, 114) refers to and quotes from him.
 
 
-[^26]:  Śālikarṇa is probably identical with Śātakarṇa referred to and quoted in the commentary of the Anargharāghava (p. 7. see Lévi, II. pp. 27, 65) and the N L. (p. 47, ed. M. Dillon). Cf. Śālivāhana=Sātavāhana.
+[^mg26]:  Śālikarṇa is probably identical with Śātakarṇa referred to and quoted in the commentary of the Anargharāghava (p. 7. see Lévi, II. pp. 27, 65) and the N L. (p. 47, ed. M. Dillon). Cf. Śālivāhana=Sātavāhana.
 
 
-[^25]:  Ag. has quoted a passage from the work of one Dattilācārya (Vol. I. p. 205). He seems to be identical with this Dattila. See also note I above.
+[^mg25]:  Ag. has quoted a passage from the work of one Dattilācārya (Vol. I. p. 205). He seems to be identical with this Dattila. See also note I above.
 
 
-[^24]:  Kohala has again been mentioned in XXXVI, 69. Ag. has referred to his opinion several times and quoted from his work on nāṭya (Vol. I. pp. 140, 173, 182, 183, 185; Vol. II. pp. 26, 55, 130, 133, 142, 144, 146, 147, 151, 155, 407, 416, 421, 434, 452, 458, 459). Later writers like Dāmodaragupta. Hemacandra, Śārṅgadeva, Śāradātanaya and Śiṅgabhūpāla acknowledge him as an authority on drama and music (See S. K. De, Skt. Poetics, p. 25. f. n.)
+[^mg24]:  Kohala has again been mentioned in XXXVI, 69. Ag. has referred to his opinion several times and quoted from his work on nāṭya (Vol. I. pp. 140, 173, 182, 183, 185; Vol. II. pp. 26, 55, 130, 133, 142, 144, 146, 147, 151, 155, 407, 416, 421, 434, 452, 458, 459). Later writers like Dāmodaragupta. Hemacandra, Śārṅgadeva, Śāradātanaya and Śiṅgabhūpāla acknowledge him as an authority on drama and music (See S. K. De, Skt. Poetics, p. 25. f. n.)
 
 
-[^23]:  B. and G. read some of these names differently. The so-called sons of Bharata were probably authors who wrote on dramaturgy, histrionic art, dance and music etc. Śiṅgabhūpāla mentions the first four. See below notes 2-7.
+[^mg23]:  B. and G. read some of these names differently. The so-called sons of Bharata were probably authors who wrote on dramaturgy, histrionic art, dance and music etc. Śiṅgabhūpāla mentions the first four. See below notes 2-7.
 
 39-40. [Thus] at the command of Brahmā and for the benefit of the people I assigned to my sons different roles suitable to them.
 
 ## *Performance begins with the three Styles*
 
-41\. O Brahmins, I then prepared to give a performance (*prayoga*) in which was adopted the dramatic Styles (*vṛtti*) such as the Verbal (*bhāratī*),[^31] the Grand (*sāttvatī*), and the Energetic (*ārabhaṭī*).
+41\. O Brahmins, I then prepared to give a performance (*prayoga*) in which was adopted the dramatic Styles (*vṛtti*) such as the Verbal (*bhāratī*),[^mg31] the Grand (*sāttvatī*), and the Energetic (*ārabhaṭī*).
 
 
 [^31]:  The four Styles probably related to four tribes such as Bharata, Sāttvata, Keśika and Arabhaṭa. Among these Bharata and Sāttvata are well-known. The remaining two names might have been lost, Kaiśikī has a variant Kauśiki. See P. C. Bagchi. Bhārat-O-Madhya-asiā (Bengali) pp, 49-52.
