--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/02.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/02.md
@@ -2,19 +2,19 @@
 title = "02 Description of the Playhouse (nāṭyamaṇḍapa)"
 
 +++
-1-2. On hearing Bharata’s words, the sages said, “O the holy one, we would like to hear about the ceremony relating to the stage.[^1] And how are the men of future to offer Pūjā in the playhouse or [to know about] the practices related to it, or its accurate description?
+1-2. On hearing Bharata’s words, the sages said, “O the holy one, we would like to hear about the ceremony relating to the stage.[^mg1] And how are the men of future to offer Pūjā in the playhouse or [to know about] the practices related to it, or its accurate description?
 
 
-[^1]:  raṅga here means ‘the stage.’ It may also mean the auditorium as well as the spectators sitting there. See Kālidāsa; Śak. I. 4. 2.
+[^mg1]:  raṅga here means ‘the stage.’ It may also mean the auditorium as well as the spectators sitting there. See Kālidāsa; Śak. I. 4. 2.
 
 3\. As the production of a drama begins with the playhouse (*nāṭyamaṇḍapa*), you should [first of all] give us its description.”
 
 ## *Three types of a playhouse*
 
-4\. On hearing these words of the sages, Bharata said, “Listen, O sages, about the description of a playhouse[^2] and of the Pūjā to be offered in this connexion.
+4\. On hearing these words of the sages, Bharata said, “Listen, O sages, about the description of a playhouse[^mg2] and of the Pūjā to be offered in this connexion.
 
 
-[^2]:  Except the cave (c. 200 B.C.) in the Ramgarh hill suspected by Th. Bloch (Report of the Archaeological Survey of India, 1903-4, pp. 123ff) to have been the remains of a theatre, there is no other evidence of the existence of a playhouse in ancient India. From the description of the playhouse in the present chapter we learn that it was constructed with brick walls and wooden posts probably with a thatched bungalow roof. The  saṃgīdāsālā (saṃgītaśālā) mentioned by Kālidāsa in his Mālavi, was probably a playhouse. Large open halls called nāṭmandir often found in front of more recently built temples in Bengal and the neighbouring provinces may be connected with the extinct playhouse. This nāṭ-mandir or nāt-śālā is often met with in the medieval Bengali literature.
+[^mg2]:  Except the cave (c. 200 B.C.) in the Ramgarh hill suspected by Th. Bloch (Report of the Archaeological Survey of India, 1903-4, pp. 123ff) to have been the remains of a theatre, there is no other evidence of the existence of a playhouse in ancient India. From the description of the playhouse in the present chapter we learn that it was constructed with brick walls and wooden posts probably with a thatched bungalow roof. The  saṃgīdāsālā (saṃgītaśālā) mentioned by Kālidāsa in his Mālavi, was probably a playhouse. Large open halls called nāṭmandir often found in front of more recently built temples in Bengal and the neighbouring provinces may be connected with the extinct playhouse. This nāṭ-mandir or nāt-śālā is often met with in the medieval Bengali literature.
 
 5-6. Creations of gods [observed] in houses and gardens are the outcome of their [mere] will; but men’s [creative] activity should be carefully guided by rules [laid down in the Śāstras]. Hence, listen about the method of building a playhouse and of the manner of offering Pūjā at the site [of its construction].
 
@@ -22,29 +22,29 @@ title = "02 Description of the Playhouse (nāṭyamaṇḍapa)"
 
 ## *Three sizes of the playhouse*
 
-8-11. Their sizes vary: they may be large (*jyeṣṭha*), middle-sized (*madhya*) and small (*avara*).[^3] The length (lit. measurement) of these [three types] fixed in terms of cubits as well as Daṇḍas, is one hundred and eight, sixtyfour or thirtytwo. They[^4] should [respectively] have [sides] one hundred and eight, sixtyfour and thirtytwo [cubits or Daṇḍas][^5] long. The large playhouse is meant for gods[^6] and the middle-sized one for kings, while for the rest of people, has been prescribed the smallest [theatre].[^7]
+8-11. Their sizes vary: they may be large (*jyeṣṭha*), middle-sized (*madhya*) and small (*avara*).[^mg3] The length (lit. measurement) of these [three types] fixed in terms of cubits as well as Daṇḍas, is one hundred and eight, sixtyfour or thirtytwo. They[^mg4] should [respectively] have [sides] one hundred and eight, sixtyfour and thirtytwo [cubits or Daṇḍas][^mg5] long. The large playhouse is meant for gods[^mg6] and the middle-sized one for kings, while for the rest of people, has been prescribed the smallest [theatre].[^mg7]
 
 
 
-[^7]:  After this, B. reads three couplets which go rightly between 20 and 24. G. also holds the same view.
+[^mg7]:  After this, B. reads three couplets which go rightly between 20 and 24. G. also holds the same view.
 
-[^6]:  Ag. (I. p. 51) thinks that by gods, kings and other peoples mentioned in this passage, characters in a play have been meant. But this view does not seem to be plausible. So the other view, mentioned by him, which takes gods and kings etc. as spectators may be accepted.
-
-
-[^5]:  As the measurements described are both in terms of cubits and daṇḍas (4 cubits), eighteen kinds of playhouse will be available.
+[^mg6]:  Ag. (I. p. 51) thinks that by gods, kings and other peoples mentioned in this passage, characters in a play have been meant. But this view does not seem to be plausible. So the other view, mentioned by him, which takes gods and kings etc. as spectators may be accepted.
 
 
-[^4]:  They i.e., the large, the middle-sized and the small.
+[^mg5]:  As the measurements described are both in terms of cubits and daṇḍas (4 cubits), eighteen kinds of playhouse will be available.
 
 
-[^3]:  Some are for identifying the oblong, the square and the triangular types respectively with the large, the middle-sized and the small playhouses, but Ag. very rightly objects to this. According to Ag.’s view there will be the following nine types of playhouse; (i) large oblong, (ii) large square, (iii) large triangular, (iv) medium oblong (v) medium square, (vi) medium triangular, (vii) small oblong, (viii) small square and (xi) small triangular. For a free translation of the passages in this chapter (8, 17, 19, 24-28, 33-35, 43-53, 63, 68, 69-92) relating to the construction of the playhouse see D.R. Mankad, “Hindu Theatre” in IHQ: VIII. 1932, pp. 482ff.
+[^mg4]:  They i.e., the large, the middle-sized and the small.
+
+
+[^mg3]:  Some are for identifying the oblong, the square and the triangular types respectively with the large, the middle-sized and the small playhouses, but Ag. very rightly objects to this. According to Ag.’s view there will be the following nine types of playhouse; (i) large oblong, (ii) large square, (iii) large triangular, (iv) medium oblong (v) medium square, (vi) medium triangular, (vii) small oblong, (viii) small square and (xi) small triangular. For a free translation of the passages in this chapter (8, 17, 19, 24-28, 33-35, 43-53, 63, 68, 69-92) relating to the construction of the playhouse see D.R. Mankad, “Hindu Theatre” in IHQ: VIII. 1932, pp. 482ff.
 
 ## *The table of measurement*
 
-12-16. Listen now about the measurement of all these theatres, which has been fixed by Viśvakarmā. Units of these measurements[^8] are: Aṇu, Raja, Bāla, Likṣā, Yūkā, Yava, Aṅgula, cubit (*hasta*) and Daṇḍa.
+12-16. Listen now about the measurement of all these theatres, which has been fixed by Viśvakarmā. Units of these measurements[^mg8] are: Aṇu, Raja, Bāla, Likṣā, Yūkā, Yava, Aṅgula, cubit (*hasta*) and Daṇḍa.
 
 
-[^8]:  The table of measurement given here agrees substantially with the one given by Kauṭilya (see IHQ. VIII. p, 482 footnote).
+[^mg8]:  The table of measurement given here agrees substantially with the one given by Kauṭilya (see IHQ. VIII. p, 482 footnote).
 
 > 8 Aṇus = 1 Raja,  
 > 8 Rajas = 1 Bāla,  
@@ -59,26 +59,26 @@ With the preceding table of measurement I shall describe them (*i.e*. the differ
 
 ## *A playhouse for mortals*
 
-17\. An [oblong] playhouse meant for mortals[^9] should be made sixtyfour cubits in length and thirtytwo cubits in breadth.
+17\. An [oblong] playhouse meant for mortals[^mg9] should be made sixtyfour cubits in length and thirtytwo cubits in breadth.
 
 
-[^9]:  A medium oblong playhouse is meant here. It is described in detail later on, See 33-38, 43-45, 63-65 below.
+[^mg9]:  A medium oblong playhouse is meant here. It is described in detail later on, See 33-38, 43-45, 63-65 below.
 
 ## *Disadvantage of a too big playhouse*
 
-18-19. No one should build a playhouse bigger than the above; for a play [produced] in it (*i.e*. a bigger house) will not be properly expressive. For anything recited or uttered in too big a playhouse will be losing euphony [for the hearers] due to weak resonance of the sounds uttered.[^10]
+18-19. No one should build a playhouse bigger than the above; for a play [produced] in it (*i.e*. a bigger house) will not be properly expressive. For anything recited or uttered in too big a playhouse will be losing euphony [for the hearers] due to weak resonance of the sounds uttered.[^mg10]
 
 20\. [Besides this] when the playhouse is very big, the expression in the face [of actors] on which rests the Representation of States and Sentiments, will not be distinctly visible [to all the spectators].
 
 
-[^10]:  See Ag. on this point.
+[^mg10]:  See Ag. on this point.
 
 21\. Hence it is desirable that playhouses should be of medium size, so that the Recitatives as well as the songs in it, may be more easily heard [by the spectators].
 
-22-23. Creations of gods [observed] in house and gardens are the outcome of their [mere] will, while men are to make careful efforts in their creation; hence men should not try to rival the creation of gods.[^11] I shall now describe the characteristics of a [play] house suitable for human beings.
+22-23. Creations of gods [observed] in house and gardens are the outcome of their [mere] will, while men are to make careful efforts in their creation; hence men should not try to rival the creation of gods.[^mg11] I shall now describe the characteristics of a [play] house suitable for human beings.
 
 
-[^11]:  That is, mortals (men) should not build a playhouse of the biggest type which has been prescribed for gods.
+[^mg11]:  That is, mortals (men) should not build a playhouse of the biggest type which has been prescribed for gods.
 
 ## *Selection of a suitable site*
 
@@ -90,104 +90,104 @@ With the preceding table of measurement I shall describe them (*i.e*. the differ
 
 ## *Measurement of the site*
 
-27a. The ground being cleared one should measure out [the building site].[^12]
+27a. The ground being cleared one should measure out [the building site].[^mg12]
 
 27-28. Under the asterism Puṣyā (*Cancri*) he should spread [for measurement] a piece of white string which may be made of cotton, wool, Muñjā grass or bark of some tree.
 
 
-[^12]:  This hemistich is followed in B. and G. by one couplet which in trans, is as follows: The asterisms Uttaraphālgunī (Beta-Leonis), Uttarāṣāḍhā (Tau-Sagittarii). Uttarabhādrapadā (Andromedœ), Mṛgaśiras (Lambda-Orionis), Viśākhā (lota-Lībra). Revatī (Piseīum). Hastā (Corvii), Tiṣyā (Delta-Cancri) and Anurādhā (Delta-Scorpii) arc favourable in connexion with drama.
+[^mg12]:  This hemistich is followed in B. and G. by one couplet which in trans, is as follows: The asterisms Uttaraphālgunī (Beta-Leonis), Uttarāṣāḍhā (Tau-Sagittarii). Uttarabhādrapadā (Andromedœ), Mṛgaśiras (Lambda-Orionis), Viśākhā (lota-Lībra). Revatī (Piseīum). Hastā (Corvii), Tiṣyā (Delta-Cancri) and Anurādhā (Delta-Scorpii) arc favourable in connexion with drama.
 
 ## *Taking up the string*
 
-28-31. Wise people should prepare for this purpose a string which is not liable to break. When the string is broken into two [pieces] the patron[^13] [of the dramatic spectacle] will surely die. When it is broken into three a political disorder will occur in the land, and it being broken into four pieces the master of the dramatic art[^14] will perish, while if the string slips out of the hand some other kind of loss will be the result. Hence it is desired that the string should always be taken and held with [great] care. Besides this the measurement of ground for the playhouse should be carefully made.
+28-31. Wise people should prepare for this purpose a string which is not liable to break. When the string is broken into two [pieces] the patron[^mg13] [of the dramatic spectacle] will surely die. When it is broken into three a political disorder will occur in the land, and it being broken into four pieces the master of the dramatic art[^mg14] will perish, while if the string slips out of the hand some other kind of loss will be the result. Hence it is desired that the string should always be taken and held with [great] care. Besides this the measurement of ground for the playhouse should be carefully made.
 
 
-[^14]:  prayoktur-nāṭyācāryasya. (Ag.)
+[^mg14]:  prayoktur-nāṭyācāryasya. (Ag.)
 
 
-[^13]:  svāminaḥ=paekṣāpateḥ, Ag.
+[^mg13]:  svāminaḥ=paekṣāpateḥ, Ag.
 
-32-33. And at a favourable moment which occurs in a (happy) Tithi[^15] during its good part (*su-kaṛaṇa*)[^16] he should get the auspicious day declared after the Brahmins have been satisfied [with gifts]. Then he should spread the string after sprinkling on it the propitiating water.
-
-
-[^16]:  karaṇa—a half of a lunar day, see below 43-45 note.
+32-33. And at a favourable moment which occurs in a (happy) Tithi[^mg15] during its good part (*su-kaṛaṇa*)[^mg16] he should get the auspicious day declared after the Brahmins have been satisfied [with gifts]. Then he should spread the string after sprinkling on it the propitiating water.
 
 
-[^15]:  tithi—a lunar day.
+[^mg16]:  karaṇa—a half of a lunar day, see below 43-45 note.
+
+
+[^mg15]:  tithi—a lunar day.
 
 ## *The ground-plan of a playhouse*
 
-33-35. Afterwards he should measure a plot of land sixtyfour cubits [long][^17] and divide the same [lengthwise] into two [equal] parts. The part which will be behind him (*i.e*. at his back) will have to be divided again into two equal halves. Of these halves one [behind him] should be again divided equally into two parts, and on one of these will be made the stage (*raṅga-śīrṣa*) and on the part at the back the tiring room.
+33-35. Afterwards he should measure a plot of land sixtyfour cubits [long][^mg17] and divide the same [lengthwise] into two [equal] parts. The part which will be behind him (*i.e*. at his back) will have to be divided again into two equal halves. Of these halves one [behind him] should be again divided equally into two parts, and on one of these will be made the stage (*raṅga-śīrṣa*) and on the part at the back the tiring room.
 
 
-[^17]:  See 17 above and the note 1 on it.
+[^mg17]:  See 17 above and the note 1 on it.
 
 ## *The ceremony of laying the foundation*
 
-35-37. Having divided the plot of land according to rules laid down before, he should lay in it the foundation of the playhouse. And during this ceremony [of laying the foundation] all the musical instruments such as, Śaṅkha (conchshell), Dundubhi[^18], Mṛdaṅga[^19] and Paṇava[^20] should be sounded.
+35-37. Having divided the plot of land according to rules laid down before, he should lay in it the foundation of the playhouse. And during this ceremony [of laying the foundation] all the musical instruments such as, Śaṅkha (conchshell), Dundubhi[^mg18], Mṛdaṅga[^mg19] and Paṇava[^mg20] should be sounded.
 
 
-[^20]:  paṇava—a small drum or tabor.
+[^mg20]:  paṇava—a small drum or tabor.
 
 
-[^19]:  mṛdaṅga— a kind of earthen drum.
+[^mg19]:  mṛdaṅga— a kind of earthen drum.
 
 
-[^18]:  dundubhi—a kind of drum.
+[^mg18]:  dundubhi—a kind of drum.
 
-37-38. And from the places for the ceremony, undesirable persons such as heretics[^21] including Śramaṇas,[^22] men in dark red (*kāṣāya*)[^23] robes as well as men with physical defects, should be turned out.
-
-
-[^23]:  kāṣāya-vasana—men in kāṣāya or robe of dark red colour; such people being Buddhist monks who accepted the vow of celebacy, were considered an evil omen, for they symbolised unproductivity and want of wordly success etc. See also XVIII, 36 note 2.
+37-38. And from the places for the ceremony, undesirable persons such as heretics[^mg21] including Śramaṇas,[^mg22] men in dark red (*kāṣāya*)[^mg23] robes as well as men with physical defects, should be turned out.
 
 
-[^22]:  B. reads śramiṇa, but G. śramaṇa; the word means naked Jain monks. See XVIII. 36 note 2.
+[^mg23]:  kāṣāya-vasana—men in kāṣāya or robe of dark red colour; such people being Buddhist monks who accepted the vow of celebacy, were considered an evil omen, for they symbolised unproductivity and want of wordly success etc. See also XVIII, 36 note 2.
 
 
-[^21]:  pāṣaṇḍa—Derived originaly from pārṣada (meaning ‘assembly’ or ‘community’) its Pkt. form was pāsaḍa. With spontaneous nasalization of the second vowel it gave rise to Aśokan pasaṃda (Seventh Pillar Edict, Delhi-Topra), which is the basis of Skt. pāṣaṇḍa in the sense of ‘heretic.’
+[^mg22]:  B. reads śramiṇa, but G. śramaṇa; the word means naked Jain monks. See XVIII. 36 note 2.
+
+
+[^mg21]:  pāṣaṇḍa—Derived originaly from pārṣada (meaning ‘assembly’ or ‘community’) its Pkt. form was pāsaḍa. With spontaneous nasalization of the second vowel it gave rise to Aśokan pasaṃda (Seventh Pillar Edict, Delhi-Topra), which is the basis of Skt. pāṣaṇḍa in the sense of ‘heretic.’
 
 38-39. At night, offerings should be made in all the ten directions [to various gods guarding them] and these offerings should consist of sweet scent, flowers, fruits and eatables of various other kinds.
 
 39-41. The food-stuff offered in [the four cardinal directions] east, west, south and north, should respectively be of white, blue, yellow and red colours. Offerings preceded by [the muttering of] Mantras should be made in [all the ten] different directions to deities presiding over them.
 
-41-42. At [the time of laying] the foundation ghee[^24] and Pāyasa[^25] should be offered to Brahmins, Madhuparka[^26] to the king, and rice with molasses to masters [of dramatic art].
+41-42. At [the time of laying] the foundation ghee[^mg24] and Pāyasa[^mg25] should be offered to Brahmins, Madhuparka[^mg26] to the king, and rice with molasses to masters [of dramatic art].
 
 
-[^26]:  madhuparka—‘ a mixture of honey’; a respectful offering prescribed to be made in Vedic times, to an honourable person and this custom still lingers in ceremonies like marriage. Its ingredients are five: curd (dadhi), ghee (sarpis), water (jala), honey (kṣaudra) and white sugar (sitā).
+[^mg26]:  madhuparka—‘ a mixture of honey’; a respectful offering prescribed to be made in Vedic times, to an honourable person and this custom still lingers in ceremonies like marriage. Its ingredients are five: curd (dadhi), ghee (sarpis), water (jala), honey (kṣaudra) and white sugar (sitā).
 
 
-[^25]:  pāyasa—rice cooked in milk with sugar. It is a kind of rice-porridge.
+[^mg25]:  pāyasa—rice cooked in milk with sugar. It is a kind of rice-porridge.
 
 
-[^24]:  ghee—clarified butter.
+[^mg24]:  ghee—clarified butter.
 
 42-43. The foundation should be laid during the auspicious part of a happy Tithi under the asterism Mūlā (*Lambda-Scorpionis*).
 
 ## *Raising pillars of the playhouse (nāṭyamaṇḍapa)*
 
-43-45. After it has been laid, walls should be built and this having been completed, pillars within the playhouse should be raised in an [auspicious] Tithi and Karaṇa[^27] which are under a good asterism. This [raising of pillars] ought to be made under the asterism Rohiṇī (*Aldeberan*) or Śravaṇā (*Aquillae*) [which are considered auspicious for the purpose].
+43-45. After it has been laid, walls should be built and this having been completed, pillars within the playhouse should be raised in an [auspicious] Tithi and Karaṇa[^mg27] which are under a good asterism. This [raising of pillars] ought to be made under the asterism Rohiṇī (*Aldeberan*) or Śravaṇā (*Aquillae*) [which are considered auspicious for the purpose].
 
 
-[^27]:  karaṇa—half of the lunar day (tithi). They are eleven in number viz.—(1) vava, (2) vālava, (3) kaulava. (4) taitila, (5) gara, (6) vaṇija, (7) viṣṭi, (8) śakuni, (9) cutuṣpada. (10) nāga and (11) kintughna, and of these the first seven and counted from the second half of the first day of the śukla-pakṣa (bright half of the moon) to the first half of the fourteenth day of the kṛṣṇa-pakṣa (dark half of the moon). They occur eight times in a month. The remaining karaṇas occur in the remaining duration of tithis and appear only once in a month. See Sūrya-siddhānta—II.67-68.
+[^mg27]:  karaṇa—half of the lunar day (tithi). They are eleven in number viz.—(1) vava, (2) vālava, (3) kaulava. (4) taitila, (5) gara, (6) vaṇija, (7) viṣṭi, (8) śakuni, (9) cutuṣpada. (10) nāga and (11) kintughna, and of these the first seven and counted from the second half of the first day of the śukla-pakṣa (bright half of the moon) to the first half of the fourteenth day of the kṛṣṇa-pakṣa (dark half of the moon). They occur eight times in a month. The remaining karaṇas occur in the remaining duration of tithis and appear only once in a month. See Sūrya-siddhānta—II.67-68.
 
 45-46. The master [of dramatic art], after he has fasted for three [days and] nights, is to raise the pillars in an auspicious moment at dawn.
 
-46-50.[^28] In the beginning, the ceremony in connexion with the Brahmin pillar should be performed with completely white,[^29] articles purified with ghee and mustard seed; and in this ceremony Pāyasa should be distributed [to Brahmins]. In case of the Kṣatriya pillar, the ceremony should be performed with cloth, garland and unguent which should all be of red[^30] colour; during the ceremony rice mixed with molasses should be given to the twice-born caste. The Vaiśya pillar should be raised in the north-western direction of the playhouse (*nāṭyamaṇḍapa*) and [at the ceremony of its raising] completely yellow[^31] articles should be used, and Brahmins should be given rice with ghee. And in case of the Śūdra pillar, which is to be raised in the north-eastern direction, articles used in offering should all be of dark[^32] colour, and the twice-born caste should be fed with Kṛsarā.
+46-50.[^mg28] In the beginning, the ceremony in connexion with the Brahmin pillar should be performed with completely white,[^mg29] articles purified with ghee and mustard seed; and in this ceremony Pāyasa should be distributed [to Brahmins]. In case of the Kṣatriya pillar, the ceremony should be performed with cloth, garland and unguent which should all be of red[^mg30] colour; during the ceremony rice mixed with molasses should be given to the twice-born caste. The Vaiśya pillar should be raised in the north-western direction of the playhouse (*nāṭyamaṇḍapa*) and [at the ceremony of its raising] completely yellow[^mg31] articles should be used, and Brahmins should be given rice with ghee. And in case of the Śūdra pillar, which is to be raised in the north-eastern direction, articles used in offering should all be of dark[^mg32] colour, and the twice-born caste should be fed with Kṛsarā.
 
 
-[^32]:  dark—symbol of non-Aryan origin associated, with the Śūdras.
+[^mg32]:  dark—symbol of non-Aryan origin associated, with the Śūdras.
 
 
-[^31]:  yellow—symbol of wealth (gold), associated with the Vaiśyas.
+[^mg31]:  yellow—symbol of wealth (gold), associated with the Vaiśyas.
 
 
-[^30]:  red—symbol of energy and strength, associated with the Kṣatriyas.
+[^mg30]:  red—symbol of energy and strength, associated with the Kṣatriyas.
 
 
-[^29]:  white—symbol of purity and learning associated with the Brahmins.
+[^mg29]:  white—symbol of purity and learning associated with the Brahmins.
 
 
-[^28]:  Before 46, G. reads on the strength of a single ms. one couplet which seems to record a tradition that the pillars should be wooden.
+[^mg28]:  Before 46, G. reads on the strength of a single ms. one couplet which seems to record a tradition that the pillars should be wooden.
 
 50-53. First of all in case of the Brahmin pillar, white garlands and unguent as well as gold from an ear-ornament should be thrown at its foot, while copper, silver, and iron are respectively to be thrown at the feet of the Kṣatriya, Vaiśya and Śūdra pillars. Besides this, gold should be thrown at the feet of the rest [of pillars].
 
