--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/03.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/03.md
@@ -4,43 +4,43 @@ title = "03 Pūjā to the Gods of the Stage (raṅgapūjā)"
 +++
 ## *Consecration of the playhouse*
 
-1-8. In the auspicious playhouse constructed with all the characteristics [mentioned above] cows, and Brahmins muttering [proper Mantras] should be made to dwell for a week. Then the master of the dramatic art who has been initiated [for the purpose] and has put on new cloths, fasted for three days, lived away from his bed-room (lit. the dwelling house), has kept his senses under control and has [thus] become purified, will besprinkle his limbs with water over which purificatory Mantras have been muttered, and consecrate the playhouse. This [consecration] should take place after he has made obeisance to the great god Śiva, the lord of all the regions, Brahmā who sprung from the lotus, Bṛhaspati, the preceptor of gods, Viṣṇu, Guha (Kārtikeya), Sarasvatī, Lakṣmī, Siddhi, Medhā, Smṛti, Mati, Candra (Moon), Sūrya (Sun), Winds, Guardians of all directions, Aśvins, Mitra, Agni, and other gods, such as Rudra, Varṇas[^1], Kāla[^2], Kali[^3], Yama, Niyati, the Sceptre of Yama[^4], Weapons of Viṣṇu[^5], the Lord of the Nāgas (Serpents), the Lord or the birds (Garuḍa), Thunderbolt, Lightning, Seas, Gandharvas, Apsarasas, Sages, Nāṭya-maids[^6], Mahāgrāmaṇī (the great leader of Gaṇas)[^7], Yakṣas, Guhyakas[^8] and the hosts of Bhūtas.
+1-8. In the auspicious playhouse constructed with all the characteristics [mentioned above] cows, and Brahmins muttering [proper Mantras] should be made to dwell for a week. Then the master of the dramatic art who has been initiated [for the purpose] and has put on new cloths, fasted for three days, lived away from his bed-room (lit. the dwelling house), has kept his senses under control and has [thus] become purified, will besprinkle his limbs with water over which purificatory Mantras have been muttered, and consecrate the playhouse. This [consecration] should take place after he has made obeisance to the great god Śiva, the lord of all the regions, Brahmā who sprung from the lotus, Bṛhaspati, the preceptor of gods, Viṣṇu, Guha (Kārtikeya), Sarasvatī, Lakṣmī, Siddhi, Medhā, Smṛti, Mati, Candra (Moon), Sūrya (Sun), Winds, Guardians of all directions, Aśvins, Mitra, Agni, and other gods, such as Rudra, Varṇas[^mg1], Kāla[^mg2], Kali[^mg3], Yama, Niyati, the Sceptre of Yama[^mg4], Weapons of Viṣṇu[^mg5], the Lord of the Nāgas (Serpents), the Lord or the birds (Garuḍa), Thunderbolt, Lightning, Seas, Gandharvas, Apsarasas, Sages, Nāṭya-maids[^mg6], Mahāgrāmaṇī (the great leader of Gaṇas)[^mg7], Yakṣas, Guhyakas[^mg8] and the hosts of Bhūtas.
 
 
-[^8]:  Kālidāsa makes no distinction between Yakṣa and Guhyaka, See Meghadūta, 1 and 5.
+[^mg8]:  Kālidāsa makes no distinction between Yakṣa and Guhyaka, See Meghadūta, 1 and 5.
 
 
-[^7]:  mahāgrāmāṇī—The great leader of Gaṇas. It is very difficult to accept Ag’s identification of mahāgrāmaṇī with Gaṇapati (mahāgrāmaṇir gaṇapatiḥ). For īn 58 below occurs the term mahāgaṇêsvara (in the plural number) indicating the different leaders of Gaṇas who followed Śiva. One of such leaders has been mentioned there as Nandīśvara (Nandin). Besides this the term Ganeśa (the leader of Gaṇas) has also been applied to Śiva in 47 below. In describing piṇḍībandhas the piṇḍī of Gaṇeśvara has been named as daskṣayajña-vimardinī (IV.260). This too shows that the words gaṇeśvara, grāmaṇī or mahāgrāmaṇī meant simply the leader, one of the leaders or the great leader of Gaṇas. The fully developed Gaṇapati seems to be non-existent at the time when the NŚ. was composed. Our. suspicion in the matter seems to be corroborated by the variant tathā grāmādhi-devatā recorded in the ms ṭha of B. for mahāgrāmaṇyaṃ. Gaṇapati seems to be a late entrant into the Hindu pantheon. He is not mentioned in any one of the old Purāṇas. Only the Varāha, Vāmana, Garuḍa and Brahma-vaivarta P. which are late, know the deity (Winternitz, Vol. I. pp. 566-568, 573, Vidyalankar, JK. sub voce). Yājñavalkya mentions Gaṇesa (Hindu Law and Custom, pp..42-44).
+[^mg7]:  mahāgrāmāṇī—The great leader of Gaṇas. It is very difficult to accept Ag’s identification of mahāgrāmaṇī with Gaṇapati (mahāgrāmaṇir gaṇapatiḥ). For īn 58 below occurs the term mahāgaṇêsvara (in the plural number) indicating the different leaders of Gaṇas who followed Śiva. One of such leaders has been mentioned there as Nandīśvara (Nandin). Besides this the term Ganeśa (the leader of Gaṇas) has also been applied to Śiva in 47 below. In describing piṇḍībandhas the piṇḍī of Gaṇeśvara has been named as daskṣayajña-vimardinī (IV.260). This too shows that the words gaṇeśvara, grāmaṇī or mahāgrāmaṇī meant simply the leader, one of the leaders or the great leader of Gaṇas. The fully developed Gaṇapati seems to be non-existent at the time when the NŚ. was composed. Our. suspicion in the matter seems to be corroborated by the variant tathā grāmādhi-devatā recorded in the ms ṭha of B. for mahāgrāmaṇyaṃ. Gaṇapati seems to be a late entrant into the Hindu pantheon. He is not mentioned in any one of the old Purāṇas. Only the Varāha, Vāmana, Garuḍa and Brahma-vaivarta P. which are late, know the deity (Winternitz, Vol. I. pp. 566-568, 573, Vidyalankar, JK. sub voce). Yājñavalkya mentions Gaṇesa (Hindu Law and Custom, pp..42-44).
 
 
-[^6]:  nāṭyakumārī—Such goddesses are possibly mentioned nowhere else.
+[^mg6]:  nāṭyakumārī—Such goddesses are possibly mentioned nowhere else.
 
 
-[^5]:  Weapons of Viṣṇu appear as deities in the Act, 1 of Bhāsa’s Bāla.
+[^mg5]:  Weapons of Viṣṇu appear as deities in the Act, 1 of Bhāsa’s Bāla.
 
 
-[^4]:  Sec note 5 below.
+[^mg4]:  Sec note 5 below.
 
 
-[^3]:  Kali—There are many legendary heroes of this name, see JK. sub voce.
+[^mg3]:  Kali—There are many legendary heroes of this name, see JK. sub voce.
 
 
-[^2]:  Kāla—There are several legendary heroes (gods, sages and Astras) of this name; see Vidyalankar, JK. sub voce.
+[^mg2]:  Kāla—There are several legendary heroes (gods, sages and Astras) of this name; see Vidyalankar, JK. sub voce.
 
 
-[^1]:  varṇas—No gods called varṇas are to be met with in any other work. They may be taken as deities ruling specially over the four varṇas of people.
+[^mg1]:  varṇas—No gods called varṇas are to be met with in any other work. They may be taken as deities ruling specially over the four varṇas of people.
 
 Having made obeisance to these, and other divine sages (*devarṣi*), he should with folded palms invoke all the gods to their respective positions, and say, “Ye, holy ones, should take us under your protection during the night, and ye with your followers should offer us assistance in this dramatic performance.”
 
 ## *Offering Pūjā to the Jarjara*
 
-11-13. Having worshipped [thus] all the gods as well as all the musical instruments (*kutapa*)[^9] he should offer Pūjā to the Jarjara[^10] for attaining good success at the performance [and pray to it as follows]. “Thou art Indra’s weapon killing all the demons; thou hast been fashioned by all the gods, and thou art capable of destroying all the obstacles; bring victory to the king and defeat to his enemies, welfare to cows and Brahmins, and progress to dramatic undertakings”.
+11-13. Having worshipped [thus] all the gods as well as all the musical instruments (*kutapa*)[^mg9] he should offer Pūjā to the Jarjara[^mg10] for attaining good success at the performance [and pray to it as follows]. “Thou art Indra’s weapon killing all the demons; thou hast been fashioned by all the gods, and thou art capable of destroying all the obstacles; bring victory to the king and defeat to his enemies, welfare to cows and Brahmins, and progress to dramatic undertakings”.
 
 
-[^10]:  See 73-81 below.
+[^mg10]:  See 73-81 below.
 
 
-[^9]:  See below 72-73 note 3. The reading saṃprayujya in all editions and mss. seems to be wrong, It should be emended as saṃprapūjya.
+[^mg9]:  See below 72-73 note 3. The reading saṃprayujya in all editions and mss. seems to be wrong, It should be emended as saṃprapūjya.
 
 14-15. After proceeding thus according to rules and staying in the phayhouse for the night, he (the master of the dramatic art) should begin Pūjā as soon as it is morning. This Pūjā connected with the stage should take place under the asterism Ārdrā (*Alpha-Orionis*) or Maghā (*Regulus*) or Yāmyā (*Musca*) or Pūrvaphalgunī (*Delta-Leonis*) or Pūrvāṣāḍhā (‘*Delta-Sagittarii*) or Pūrvabhādrapadā (*Alpha-Pegasi*) or Aśleṣā (*Hydrae*) or Mūlā (*Lambda-Scorpionis*).
 
@@ -48,51 +48,51 @@ Having made obeisance to these, and other divine sages (*devarṣi*), he should 
 
 ## *Installation of the gods*
 
-17\. During the concluding moments of the day, which are considered to be hard and full of evils, and are presided over by Bhūtas, one should perform Ācamana[^11] and cause the gods to be installed.
+17\. During the concluding moments of the day, which are considered to be hard and full of evils, and are presided over by Bhūtas, one should perform Ācamana[^mg11] and cause the gods to be installed.
 
 
-[^11]:  ācamana—ceremonial rinsing of the mouth by sipping water from the palm of the hand.
+[^mg11]:  ācamana—ceremonial rinsing of the mouth by sipping water from the palm of the hand.
 
-18-20. [Along with these gods] should be [taken] red thread-bangle (*pratisarā*)[^12], the best kind of red sandal, red flowers and red fruits. [With these and] articles such as barley, white mustard, sunned rice, Nāgapuṣpa[^13] powder and husked saffron (*priyaṅgu*)[^14], the gods should be installed.
-
-
-[^14]:  priyaṅgu =saffron, and not the fruit of the priyaṅgu creeper.
+18-20. [Along with these gods] should be [taken] red thread-bangle (*pratisarā*)[^mg12], the best kind of red sandal, red flowers and red fruits. [With these and] articles such as barley, white mustard, sunned rice, Nāgapuṣpa[^mg13] powder and husked saffron (*priyaṅgu*)[^mg14], the gods should be installed.
 
 
-[^13]:  nāgapuṣpa =the campaka tree (Apte), but Ag. says nāgapuṣpaṃ nāgadantaḥ.
+[^mg14]:  priyaṅgu =saffron, and not the fruit of the priyaṅgu creeper.
 
 
-[^12]:  pratisarā—sūtra-vinirmita-granthi-mantaḥ kaṅkaṇaviśeṣaḥ, Ag. (i. p. 74).
+[^mg13]:  nāgapuṣpa =the campaka tree (Apte), but Ag. says nāgapuṣpaṃ nāgadantaḥ.
+
+
+[^mg12]:  pratisarā—sūtra-vinirmita-granthi-mantaḥ kaṅkaṇaviśeṣaḥ, Ag. (i. p. 74).
 
 ## *The Maṇḍala for installing the gods*
 
 20\. In this ceremony one should draw in proper place a Maṇḍala according to the manner prescribed.
 
-21\. This maṇḍala should be sixteen Tālas (*hasta*)[^15] square and it should have doors on all its four sides,
+21\. This maṇḍala should be sixteen Tālas (*hasta*)[^mg15] square and it should have doors on all its four sides,
 
 
-[^15]:  hasta in this passage is to be interpreted as hasta-tala or tāla i.e., the interval between the tips of the thumb and the middle-finger stretched in opposite directions. SR. VII. 1046, Otherwise it will be impossible to accomodate the maṇḍala on the stage which is eight cubits wide (See II. 33-35). The ancient commentators like Śaṅkuka and others pointed out how absurd it would be to take hasta in the passage in the sense of cubit. (see Ag. I. p. 75).
+[^mg15]:  hasta in this passage is to be interpreted as hasta-tala or tāla i.e., the interval between the tips of the thumb and the middle-finger stretched in opposite directions. SR. VII. 1046, Otherwise it will be impossible to accomodate the maṇḍala on the stage which is eight cubits wide (See II. 33-35). The ancient commentators like Śaṅkuka and others pointed out how absurd it would be to take hasta in the passage in the sense of cubit. (see Ag. I. p. 75).
 
 22\. In its middle should be drawn two lines vertically and horizontally (*i.e* parallel to the sides), and in the apartments made by these lines, should be installed the different gods.
 
-23-30. In the middle of this (*maṇḍala*), should be put Brahmā who has lotus as his seat[^16]. Then one should first of all put in the east Śiva with his host of Bhūtas, Nārāyaṇa (Viṣṇu), Indra, Skanda (Kārtikeya), Sūrya, Aśvins, Candra, Sarasvatī, Lakṣmī, Śraddhā and Medhā, in the south-east Agni, Svāhā, Viśvedevas, Gandharvas, Rudras and Ṛṣis, in the south Yama, Mitra with his followers, Pitṛs, Piśācas, Uragas and Guhyakas, in the south-west the Rākṣasas and all the Bhūtas, in the west the Seas and Varuṇa, in the north-west the Seven Winds[^17] and Garuḍa with other birds, in the north Kuvera (Kubera), Mothers of the Nāṭya, Yakṣas with their followers, in the north-east leaders of Gaṇas such as Nandī, Brahmarṣis and the host of Bhūtas in their proper places.
+23-30. In the middle of this (*maṇḍala*), should be put Brahmā who has lotus as his seat[^mg16]. Then one should first of all put in the east Śiva with his host of Bhūtas, Nārāyaṇa (Viṣṇu), Indra, Skanda (Kārtikeya), Sūrya, Aśvins, Candra, Sarasvatī, Lakṣmī, Śraddhā and Medhā, in the south-east Agni, Svāhā, Viśvedevas, Gandharvas, Rudras and Ṛṣis, in the south Yama, Mitra with his followers, Pitṛs, Piśācas, Uragas and Guhyakas, in the south-west the Rākṣasas and all the Bhūtas, in the west the Seas and Varuṇa, in the north-west the Seven Winds[^mg17] and Garuḍa with other birds, in the north Kuvera (Kubera), Mothers of the Nāṭya, Yakṣas with their followers, in the north-east leaders of Gaṇas such as Nandī, Brahmarṣis and the host of Bhūtas in their proper places.
 
 
-[^17]:  For the seven winds see the Vāmana P, (see Vidyalankar, JK. sub voce).
+[^mg17]:  For the seven winds see the Vāmana P, (see Vidyalankar, JK. sub voce).
 
 
-[^16]:  According to Ag. a lotus is to be described in the centre of maṇḍala.
+[^mg16]:  According to Ag. a lotus is to be described in the centre of maṇḍala.
 
-31\. And [in the eastern] pillar should be placed Sanatkumāra[^18], in the southern one Dakṣa[^19], in the northern one Grāmaṇī (lit. leader of Gaṇas)[^20] and in the western one Skanda (Kārtikeya).
-
-
-[^20]:  See above 1-8 note 7.
+31\. And [in the eastern] pillar should be placed Sanatkumāra[^mg18], in the southern one Dakṣa[^mg19], in the northern one Grāmaṇī (lit. leader of Gaṇas)[^mg20] and in the western one Skanda (Kārtikeya).
 
 
-[^19]:  Dakṣa—one of the lords of the creation (prajāpati), son of Pracetas. There were other Dakṣas besides. See Vidyalankar, JK, sub voce.
+[^mg20]:  See above 1-8 note 7.
 
 
-[^18]:  Sanatkumāra—ane of the great ṛṣis, and a son of Brahmā.
+[^mg19]:  Dakṣa—one of the lords of the creation (prajāpati), son of Pracetas. There were other Dakṣas besides. See Vidyalankar, JK, sub voce.
+
+
+[^mg18]:  Sanatkumāra—ane of the great ṛṣis, and a son of Brahmā.
 
 32\. According to this rule all the gods in their [proper] form and colour should be placed in their respective positions.
 
@@ -100,48 +100,48 @@ Having made obeisance to these, and other divine sages (*devarṣi*), he should 
 
 33\. After they have been installed with regular ceremony in suitable places they should be worshipped in a fitting manner.
 
-34\. Gods [in general] should be given white[^21] garlands and unguents, while Gandharvas, Agni and Sūrya should be given garlands and unguents of red[^22] colour,
+34\. Gods [in general] should be given white[^mg21] garlands and unguents, while Gandharvas, Agni and Sūrya should be given garlands and unguents of red[^mg22] colour,
 
 
-[^22]:  ‘Red’ here seems to be the symbol of energy.
+[^mg22]:  ‘Red’ here seems to be the symbol of energy.
 
 
-[^21]:  See above 1-8 note 7. ‘White’ here seems to be the symbol of purity and good grace.
+[^mg21]:  See above 1-8 note 7. ‘White’ here seems to be the symbol of purity and good grace.
 
 35\. After being treated [thus] in due order and manner, they should be worshipped according to rules with suitable offerings.
 
-36-39. [Offerings suitable to different gods and goddesses are as follows]: Brahmā Madhuparka,[^23] Sarasvatī, Pāyasa,[^24] gods like Śiva, Viṣṇu, and Indra sweetmeats, Agni rice cooked with ghee, Candra and Sūrya rice cooked with molasses. Viśvedevas, Gandharvas and sages honey and Pāyasa, Yama and Mitra cakes and sweetmeats, Pitṛs, Piśācas and Uragas ghee and milk, host of Bhūtas raw and cooked meat, wines of different kinds and grams covered with thick milk.
+36-39. [Offerings suitable to different gods and goddesses are as follows]: Brahmā Madhuparka,[^mg23] Sarasvatī, Pāyasa,[^mg24] gods like Śiva, Viṣṇu, and Indra sweetmeats, Agni rice cooked with ghee, Candra and Sūrya rice cooked with molasses. Viśvedevas, Gandharvas and sages honey and Pāyasa, Yama and Mitra cakes and sweetmeats, Pitṛs, Piśācas and Uragas ghee and milk, host of Bhūtas raw and cooked meat, wines of different kinds and grams covered with thick milk.
 
 
-[^24]:  pāyasa—see above II. 41-42 note.
+[^mg24]:  pāyasa—see above II. 41-42 note.
 
 
-[^23]:  madhuparka—see above II, 41-42. note 3.
+[^mg23]:  madhuparka—see above II, 41-42. note 3.
 
 ## *Consecration of the Mattavāraṇī*
 
-40-44 Similar shall be the rules regarding the Pūjā in connexion with the Mattavāraṇī. [Offerings to be made to gods and demigods are as follows]:[^25] Rākṣasas raw and cooked meat, Dānavas wine and meat, the remaining gods cake and Utkarikā[^26] and boiled rice, gods of seas and rivers fish and cakes, Varuṇa ghee and Pāyasa, Sages various roots and fruits, the wind god and birds different edible stuff (lit. *bhakṣya* and *bhojya*), Mothers[^27] of the Nāṭya, and Dhanada (Kuvera (Kubera)) with his followers eatables including cakes, and Locitās.[^28]
+40-44 Similar shall be the rules regarding the Pūjā in connexion with the Mattavāraṇī. [Offerings to be made to gods and demigods are as follows]:[^mg25] Rākṣasas raw and cooked meat, Dānavas wine and meat, the remaining gods cake and Utkarikā[^mg26] and boiled rice, gods of seas and rivers fish and cakes, Varuṇa ghee and Pāyasa, Sages various roots and fruits, the wind god and birds different edible stuff (lit. *bhakṣya* and *bhojya*), Mothers[^mg27] of the Nāṭya, and Dhanada (Kuvera (Kubera)) with his followers eatables including cakes, and Locitās.[^mg28]
 
 
 
-[^28]:  locitā—This word seems to be connected with the NIA locī, luei.
+[^mg28]:  locitā—This word seems to be connected with the NIA locī, luei.
 
-[^27]:  These goddesses (nāṭyamatṛkās) seem to have been ignored by the Purānas.
-
-
-[^26]:  utkarikā =a kind of sweetmeat.
+[^mg27]:  These goddesses (nāṭyamatṛkās) seem to have been ignored by the Purānas.
 
 
-[^25]:  See above.
+[^mg26]:  utkarikā =a kind of sweetmeat.
+
+
+[^mg25]:  See above.
 
 45\. These different kinds of foodstuff should be offered to them and the Mantras to be uttered at the time of making offering to different gods will be as follows:—
 
 46\. (The Mantra for Brahmā), O the god of gods, the most lordly one, the lotus-born one, the grand-father [of the worlds] accept this my offering consecrated by the Mantra.
 
-47\. (For Śiva) O the god of gods, the great god, the lord of Gaṇas[^29] and the killer of Tripura, accept this my etc.
+47\. (For Śiva) O the god of gods, the great god, the lord of Gaṇas[^mg29] and the killer of Tripura, accept this my etc.
 
 
-[^29]:  It should be marked here that Śiva has been called Gaṇeśvara, a term applied in later times to Gaṇapati only.
+[^mg29]:  It should be marked here that Śiva has been called Gaṇeśvara, a term applied in later times to Gaṇapati only.
 
 48\. (For Viṣṇu), O Nārāyaṇa, Padmanābha, the best of the gods, with unrestrained movement, accept this my etc.
 
@@ -169,10 +169,10 @@ Having made obeisance to these, and other divine sages (*devarṣi*), he should 
 
 60a. (For Kāmapāla) O Kāmapāla, I always bow to thee to whom this offering is made.
 
-60-61. (For Gandharvas) O Gandharvas, amongst whom Nārada, Tumburu and Viśvāvasu[^30] are the foremost, accept this my best offering.
+60-61. (For Gandharvas) O Gandharvas, amongst whom Nārada, Tumburu and Viśvāvasu[^mg30] are the foremost, accept this my best offering.
 
 
-[^30]:  Three ancient masters of music.
+[^mg30]:  Three ancient masters of music.
 
 61-62. (For Yama and Mitra) O Yama and Mitra, the gods who are adored by all the worlds, accept this my etc.
 
@@ -194,24 +194,24 @@ Having made obeisance to these, and other divine sages (*devarṣi*), he should 
 
 70-71. To all other gods and Gandharvas too, who occupy the heavens, the earth, the middle region and the ten directions, these offerings are made (lit. let these be accepted by them).
 
-71-72. Then an [earthen] jar[^31] full of water with a garland of leaves in its front, should be placed in the middle of the stage, and a piece of gold should be put into it.
+71-72. Then an [earthen] jar[^mg31] full of water with a garland of leaves in its front, should be placed in the middle of the stage, and a piece of gold should be put into it.
 
 
-[^31]:  For the significance of this jar see below 87-89.
+[^mg31]:  For the significance of this jar see below 87-89.
 
-72-73. All the musical instruments covered with cloth should be worshipped with [sweet] scent, flowers, garlands, incense and various eatables hard and soft.[^32]
+72-73. All the musical instruments covered with cloth should be worshipped with [sweet] scent, flowers, garlands, incense and various eatables hard and soft.[^mg32]
 
 ## *Consecration of the Jarjara*
 
 
-[^32]:  This passage with some minor variation has been repeated in B. and G. But this is out of place there. For the order in which musical instruments (kutapa) and the Jarjara should be worshipped see 11-13 above.
+[^mg32]:  This passage with some minor variation has been repeated in B. and G. But this is out of place there. For the order in which musical instruments (kutapa) and the Jarjara should be worshipped see 11-13 above.
 
 73-74. Having worshipped all the gods in due order, and offering Pūjā to the Jarjara [in the following manner] one should have the obstacles removed.
 
-74-76. [One should fasten a piece of] white cloth at the top [of the Jarjara], blue cloth at the Rudra joint, yellow cloth at the Viṣṇu joint, red cloth at the Skanda joint, and variegated cloth at the lowest joint.[^33] And garlands, incense and unguents are to be offered to it (the Jarjara) in a fitting manner.
+74-76. [One should fasten a piece of] white cloth at the top [of the Jarjara], blue cloth at the Rudra joint, yellow cloth at the Viṣṇu joint, red cloth at the Skanda joint, and variegated cloth at the lowest joint.[^mg33] And garlands, incense and unguents are to be offered to it (the Jarjara) in a fitting manner.
 
 
-[^33]:  For identifying the joints see 78-79 below.
+[^mg33]:  For identifying the joints see 78-79 below.
 
 76-77. Having observed all these rites with incense, garlands and unguents one should consecrate the Jarjara with the following Mantra:
 
@@ -233,7 +233,7 @@ Having made obeisance to these, and other divine sages (*devarṣi*), he should 
 
 85-86. After saying these words for the happiness of the king, the wise man should utter the Benediction for the success of the dramatic production.
 
-86- 87. [The Benediction]: Let mothers such as Sarasvatī, Dhṛti, Medhā, Hrī, Śrī, Lakṣmī, and Smṛti[^34] protect you and give you success.
+86- 87. [The Benediction]: Let mothers such as Sarasvatī, Dhṛti, Medhā, Hrī, Śrī, Lakṣmī, and Smṛti[^mg34] protect you and give you success.
 
 
 [^34]:  These are the seven Nāṭya-mātṛkās. See 23-30 above.
