--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/04.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/04.md
@@ -6,15 +6,15 @@ title = "04 Description of the Class Dance (tāṇḍava)"
 
 1\. After having worshipped [the gods presiding over the stage] I said to Brahmā, “Tell me quickly, O the mighty one, which play should be performed?”
 
-*2*. [In reply] I was told by the Lord, “Perform the Amṛta-manthana (the Churning of the Ocean)[^1] which is capable of stimulating efforts and of giving pleasure to gods.
+*2*. [In reply] I was told by the Lord, “Perform the Amṛta-manthana (the Churning of the Ocean)[^mg1] which is capable of stimulating efforts and of giving pleasure to gods.
 
 
-[^1]:  The legend about the churning of the ocean occurs in the Mbh. (I. 17-19) and the Viṣṇu P. (1) See Winternitz, Vol. I pp. 389, 546,
+[^mg1]:  The legend about the churning of the ocean occurs in the Mbh. (I. 17-19) and the Viṣṇu P. (1) See Winternitz, Vol. I pp. 389, 546,
 
-3\. I have composed this Samavakāra[^2] which is conducive to [the performance of] duties (*dharma*), to [the fulfillment of] desire (*kāma*) as well as [to the earning] wealth (*artha*).”
+3\. I have composed this Samavakāra[^mg2] which is conducive to [the performance of] duties (*dharma*), to [the fulfillment of] desire (*kāma*) as well as [to the earning] wealth (*artha*).”
 
 
-[^2]:  See XX. 69 ff.
+[^mg2]:  See XX. 69 ff.
 
 4\. When this Samavakāra was performed, gods and demons were delighted to witness actions and ideas [familiar to them.]
 
@@ -24,38 +24,38 @@ title = "04 Description of the Class Dance (tāṇḍava)"
 
 8\. “I shall enjoy it,” said the lord of gods in reply. Then Brahmā asked me to get ready [for the performance].
 
-9-10. “O the best of the Brahmins, after the Preliminaries connected with the performance had been completed this (Samavakāra named the Amṛta-manthana) as well as a Ḍīma[^3] named the Tripuradāha (the Burning of Tripura)[^4] was performed in the Himalayan region which consisted of many hills and in which there were many Bhūtas, Gaṇas^([2](http://www.wisdomlib.org/admin/files/natyashastra/abbyy_macro.php?v=4#bookmark1)) and beautiful caves and waterfalls.”
+9-10. “O the best of the Brahmins, after the Preliminaries connected with the performance had been completed this (Samavakāra named the Amṛta-manthana) as well as a Ḍīma[^mg3] named the Tripuradāha (the Burning of Tripura)[^mg4] was performed in the Himalayan region which consisted of many hills and in which there were many Bhūtas, Gaṇas^([2](http://www.wisdomlib.org/admin/files/natyashastra/abbyy_macro.php?v=4#bookmark1)) and beautiful caves and waterfalls.”
 
 
-[^4]:  Tripuradāha—As Śiva killed an Asura (demon) named Tripura, by burning him by one of his fiery arrows he is called Tripurāntaka. See JK. sub voce.
+[^mg4]:  Tripuradāha—As Śiva killed an Asura (demon) named Tripura, by burning him by one of his fiery arrows he is called Tripurāntaka. See JK. sub voce.
 
 
-[^3]:  ḍima—one of the plays of the major type; for its characteristics see XX. 84 ff.
+[^mg3]:  ḍima—one of the plays of the major type; for its characteristics see XX. 84 ff.
 
 11\. Then all the [Bhūtas] and Gaṇas were pleased to see actions and ideas familiar to them, and Śiva too was pleased and said to Brahmā:
 
 12\. “O the high-souled one, this drama (*nāṭya*) which is conducive to fame, welfare, merit and intellect, has been well-conceived by you.
 
-13- 14. Now in the evening, while performing it, I remembered that dance made beautiful by Aṅgahāras[^5] consisting of different Karaṇas.[^6] You may utilize these in the Preliminaries (*pūrvaraṅga*) of a play.
+13- 14. Now in the evening, while performing it, I remembered that dance made beautiful by Aṅgahāras[^mg5] consisting of different Karaṇas.[^mg6] You may utilize these in the Preliminaries (*pūrvaraṅga*) of a play.
 
 
-[^6]:  See below 29-30 note 1. For details about the Aṅgahāras see below 16 ff, ff.
+[^mg6]:  See below 29-30 note 1. For details about the Aṅgahāras see below 16 ff, ff.
 
 
-[^5]:  aṅgahāra—major dance figures which depend on minor dance figures (karaṇas) The word means ‘movement of limbs’. See Ag. (I. p. 91).
+[^mg5]:  aṅgahāra—major dance figures which depend on minor dance figures (karaṇas) The word means ‘movement of limbs’. See Ag. (I. p. 91).
 
 ## *Two kinds of Preliminaries*
 
-14- 16. In the application of the Vardhamānaka,[^7] the Āsārita,[^8] the Gita[^9] and the Mahāgīta you will depict properly the ideas [by means of dance movements]; and the Preliminaries which you have [just] performed are called “pure”. [But] when these dances will be added to them (pure Preliminaries) they will be called “mixed”.
+14- 16. In the application of the Vardhamānaka,[^mg7] the Āsārita,[^mg8] the Gita[^mg9] and the Mahāgīta you will depict properly the ideas [by means of dance movements]; and the Preliminaries which you have [just] performed are called “pure”. [But] when these dances will be added to them (pure Preliminaries) they will be called “mixed”.
 
 
-[^9]:  See V. 60-63 note 3.
+[^mg9]:  See V. 60-63 note 3.
 
 
-[^8]:  See V. 21 note 1.
+[^mg8]:  See V. 21 note 1.
 
 
-[^7]:  See V. 12-15 note 3.
+[^mg7]:  See V. 12-15 note 3.
 
 ## *Aṅgahāras*
 
@@ -63,46 +63,46 @@ title = "04 Description of the Class Dance (tāṇḍava)"
 
 17-18. Then Śiva (lit. lord of the world) called Taṇḍu and said, “Speak to Bharata about the use of the Aṅgahāras.”
 
-18- 19. And by Taṇḍu I was told the use of the Aṅgahāras. I shall now speak of them as well as of the various Karaṇas and Recakas.[^10]
+18- 19. And by Taṇḍu I was told the use of the Aṅgahāras. I shall now speak of them as well as of the various Karaṇas and Recakas.[^mg10]
 
 19-27. The thirtytwo Aṅgahāras are as follows:—Sthirahasta, Paryastaka, Sūcividdha, Apaviddha, Ākṣiptaka, Udghaṭṭita,,Viṣkambha, Aparājita, Viṣkambhāpasṛta, Mattākrīḍa, Svastikarecita, Pārśvasvastika, Vṛścika, (Vṛścikāpasṛta) Bhramara, Mattaskhalitaka, Madavilasita, Gatimaṇḍala, Paricchinna, Parivṛttarecita, Vaiśākharecita, Parāvṛtta, Alātaka, Pārśvaccheda, Vidyudbhrānta. Uddhṛtaka, (Udvṛttaka) Alīḍha, Recita, Ācchurita, Ākṣiptarecita, Saṃbhrānta, Apasarpita, Ardhanikuṭṭaka.
 
 
-[^10]:  18-19 1 See below 247ff.
+[^mg10]:  18-19 1 See below 247ff.
 
 ## *Uses of Aṅgahāras*
 
-28-29. I shall now speak about their performance dependent on the Karaṇas[^11]. [And besides this] “O the best of the Brahmins, I shall tell you about the movements of hands and feet that are proper to the Aṅgahāras.
+28-29. I shall now speak about their performance dependent on the Karaṇas[^mg11]. [And besides this] “O the best of the Brahmins, I shall tell you about the movements of hands and feet that are proper to the Aṅgahāras.
 
 
-[^11]:  28-29 1 For details about karaṇa see 30ff below.
+[^mg11]:  28-29 1 For details about karaṇa see 30ff below.
 
 ## *Karaṇas*
 
-29- 30. All the Aṅgahāras consist of Karaṇas[^12]; hence I shall mention the names of the latter as well as their descriptions.
+29- 30. All the Aṅgahāras consist of Karaṇas[^mg12]; hence I shall mention the names of the latter as well as their descriptions.
 
 
-[^12]:  29-30 1 karaṇa—minor dance figure. See Ag. (I 93)
+[^mg12]:  29-30 1 karaṇa—minor dance figure. See Ag. (I 93)
 
 30-34. The combined [movement of] hands and feet in dance is called the Karaṇa: Two Karaṇas will make one Mātṛkā, and two, three, or four Mātṛkās will make up one Aṅgahāra. Three Karaṇas will make a Kalāpaka, four a Śaṇḍaka, and five a Saṃghātaka. Thus the Aṅgahāras consist of six, seven, eight or nine Karaṇas. I shall now speak of the hand and feet movements making up these (Karaṇas).
 
 31-55. The Karaṇas are one hundred and eight in number and they are as follows: Talapuṣpapuṭa Vartita, Valitoru, Apaviddha, Samanakha, Līna, Svastikarecita, Maṇḍalasvastika, Nikuṭṭaka, Ardhanikuṭṭaka, Kaṭicchinna, Ardharecita, Vakṣaḥsvastika, Unmatta, Svastika, Pṛṣṭhasvastika, Diksvastika, Alāta, Kaṭisama, Ākṣiptarecita, Vikṣiptākṣipta, Ardhasvastika, Añcita, Bhujaṅgatrāsita, Ūrdhvajānu, Nikuñcita, Matalli, Ardhamatalli, Recakanikuṭṭita (Recita-), Padāpaviddhaka, Valita, Ghūrṇita, Lalita, Daṇḍapakṣa, Bhujaṅgatrastarecita, Nūpura, Vaiśākharecita, Bhramaraka, Catura, Bhujaṅgāñcita (ka), Daṇḍakarecita, Vṛścikakuṭṭita, Kaṭibhrānta, Latāvṛścika, Chinna, Vṛścikarecita, Vṛścika, Vyaṃsita, Pārśvanikuṭṭana(-kuṭṭaka), Latāṭatilaka, Krāntaka, Kuñcita, Cakramaṇḍala, Uromaṇḍala, Ākṣipta, Talavilāsita, Argala, Vikṣipta, Āvṛtta (Āvarta), Dolapāda, Nivṛtta, Vinivṛtta, Parśvakrānta, Niśumbhita, Vidyudbhrānta, Ātikrānta, Vivartitaka, Gajakrīḍita, Talasaṃsphoṭita, Garuḍaplutaka, Gaṇḍasūcī, Parivṛtta, Pārśvajānu, Gṛdhrāvalīnaka, Saṃnata (Sannata) Sūcī, Ardhasūci, Sūcīviddha, Apakrānta, Mayūralalita, Sarpita, Daṇḍapāda, Hariṇapluta, Preṅkholita, Nitamba, Skhalita, Karihasta, Prasarpita (-pitaka), Siṃhāvikrīḍita, Siṃhākarṣita, Udvṛtta, Upasṛta, Talasaṃghaṭṭita, Janita, Avahitthaka, Niveśa, Elakākrīḍita, Urūdvṛtta, Madaskhalita, Viṣṇukrānta, Saṃbhrānta, Viṣkambha, Udghaṭṭita (Udghaṭṭa), Vṛṣabhakrīḍita, Lolitaka (Lolita), Nāgāpasarpita, Śakaṭāsya, Gaṅgāvataraṇa.
 
-56\. [These Karaṇas will be used] in dance, fight, personal combat, walking as well as movements in general. Foot movements which have been prescribed for the exercise of Sthānas[^13] and Cārīs,[^14] will apply also to these Karaṇas.[^15]
+56\. [These Karaṇas will be used] in dance, fight, personal combat, walking as well as movements in general. Foot movements which have been prescribed for the exercise of Sthānas[^mg13] and Cārīs,[^mg14] will apply also to these Karaṇas.[^mg15]
 
 
 
-[^15]:  B. G. read one hemistich more before 56a. It does not occur in some mss. Ag. records this fact. Though these 108 karaṇas constitute general dance, which is sometimes interpolated in the acting to fill up its gaps, they (karaṇas) may be also used to embellish the movement of limbs in fights of any kind. See Ag. (I. pp. 96).
+[^mg15]:  B. G. read one hemistich more before 56a. It does not occur in some mss. Ag. records this fact. Though these 108 karaṇas constitute general dance, which is sometimes interpolated in the acting to fill up its gaps, they (karaṇas) may be also used to embellish the movement of limbs in fights of any kind. See Ag. (I. pp. 96).
 
-[^14]:  See XI. 2 ff.
-
-
-[^13]:  See XI. 49 ff.
-
-57\. And application of the Nṛtta-hastas[^16] which have been prescribed for dance, is generally implied in the Karaṇas.
+[^mg14]:  See XI. 2 ff.
 
 
-[^16]:  For nṛttahastas see IX. 177 ff.
+[^mg13]:  See XI. 49 ff.
+
+57\. And application of the Nṛtta-hastas[^mg16] which have been prescribed for dance, is generally implied in the Karaṇas.
+
+
+[^mg16]:  For nṛttahastas see IX. 177 ff.
 
 58\. I shall treat the Cārīs suitable for [representing] fight at the time of discussing the foot movements. The master [of dramatic art] should apply them on any occasion according to his histrionic talents.
 
@@ -114,21 +114,21 @@ title = "04 Description of the Class Dance (tāṇḍava)"
 
 ## *Definition of Karaṇas*
 
-62\. Talapuṣpapuṭa—Puṣpapuṭa hand held on the left side, the foot is Agratalasañcara, the side is Sannata (Nata).[^17]
+62\. Talapuṣpapuṭa—Puṣpapuṭa hand held on the left side, the foot is Agratalasañcara, the side is Sannata (Nata).[^mg17]
 
 63\. Vartita—Vyavṛtta(= Vyavartita) and Parivartita hands bent at the wrist, then these hands placed on thighs.
 
 
-[^17]:  For the sake of convenience, constituent parts of the karaṇas have been separately mentioned. This method has been followed by A. K. Coomaraswamy in MG.
+[^mg17]:  For the sake of convenience, constituent parts of the karaṇas have been separately mentioned. This method has been followed by A. K. Coomaraswamy in MG.
 
 64\. Valitoru—Śukatuṇḍa hands to make Vyavartita and Parivartita-karaṇa, and thighs as Valita.
 
 63\. Apaviddha—the [tight] hand with Śukatuṇḍa gesture to fall on the [right] thigh, the left hand held on the chest.
 
-66\. Samanakha—the two Samankha[^18] feet touching each other, two hands hanging down, and the body in a natural pose.
+66\. Samanakha—the two Samankha[^mg18] feet touching each other, two hands hanging down, and the body in a natural pose.
 
 
-[^18]:  samanakha feet has nowhere else been mentioned in the NŚ.
+[^mg18]:  samanakha feet has nowhere else been mentioned in the NŚ.
 
 67\. Līna—the two Patāka hands held together in Añjali pose on the chest, the neck held high, and the shoulder bent.
 
@@ -136,7 +136,7 @@ title = "04 Description of the Class Dance (tāṇḍava)"
 
 69\. Maṇḍalasvastika—two hands moved to unite in the Svastika gesture with their palms turned upwards in a similar manner, and the body in the Maṇḍala Sthāna (posture).
 
-70\. Nikuṭṭaka—each of the hands to be moved up and down[^19] alternately between the head and another arm, and the legs also moved in a similar manner.
+70\. Nikuṭṭaka—each of the hands to be moved up and down[^mg19] alternately between the head and another arm, and the legs also moved in a similar manner.
 
 
 [^19]:  nikuṭṭita=nikuṭṭana. Ag. (I. p. 103) quoted the definition of nikuṭṭana from Kohala as follows: “unnamaṇaṃ vinamanaṃ syād aṅgasya nikuṭṭanam”.
