--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/05.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/05.md
@@ -4,84 +4,84 @@ title = "05 Preliminaries of a Play (pūrvaraṅga)"
 +++
 ## *The Sages question*.
 
-1-4. On hearing the words of Bharata who continued the topic of drama, the sages were pleased in mind and said, “We have heard from you about the origin of drama[^1] and the Jarjara[^2] as well as [the means of] stopping obstacles,[^3] and the worship of gods.[^4] Having grasped the meaning we would like to know in detail (lit. exhaustively), O the very splendid one, about the Preliminaries with all their characteristics; it behoves you, O Brahmin, to explain [everything] for our understanding [the same properly].”
+1-4. On hearing the words of Bharata who continued the topic of drama, the sages were pleased in mind and said, “We have heard from you about the origin of drama[^mg1] and the Jarjara[^mg2] as well as [the means of] stopping obstacles,[^mg3] and the worship of gods.[^mg4] Having grasped the meaning we would like to know in detail (lit. exhaustively), O the very splendid one, about the Preliminaries with all their characteristics; it behoves you, O Brahmin, to explain [everything] for our understanding [the same properly].”
 
 
-[^4]:  See III.
+[^mg4]:  See III.
 
 
-[^3]:  See I. 54.68.
+[^mg3]:  See I. 54.68.
 
 
-[^2]:  See I. 69-73.
+[^mg2]:  See I. 69-73.
 
 
-[^1]:  See I. 13-18.
+[^mg1]:  See I. 13-18.
 
 ## *Bharata answers*.
 
-5-6. Hearing these words of the sages, Bharata spoke thus about the rules of the Preliminaries: “O the blessed ones, listen to me. I am speaking about the Preliminaries as well as of the Pādabhāga,[^5] the Kalās[^6] and the Walking-round[^7] [which relate to them].
+5-6. Hearing these words of the sages, Bharata spoke thus about the rules of the Preliminaries: “O the blessed ones, listen to me. I am speaking about the Preliminaries as well as of the Pādabhāga,[^mg5] the Kalās[^mg6] and the Walking-round[^mg7] [which relate to them].
 
 
-[^7]:  parivarta. On this see below 23-24, 65-89.
+[^mg7]:  parivarta. On this see below 23-24, 65-89.
 
 
-[^6]:  kalā—unit of the time measure in music. See XXXI. 1-4 See Ag. (I. 211).
+[^mg6]:  kalā—unit of the time measure in music. See XXXI. 1-4 See Ag. (I. 211).
 
 
-[^5]:  pādabhāga—See XXXI, 247. This is a term relating to tāla.
+[^mg5]:  pādabhāga—See XXXI, 247. This is a term relating to tāla.
 
 ## *Preliminaries defined*
 
-7\. As it is first performed at the beginning (*pūrvam*) in the stage (*raṅga*) it is called the (*pūrvaraṅga*)[^8]
+7\. As it is first performed at the beginning (*pūrvam*) in the stage (*raṅga*) it is called the (*pūrvaraṅga*)[^mg8]
 
 ## *Parts of the Preliminaries*
 
 
-[^8]:  BhP. defines pūrvaraṅga as follows:
+[^mg8]:  BhP. defines pūrvaraṅga as follows:
 
-8-11. Its different parts are to be performed in due order with the playing of drums and stringed instruments as well as with Recitatives (*pāṭhya*). Pratyāhāra,[^9] Avataraṇa[^10], Ārambha[^11], Āśrāvaṇā[^12], Vaktrapāṇi[^13], Parighaṭṭanā[^14], Ṣaṃghoṭanā[^15], Mārgāsārita[^16], and Āsārita[^17] of the long, the medium and the short types, are the songs outside the performance of a play to be sung by persons behind the curtain[^18] to the accompaniment of drums and stringed instruments.
-
-
-[^18]:  From this statement it appears that the first nine items of the preliminaries were performed behind the curtains on two doors of the tiring room.
+8-11. Its different parts are to be performed in due order with the playing of drums and stringed instruments as well as with Recitatives (*pāṭhya*). Pratyāhāra,[^mg9] Avataraṇa[^mg10], Ārambha[^mg11], Āśrāvaṇā[^mg12], Vaktrapāṇi[^mg13], Parighaṭṭanā[^mg14], Ṣaṃghoṭanā[^mg15], Mārgāsārita[^mg16], and Āsārita[^mg17] of the long, the medium and the short types, are the songs outside the performance of a play to be sung by persons behind the curtain[^mg18] to the accompaniment of drums and stringed instruments.
 
 
-[^17]:  See below 21.
+[^mg18]:  From this statement it appears that the first nine items of the preliminaries were performed behind the curtains on two doors of the tiring room.
 
 
-[^16]:  See below 20.
+[^mg17]:  See below 21.
 
 
-[^15]:  See below 20.
+[^mg16]:  See below 20.
 
 
-[^14]:  See below 19.
+[^mg15]:  See below 20.
 
 
-[^13]:  See below 19.
+[^mg14]:  See below 19.
 
 
-[^12]:  See below 18.
+[^mg13]:  See below 19.
 
 
-[^11]:  See below 18.
+[^mg12]:  See below 18.
 
 
-[^10]:  See below 18.
+[^mg11]:  See below 18.
 
 
-[^9]:  See below 17.
-
-12-15. Then after removing the curtain[^19], dances and recitals[^20] are to be performed with the playing of all musical instruments, and some song of the Madraka[^21] class is to be sung, or one of the Vardhamānaka[^22] class along with the Class Dance [suitable to it] should be applied. Then should take place [one after another] during the Preliminaries the following:—Utthāpana[^23], Walking round[^24], Benediction[^25], Suṣkāpakṛṣṭā[^26], Raṅgadvāra[^27], Cārī[^28], Mahācārī[^29], Three Men’s Talk[^30] and Laudation[^31].
+[^mg10]:  See below 18.
 
 
-[^31]:  See below 29-30, 141-142.
+[^mg9]:  See below 17.
+
+12-15. Then after removing the curtain[^mg19], dances and recitals[^mg20] are to be performed with the playing of all musical instruments, and some song of the Madraka[^mg21] class is to be sung, or one of the Vardhamānaka[^mg22] class along with the Class Dance [suitable to it] should be applied. Then should take place [one after another] during the Preliminaries the following:—Utthāpana[^mg23], Walking round[^mg24], Benediction[^mg25], Suṣkāpakṛṣṭā[^mg26], Raṅgadvāra[^mg27], Cārī[^mg28], Mahācārī[^mg29], Three Men’s Talk[^mg30] and Laudation[^mg31].
 
 
-[^30]:  See below 28-29, 137-141.
+[^mg31]:  See below 29-30, 141-142.
 
 
-[^29]:  See below 27-28, 127-130.
+[^mg30]:  See below 28-29, 137-141.
+
+
+[^mg29]:  See below 27-28, 127-130.
 
 
 [^28]:  See below 27-28, 119-120.
