--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/06.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/06.md
@@ -4,22 +4,22 @@ title = "06 Sentiments (rasa)"
 +++
 ## *The sages question*.
 
-1-3. After hearing about the rules regarding the Preliminaries, the great sages continued their inquiries and said to Bharata, “Answer five of our questions. Explain how the Sentiments enumerated by experts in dramatic art attain their [special] qualities. And why are the *bhāvas* (Psychological States, lit. feelings) so called, and what do they *bhāvayanti* (make us feel)?. Besides these, what are the real meanings of terms, such as, Digest (*saṃgraha*)[^1], Memorial Verse (*kārikā*) and Etymology (*nirukta*)”?
+1-3. After hearing about the rules regarding the Preliminaries, the great sages continued their inquiries and said to Bharata, “Answer five of our questions. Explain how the Sentiments enumerated by experts in dramatic art attain their [special] qualities. And why are the *bhāvas* (Psychological States, lit. feelings) so called, and what do they *bhāvayanti* (make us feel)?. Besides these, what are the real meanings of terms, such as, Digest (*saṃgraha*)[^mg1], Memorial Verse (*kārikā*) and Etymology (*nirukta*)”?
 
 
-[^1]:  For an assumed chronology of saṃgraha, kārikā, nirukta, sūtra and bhāṣya mentioned here see S. K, De, Skt. Poetics, Vol. I. pp. 28ff.
+[^mg1]:  For an assumed chronology of saṃgraha, kārikā, nirukta, sūtra and bhāṣya mentioned here see S. K, De, Skt. Poetics, Vol. I. pp. 28ff.
 
 ## *Bharata answers*.
 
 4\. At these words of the sages, Bharata continued speaking, and mentioned in reply to their question the distinction between the Sentiments and the Psychological States.
 
-5-7. And then he said, “O sages, I shall tell you in detail and in due order about the Digest, the Memorial Verse and the Etymology. I am not able by any means to exhaust all the topics about drama; for knowledge,[^2] and arts and crafts[^3] connected with it are respectively manifold and endless in number. And as it is not possible to treat exhaustively (lit. to go to the end of) even one of these subjects which are [vast] like an ocean, there cannot be any question of mastering them all.
+5-7. And then he said, “O sages, I shall tell you in detail and in due order about the Digest, the Memorial Verse and the Etymology. I am not able by any means to exhaust all the topics about drama; for knowledge,[^mg2] and arts and crafts[^mg3] connected with it are respectively manifold and endless in number. And as it is not possible to treat exhaustively (lit. to go to the end of) even one of these subjects which are [vast] like an ocean, there cannot be any question of mastering them all.
 
 
-[^3]:  śilpāni citrapnstādi-karmāṇi (Ag).
+[^mg3]:  śilpāni citrapnstādi-karmāṇi (Ag).
 
 
-[^2]:  jñānāni vyākaraṇādīni śāstrāṇi (Ag).
+[^mg2]:  jñānāni vyākaraṇādīni śāstrāṇi (Ag).
 
 8\. [Hence] I shall tell you about the Digest on Sentiments, Psychological States and such other matters, which has its concents embodied in a small number of Sūtras but which promotes inference [in connection with the subject].
 
@@ -29,102 +29,102 @@ title = "06 Sentiments (rasa)"
 
 10\. The Digest [of the Nāṭyaveda treats] the Sentiments, the Psychological States, the Histrionic Representation, the Practices (*dharmī*), the Styles (*vṛtti*), Local Usages (*pravṛtti*), Success (*siddhi*), the notes (*svara*), the instrumental music (*ātodya*), songs and the stage.
 
-11\. When a rule (lit. meaning) is explained (lit. uttered) briefly in a Sūtra with a minimum (lit. small) number of words, it is called the Memorial Verse which shows the meaning [of the rule clearly].[^4]
+11\. When a rule (lit. meaning) is explained (lit. uttered) briefly in a Sūtra with a minimum (lit. small) number of words, it is called the Memorial Verse which shows the meaning [of the rule clearly].[^mg4]
 
 12-13. Etymology is the definitive meaning which arises in connexion with various nouns, is helped by dictionaries (lit. vocabularies), and the rules of grammatical interpretation, includes the significance of the root involved as well as the reasons modifying it, and is helped by various findings [of Śāstras], and this meaning [of a noun] is established [mainly] from a consideration of its root [and *pratyaya* or affix].
 
 
-[^4]:  One additional characteristic of the kārikā may be that it should be generally composed in metres like āryā or anuṣṭup, e.g. the Sāṃkbyakārikā.
+[^mg4]:  One additional characteristic of the kārikā may be that it should be generally composed in metres like āryā or anuṣṭup, e.g. the Sāṃkbyakārikā.
 
 14\. O the best of Brahmins, [the subjects included into] the Digest which I mentioned earlier, will now be discussed in detail with the necessary Memorial Verses and Etymologies connected with them.
 
 ## *Eight Sentiments*
 
-15\. The eight Sentiments[^5] recognized in drama are as follows: Erotic (*śṛṅgāra*), Comic (*hāsya*), Pathetic (*karuṇa*), Furious (*raudra*), Heroic (*vīra*), Terrible (*bhayānaka*), Odious (*bībhatsa*) and Marvellous (*adbhuta*)[^6].
+15\. The eight Sentiments[^mg5] recognized in drama are as follows: Erotic (*śṛṅgāra*), Comic (*hāsya*), Pathetic (*karuṇa*), Furious (*raudra*), Heroic (*vīra*), Terrible (*bhayānaka*), Odious (*bībhatsa*) and Marvellous (*adbhuta*)[^mg6].
 
 
-[^6]:  Later writers on Skt, poetics add one more rasa (śānta) to this number.
+[^mg6]:  Later writers on Skt, poetics add one more rasa (śānta) to this number.
 
 
-[^5]:  rasa—A.K. Coomaraswamy is for translating the word as ‘flavour’ (M G. p. 17).
+[^mg5]:  rasa—A.K. Coomaraswamy is for translating the word as ‘flavour’ (M G. p. 17).
 
-16\. These eight are the Sentiments named by Druhiṇa (Brahmā). I shall now speak of the Durable and the Complementary Psychological States and the Sāttvika ones[^7].
+16\. These eight are the Sentiments named by Druhiṇa (Brahmā). I shall now speak of the Durable and the Complementary Psychological States and the Sāttvika ones[^mg7].
 
 
-[^7]:  bhāva—A.B. Keith translates this word as ‘feeling’ or ‘emotion.’ See Skt. Drama, p. 319, A. K. Coomaraswamy and others translate it as “mood” (loc. cit.). Haas translates it as ‘State.’ See DR. p. 108.
+[^mg7]:  bhāva—A.B. Keith translates this word as ‘feeling’ or ‘emotion.’ See Skt. Drama, p. 319, A. K. Coomaraswamy and others translate it as “mood” (loc. cit.). Haas translates it as ‘State.’ See DR. p. 108.
 
 ## *Durable Psychological States*
 
-17\. The Durable Psychological States (*sthāyibhāva*)[^8] are known to be the following: love, mirth, sorrow, anger, energy, terror, disgust and astonishment.
+17\. The Durable Psychological States (*sthāyibhāva*)[^mg8] are known to be the following: love, mirth, sorrow, anger, energy, terror, disgust and astonishment.
 
 
-[^8]:  sthāyibhāva—Keith translates the term as ‘dominant emotion’ (Skt. Drama) and Haas as ‘Permanent State’ (DR.) and others as ‘permanent mood’ (e.g. S. K. De, Skt Poetics, Vol. II. p. 26).
+[^mg8]:  sthāyibhāva—Keith translates the term as ‘dominant emotion’ (Skt. Drama) and Haas as ‘Permanent State’ (DR.) and others as ‘permanent mood’ (e.g. S. K. De, Skt Poetics, Vol. II. p. 26).
 
-18-21. The thirty-three Complementary Psychological States (*vyabhicāribhāva*)[^9] are known to be the following: discouragement, weakness, apprehension, envy, intoxication, weariness, indolence, depression, anxiety, distraction, recollection, contentment, shame, inconstancy, joy, agitation, stupor, arrogance, despair, impatience, sleep, epilepsy, dreaming, awakening, indignation, dissimulation, cruelty, assurance, sickness, insanity, death, fright and deliberation. These are defined by their names.
+18-21. The thirty-three Complementary Psychological States (*vyabhicāribhāva*)[^mg9] are known to be the following: discouragement, weakness, apprehension, envy, intoxication, weariness, indolence, depression, anxiety, distraction, recollection, contentment, shame, inconstancy, joy, agitation, stupor, arrogance, despair, impatience, sleep, epilepsy, dreaming, awakening, indignation, dissimulation, cruelty, assurance, sickness, insanity, death, fright and deliberation. These are defined by their names.
 
 
-[^9]:  These are also known as sañcāri-bhāva which was translated as ‘transitory emotion or mood’. See SD.
+[^mg9]:  These are also known as sañcāri-bhāva which was translated as ‘transitory emotion or mood’. See SD.
 
 ## *Eight Sāttvika States*
 
-22\. Paralysis, Perspiration, Horripilation, Change of Voice, Trembling, Change of Colour, Weeping and Fainting are the eight Sāttvika States.[^10]
+22\. Paralysis, Perspiration, Horripilation, Change of Voice, Trembling, Change of Colour, Weeping and Fainting are the eight Sāttvika States.[^mg10]
 
 ## *Four kinds of Histrionic Representation*
 
 
-[^10]:  sāttvika-bhāva—The word sāttvika cannot be properly translated into English. Keith does not make any such attempt (see Skt. Drama) Haas translates the sāttvika-bhāva as ‘Involuntary States.’ But this seems to be very misleading, for the NŚ. takes sattva to be connected with manas. (see VII 93), and most of the later writers follow this work in this respect. So the author of the ND. (III. 153) writes “avahitaṃ manaḥ sattvaṃ tat prayojanaṃ heturasyeti sāttvikaḥ; mano'navadhāne hi na śakyante eva svarabhedādayo nāṭyena darśayitum.”. The NŚ. has also a definition of sattva which is as follows: “dehātmakaṃ bhavet sattvam” (XXIV. 7). The author of the BhP. elaborately defines the term sattva and discusses the psychological process connected with its use; see (pp. 13-14). Viśvanātha in his SD. (164) defines sattva as follows: “sattvaṃ nāma sātmaviśrāmaprakrāśakaro kaścanāntaro dharmaḥ”.
+[^mg10]:  sāttvika-bhāva—The word sāttvika cannot be properly translated into English. Keith does not make any such attempt (see Skt. Drama) Haas translates the sāttvika-bhāva as ‘Involuntary States.’ But this seems to be very misleading, for the NŚ. takes sattva to be connected with manas. (see VII 93), and most of the later writers follow this work in this respect. So the author of the ND. (III. 153) writes “avahitaṃ manaḥ sattvaṃ tat prayojanaṃ heturasyeti sāttvikaḥ; mano'navadhāne hi na śakyante eva svarabhedādayo nāṭyena darśayitum.”. The NŚ. has also a definition of sattva which is as follows: “dehātmakaṃ bhavet sattvam” (XXIV. 7). The author of the BhP. elaborately defines the term sattva and discusses the psychological process connected with its use; see (pp. 13-14). Viśvanātha in his SD. (164) defines sattva as follows: “sattvaṃ nāma sātmaviśrāmaprakrāśakaro kaścanāntaro dharmaḥ”.
 
-23\. Four kinds of Histrionic Representation are Gestures (*āṅgika*)[^11], Words (*vācika*)[^12], Dresses and Make-up (*āhārya*)[^13] and the Representation of the Sattva (*sāttvika*).[^14]
-
-
-
-[^14]:  See XXIII. See XXIV.
-
-[^13]:  See XXIII.
+23\. Four kinds of Histrionic Representation are Gestures (*āṅgika*)[^mg11], Words (*vācika*)[^mg12], Dresses and Make-up (*āhārya*)[^mg13] and the Representation of the Sattva (*sāttvika*).[^mg14]
 
 
-[^12]:  vācika—means words suitable for representation of the different States (bhāva) composed by the playwright. See XV-XXII.
+
+[^mg14]:  See XXIII. See XXIV.
+
+[^mg13]:  See XXIII.
 
 
-[^11]:  āṅgikā—means Gestures of special kind defined in the śāstra; see VIII-XII.
+[^mg12]:  vācika—means words suitable for representation of the different States (bhāva) composed by the playwright. See XV-XXII.
+
+
+[^mg11]:  āṅgikā—means Gestures of special kind defined in the śāstra; see VIII-XII.
 
 ## *Two Practices*
 
-24\. Practice of Representation (*dharmī*)[^15] in a dramatic performance is twofold: realistic (*lokadharmī*, lit. popular) and coventional (*nāṭyadharmī*, lit. theatrical).
+24\. Practice of Representation (*dharmī*)[^mg15] in a dramatic performance is twofold: realistic (*lokadharmī*, lit. popular) and coventional (*nāṭyadharmī*, lit. theatrical).
 
 
-[^15]:  dharmī—This word has not been very correctly used. But the meaning is clear; for details about dharmī see XIII. 69-81.
+[^mg15]:  dharmī—This word has not been very correctly used. But the meaning is clear; for details about dharmī see XIII. 69-81.
 
 ## *Four Styles*
 
-And the Verbal (*bhāratī*), the Grand (*sāttvatī*), the Graceful (*kaiśikī*) and the Energetic (*ārabhaṭī*) are the four Styles.[^16]
+And the Verbal (*bhāratī*), the Grand (*sāttvatī*), the Graceful (*kaiśikī*) and the Energetic (*ārabhaṭī*) are the four Styles.[^mg16]
 
 ## *Four Local Usages*
 
 
-[^16]:  Haas translates vṛttis as Styles of Procedure (DR. p. 67). The four Styles are translated by him as Eloquent (bhāratī), Grandiose (sāttvatī), Gay (kaiśikī) and Horrific (ārabhaṭī). We follow Keith’s translation (Skt. Drama, p. 326). For details about vṛttis see XXII. lff.
+[^mg16]:  Haas translates vṛttis as Styles of Procedure (DR. p. 67). The four Styles are translated by him as Eloquent (bhāratī), Grandiose (sāttvatī), Gay (kaiśikī) and Horrific (ārabhaṭī). We follow Keith’s translation (Skt. Drama, p. 326). For details about vṛttis see XXII. lff.
 
-25-26. Āvanti, Dākṣinātyā, Oḍramāgadhī and Pañcālamadhyamā are the four Local Usages (*pravṛtti*)[^17] in a dramatic performance.
+25-26. Āvanti, Dākṣinātyā, Oḍramāgadhī and Pañcālamadhyamā are the four Local Usages (*pravṛtti*)[^mg17] in a dramatic performance.
 
 
-[^17]:  pravṛtti—Haas translates this word as ‘Local Characteristics,’ (See DR, p. 74). The five geographical names (Avanti, Dākṣinātyā, Oḍra, Magadha and Pañcāla) indicate that these were the parts of India where dramatic show gained special popularity. For details about pravṛttis see XIV. 36-56.
+[^mg17]:  pravṛtti—Haas translates this word as ‘Local Characteristics,’ (See DR, p. 74). The five geographical names (Avanti, Dākṣinātyā, Oḍra, Magadha and Pañcāla) indicate that these were the parts of India where dramatic show gained special popularity. For details about pravṛttis see XIV. 36-56.
 
 ## *Success*
 
-The Success[^18] in the dramatic performance is of two kinds: divine (*daivikī*) and human (*mānuṣī*).
+The Success[^mg18] in the dramatic performance is of two kinds: divine (*daivikī*) and human (*mānuṣī*).
 
 
-[^18]:  siddhi (success)—For details about the Success see XXVII. lff.
+[^mg18]:  siddhi (success)—For details about the Success see XXVII. lff.
 
 ## *Notes*
 
-27-29. And [musical] notes such as, Ṣaḍja, Ṛṣabha etc. are seven[^19] in number, and they fall into two groups: human (*śārirā*, lit. from body) and instrumental (*vaiṇava*, lit. from the Vīṇā).[^20]
+27-29. And [musical] notes such as, Ṣaḍja, Ṛṣabha etc. are seven[^mg19] in number, and they fall into two groups: human (*śārirā*, lit. from body) and instrumental (*vaiṇava*, lit. from the Vīṇā).[^mg20]
 
 
 
-[^20]:  See XXVIII. 1-2.
+[^mg20]:  See XXVIII. 1-2.
 
-[^19]:  See XXVIII. 21, 10.
+[^mg19]:  See XXVIII. 21, 10.
 
 ## *Four kinds of musical instrument*
 
@@ -132,36 +132,36 @@ The musical instruments are of four kinds: stringed (*tata*) covered (*avanaddha
 
 ## *Five kinds of Dhruvā*
 
-29-30. Songs which relate to Dhruvās are of five kinds:[^21] entering (*praveśa*), casual (*ākṣepa*), going out (*niskrama*), pleasing (*prāsādika*) and intermediate (*āntara*). And the playhouse is of three types: oblong, square and triangular.
+29-30. Songs which relate to Dhruvās are of five kinds:[^mg21] entering (*praveśa*), casual (*ākṣepa*), going out (*niskrama*), pleasing (*prāsādika*) and intermediate (*āntara*). And the playhouse is of three types: oblong, square and triangular.
 
 
-[^21]:  See XXXII. 60 ff.
+[^mg21]:  See XXXII. 60 ff.
 
 ## *Sentiments explained*
 
-In that connexion I shall first of all explain the Sentiments (*rasa*). No [poetic] meaning proceeds [from speech] without [any kind of] Sentiment. Now the Sentiment is produced (*rasa-niṣpattiḥ*) from a combination (*saṃyoga*)[^22] of Determinants (*vibhāva*), Consequents (*anubhāva*) and Complementary Psychological States (*vyabhicāri-bhāva*). Is there any instance [parallel to it], [Yes], it is said that, as taste (*rasa*) results from a combination of various spices, vegetables and other articles, and as six tastes are produced by articles such as, raw sugar or spices or vegetables, so the Durable Psychological States (*sthāyibhāva*), when they come together with various other Psychological States, attain the quality of a Sentiment (*i.e*. become Sentiment). Now one enquires, “What is the meaning of the word *rasa*”? It is said in reply [that, *rasa* is so called] because it is capable of being tasted (*āsvādyate*). How is *rasa* tasted? [In reply] it is said that just as well-disposed persons while eating food cooked with many kinds of spice, enjoy (*āsvādayanti*) its tastes, and attain pleasure and satisfaction, so the cultured people taste the Durable Psychological States while they see them represented by an expression of the various Psychological States with Words, Gestures and the Sattva, and derive pleasure and satisfaction. Thus is explained [the Memorial Verse ending with] *tasmān nāṭyarasā iti*.[^23] For in this connexion there are two traditional couplets:
+In that connexion I shall first of all explain the Sentiments (*rasa*). No [poetic] meaning proceeds [from speech] without [any kind of] Sentiment. Now the Sentiment is produced (*rasa-niṣpattiḥ*) from a combination (*saṃyoga*)[^mg22] of Determinants (*vibhāva*), Consequents (*anubhāva*) and Complementary Psychological States (*vyabhicāri-bhāva*). Is there any instance [parallel to it], [Yes], it is said that, as taste (*rasa*) results from a combination of various spices, vegetables and other articles, and as six tastes are produced by articles such as, raw sugar or spices or vegetables, so the Durable Psychological States (*sthāyibhāva*), when they come together with various other Psychological States, attain the quality of a Sentiment (*i.e*. become Sentiment). Now one enquires, “What is the meaning of the word *rasa*”? It is said in reply [that, *rasa* is so called] because it is capable of being tasted (*āsvādyate*). How is *rasa* tasted? [In reply] it is said that just as well-disposed persons while eating food cooked with many kinds of spice, enjoy (*āsvādayanti*) its tastes, and attain pleasure and satisfaction, so the cultured people taste the Durable Psychological States while they see them represented by an expression of the various Psychological States with Words, Gestures and the Sattva, and derive pleasure and satisfaction. Thus is explained [the Memorial Verse ending with] *tasmān nāṭyarasā iti*.[^mg23] For in this connexion there are two traditional couplets:
 
 
-[^23]:  See below 33-34.
+[^mg23]:  See below 33-34.
 
 
-[^22]:  The NŚ. nowhere explains the terms niṣpatti and saṃyoga of this definition and does not include the sthāyibhāva in it (the def.). Hence the theory of rasa has come to be interpreted differently in later times by Lollata, Śaṅkuka, (Bhaṭṭa) Nāyaka and Abhinavagupta.
+[^mg22]:  The NŚ. nowhere explains the terms niṣpatti and saṃyoga of this definition and does not include the sthāyibhāva in it (the def.). Hence the theory of rasa has come to be interpreted differently in later times by Lollata, Śaṅkuka, (Bhaṭṭa) Nāyaka and Abhinavagupta.
 
-32-33. Just as connoisseur of cooked food (*bhakta*) while eating food which has been prepared from various spices and other articles taste it, so the learned people taste in their heart (*manas*) the Durable Psychological States (such as love, sorrow etc.) when they are represented by an expression of the Psychological States with Gestures. Hence these Durable Psychological States in a drama are called Sentiments.[^24]
+32-33. Just as connoisseur of cooked food (*bhakta*) while eating food which has been prepared from various spices and other articles taste it, so the learned people taste in their heart (*manas*) the Durable Psychological States (such as love, sorrow etc.) when they are represented by an expression of the Psychological States with Gestures. Hence these Durable Psychological States in a drama are called Sentiments.[^mg24]
 
 ## *Relation between Sentiments and Psychological States*.
 
 
-[^24]:  For a discussion on Bharata’s theory of rasa see Skt, Poetics, Vol. II. PP-25ff.
+[^mg24]:  For a discussion on Bharata’s theory of rasa see Skt, Poetics, Vol. II. PP-25ff.
 
 ² Now one enquires, “Do the Psychological States come out of the Sentiments or the Sentiments come out of the Psychological States?” On this point, some are of opinion that they arise from their mutual contact. But this is not so. Why?
 
 It is apparent that the Sentiments arise from the Psychological States and not the Psychological States from the Sentiments. For [on this point] there are [traditional] couplets such as:
 
-34-35. The Psychological States are so called by experts it drama, for they make one feel (*bhāvayanti*) the Sentiments in connexion with various modes of dramatic representation. Just as by many articles of various kinds, auxiliary cooked eatable (*vyañjana*)[^25] is brought forth, so the Psychological States along with different kinds of Histrionic Representation will cause the Sentiments to be felt.
+34-35. The Psychological States are so called by experts it drama, for they make one feel (*bhāvayanti*) the Sentiments in connexion with various modes of dramatic representation. Just as by many articles of various kinds, auxiliary cooked eatable (*vyañjana*)[^mg25] is brought forth, so the Psychological States along with different kinds of Histrionic Representation will cause the Sentiments to be felt.
 
 
-[^25]:  The reading of this passage seems to be confused.
+[^mg25]:  The reading of this passage seems to be confused.
 
 36\. There can be no Sentiment prior to (lit. without) the Psychological States, and no Psychological States without the Sentiments [following it], and during the Histrionic Representation they result from their interaction.
 
