--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/07.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/07.md
@@ -346,17 +346,17 @@ There are two Āryās on this point:
 
 ## *Epilepsy (*apasmāra*)*
 
-Epilepsy (*apasmāra*) is caused by Determinants such as being possessed by a god, a Nāga, a Yakṣa, a Rākṣa, a Piśāca and the like, and a memory of such beings, eating food left after somebody’s partaking of it, staying in a deserted house, non-observation of proper interval of time [in taking food, in sleeping etc.], derangement of humours (*dhātu*)[^1] and the like. It is to be represented on the stage by Consequents such as throbbing, trembling, running, falling down, perspiration, foaming in the mouth, hiccup, licking [the lips] with the tongue, and the like.
+Epilepsy (*apasmāra*) is caused by Determinants such as being possessed by a god, a Nāga, a Yakṣa, a Rākṣa, a Piśāca and the like, and a memory of such beings, eating food left after somebody’s partaking of it, staying in a deserted house, non-observation of proper interval of time [in taking food, in sleeping etc.], derangement of humours (*dhātu*)[^mg1] and the like. It is to be represented on the stage by Consequents such as throbbing, trembling, running, falling down, perspiration, foaming in the mouth, hiccup, licking [the lips] with the tongue, and the like.
 
 
-[^1]:  They are three in number viz. wind (vāyu), bile (pitta) and phlegm (kapha).
+[^mg1]:  They are three in number viz. wind (vāyu), bile (pitta) and phlegm (kapha).
 
 On this point there are two Āryās:
 
-73\. Epilepsy occurs in a person when he is possessed by Bhūtas and Piśācas, when he remembers these beings, [eats] Ucchiṣṭa[^2], stays in a deserted house, disregards proper interval of time [for taking food etc.], and is impure [in body].
+73\. Epilepsy occurs in a person when he is possessed by Bhūtas and Piśācas, when he remembers these beings, [eats] Ucchiṣṭa[^mg2], stays in a deserted house, disregards proper interval of time [for taking food etc.], and is impure [in body].
 
 
-[^2]:  That which is left over in the plate after a person has finished his meal.
+[^mg2]:  That which is left over in the plate after a person has finished his meal.
 
 74\. Falling down suddenly on the ground, trembling, foaming in the mouth, and rising up while senseless, are conditions during Epilepsy.
 
@@ -416,10 +416,10 @@ There is a Ślokā on this point:
 
 ## *Disease (*vyādhi*)*
 
-Disease (*vyādhi*) owes it origin to [an attack of three humours such as] wind (*vāta*), biles (*pitta*) and phlegm (*kapha*).[^3] Fever and similar other illnesses are special varieties of it. Fever is of two kinds, viz. that with a feeling of cold (*śīta*) and that with a feeling of heat (*dāha*). Fever with a feeling of cold should be represented by Consequents such as shivering, tremor of the entire body, bending [the body], shaking of the jaws, narrowing down the nasal passage, dryness of the mouth, horripilation, lamentation and the like. And that with a feeling of heat, is to be represented by throwing out clothes, the hands and the feet, desire [to roll on] the ground, [use of] unguent, desire for coolness, lamentation, crying and the like. The other types of sicknesses are to be represented on the stage by Consequents such as narrowing down the mouth, dullness of the body, [deep] breathing, making [peculiar] sounds, crying, tremor and the like.
+Disease (*vyādhi*) owes it origin to [an attack of three humours such as] wind (*vāta*), biles (*pitta*) and phlegm (*kapha*).[^mg3] Fever and similar other illnesses are special varieties of it. Fever is of two kinds, viz. that with a feeling of cold (*śīta*) and that with a feeling of heat (*dāha*). Fever with a feeling of cold should be represented by Consequents such as shivering, tremor of the entire body, bending [the body], shaking of the jaws, narrowing down the nasal passage, dryness of the mouth, horripilation, lamentation and the like. And that with a feeling of heat, is to be represented by throwing out clothes, the hands and the feet, desire [to roll on] the ground, [use of] unguent, desire for coolness, lamentation, crying and the like. The other types of sicknesses are to be represented on the stage by Consequents such as narrowing down the mouth, dullness of the body, [deep] breathing, making [peculiar] sounds, crying, tremor and the like.
 
 
-[^3]:  See the Kāśyapasaṃhitā, XXVII. 6.
+[^mg3]:  See the Kāśyapasaṃhitā, XXVII. 6.
 
 There is a Śloka on this point:
 
@@ -427,10 +427,10 @@ There is a Śloka on this point:
 
 ## *Insanity (*unmāda*)*
 
-Insanity (*unmāda*) is caused by Determinants such as death of beloved persons, loss of wealth, stroke of adversity, derangement of [the three humours]: wind (*vāta*), biles (*pitta*), phelgm (*śleṣmā*), and the like. It is to be represented on the stage by laughing, weeping, crying, talking, lying down, sitting, running, dancing, singing and reciting [something] without any reason, smearing [the body] with ashes and dust, taking grass, Nirmālya[^4]. soiled cloth, tags, potsherd and earthen tray as decoration [of the body], many other senseless acts, and imitation of others.
+Insanity (*unmāda*) is caused by Determinants such as death of beloved persons, loss of wealth, stroke of adversity, derangement of [the three humours]: wind (*vāta*), biles (*pitta*), phelgm (*śleṣmā*), and the like. It is to be represented on the stage by laughing, weeping, crying, talking, lying down, sitting, running, dancing, singing and reciting [something] without any reason, smearing [the body] with ashes and dust, taking grass, Nirmālya[^mg4]. soiled cloth, tags, potsherd and earthen tray as decoration [of the body], many other senseless acts, and imitation of others.
 
 
-[^4]:  Remains of a flower-offering to a deity, which is supposed to purify a person who takes it with reverence.
+[^mg4]:  Remains of a flower-offering to a deity, which is supposed to purify a person who takes it with reverence.
 
 There are two Āryās on this point:
 
@@ -440,12 +440,12 @@ There are two Āryās on this point:
 
 ## *Death (*maraṇa*)*
 
-Death (*maraṇa*) comes through disease as well as accidental injury. Of these two kinds of death, that from sickness is caused by Determinants such as a malady of the intestine and the liver, colic pain, disturbance of humours, tumours, boils, fever, cholera, and the like. And that due to accidental injury is caused by weapons, snake bite, taking poison, [attack of] ferocious animals, injury due to falling down from elephant, horse, chariot and other vehicles. I shall now speak of the different methods of their representation on the stage. Death from disease is to be represented on the stage by Consequents such as looseness of the body, motionlessness of the limbs, closed eyes, hiccup, deep breathing, looking for family members, speaking indistinct words and the like.[^5]
+Death (*maraṇa*) comes through disease as well as accidental injury. Of these two kinds of death, that from sickness is caused by Determinants such as a malady of the intestine and the liver, colic pain, disturbance of humours, tumours, boils, fever, cholera, and the like. And that due to accidental injury is caused by weapons, snake bite, taking poison, [attack of] ferocious animals, injury due to falling down from elephant, horse, chariot and other vehicles. I shall now speak of the different methods of their representation on the stage. Death from disease is to be represented on the stage by Consequents such as looseness of the body, motionlessness of the limbs, closed eyes, hiccup, deep breathing, looking for family members, speaking indistinct words and the like.[^mg5]
 
 There is a Śloka on this point:
 
 
-[^5]:  Earlier writers on the Hindu drama wrongly believed that NŚ. excluded scenes of death from the stage. See Keith, Skt. Drama, pp. 222; also M. Ghosh, “A so-called convention of the Hindu Drama,” IHQ. IX. 1933, pp. 981ff. Windisch thought that Śūdraka in his Act. VIII violated a rule in showing the murder of Vasantasenā by Śakāra (Der griechische Einfluss in indische Drama, Berlin, 1882. p. 43).
+[^mg5]:  Earlier writers on the Hindu drama wrongly believed that NŚ. excluded scenes of death from the stage. See Keith, Skt. Drama, pp. 222; also M. Ghosh, “A so-called convention of the Hindu Drama,” IHQ. IX. 1933, pp. 981ff. Windisch thought that Śūdraka in his Act. VIII violated a rule in showing the murder of Vasantasenā by Śakāra (Der griechische Einfluss in indische Drama, Berlin, 1882. p. 43).
 
 86\. Death due to disease is to be represented on the stage by one mark viz. loose body and inactive sense-organs. But death due to accidental injury is to be represented on the stage in different ways: *e.g*., [death due to] wound by weapons is to be represented by Consequents such as suddenly falling down on the ground and the like. In case of snake-bite or taking poison [there is a gradual] development of its symptoms which are eight in number, viz. thinness (of the body), tremor, burning sensation, hiccup, foam at the mouth, breaking of the neck, paralysis and death.
 
@@ -477,12 +477,12 @@ There is a Śloka on this point:
 
 These are the thirty-three Transitory States; they are to be produced in a play by men and women of the superior, middling and inferior types in conformity with [proper] place, time and occasion.
 
-93\. These thirty-three are known as the Transitory States. I shall now explain in detail the Sāttvika States.[^6]
+93\. These thirty-three are known as the Transitory States. I shall now explain in detail the Sāttvika States.[^mg6]
 
 ## *Sāttvika States*
 
 
-[^6]:  See above note 1 on VI 22.
+[^mg6]:  See above note 1 on VI 22.
 
 Now it may be asked,
 
@@ -554,20 +554,20 @@ Among these,
 
 121\. That which stands on the principal theme [of the play] and is combined with Determinants, Consequents and Transitory States is the Dominant Sentiment.
 
-122.[^7]This Dominant Sentiment should be represented with an exuberence of the Sattva, but the Transitory States by mere physical gestures (lit. form), for they are to support the Dominant Sentiment [and as such should not excel it].
+122.[^mg7]This Dominant Sentiment should be represented with an exuberence of the Sattva, but the Transitory States by mere physical gestures (lit. form), for they are to support the Dominant Sentiment [and as such should not excel it].
 
 
-[^7]:  A disregard of this principle is liable to cause undue prominence to minor characters in a play and thereby to frustrate the principal object of the playwright.
+[^mg7]:  A disregard of this principle is liable to cause undue prominence to minor characters in a play and thereby to frustrate the principal object of the playwright.
 
 123\. [Independent representation of] a variety [of Sentiments] does not displease and such a variety is rare in practical life (lit. amongst people). But a mixture of different Sentiments will, however, bring pleasure [to the spectators] when such is carefully represented.
 
-124\. In [the production of] plays the Dominant, the Sāttvika and the Transitory States which are supporters of the Sentiments and which are accomplished through many objects and ideas, should be assigned to male[^8] characters.[^9]
+124\. In [the production of] plays the Dominant, the Sāttvika and the Transitory States which are supporters of the Sentiments and which are accomplished through many objects and ideas, should be assigned to male[^mg8] characters.[^mg9]
 
 
 
-[^9]:  An analysis of the plays of the best kind, known to us seems to explain this rule. For in almost all of them superior roles are assigned to men who can better be made the vehicle of different and complex psychological states.
+[^mg9]:  An analysis of the plays of the best kind, known to us seems to explain this rule. For in almost all of them superior roles are assigned to men who can better be made the vehicle of different and complex psychological states.
 
-[^8]:  puṃsānukīrṇāḥ (puṣpāvakīrṇāḥ B.G.).
+[^mg8]:  puṃsānukīrṇāḥ (puṣpāvakīrṇāḥ B.G.).
 
 125\. The Sentiments and the States in plays are thus to be created. One who knows this well will attain the best Success [in the production of a play].
 
