--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/08.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/08.md
@@ -4,13 +4,13 @@ title = "08 Gestures of Minor Limbs (upāṅga)"
 +++
 ## *The sages question*.
 
-1-2. Through your kindness we have heard in due order everything relating to the origin of the States[^1] and Sentiments[^2]. We shall now like to know also what the experts say about the different kinds of Histrionic Representation, their meanings and different subdivisions.
+1-2. Through your kindness we have heard in due order everything relating to the origin of the States[^mg1] and Sentiments[^mg2]. We shall now like to know also what the experts say about the different kinds of Histrionic Representation, their meanings and different subdivisions.
 
 
-[^2]:  See VI.
+[^mg2]:  See VI.
 
 
-[^1]:  See VIII.
+[^mg1]:  See VIII.
 
 3\. O the blessed one, you are also to tell us accurately what kinds of Histrionic Representation are to be applied to which [places or occasions] by persons aiming at Success.
 
@@ -20,10 +20,10 @@ title = "08 Gestures of Minor Limbs (upāṅga)"
 
 5\. “O sages, I shall now speak to you in detail so that the Histrionic Representation becomes properly explained to you.
 
-[^3] We shall speak of [the fact that] the *abhinaya* (Histrionic Representation) is of four kinds. The question is, “Why is it called the *abhinaya?*” It is said in reply to this that the *abhinaya* is derived from the prefix *abhi*, and the verbal root *nī* meaning ‘to cause to get’ (to attain), and the sufix *ac* attached to these two. Hence a [full] answer to this should be made after a consideration of the root and its meaning.
+[^mg3] We shall speak of [the fact that] the *abhinaya* (Histrionic Representation) is of four kinds. The question is, “Why is it called the *abhinaya?*” It is said in reply to this that the *abhinaya* is derived from the prefix *abhi*, and the verbal root *nī* meaning ‘to cause to get’ (to attain), and the sufix *ac* attached to these two. Hence a [full] answer to this should be made after a consideration of the root and its meaning.
 
 
-[^3]:  This portion till the beginning of 6 is originally in prose.
+[^mg3]:  This portion till the beginning of 6 is originally in prose.
 
 There is a Śloka on this point
 
@@ -31,32 +31,32 @@ There is a Śloka on this point
 
 ## *Meaning of abhinaya*
 
-7\. *Abhinaya* is so called because in the performance [of a play] it together with the Śākha[^4], the Aṅga[^5] and the Upāṅga[^6] explains the meaning of different [things].
+7\. *Abhinaya* is so called because in the performance [of a play] it together with the Śākha[^mg4], the Aṅga[^mg5] and the Upāṅga[^mg6] explains the meaning of different [things].
 
 
-[^6]:  See 13 below.
+[^mg6]:  See 13 below.
 
 
-[^5]:  See 13 below.
+[^mg5]:  See 13 below.
 
 
-[^4]:  See 15 below.
+[^mg4]:  See 15 below.
 
 ## *Four kinds of abhinaya*
 
 8\. O Brahmins, the Histrionic Representation of a play takes place in four ways, and on this [Representation] the plays of different types rest.
 
-9\. O Brahmins, this Histrionic Representation is known to be fourfold: Gestures[^7] (*āṅgika*), Words, (*vācika*) Dresses and Make-up (*āhārya*) and the Sattva.
+9\. O Brahmins, this Histrionic Representation is known to be fourfold: Gestures[^mg7] (*āṅgika*), Words, (*vācika*) Dresses and Make-up (*āhārya*) and the Sattva.
 
 
-[^7]:  More properly ‘gestures and postures.’
+[^mg7]:  More properly ‘gestures and postures.’
 
 ## *Gesture (āṅgika): its three varieties*
 
-10\. Of these, the Sattva has been described before[^8], along with the States; now listen first of all above the Gestures.
+10\. Of these, the Sattva has been described before[^mg8], along with the States; now listen first of all above the Gestures.
 
 
-[^8]:  VII. 92.
+[^mg8]:  VII. 92.
 
 11\. The Gesture is of three kinds, viz. that of the limbs (*śārira*), that of the face (*mukhaja*) and that related to [different], movements of the entire body (*ceṣṭākṛta*) including the Śākhā, the Aṅga and the Upāṅga.
 
@@ -66,28 +66,28 @@ There is a Śloka on this point
 
 14\. Producers of plays should reckon the Śākhā, dance (*nṛtta*) and the Aṅkura as the three aspects of the Histrionic Representation.
 
-15\. The Gestures are called the Śākhā;[^9] pantomiming through them is the Aṅkura[^10] and that which is based on the Karaṇas[^11] and consists of the Aṅgahāras[^12] is called dance (*nṛtta*).
+15\. The Gestures are called the Śākhā;[^mg9] pantomiming through them is the Aṅkura[^mg10] and that which is based on the Karaṇas[^mg11] and consists of the Aṅgahāras[^mg12] is called dance (*nṛtta*).
 
 
-[^12]:  See IV. 170 ff.
+[^mg12]:  See IV. 170 ff.
 
 
-[^11]:  See IV. 170 ff.
+[^mg11]:  See IV. 170 ff.
 
 
-[^10]:  See IV. 299 ff.
+[^mg10]:  See IV. 299 ff.
 
 
-[^9]:  From Śārṅgadeva’s definition (SR. VII. 37-38) we learn that the śākhā means the flourish of the gesticulating hand (kara-vartanā) preceding one’s speech, whereas the aṅkura means such a flourish following it.
+[^mg9]:  From Śārṅgadeva’s definition (SR. VII. 37-38) we learn that the śākhā means the flourish of the gesticulating hand (kara-vartanā) preceding one’s speech, whereas the aṅkura means such a flourish following it.
 
 16\. O Brahmins, listen first of all about the different gestures of the head, which are included in the facial gestures and which support many Sentiments (*rasa*) and States (*bhāva*).
 
 ## *Gestures of the head (śiras) and their uses*
 
-17-18. The gesture of the head is of thirteen[^13] kinds, viz. Ākampita, Kampita, Dhuta, Vidhuta, Parivāhita, Udvāhita, Avadhuta, Añcita, Nihañcita, Parāvṛtta, Utkṣipta, Adhogata, and Lolita.
+17-18. The gesture of the head is of thirteen[^mg13] kinds, viz. Ākampita, Kampita, Dhuta, Vidhuta, Parivāhita, Udvāhita, Avadhuta, Añcita, Nihañcita, Parāvṛtta, Utkṣipta, Adhogata, and Lolita.
 
 
-[^13]:  The AD. has nine gestures of the head. See ed. M. Ghosh, 49-65, and A.K. Coomaraswamy, MG. pp. 36-38.
+[^mg13]:  The AD. has nine gestures of the head. See ed. M. Ghosh, 49-65, and A.K. Coomaraswamy, MG. pp. 36-38.
 
 19\. Ākampita: Moving the head slowly up and down is called the Ākampita.
 
@@ -107,34 +107,34 @@ Kampita: When the movements in the Ākampita head are quick and copious the same
 
 26\. (Uses): The Parivāhita head is applicable in demonstration, surprise, joy, remembering, intolerance, cogitation, concealment and [amorous] sporting.
 
-27\. The Udvāhita[^14] head is to be applied in pride, showing height, looking high up, self-esteem and the like.
+27\. The Udvāhita[^mg14] head is to be applied in pride, showing height, looking high up, self-esteem and the like.
 
 
-[^14]:  G. names the head movement as ādhūta.
+[^mg14]:  G. names the head movement as ādhūta.
 
 28\. Avadhuta: When the head is lowered once after turning it up it is called Avadhuta. (Uses): It is to be applied in [communicating] a message, invoking [a deity], conversation and beckoning [one to come near].
 
 29\. Añcita: When the neck is slightly bent on one side the Añcita head is the result. (Uses) It is applicable in sickness, swoon, intoxication, anxiety and sorrow.
 
-30-31. Nihañcita: When two shoulders are raised up the neck bent on one side, the Nihañcita head is produced. (Uses): It is to be used by women in pride, Amorousness (*vilāsa*),[^15] Light-heartedness (*lalita*)[^16] Affected Indifference, (*bibboka*),[^17] Hysterical Mood, (*kilakiñcita*),[^18] Silent Expression of Affection (*moṭṭāyita*),[^19] Pretended anger, (*kuṭṭamita*),[^20] Paralysis and Jealous anger (*māna*).
+30-31. Nihañcita: When two shoulders are raised up the neck bent on one side, the Nihañcita head is produced. (Uses): It is to be used by women in pride, Amorousness (*vilāsa*),[^mg15] Light-heartedness (*lalita*)[^mg16] Affected Indifference, (*bibboka*),[^mg17] Hysterical Mood, (*kilakiñcita*),[^mg18] Silent Expression of Affection (*moṭṭāyita*),[^mg19] Pretended anger, (*kuṭṭamita*),[^mg20] Paralysis and Jealous anger (*māna*).
 
 
-[^20]:  See ibid 20.
+[^mg20]:  See ibid 20.
 
 
-[^19]:  See ibid 19.
+[^mg19]:  See ibid 19.
 
 
-[^18]:  See ibid 18.
+[^mg18]:  See ibid 18.
 
 
-[^17]:  See ibid 21.
+[^mg17]:  See ibid 21.
 
 
-[^16]:  See ibid 22.
+[^mg16]:  See ibid 22.
 
 
-[^15]:  SeeXXIV. 15.
+[^mg15]:  SeeXXIV. 15.
 
 32\. Parāvṛtta: When the face is turned round, the Parāvṛtta head is the result. (Uses): It is to be used in turning away the face and looking back and the like.
 
@@ -150,19 +150,19 @@ Kampita: When the movements in the Ākampita head are quick and copious the same
 
 ## *Thirty-six Glances (dṛṣṭi)*
 
-38\. Glances expressing the Sentiments[^21] are Kāntā, Bhayānakā, Hāsyā, Karuṇā, Adbhutā, Raudrī, Vīrā, and Bībhatsā.
+38\. Glances expressing the Sentiments[^mg21] are Kāntā, Bhayānakā, Hāsyā, Karuṇā, Adbhutā, Raudrī, Vīrā, and Bībhatsā.
 
 
-[^21]:  The AD. has only eight glances, see ed. M. Ghosh, 66-78, and A. K. Coomaraswamy, MG. p. 40. But curiously enough the names of the eight glances in the AD. even if referred by Coomaraswamy’s text to the Bharataśāstra, does not occur in the NŚ. which has no less than thirty-six glances. Besides the eight glances Coomaraswamy’s text records (loc. cit.) forty-four glances which include those mentioned in the NŚ.
+[^mg21]:  The AD. has only eight glances, see ed. M. Ghosh, 66-78, and A. K. Coomaraswamy, MG. p. 40. But curiously enough the names of the eight glances in the AD. even if referred by Coomaraswamy’s text to the Bharataśāstra, does not occur in the NŚ. which has no less than thirty-six glances. Besides the eight glances Coomaraswamy’s text records (loc. cit.) forty-four glances which include those mentioned in the NŚ.
 
 39\. Glances to be used in the Dominant States are Snigdhā, Hṛṣṭā, Dīnā, Kruddhā, Dṛptā, Bhayānvitā, Jugupsitā and Vismitā.
 
-40-42. Glances to be used in the Transitory States such as Śūnyā, Malinā, Śrāntā, Lajjānvitā, Glānā, Śaṅkitā, Viṣaṇṇā, Muktā, Kuñcitā, Abhitaptā, Jihmā, Lalitā, Vitarkitā, Ardhamukulā, Vibhrāntā, Viplutā, Ākekarā, Vikośā, Trastā and Madira, make up their number thirty-six.[^22]
+40-42. Glances to be used in the Transitory States such as Śūnyā, Malinā, Śrāntā, Lajjānvitā, Glānā, Śaṅkitā, Viṣaṇṇā, Muktā, Kuñcitā, Abhitaptā, Jihmā, Lalitā, Vitarkitā, Ardhamukulā, Vibhrāntā, Viplutā, Ākekarā, Vikośā, Trastā and Madira, make up their number thirty-six.[^mg22]
 
 ### *Glances to express the Sentiments*
 
 
-[^22]:  See note 1 to 38 above.
+[^mg22]:  See note 1 to 38 above.
 
 43\. I shall now explain the characteristics of these Glances in connexion with the various Sentiments and the States, and shall describe their functions.
 
@@ -499,10 +499,10 @@ Bright face—in wonder, laughter and love.
 Reddened face—in intoxication and in the Heroic, the Terrible and the Pathetic Sentiments.  
 Dark face—in the Terrible and the Odious Sentiments.
 
-161-162. The colour of the face should be thus used to represent the States and the Sentiments. The acting done with the Gestures of the Śākhā[^23], the Aṅga and the Upāṅga is good, but without proper colour of the face it will not be charming (lit. beautiful).
+161-162. The colour of the face should be thus used to represent the States and the Sentiments. The acting done with the Gestures of the Śākhā[^mg23], the Aṅga and the Upāṅga is good, but without proper colour of the face it will not be charming (lit. beautiful).
 
 
-[^23]:  See 11 and 15 above.
+[^mg23]:  See 11 and 15 above.
 
 162-163. Even a few Gestures when combined with the proper colour of the face will double their charm (lit. beauty) just as the moon will enhance the charm of the night.
 
