--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/09.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/09.md
@@ -4,41 +4,41 @@ title = "09 Gestures of Major Limbs (aṅga)"
 +++
 ## *Bharata speaks*.
 
-1-3. So much about the minor limbs such as head, eyes, eyebrows, nose, lips and cheeks, and their description that I was to tell you. I shall now define the gestures of [major limbs] hands, breast, sides, belly, waist, thighs and feet and their proper use.[^1] In this connexion I shall [first of all] explain the gesture of hands and the like, that are used in the production of a play. You are to listen how they are to be applied [in acting].
+1-3. So much about the minor limbs such as head, eyes, eyebrows, nose, lips and cheeks, and their description that I was to tell you. I shall now define the gestures of [major limbs] hands, breast, sides, belly, waist, thighs and feet and their proper use.[^mg1] In this connexion I shall [first of all] explain the gesture of hands and the like, that are used in the production of a play. You are to listen how they are to be applied [in acting].
 
 
-[^1]:  This use relates to the two-fold Practice (realistic and coventional) on the stage (See XIV. 62ff). The Realistic Practice (lokadharmī) in this connexion is of two kinds, viz. (1) that reflecting one’s emotion, as in arrogant reference to one’s ownself, this (patāka) hand is to be raised on a level with the forehead (IX. 19), (2) that representing the external form of an object, as the use of the Padmakośa hand to represent lotus and similar flowers. The Conventional Practice (nāṭyadharmī) is likewise of two kinds, viz, (1) that creating an ornamental effect, as the use of the four karaṇas of the hand (See IX. 205-211 below), (2) that partially suggesting a popular behaviour, as the use of the tṛipatāka hand to represent words spoken aside (janāntika). See Ag.
+[^mg1]:  This use relates to the two-fold Practice (realistic and coventional) on the stage (See XIV. 62ff). The Realistic Practice (lokadharmī) in this connexion is of two kinds, viz. (1) that reflecting one’s emotion, as in arrogant reference to one’s ownself, this (patāka) hand is to be raised on a level with the forehead (IX. 19), (2) that representing the external form of an object, as the use of the Padmakośa hand to represent lotus and similar flowers. The Conventional Practice (nāṭyadharmī) is likewise of two kinds, viz, (1) that creating an ornamental effect, as the use of the four karaṇas of the hand (See IX. 205-211 below), (2) that partially suggesting a popular behaviour, as the use of the tṛipatāka hand to represent words spoken aside (janāntika). See Ag.
 
 ## *Sixty-seven gestures of hands (hasta) *
 
-4-7. Gestures of single hands (*asaṃyuta-hasta*)[^2] are twenty-four in number: Patāka, Tripatāka, Kartarīmukha, Ardhacandra, Arāla, Śukatuṇḍa, Muṣṭi, Śikhara, Kapittha, Kaṭakāmukha,[^3] Sūcyāsya (Sūcīmukha), Padmakośa, Sarpaśiras, Mṛgaśīrṣa, Kāṅgula, Alapadma (Alapallava), Catura, Bhramara, Haṃsāsya, Haṃsapakṣa, Sandaṃśa, Mukulā, Ūrṇanābha and Tāmracūḍa.
+4-7. Gestures of single hands (*asaṃyuta-hasta*)[^mg2] are twenty-four in number: Patāka, Tripatāka, Kartarīmukha, Ardhacandra, Arāla, Śukatuṇḍa, Muṣṭi, Śikhara, Kapittha, Kaṭakāmukha,[^mg3] Sūcyāsya (Sūcīmukha), Padmakośa, Sarpaśiras, Mṛgaśīrṣa, Kāṅgula, Alapadma (Alapallava), Catura, Bhramara, Haṃsāsya, Haṃsapakṣa, Sandaṃśa, Mukulā, Ūrṇanābha and Tāmracūḍa.
 
 
-[^3]:  Some mss. read this name as khaṭakāmukha. Our reading is supported by the AD. (See ed. M. Ghosh, verse 124. A. K. Coomaraswamy MG. p. 50).
+[^mg3]:  Some mss. read this name as khaṭakāmukha. Our reading is supported by the AD. (See ed. M. Ghosh, verse 124. A. K. Coomaraswamy MG. p. 50).
 
 
-[^2]:  These hands gestures are ordinarily used singly; but at times two hands showing one of these gestures are used simultaneously. But still these are called single (asaṃyuta) hands. For, combined (saṃyuta) hands are so called because they are always to be shown by both the hands; see Ag.
+[^mg2]:  These hands gestures are ordinarily used singly; but at times two hands showing one of these gestures are used simultaneously. But still these are called single (asaṃyuta) hands. For, combined (saṃyuta) hands are so called because they are always to be shown by both the hands; see Ag.
 
-8-10. Gestures of combined hands (*saṃyuta-hasta*)[^4] are thirteen in number: Añjali, Kapota, Karkaṭa, Svastika, Kaṭakāvardhamānaka,[^5] Utsaṅga, Niṣadha, Dola, Puṣpapuṭa, Makara, Gajadanta, Avahittha and Vardhamāna.
-
-
-[^5]:  Some mss, read this name as khaṭakā 0; Kaṭakāvardhana, is the name of a saṃyuta-hasta in the AD. ed. M, Ghosh, 187, and A. K, Coomaraswamy, MG, p. 60.
+8-10. Gestures of combined hands (*saṃyuta-hasta*)[^mg4] are thirteen in number: Añjali, Kapota, Karkaṭa, Svastika, Kaṭakāvardhamānaka,[^mg5] Utsaṅga, Niṣadha, Dola, Puṣpapuṭa, Makara, Gajadanta, Avahittha and Vardhamāna.
 
 
-[^4]:  See note 1 to 4-7 above.
-
-10-17. Dance-hands (*nṛtta-hasta*)[^6] are Caturasra,[^7] Udvṛtta, Talamukha, Svastika, Viprakīrṇa, Arālakhaṭakāmukha, Āviddhavakra, Sūcyāsya, Recita, Ardharecita, Uttānavañcita, Pallava, Nitamba, Keśabandha, Latā, Karihasta, Pakṣavañcitaka, Pakṣapradyotaka, Garuḍapakṣa, Daṇḍapakṣa, Ūrdhvamaṇḍalī, Pārśvamaṇḍalī, Uromaṇḍalī, Uraḥpārśvārdhamaṇḍalī, Muṣṭikasvastika, Nalinīpadmakośa, Alapallava, Ulbaṇa, Lalita and Valita.
+[^mg5]:  Some mss, read this name as khaṭakā 0; Kaṭakāvardhana, is the name of a saṃyuta-hasta in the AD. ed. M, Ghosh, 187, and A. K, Coomaraswamy, MG, p. 60.
 
 
-[^7]:  In the Skt. text these names are given in dual number e.g. our caturasra stands as caturasrau. The reason for this is to be sought in the fact that unlike the single and combined hands which must represent one single idea or object, the hands in the dance-hand gestures are to be individually moved, not for representing any idea or object, but for creating an ornamental effect in acting as well as in dance. See Ag.
+[^mg4]:  See note 1 to 4-7 above.
+
+10-17. Dance-hands (*nṛtta-hasta*)[^mg6] are Caturasra,[^mg7] Udvṛtta, Talamukha, Svastika, Viprakīrṇa, Arālakhaṭakāmukha, Āviddhavakra, Sūcyāsya, Recita, Ardharecita, Uttānavañcita, Pallava, Nitamba, Keśabandha, Latā, Karihasta, Pakṣavañcitaka, Pakṣapradyotaka, Garuḍapakṣa, Daṇḍapakṣa, Ūrdhvamaṇḍalī, Pārśvamaṇḍalī, Uromaṇḍalī, Uraḥpārśvārdhamaṇḍalī, Muṣṭikasvastika, Nalinīpadmakośa, Alapallava, Ulbaṇa, Lalita and Valita.
 
 
-[^6]:  These gestures (dance-hands, nṛttahasta) as their name implies, are ordinarily to be used in dance; but in course of acting too they are often to be used along with other gestures (single and combined) to create an ornamental effect (See note 1 to 1-3 above). See Ag.
-
-These are the sixtyfour[^8] gestures of hands.
+[^mg7]:  In the Skt. text these names are given in dual number e.g. our caturasra stands as caturasrau. The reason for this is to be sought in the fact that unlike the single and combined hands which must represent one single idea or object, the hands in the dance-hand gestures are to be individually moved, not for representing any idea or object, but for creating an ornamental effect in acting as well as in dance. See Ag.
 
 
-[^8]:  In actual enumeration hand-gestures are sixty-seven in number (single 24, combined 13 and Dance-hands 30). Catuḥsaṣṭhi in the text should be emended to saptasaṣṭhi.
+[^mg6]:  These gestures (dance-hands, nṛttahasta) as their name implies, are ordinarily to be used in dance; but in course of acting too they are often to be used along with other gestures (single and combined) to create an ornamental effect (See note 1 to 1-3 above). See Ag.
+
+These are the sixtyfour[^mg8] gestures of hands.
+
+
+[^mg8]:  In actual enumeration hand-gestures are sixty-seven in number (single 24, combined 13 and Dance-hands 30). Catuḥsaṣṭhi in the text should be emended to saptasaṣṭhi.
 
 ## *Gestures of single hands (asaṃyuta-hasta) *
 
@@ -46,72 +46,72 @@ These are the sixtyfour[^8] gestures of hands.
 
 Patāka (flag)—the fingers extended and close against one another, and the thumb bent.
 
-(Uses): To represent an administration of blows, scorching heat, urging, attainment of happiness and arrogant reference of one’s ownself[^9] this hand is to be raised on a level with the forehead. To represent the glare of heat, torrential rain and shower of flowers two Patāka hands with the fingers separated and moving, are to be joined together. A shallow pool of water, present of flowers, grass and any design [lit. object] made on the ground are to be represented by two such hands separated from the Svastika position. The same Patāka hands with their fingers pointing downwards are to be used to represent anything closed, made open, protected, covered, dense or private (to be concealed). This very hand with its fingers pointing downwards and moving up and down, is to express the speedy movement of wind and [ocean] waves, [ocean waves] breaking against the shore, and an objection. The Recaka of this hand should be used to represent encouragement, many [in number], a great crowd of men, height, beating of drums, and flight of birds upwards. And anything washed, pressed, cleansed, pounded, or holding up a hill or uprooting it, should be represented by the palms of two such hands rubbing each other. This is also the manner of representing man and woman.[^10]
+(Uses): To represent an administration of blows, scorching heat, urging, attainment of happiness and arrogant reference of one’s ownself[^mg9] this hand is to be raised on a level with the forehead. To represent the glare of heat, torrential rain and shower of flowers two Patāka hands with the fingers separated and moving, are to be joined together. A shallow pool of water, present of flowers, grass and any design [lit. object] made on the ground are to be represented by two such hands separated from the Svastika position. The same Patāka hands with their fingers pointing downwards are to be used to represent anything closed, made open, protected, covered, dense or private (to be concealed). This very hand with its fingers pointing downwards and moving up and down, is to express the speedy movement of wind and [ocean] waves, [ocean waves] breaking against the shore, and an objection. The Recaka of this hand should be used to represent encouragement, many [in number], a great crowd of men, height, beating of drums, and flight of birds upwards. And anything washed, pressed, cleansed, pounded, or holding up a hill or uprooting it, should be represented by the palms of two such hands rubbing each other. This is also the manner of representing man and woman.[^mg10]
 
 
 
-[^10]:  Ag. gives detailed rules about the use of the patāka hand in all the cases mentioned above.
+[^mg10]:  Ag. gives detailed rules about the use of the patāka hand in all the cases mentioned above.
 
-[^9]:  In saying ‘I too,’ ‘of me too,’ ‘by me too,’ ‘in me too’ and the like (Ag).
+[^mg9]:  In saying ‘I too,’ ‘of me too,’ ‘by me too,’ ‘in me too’ and the like (Ag).
 
 26-32. Tripatāka (flag with three fingers)—the third finger of the Patāka hand to be bent.
 
-(Uses): It is to be used in representing invocation, descent, bidding goodbye, prohibition, entrance, raising up [anything],[^11] bowing [in salutation], comparing,[^12] suggesting alternatives, touching [the head with] auspicious objects or putting them on the head, putting on a turban or a crown and covering the mouth or the ears. This very hand with its fingers pointing downwards and moving up and down is to be used in representing flight of small birds, stream, snake, bees and the like. And with the third finger of the Tripatāka should be represented wiping off tears, drawing a Tilaka or Patralekhā[^13] and touching of hairs.
+(Uses): It is to be used in representing invocation, descent, bidding goodbye, prohibition, entrance, raising up [anything],[^mg11] bowing [in salutation], comparing,[^mg12] suggesting alternatives, touching [the head with] auspicious objects or putting them on the head, putting on a turban or a crown and covering the mouth or the ears. This very hand with its fingers pointing downwards and moving up and down is to be used in representing flight of small birds, stream, snake, bees and the like. And with the third finger of the Tripatāka should be represented wiping off tears, drawing a Tilaka or Patralekhā[^mg13] and touching of hairs.
 
 
-[^13]:  rocanālabhanakam -touching, (the body) with go-roama or drawing ornamental designs (patralekhā) on the body with this substance. Gorocanā is a bright yellow pigment prepared from the urine or the bile of a cow.
+[^mg13]:  rocanālabhanakam -touching, (the body) with go-roama or drawing ornamental designs (patralekhā) on the body with this substance. Gorocanā is a bright yellow pigment prepared from the urine or the bile of a cow.
 
 
-[^12]:  nidarśanam upamānopameyabhāvam (Ag.).
+[^mg12]:  nidarśanam upamānopameyabhāvam (Ag.).
 
 
-[^11]:  Ag. thinks that this relates to objects like one’s chin.
+[^mg11]:  Ag. thinks that this relates to objects like one’s chin.
 
-32-37. Two Tripatāka[^14] hands held like a Svastika represent adoration of the feet of venerable persons (*guru*)[^15]. Two such hands are to meet each other’s end for representing marriage. Separated and moved to the forehead they indicate a king. When obliquely forming a Svastika they represent planets. To indicate an ascetic they arc to be raised with palm turned forward. To represent a door they are to face each other. Submarine fire, battle and sea-monsters are to be indicated by two Tripatāka hands, first raised near one’s face and then moved with the fingers pointing downwards. With these very hands should be indicated jumping of monkeys, waves, wind and women. To show the crescent moon this hand should put forward its thumb, and to indicate a king’s march [against his enemy] this hand should turn itself towards the back.
-
-
-[^15]:  Parents, grand-parents and the spiritual guide etc. are meant by this term.
+32-37. Two Tripatāka[^mg14] hands held like a Svastika represent adoration of the feet of venerable persons (*guru*)[^mg15]. Two such hands are to meet each other’s end for representing marriage. Separated and moved to the forehead they indicate a king. When obliquely forming a Svastika they represent planets. To indicate an ascetic they arc to be raised with palm turned forward. To represent a door they are to face each other. Submarine fire, battle and sea-monsters are to be indicated by two Tripatāka hands, first raised near one’s face and then moved with the fingers pointing downwards. With these very hands should be indicated jumping of monkeys, waves, wind and women. To show the crescent moon this hand should put forward its thumb, and to indicate a king’s march [against his enemy] this hand should turn itself towards the back.
 
 
-[^14]:  This portion does not occur in all mss., and may well have been a later addition.
+[^mg15]:  Parents, grand-parents and the spiritual guide etc. are meant by this term.
+
+
+[^mg14]:  This portion does not occur in all mss., and may well have been a later addition.
 
 38-40. Kartarīmukha (scissors’ blades)—the forefinger of the Tripatāka hand is to bend backwards.
 
-(Uses): This [hand with its fingers] pointing downwards will represent showing the way, decorating the feet[^16] or dying them,[^17] and the crawling [of babies]. With fingers pointing upwards it will represent biting, horn and letters. And when the fingers in it are turned differently (*i.e*. the middle finger is bent backwards) it will represent falling down, death, transgression,[^18] reversion, cogitation and putting [anything] in trust.
+(Uses): This [hand with its fingers] pointing downwards will represent showing the way, decorating the feet[^mg16] or dying them,[^mg17] and the crawling [of babies]. With fingers pointing upwards it will represent biting, horn and letters. And when the fingers in it are turned differently (*i.e*. the middle finger is bent backwards) it will represent falling down, death, transgression,[^mg18] reversion, cogitation and putting [anything] in trust.
 
 
-[^18]:  vyatikramaḥ aparādhaḥ (Ag.).
+[^mg18]:  vyatikramaḥ aparādhaḥ (Ag.).
 
 
-[^17]:  rañjanam alaktakena (Ag.).
+[^mg17]:  rañjanam alaktakena (Ag.).
 
 
-[^16]:  racanaṃ kasturikādinā patrabhaṅgādikriyā (Ag,).
+[^mg16]:  racanaṃ kasturikādinā patrabhaṅgādikriyā (Ag,).
 
 42\. And with the two such (*saṃyuta*) hands or one such (*asaṃyuta*) hand should be represented an antelope, yak, buffalo, celestial elephant (*airāvata*), bull, gate (*gogūra*) and hill-top.
 
 42-44. Ardhacandra (crescent moon)—the fingers and the thumb so bent as to make a curve like a bow.
 
-(Uses): With this should be represented young trees, crescent moon, conch shell, jar (*kalaśa*), bracelet, forcible opening, exertion,[^19] thinness and drinking. With this [very] Ardhacandra hand women should represent girdle, hip waist, face, Tālapatra[^20] and earring.
+(Uses): With this should be represented young trees, crescent moon, conch shell, jar (*kalaśa*), bracelet, forcible opening, exertion,[^mg19] thinness and drinking. With this [very] Ardhacandra hand women should represent girdle, hip waist, face, Tālapatra[^mg20] and earring.
 
 
-[^20]:  Mss. read tālapatra (tāḍapatra) meaning a kind of ear-ornament (tāḍaṅka or tāṭaṅka). It is different from kuṇḍala which is also a car-ornament.
+[^mg20]:  Mss. read tālapatra (tāḍapatra) meaning a kind of ear-ornament (tāḍaṅka or tāṭaṅka). It is different from kuṇḍala which is also a car-ornament.
 
 
-[^19]:  āyastaṃ khedam (Ag.).
+[^mg19]:  āyastaṃ khedam (Ag.).
 
 45-50. Arala (bent)—the forefinger curved like a bow, the thumb also curved and the remaining fingers separated and turned upwards.
 
-(Uses): With this should be represented courage, pride, prowess, beauty, contentment, heavenly [objects], poise, act of blessing and other favourable states. And this, again, will represent woman’s gathering of hairs or scattering them and looking carefully over their entire body. The preliminaries to the marriage by bride’s going round the bridegroom[^21] and [marital] union[^22] are to be represented by two Arāla hands moving around each other and their fingers meeting in the form of a Svastika. And with similar hands should be represented circumambulation, round objects, great crowd of men, objects arranged on the ground.[^23] In calling any one, in making offering to the manes, saying too many things, in censure and rebuke etc., wiping off sweat and enjoying sweet smell, the Tripatāka hands have been prescribed before by me, but women are to use the Arāla hand to represent these.
+(Uses): With this should be represented courage, pride, prowess, beauty, contentment, heavenly [objects], poise, act of blessing and other favourable states. And this, again, will represent woman’s gathering of hairs or scattering them and looking carefully over their entire body. The preliminaries to the marriage by bride’s going round the bridegroom[^mg21] and [marital] union[^mg22] are to be represented by two Arāla hands moving around each other and their fingers meeting in the form of a Svastika. And with similar hands should be represented circumambulation, round objects, great crowd of men, objects arranged on the ground.[^mg23] In calling any one, in making offering to the manes, saying too many things, in censure and rebuke etc., wiping off sweat and enjoying sweet smell, the Tripatāka hands have been prescribed before by me, but women are to use the Arāla hand to represent these.
 
 
-[^23]:  Objects such as Ālpanā and flowers arranged on the ground. For Ālpana see L’alpana by Andre et Suzanne Karpelles, Paris, 1930 (?)
+[^mg23]:  Objects such as Ālpanā and flowers arranged on the ground. For Ālpana see L’alpana by Andre et Suzanne Karpelles, Paris, 1930 (?)
 
 
-[^22]:  vivābaḥ—agnan sākṣiṇi pāṇigrahaṇam (Ag.).
+[^mg22]:  vivābaḥ—agnan sākṣiṇi pāṇigrahaṇam (Ag.).
 
 
-[^21]:  kautukam—vivāhāt pūrvabhāvī vadhūvaravor ācāraḥ antarvivābaḥ (Ag.).
+[^mg21]:  kautukam—vivāhāt pūrvabhāvī vadhūvaravor ācāraḥ antarvivābaḥ (Ag.).
 
 51-53. Śukatuṇḍa (parrot’s beak)—the ring-finger (third finger) of the Arāla hand is bent.
 
@@ -119,16 +119,16 @@ Patāka (flag)—the fingers extended and close against one another, and the thu
 
 54-55. Muṣṭi (fist—fingers have their ends [bent] into the palm and the thumb [is set] upon them.
 
-(Uses): It is used to represent beating, exercise[^24] exit, pressing,[^25] shampooing,[^26] grasping sword and holding spears and clubs.
+(Uses): It is used to represent beating, exercise[^mg24] exit, pressing,[^mg25] shampooing,[^mg26] grasping sword and holding spears and clubs.
 
 
-[^26]:  Saṃvāhana according to Ag. means mṛtpīḍana.
+[^mg26]:  Saṃvāhana according to Ag. means mṛtpīḍana.
 
 
-[^25]:  ‘Pressing’ of the teats of cows and buffaloes while milking them; stanapīḍane—mahiṣyādidohane (Ag.).
+[^mg25]:  ‘Pressing’ of the teats of cows and buffaloes while milking them; stanapīḍane—mahiṣyādidohane (Ag.).
 
 
-[^24]:  Vyāyāma according to Ag. means yūddha.
+[^mg24]:  Vyāyāma according to Ag. means yūddha.
 
 56-57. Śikhara (peak)—in this very hand (*muṣṭi*) the thumb raised.
 
@@ -140,7 +140,7 @@ Patāka (flag)—the fingers extended and close against one another, and the thu
 
 60-63. Kaṭakāmukha—the ring-finger and the little finger of this Kapittha hand to be raised and bent.
 
-(Uses): It is used to represent sacrifice,[^27] oblation,[^28] umbrella, drawing up reins, fan, holding a mirror, drawing [patterns],[^29] powdering, taking up big sticks, arranging a pearl necklace, wearing garlands, gathering the ends of clothes, churning, drawing out arrows, plucking flowers, wielding a long whip, drawing out a goad, a rope, and representing a woman.
+(Uses): It is used to represent sacrifice,[^mg27] oblation,[^mg28] umbrella, drawing up reins, fan, holding a mirror, drawing [patterns],[^mg29] powdering, taking up big sticks, arranging a pearl necklace, wearing garlands, gathering the ends of clothes, churning, drawing out arrows, plucking flowers, wielding a long whip, drawing out a goad, a rope, and representing a woman.
 
 
 [^29]:  khaṇḍanam—drawing decorative patterns or designs on anything. Ag’s explanation of this seems to be wrong, Cf. alakā-tilakā patrāvalīṃ khaṇḍante (draws the alakā-tīlakā and patrāvalī) in the Kīrtilatā of Vidyāpati. See ed. Haraprasād Śāstrī, Calcutta, BS. 1331 (1924) pp. 13-14, and the root khāḍ (to draw) in E. Bengal dialect of T ippera.
