--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/10.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/10.md
@@ -142,12 +142,12 @@ Añcita—the heels on the ground, the forepart of the feet raised and all the t
 
 Kuñcita—the heels thrown up, toes all bent down and the middle of the feet too bent.
 
-51\. (Uses): It is to be used in aristocratic (*udātta*) gait, turning, round to the right and *vice versa* and in the Atikrāntā Cārī.[^1]
+51\. (Uses): It is to be used in aristocratic (*udātta*) gait, turning, round to the right and *vice versa* and in the Atikrāntā Cārī.[^mg1]
 
 ## *Dance steps (cārī) *
 
 
-[^1]:  B. reads after this three additional hemistichs which define the Sūci foot as follows: The [right foot with its] heel raised resting on the big toe and the left foot in the natural position constitute the Sūcī feet. It is used in dance and playing the Nūpura.
+[^mg1]:  B. reads after this three additional hemistichs which define the Sūci foot as follows: The [right foot with its] heel raised resting on the big toe and the left foot in the natural position constitute the Sūcī feet. It is used in dance and playing the Nūpura.
 
 52\. Persons practising [the Cārīs] should take up simultaneously the movements of the feet, the shanks and the thighs. [For] in the movement of feet are included all the movements of shanks and thighs.
 
