--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/11.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/11.md
@@ -10,10 +10,10 @@ title = "11 Cārī movements"
 
 3\. Cārī: The movement [mainly] with a single foot, is called the Cārī.
 
-Karaṇa[^1]: The two feet moving [together] is called the Karaṇa.
+Karaṇa[^mg1]: The two feet moving [together] is called the Karaṇa.
 
 
-[^1]:  This karaṇa should be distinguished from that mentioned in IV. 30, 34-75, 63ff.
+[^mg1]:  This karaṇa should be distinguished from that mentioned in IV. 30, 34-75, 63ff.
 
 4\. Khaṇḍa: A combination of the [three] Karaṇas is called the Khaṇḍa.
 
@@ -29,36 +29,36 @@ Maṇḍala: Three or four Khaṇḍas combine to make up the Maṇḍala.
 
 ## *Thirty-two Cārīs*
 
-8-10. The following sixteen are the earthly (*bhaumī*) Cārīs: Samapādā, Sthitāvartā, Śakaṭāsyā, Adhyardhikā, Cāṣagati, Vicyavā, Eḍakākrīḍitā, Baddhā, Ūrūdvṛttā, Aḍḍitā, Utsyanditā,[^2] Janitā, Syanditā[^3], Apasyanditā,[^4] Samotsaritamatalli and Matalli.
+8-10. The following sixteen are the earthly (*bhaumī*) Cārīs: Samapādā, Sthitāvartā, Śakaṭāsyā, Adhyardhikā, Cāṣagati, Vicyavā, Eḍakākrīḍitā, Baddhā, Ūrūdvṛttā, Aḍḍitā, Utsyanditā,[^mg2] Janitā, Syanditā[^mg3], Apasyanditā,[^mg4] Samotsaritamatalli and Matalli.
 
 
-[^4]:  ibid.
+[^mg4]:  ibid.
 
 
-[^3]:  See note 1 above.
+[^mg3]:  See note 1 above.
 
 
-[^2]:  G. reads these names as Utspandītā, Apaspanditā and Spanditā and B. as Utspanditā, Syanditā, and Apasyanditā. I have taken the root syand as the basis of all these names. Mss. erratically give -syand and -spand-.
+[^mg2]:  G. reads these names as Utspandītā, Apaspanditā and Spanditā and B. as Utspanditā, Syanditā, and Apasyanditā. I have taken the root syand as the basis of all these names. Mss. erratically give -syand and -spand-.
 
 11-13. The aerial (*ākāśikī*) Cārīs are sixteen in number. They are as follows: Atikrāntā, Apakrāntā, Pārśvakrāntā, Ūrdhvajānu, Sūcī, Nūpurapādika, Dolapādā, Ākṣiptā, Āviddhā, Udvṛttā, Vidyudbhrāntā, Alātā, Bhujaṅgatrasitā, Hariṇaplutā, Daṇḍā and Bhramarī.
 
 ## *Earthly Cārīs*
 
-14\. Samapādā—the two feet close together, the nails [of the toes] meeting, and standing on the spot.[^5]
+14\. Samapādā—the two feet close together, the nails [of the toes] meeting, and standing on the spot.[^mg5]
 
 15\. Sthitāvartā—one Agratalasañcara foot drawn up to cross the remaining foot and this movement repeated with another foot after separating the two.
 
 
-[^5]:  On the appropriateness of this name see Ag.
+[^mg5]:  On the appropriateness of this name see Ag.
 
 16\. Śakaṭāsyā—the body held upright, one Agratalasañcara foot put forward and the breast being Udvāhita.
 
-17\. Adhyardhikā—the left foot on the back (i.e. heel) of the right one, the latter to be drawn away [a Tāla and half a part].[^6]
+17\. Adhyardhikā—the left foot on the back (i.e. heel) of the right one, the latter to be drawn away [a Tāla and half a part].[^mg6]
 
 18\. Cāṣagati—the right foot put forward and then drawn back and at the same time left foot drawn back and put forward afterwards.
 
 
-[^6]:  The exact measure (1½ tāla) is given by Ag.
+[^mg6]:  The exact measure (1½ tāla) is given by Ag.
 
 19\. Vicyavā—separating the feet from the Samapādā position and striking the ground with their fore part.
 
@@ -142,13 +142,13 @@ Apasyanditā—the reverse of the Syanditā Cārī (*i.e*. another foot being pu
 
 59-60. Samapāda—the feet in the natural posture and kept one Tāla apart, and the body with the natural Sauṣṭhava. Brahmā is its presiding deity.
 
-61-63. (Uses): It should be assumed in accepting blessings from the Brahmins[^7], and in mimicking birds. The bridegroom at the marriage ceremony, persons in the sky, chariot and aerial car (*vimāna*), person[^8] of marked sects (*liṅgasthā*) and persons practising vows are also to assume this.
+61-63. (Uses): It should be assumed in accepting blessings from the Brahmins[^mg7], and in mimicking birds. The bridegroom at the marriage ceremony, persons in the sky, chariot and aerial car (*vimāna*), person[^mg8] of marked sects (*liṅgasthā*) and persons practising vows are also to assume this.
 
 
-[^8]:  liṅgasthān—śaivādyāḥ vratasthā ūrdhvakāyādī prajñaṅgāḥ (?) (Ag.).
+[^mg8]:  liṅgasthān—śaivādyāḥ vratasthā ūrdhvakāyādī prajñaṅgāḥ (?) (Ag.).
 
 
-[^7]:  vipramaṅgala—vipraiḥ yan maṅgalāśīrvacanādi etc. (Ag.).
+[^mg7]:  vipramaṅgala—vipraiḥ yan maṅgalāśīrvacanādi etc. (Ag.).
 
 63-65. Vaiśākha—the two feet three Tālas and a half apart and the thighs without motion; [besides this] the two feet to be obliquely placed pointing sideways. Skanda (Kārtikeya) is its presiding deity.
 
