--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/12.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/12.md
@@ -8,19 +8,19 @@ title = "12 Maṇḍala movements"
 
 2-3. The aerial Maṇḍalas are: Atikrānta, Vicitra, Lalitasañcara, Sūcividdha, Daṇḍapāda, Vihṛta, Alāta(-ka), Vāmaviddha, Lalita and Krānta.
 
-3-5. The earthly Maṇḍalas are Bhramara, Āskandita,[^1] Āvarta, Samotsarita, Eḍakākrīḍīta, Aḍḍita, Śakaṭāsya, Adhyardha(-ka), Piṣṭakuṭṭa and Cāṣagata. Listen about their description.
+3-5. The earthly Maṇḍalas are Bhramara, Āskandita,[^mg1] Āvarta, Samotsarita, Eḍakākrīḍīta, Aḍḍita, Śakaṭāsya, Adhyardha(-ka), Piṣṭakuṭṭa and Cāṣagata. Listen about their description.
 
 
-[^1]:  Mss. sometimes give this name as āspandita which seems to be a corruption for āskandita. Cf. The note 1 on XI. 7-9.
+[^mg1]:  Mss. sometimes give this name as āspandita which seems to be a corruption for āskandita. Cf. The note 1 on XI. 7-9.
 
 ## *Aerial Maṇḍalas*
 
 6-9. Atikrānta—the right foot [to be moved successively] in the Janitā Cārī and [the Śakaṭāsyā Cārī in which the breast is] Udvāhita, the left foot in the Alātā Cārī and the right foot in the Pārśvakrāntā Cāri, (next) the left foot in the Sūcī Cārī and the right foot in the Apakrāntā Cārī, [again] the left foot [successively] in the Sūcī Cārī and [the Bhramarī Cārī by] turning the Trika, (then) the right foot in the Udvṛitta Cārī and the left foot in the Alātā Cārī which should be changed (lit. divided) to the Bhramarī Cārī, again this left foot in the Alātā Cārī and the right foot in the Daṇḍapāda Cārī.
 
-10-13. Vicitra—the right foot [successively to be moved] in the Janitā Cārī and in the Talasañcara[^2] (Nikuṭṭana), manner, (then) the left foot in the Syanditā Cārī, the right foot in the Pārśvakrāntā Cārī, (again) the left foot in the Bhujaṅgatrasitā Cārī and the tight foot [successively] in the Ātikrāntā and Udvṛttā Cārīs, (next) the left foot in the Sūcī Cārī, the right foot in the Vikṣitpā (Ākṣiptā) Cārī and the left foot in the Apakrāntā Cārī.
+10-13. Vicitra—the right foot [successively to be moved] in the Janitā Cārī and in the Talasañcara[^mg2] (Nikuṭṭana), manner, (then) the left foot in the Syanditā Cārī, the right foot in the Pārśvakrāntā Cārī, (again) the left foot in the Bhujaṅgatrasitā Cārī and the tight foot [successively] in the Ātikrāntā and Udvṛttā Cārīs, (next) the left foot in the Sūcī Cārī, the right foot in the Vikṣitpā (Ākṣiptā) Cārī and the left foot in the Apakrāntā Cārī.
 
 
-[^2]:  See Ag.
+[^mg2]:  See Ag.
 
 14-17. Lalitasañcara—the right foot with the knee raised [to move] in the Sūcī Cārī, (next) the left foot in the Apakrāntā Cārī and the right one in the Pārśvakrāntā Cārī (again) the left foot [successively] in the Sūcī and the Bhramarī Cārīs [this latter by turning round the Trika] and the right foot in the Pārśvakrāntā Cārī and the left foot in the Atikrāntā Cārī which is to be changed (lit. divided) into the Bhramarī Cāri.
 
@@ -50,17 +50,17 @@ title = "12 Maṇḍala movements"
 
 51-53. Samotsarita—assuming first of all the Samapāda Sthāna, then stretching the two hands with their palms turned upwards, (next) their intermittant Āveṣṭana and Udveṣṭana movements, [then putting the left hand] on the waist, the right hand moved in the Āvartita manner [next the right hand to be put on the waist] and the left hand moved in the Āvartita manner, moving round alternately with this Cārī, will give rise to the Samotsarita Maṇḍala.
 
-54-55.[^3] Eḍakākrīḍita—the two feet on the ground (to be moved successively) in the Sūcī and the Eḍakākrīḍita Cārīs, (next) the swift moving Bhramarī Cārī by turning the Trika, (then) moving (the feet) round alternately in the Sūcī and the Āviddha Cārīs. This will give rise to the Khaṇḍa-maṇḍala named Eḍakākrīḍita.
+54-55.[^mg3] Eḍakākrīḍita—the two feet on the ground (to be moved successively) in the Sūcī and the Eḍakākrīḍita Cārīs, (next) the swift moving Bhramarī Cārī by turning the Trika, (then) moving (the feet) round alternately in the Sūcī and the Āviddha Cārīs. This will give rise to the Khaṇḍa-maṇḍala named Eḍakākrīḍita.
 
 
-[^3]:  This khaṇḍamaṇḍala seems to be another name for eḍakākrīḍita.
+[^mg3]:  This khaṇḍamaṇḍala seems to be another name for eḍakākrīḍita.
 
-56-58. Aḍḍitā—the right foot [to be moved] in the Udghaṭṭa manner and then (simply) moved round, next [to be moved] in the Syanditā Cārī and the left foot in the Śakaṭāsyā Cārī, next the right foot to be moved backwards in the Apakrāntā (Apasarpī) and the Cāṣagati Cārīs, (then) the left foot in the Aḍḍitā Cārī and the right foot in the Apakrāntā (Apasarpitā) Cārī (next) the left foot in the Bhramarī Cārī and the right foot in the Syanditā (Āsyanditā) Cārīs and to violently strike the ground.[^4]
+56-58. Aḍḍitā—the right foot [to be moved] in the Udghaṭṭa manner and then (simply) moved round, next [to be moved] in the Syanditā Cārī and the left foot in the Śakaṭāsyā Cārī, next the right foot to be moved backwards in the Apakrāntā (Apasarpī) and the Cāṣagati Cārīs, (then) the left foot in the Aḍḍitā Cārī and the right foot in the Apakrāntā (Apasarpitā) Cārī (next) the left foot in the Bhramarī Cārī and the right foot in the Syanditā (Āsyanditā) Cārīs and to violently strike the ground.[^mg4]
 
 59-60. Śakaṭāsya—The right foot (to be moved) in the Janitā Cārī, and next to move in the Talasañcara (Nikuṭṭana) manner, the same foot in the Śakaṭāsyā Cārī and the left foot in the Syanditā Cārī, moving round in this manner alternately with the Śakaṭāsyā Cārī. This Cārī Maṇḍala named the Śakaṭāsya is to be used in fight.
 
 
-[^4]:  āsphoṭana—padatalena bhūmitāḍanam (Ag.).
+[^mg4]:  āsphoṭana—padatalena bhūmitāḍanam (Ag.).
 
 61-62. Adhyardha—the right foot (to be moved successively) in the Janitā and Syanditā Cārīs, then the left foot in the Apakrāntā (Apasarpitā) Cārī and the right foot in the Śakaṭāsyā Cārī. Moving around alternately in these Cārīs, will be the Cārī Maṇḍala named Adhyardha to be used in personal combat.
 
