--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/13.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/13.md
@@ -2,17 +2,17 @@
 title = "13 Different Gaits (gati)"
 
 +++
-1.[^1] So much about the formation of Maṇḍalas by a combination of the System of Cārīs (*cārī-vyāyāma*). I shall hereafter describe the Gaits suitable for (lit. existing in) different characters [in a play].
+1.[^mg1] So much about the formation of Maṇḍalas by a combination of the System of Cārīs (*cārī-vyāyāma*). I shall hereafter describe the Gaits suitable for (lit. existing in) different characters [in a play].
 
 
-[^1]:  On the Gait Ag. says: “The Gait is to be prescribed with a view to the person, Sentiment, situation, place and occasion.”
+[^mg1]:  On the Gait Ag. says: “The Gait is to be prescribed with a view to the person, Sentiment, situation, place and occasion.”
 
 ## *Entrance of dramatis personae*
 
-2-3. After the Overture (Upavahana[^2]) with drums and other musical instruments has been performed by observing Kalās suitable to the Mārga [adopted in it], and the Dhruvās [to be sung] at the entrance of *dramatis personae*, have commenced, and the curtain has been drawn away, the actors who are to develop Sentiments in the various items [of a play] should enter (lit. be made to enter) the stage.
+2-3. After the Overture (Upavahana[^mg2]) with drums and other musical instruments has been performed by observing Kalās suitable to the Mārga [adopted in it], and the Dhruvās [to be sung] at the entrance of *dramatis personae*, have commenced, and the curtain has been drawn away, the actors who are to develop Sentiments in the various items [of a play] should enter (lit. be made to enter) the stage.
 
 
-[^2]:  It seems that upavahana gave rise to upohana (Pkt.) which afterwards was adopted in its place; for upohana see 138ff. It is defined by Ag. as follows: upohyante samāsa-vyāsataḥ padakalātālasamabhihitāḥ svarā yasminn aṅge tat tathoktam (vol. I. p, 186).
+[^mg2]:  It seems that upavahana gave rise to upohana (Pkt.) which afterwards was adopted in its place; for upohana see 138ff. It is defined by Ag. as follows: upohyante samāsa-vyāsataḥ padakalātālasamabhihitāḥ svarā yasminn aṅge tat tathoktam (vol. I. p, 186).
 
 ## *Posture for superior and middling characters on entrance*
 
@@ -46,29 +46,29 @@ title = "13 Different Gaits (gati)"
 
 21\. When [a character] is walking along with his equals, the basis of the tempo [of his Gait] will be [according to his own rank] of four or two Kalās or one Kalā.
 
-22\. But when any one is walking accompanied by persons of the middling and the inferior types [the basis of the tempo of the Gait of the group] will be four and two Kalās or one Kalā[^3].
+22\. But when any one is walking accompanied by persons of the middling and the inferior types [the basis of the tempo of the Gait of the group] will be four and two Kalās or one Kalā[^mg3].
 
 
-[^3]:  Significance of this rule is not clear.
+[^mg3]:  Significance of this rule is not clear.
 
 23\. The wise actors should make the steps four Tālas wide in case of gods, Dānavas, Pannagas (Nāga), Yakṣas, kings, and Rākṣasas.
 
-24\. All other dwellers of the heaven[^4] will have steps of medium [width]. But those among them who are majestic should have Gait similar to that of gods.
+24\. All other dwellers of the heaven[^mg4] will have steps of medium [width]. But those among them who are majestic should have Gait similar to that of gods.
 
 
-[^4]:  By such dwellers devadūtas are meant (Ag.).
+[^mg4]:  By such dwellers devadūtas are meant (Ag.).
 
 ## *Gait of kings*
 
 The sages question:
 
-25-28. “If the kings are human beings why should they have a Gait similar to that of gods?” It is said [in reply], “Why should not the kings have Gait suitable for these (*i.e*. gods)? In drama and dance the characters [are of three kinds, viz.] divine, semi-divine (lit. divine-human) and human. Of these, the nature of gods is divine, that of the kings is semi-divine and that of the others known to people ate called human. For kings have been described in the Vedas and the *adhyātma* (Upaniṣad)[^5] as being made up (lit. born) of parts of [different] gods. Hence there cannot be any fault in kings imitating gods.[^6]”
+25-28. “If the kings are human beings why should they have a Gait similar to that of gods?” It is said [in reply], “Why should not the kings have Gait suitable for these (*i.e*. gods)? In drama and dance the characters [are of three kinds, viz.] divine, semi-divine (lit. divine-human) and human. Of these, the nature of gods is divine, that of the kings is semi-divine and that of the others known to people ate called human. For kings have been described in the Vedas and the *adhyātma* (Upaniṣad)[^mg5] as being made up (lit. born) of parts of [different] gods. Hence there cannot be any fault in kings imitating gods.[^mg6]”
 
 
-[^6]:  vedādhyātmasu = vedeṣu tathā adhyātmaśāstreṣu vedānteṣu (Ag.).
+[^mg6]:  vedādhyātmasu = vedeṣu tathā adhyātmaśāstreṣu vedānteṣu (Ag.).
 
 
-[^5]:  mātaliprabhrtayaḥ (Ag.).
+[^mg5]:  mātaliprabhrtayaḥ (Ag.).
 
 29\. This is the rule of Gait in ordinary walking; but, for Gait in cases of hurry, insanity and anger the rule about its measure will not apply.
 
@@ -92,10 +92,10 @@ The sages question:
 
 ## *Gait in the Erotic Sentiment*
 
-40-44. Gait in open (i.e. very clear) love-making should be graceful. [The lover] is to enter the stage with the female messenger showing the way. He is to act his part.(lit. meaning connected with the play) by means of the Sūcā[^7]. He should use pleasant perfumes and be dressed with lovely garments, ornaments² and garlands of various sweet-smelling flowers. He should walk with graceful steps with a slow tempo in the Atikrāntā Cārī, and his limbs should have the Sauṣṭhava, and he should move with proper tempo and Tāla. His hands should always follow the feet. The former should be raised along with the falling of the latter, and with the raising of the latter the former should fall (lit. *vice versa*)³.
+40-44. Gait in open (i.e. very clear) love-making should be graceful. [The lover] is to enter the stage with the female messenger showing the way. He is to act his part.(lit. meaning connected with the play) by means of the Sūcā[^mg7]. He should use pleasant perfumes and be dressed with lovely garments, ornaments² and garlands of various sweet-smelling flowers. He should walk with graceful steps with a slow tempo in the Atikrāntā Cārī, and his limbs should have the Sauṣṭhava, and he should move with proper tempo and Tāla. His hands should always follow the feet. The former should be raised along with the falling of the latter, and with the raising of the latter the former should fall (lit. *vice versa*)³.
 
 
-[^7]:  See Ag.
+[^mg7]:  See Ag.
 
 45-48. Now listen about the Gait in case of concealed love. After dismissing his servants (lit. men) the lover is to walk [at night] along with the female messenger as his guide. He is to put out the lamp. He is to be dressed in [simple] clothes suited to the time and is to not wear too many ornaments. In making love secretly a person is to walk in company of the female messenger with slow and silent steps. Being apprehesive of sounds [heard at the time] he is to uneasy and to look constantly around and to tremble in his body and to have a faltering Gait.
 
@@ -137,13 +137,13 @@ The sages question:
 
 ## *Gait of ascetics and sectarians*
 
-79-86. Gait of Yatis, Śramaṇas, those practising austerities should be made like that of one observing the vow of Brahmacarya. [In playing his part] a wise [actor] should have immobile eyes looking only four cubits [in front][^8], a ready memory, the entire body in steadiness, and he is to keep the mind at rest, to assume the marks[^9] belonging to his sect and to have modest robes or clothes dyed in dark red, and to stand with the Samapāda feet and to assume the Sthāna of the same name. Then he should make two Catura hands one of which is to be stretched. And assuming a serene appearance in conformity with the performance he should execute the Atikrāntā (Atikrama) Cārī with natural (lit. not drooping) limbs. The best ascetics with a great vow are to have such a Gait, and to others is to be given a Gait contrary to this. As for the rest of the ascetics, according to the vow [enjoined by their own sects] they are to have a Gait confused or stately or sober or mild. And in case of the members of the Pāśupata sect they should walk in the Śakaṭāsyā and Atikrāntā Cārīs with haughty steps.
+79-86. Gait of Yatis, Śramaṇas, those practising austerities should be made like that of one observing the vow of Brahmacarya. [In playing his part] a wise [actor] should have immobile eyes looking only four cubits [in front][^mg8], a ready memory, the entire body in steadiness, and he is to keep the mind at rest, to assume the marks[^mg9] belonging to his sect and to have modest robes or clothes dyed in dark red, and to stand with the Samapāda feet and to assume the Sthāna of the same name. Then he should make two Catura hands one of which is to be stretched. And assuming a serene appearance in conformity with the performance he should execute the Atikrāntā (Atikrama) Cārī with natural (lit. not drooping) limbs. The best ascetics with a great vow are to have such a Gait, and to others is to be given a Gait contrary to this. As for the rest of the ascetics, according to the vow [enjoined by their own sects] they are to have a Gait confused or stately or sober or mild. And in case of the members of the Pāśupata sect they should walk in the Śakaṭāsyā and Atikrāntā Cārīs with haughty steps.
 
 
-[^9]:  liṅgam i.e, japabhasmakaupinādi (Ag.).
+[^mg9]:  liṅgam i.e, japabhasmakaupinādi (Ag.).
 
 
-[^8]:  79-861 See Ag.
+[^mg8]:  79-861 See Ag.
 
 ## *Gait of a person in darkness or of a blind man*
 
@@ -197,13 +197,13 @@ by putting foward Ākuñcita (Kuñcita) feet within one Tāla and holding the Ka
 
 ## *Gait of a Kāñcukīya*
 
-112-113. [Gait] of a Kāñcukīya (armour-bearer)[^10] should be made [suitable] to his particular age and condition. When he is not old[^11] his Gait should be as follows: With the feet raised half a Tāla high and simple steps he should walk carrying his limbs like one who is treading upon (lit. touching) mud.
+112-113. [Gait] of a Kāñcukīya (armour-bearer)[^mg10] should be made [suitable] to his particular age and condition. When he is not old[^mg11] his Gait should be as follows: With the feet raised half a Tāla high and simple steps he should walk carrying his limbs like one who is treading upon (lit. touching) mud.
 
 
-[^11]:  a-vṛddhasya. The adjective of the kāñcukīya renders invalid the late definition according to which he should necessarily be old. Such a definition has been wrongly ascribed to Bharata in Rucipati’s commentary to the Anargharāghava (ed. in Kāvyamālā, p. 109). The kāñcukīya in the plays ascribed to Bhāsa (i.e. Svapna., Pratimā., Abhi. Pañca., Dūtavā, and Bāla.) does not show any trace of old age. The kañcukin in the Śak. deplores that the cane-stick which he had to take up as the symbol of his office, has become in old age the support of his body which he could move with difficulty (V.3.). From this it may be assumed that he was appointed long before old age came upon him.
+[^mg11]:  a-vṛddhasya. The adjective of the kāñcukīya renders invalid the late definition according to which he should necessarily be old. Such a definition has been wrongly ascribed to Bharata in Rucipati’s commentary to the Anargharāghava (ed. in Kāvyamālā, p. 109). The kāñcukīya in the plays ascribed to Bhāsa (i.e. Svapna., Pratimā., Abhi. Pañca., Dūtavā, and Bāla.) does not show any trace of old age. The kañcukin in the Śak. deplores that the cane-stick which he had to take up as the symbol of his office, has become in old age the support of his body which he could move with difficulty (V.3.). From this it may be assumed that he was appointed long before old age came upon him.
 
 
-[^10]:  The word kāñcukīya (kañcukin) should be translated as ‘armour-bearer’ and not as ‘chamberlain’ which term should be used for sannidhātṛ; See Kauṭilya’s Arthaśāstra (2.4.23). BhP. (p. 292) defines the Kañcukīya as follows: Passionless Brahmins who have knowledge and wisdom being in charge of (the king’s) armour and crown, and holding a cane-stick (as symbol of their authority), are called Kañcukīya by the wise.
+[^mg10]:  The word kāñcukīya (kañcukin) should be translated as ‘armour-bearer’ and not as ‘chamberlain’ which term should be used for sannidhātṛ; See Kauṭilya’s Arthaśāstra (2.4.23). BhP. (p. 292) defines the Kañcukīya as follows: Passionless Brahmins who have knowledge and wisdom being in charge of (the king’s) armour and crown, and holding a cane-stick (as symbol of their authority), are called Kañcukīya by the wise.
 
 114\. But in case of his being [quite] old he should walk with the trembling body and raise the feet slowly, and with [every] step he is to take his breath.
 
@@ -243,13 +243,13 @@ After moving in the Baddhā Cārī he is to cross his feet. Then going round in 
 
 141-142. A person covered with tattered clothes or skin, or smeared with ink (or lamb-black), ashes or yellow ochre will be [causing] laughter due to the costumes and make-up. Hence the [Jester] after considering the character [he is to represent] should carefully (lit. essentially) assume [one or more of] these states.
 
-143-146. Gait of the Jester should be distinguished according to his different conditions. [For example], in his natural Gait he is to carry the Kuṭilaka[^12][^13] (*kuṭila*) in his left hand and to show the Catura [gesture] with the right hand. Besides, he is to lower by turns one of his sides, head, hands and feet observing proper tempo and Tāla. Gait other than this which is natural, will be abnormal [in his case]. His Gait on having some food which was difficult to get, will be arrested.
+143-146. Gait of the Jester should be distinguished according to his different conditions. [For example], in his natural Gait he is to carry the Kuṭilaka[^mg12][^mg13] (*kuṭila*) in his left hand and to show the Catura [gesture] with the right hand. Besides, he is to lower by turns one of his sides, head, hands and feet observing proper tempo and Tāla. Gait other than this which is natural, will be abnormal [in his case]. His Gait on having some food which was difficult to get, will be arrested.
 
 
-[^13]:  (1441) For an old kañcūkin see Śak. loc. cit. Mudrā, II, 9, and III, 1.
+[^mg13]:  (1441) For an old kañcūkin see Śak. loc. cit. Mudrā, II, 9, and III, 1.
 
 
-[^12]:  See p. 10 note 2
+[^mg12]:  See p. 10 note 2
 
 ## *Gait of menials*
 
@@ -275,13 +275,13 @@ After moving in the Baddhā Cārī he is to cross his feet. Then going round in 
 
 154-155. [In this Gait] after assuming the Ālīḍha Sthāna (posture) with limbs conforming to it, that is, one hand on the knee and the other on the breast, one is to look all around and put one’s chin on one’s shoulder and to walk with feet raised five Tālas high and placed at the same interval.
 
-156\. This Gait should be applied to [represent] lions[^14] and such other animals[^15] at the time of personal combat as well as on entering the stage.
+156\. This Gait should be applied to [represent] lions[^mg14] and such other animals[^mg15] at the time of personal combat as well as on entering the stage.
 
 
-[^15]:  Reference here is to animals like Sugrīva and Jāmbavat (Ag).
+[^mg15]:  Reference here is to animals like Sugrīva and Jāmbavat (Ag).
 
 
-[^14]:  Lions etc. here indicate actors with the mask of these animals.
+[^mg14]:  Lions etc. here indicate actors with the mask of these animals.
 
 157\. As for the rest of animals the Gait and the Sthāna for them when entering the stage or carrying any one or anything on the back should be made suitable to the occasion.
 
@@ -313,12 +313,12 @@ After moving in the Baddhā Cārī he is to cross his feet. Then going round in 
 
 ## *Gait of young women*
 
-177-179. The steps of women should not be made of six or eight Kalās duration. Such a step will be irksome for them. This will be the Gait of women in their youth. I shall speak [now] about the Gait of women who are aged (*sthavīyasī*).[^16]
+177-179. The steps of women should not be made of six or eight Kalās duration. Such a step will be irksome for them. This will be the Gait of women in their youth. I shall speak [now] about the Gait of women who are aged (*sthavīyasī*).[^mg16]
 
 ## *Gait of aged women*
 
 
-[^16]:  B.G. read sthānīyā yā strīyas tāsām for sthavīyasīnām etāsām. The word sthavīyas may well be a comparative form of sthavira. Cf, davīyas for dūra.
+[^mg16]:  B.G. read sthānīyā yā strīyas tāsām for sthavīyasīnām etāsām. The word sthavīyas may well be a comparative form of sthavira. Cf, davīyas for dūra.
 
 179-181. After assuming the Avahittha Sthāna and putting the left hand on the waist and the right hand with the Arāla gesture upturned, placed between the navel and the breasts, they are to walk gradually with their body neither relaxed nor stiff nor [much] moving about.
 
@@ -400,10 +400,10 @@ After moving in the Baddhā Cārī he is to cross his feet. Then going round in 
 
 ## *Seats for male characters*
 
-208-210. O Brahmins, gods and kings are to be given the Lion-seat (*i.e*. throne), the priests and the ministers the cane-seat[^17], the commander of the army and the crown-prince the Muṇḍā-seat,[^18] the Brahmins the wooden seat and the other princess the carpet-seat. This rule of seats should be observed in the royal court.
+208-210. O Brahmins, gods and kings are to be given the Lion-seat (*i.e*. throne), the priests and the ministers the cane-seat[^mg17], the commander of the army and the crown-prince the Muṇḍā-seat,[^mg18] the Brahmins the wooden seat and the other princess the carpet-seat. This rule of seats should be observed in the royal court.
 
 
-[^18]:  muṇḍāsana is probably nothing other than Bengali ṃoḍā.
+[^mg18]:  muṇḍāsana is probably nothing other than Bengali ṃoḍā.
 
 
 [^17]:  208-210 1 A cane-chair.
