--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/14.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/14.md
@@ -2,10 +2,10 @@
 title = "14 Zones (kakṣyā) and Local Usages (pravṛtti)"
 
 +++
-1.[^1] One should fix the Zones [of the stage] after knowing the division of three [kinds of] playhouse, that have been mentioned before by me.
+1.[^mg1] One should fix the Zones [of the stage] after knowing the division of three [kinds of] playhouse, that have been mentioned before by me.
 
 
-[^1]:  See II. 630.
+[^mg1]:  See II. 630.
 
 ## *Arrangement of drums*
 
@@ -13,10 +13,10 @@ title = "14 Zones (kakṣyā) and Local Usages (pravṛtti)"
 
 ## *The Zonal division*
 
-3\. The Zonal division[^2] is to be indicated by going about on the stage. [When one is in a particular] Zone [of the stage, it] will change [lit. be another] with his walking out of it.
+3\. The Zonal division[^mg2] is to be indicated by going about on the stage. [When one is in a particular] Zone [of the stage, it] will change [lit. be another] with his walking out of it.
 
 
-[^2]:  As modern device of the change of scenes was absent in the ancient Indian theatre, the convention of the Zonal division indicated the locality, in which different characters met.
+[^mg2]:  As modern device of the change of scenes was absent in the ancient Indian theatre, the convention of the Zonal division indicated the locality, in which different characters met.
 
 ## *Utility of the Zonal division*
 
@@ -48,10 +48,10 @@ title = "14 Zones (kakṣyā) and Local Usages (pravṛtti)"
 
 ## *Indicating distance great, small and medium*
 
-17\. The same place if much walked over will be taken as a distant land. And nearby land or lands of medium distance are to be indicated likewise [on the same principle][^3].
+17\. The same place if much walked over will be taken as a distant land. And nearby land or lands of medium distance are to be indicated likewise [on the same principle][^mg3].
 
 
-[^3]:  For an example of this see Uttara. I.
+[^mg3]:  For an example of this see Uttara. I.
 
 ## *Movement of gods and demigods*
 
@@ -83,93 +83,93 @@ title = "14 Zones (kakṣyā) and Local Usages (pravṛtti)"
 
 ## *Four Local Usages*
 
-36\. I shall now resume the description of the Local Usages (*pravṛtti*) which according to experts in drama are four: Āvantī, Dākṣiṇātyā, Pāñcālī (Pāñcāla-madhyamā) and Oḍra-Māgadhī[^4]
+36\. I shall now resume the description of the Local Usages (*pravṛtti*) which according to experts in drama are four: Āvantī, Dākṣiṇātyā, Pāñcālī (Pāñcāla-madhyamā) and Oḍra-Māgadhī[^mg4]
 
 [Now comes the question]: Why is [it called] *pravṛtti* (report) [of the Local Usages]? [In answer to this] it is said that *pravṛtti* is so called because it gives us properly information regarding costumes, languages, and manners in different countries of the world. *Vṛtti* means ‘information’. There are many countries in this world. Hence it is asked, “How a fourfold division of these (*i.e*. the four *pravṛttis*) [can be] justified? For an observance of all these *pravṛttis* has common characteristics.” [In reply] it has been said, “It is true that their observance has common characteristics; but as people have different native countries, costumes, languages and manners, I have prescribed a fourfold classification of the dramatic performance attached to [four] different Styles. [Different] countries are attached to performances which relate to the Styles such as the Verbal (*bhāratī*), the Grand (*sāttvatī*), the Graceful (*kaiśikī*) and the Violent (*ārabhatī*). Because of this the four Local Usages develop, and performances [following them] originate.
 
 
-[^4]:  The passage following this till the beginning of 37 is in prose.
+[^mg4]:  The passage following this till the beginning of 37 is in prose.
 
 ## *Dākṣinātyā Local Usage*
 
 Now [it is said] in this connexion (lit. there) that the Southern [countries] favour various kinds of dance, song and instrumental music, an abundance of the Graceful (*kaiśiki*) Style, and clever and graceful gestures. They are as follows:
 
-37\. Countries adjacent to mountains named the Mahendra, the Malaya, the Sahya, the Mekala[^5] and the Kālapañjara[^6], are known as the Dākṣiṇāpatha (Deccan).
+37\. Countries adjacent to mountains named the Mahendra, the Malaya, the Sahya, the Mekala[^mg5] and the Kālapañjara[^mg6], are known as the Dākṣiṇāpatha (Deccan).
 
 
-[^6]:  Kālapañjara seems to be same as modern Kāliñjar (=Kālapiñjara); piñjara is a variant of pañjara; see Paia-saddhamahaṇṇavo, sub voce.
+[^mg6]:  Kālapañjara seems to be same as modern Kāliñjar (=Kālapiñjara); piñjara is a variant of pañjara; see Paia-saddhamahaṇṇavo, sub voce.
 
 
-[^5]:  For Mekala see the Buddhacarita XI. 31
+[^mg5]:  For Mekala see the Buddhacarita XI. 31
 
-38-39. Kosala, Tosala[^7], Kaliṅga, Mosala[^8] and countries like Dramiḍa, Andhra, Mahā-vaiṇṇā[^9] and Vanavāsika which lie between the Southern Ocean and the Vindhya [mountain] are always to take to the Dākṣiṇātyā Local Usage[^10].
-
-
-[^10]:  Geographical names mentioned in this passage and the passages that follow, are mostly to be met with in the Purāṇas (sometimes with variant readings). For a discussion on the same see D.C. Sircar, ‘Text of the Puranic Lists of Peoples’ (IHQ. Vol. XXI. 1945, PP. 227-314).
+38-39. Kosala, Tosala[^mg7], Kaliṅga, Mosala[^mg8] and countries like Dramiḍa, Andhra, Mahā-vaiṇṇā[^mg9] and Vanavāsika which lie between the Southern Ocean and the Vindhya [mountain] are always to take to the Dākṣiṇātyā Local Usage[^mg10].
 
 
-[^9]:  Mahā-veṇṇā, a Skt. name of the Kṛṣṇa-veṇṇā river. The name indicates the attached river-valley.
+[^mg10]:  Geographical names mentioned in this passage and the passages that follow, are mostly to be met with in the Purāṇas (sometimes with variant readings). For a discussion on the same see D.C. Sircar, ‘Text of the Puranic Lists of Peoples’ (IHQ. Vol. XXI. 1945, PP. 227-314).
 
 
-[^8]:  Older name of Masulipaṭṭanam in Andhra.
+[^mg9]:  Mahā-veṇṇā, a Skt. name of the Kṛṣṇa-veṇṇā river. The name indicates the attached river-valley.
 
 
-[^7]:  Aśoka’s Tosali.
+[^mg8]:  Older name of Masulipaṭṭanam in Andhra.
+
+
+[^mg7]:  Aśoka’s Tosali.
 
 ## *Āvantī Local Usage*
 
-40-41. Avantī, Vidiśā, Saurāṣṭra, Mālava, Sindhu, Sauvīra, Ānarta[^11], Arvudeya[^12] Daśārṇa, Tripura, and Mṛttikāvat[^13] always take to the Āvantī Local Usage.
+40-41. Avantī, Vidiśā, Saurāṣṭra, Mālava, Sindhu, Sauvīra, Ānarta[^mg11], Arvudeya[^mg12] Daśārṇa, Tripura, and Mṛttikāvat[^mg13] always take to the Āvantī Local Usage.
 
 
-[^13]:  Sometimes identified with Mertā in Rājasthān. See JAS. Vol XVII. pp. 180-181.
+[^mg13]:  Sometimes identified with Mertā in Rājasthān. See JAS. Vol XVII. pp. 180-181.
 
 
-[^12]:  Arvuda or modern Ābu in Rajputana is probably meant by this name.
+[^mg12]:  Arvuda or modern Ābu in Rajputana is probably meant by this name.
 
 
-[^11]:  Ānarta was probably N. Kathiawar peninsula.
+[^mg11]:  Ānarta was probably N. Kathiawar peninsula.
 
 42\. This Local Usage depends on the Grand (*sāttvatī*) and the Graceful (*kaiśikī*) Styles. Hence these should be used in plays and should be adopted by the producers [related to the area].
 
 ## *Oḍra-Māgadhī Local Usage: *
 
-43-45. Eastern [countries such as] Aṅga, Vaṅga, [Ut]kaliṅga[^14], Vatsa, Oḍra Magadha, Puṇḍra, Nepāla, Antargiri, Bahirgiri, Pravaṃga[^15], Māhendra, Malada[^16], Mallavartaka,[^17] Brahmottara (Suhmottara)[^18] Bhārgava[^19], Mārgava[^20], Prāgjyotiṣa, Pulinda, Videha, Tāmralipta, and Prāṅga[^21] adopt the Local Usage known as the Oḍra-Māgadhī.
+43-45. Eastern [countries such as] Aṅga, Vaṅga, [Ut]kaliṅga[^mg14], Vatsa, Oḍra Magadha, Puṇḍra, Nepāla, Antargiri, Bahirgiri, Pravaṃga[^mg15], Māhendra, Malada[^mg16], Mallavartaka,[^mg17] Brahmottara (Suhmottara)[^mg18] Bhārgava[^mg19], Mārgava[^mg20], Prāgjyotiṣa, Pulinda, Videha, Tāmralipta, and Prāṅga[^mg21] adopt the Local Usage known as the Oḍra-Māgadhī.
 
 
-[^21]:  The region beyond Aṅga.
+[^mg21]:  The region beyond Aṅga.
 
 
-[^20]:  Mārgava remains unidentified.
+[^mg20]:  Mārgava remains unidentified.
 
 
-[^19]:  Bhārgava remains unidentified.
+[^mg19]:  Bhārgava remains unidentified.
 
 
-[^18]:  For Brahmottara see Viśvabhārati Patrikā, Vol. IV. pp, 250ff.
+[^mg18]:  For Brahmottara see Viśvabhārati Patrikā, Vol. IV. pp, 250ff.
 
 
-[^17]:  Mallavartaka may be modern Mallabhum (Bankura in W. Bengal).
+[^mg17]:  Mallavartaka may be modern Mallabhum (Bankura in W. Bengal).
 
 
-[^16]:  Maladā be may modern Maldah District of W. Bengal.
+[^mg16]:  Maladā be may modern Maldah District of W. Bengal.
 
 
-[^15]:  The region beyond Vaṅga.
+[^mg15]:  The region beyond Vaṅga.
 
 
-[^14]:  Utkaliṅga is the older name of the later Utkala. This occurs in the Brahma P.
+[^mg14]:  Utkaliṅga is the older name of the later Utkala. This occurs in the Brahma P.
 
-46\. In relation also to other countries known in the Purāṇas as belonging to the East, the Oḍra-Māgadhī Local Usage is applied. [This Local Usage depends on the Verbal (*bhāratī*) and the Graceful (*kaiśikī*) Styles.][^22]
+46\. In relation also to other countries known in the Purāṇas as belonging to the East, the Oḍra-Māgadhī Local Usage is applied. [This Local Usage depends on the Verbal (*bhāratī*) and the Graceful (*kaiśikī*) Styles.][^mg22]
 
 ## *Pāñcālī Local Usage*
 
 
-[^22]:  This is from a conjecturel restoration. See Introduction to the text.
+[^mg22]:  This is from a conjecturel restoration. See Introduction to the text.
 
-47-48. Countries such as Pañcāla, Śūrasena, Kāśmīra, Hastināpura, Vālhīka, Śālvakā,[^23] Madra and Uśīnara which are contiguous either to the Himalayas or to the Northern bank of the Ganges, take to the Pāñcālī (Pāñcāla-madhyamā) Local Usage.
+47-48. Countries such as Pañcāla, Śūrasena, Kāśmīra, Hastināpura, Vālhīka, Śālvakā,[^mg23] Madra and Uśīnara which are contiguous either to the Himalayas or to the Northern bank of the Ganges, take to the Pāñcālī (Pāñcāla-madhyamā) Local Usage.
 
 
-[^23]:  47-48 1 The reading Śalyaka of some mss. may be a variant of Śālvaka. As in the Purāṇas an expression like śālvāh śākalavāsinaḥ is met with, Śālvas or Śālvakas might have been the name of a tribe residing in the ancient Śākala region. See Pāṇini. IV. 2. 135, 169, 173 and Mbh. Bhīṣma 10.3.
+[^mg23]:  47-48 1 The reading Śalyaka of some mss. may be a variant of Śālvaka. As in the Purāṇas an expression like śālvāh śākalavāsinaḥ is met with, Śālvas or Śālvakas might have been the name of a tribe residing in the ancient Śākala region. See Pāṇini. IV. 2. 135, 169, 173 and Mbh. Bhīṣma 10.3.
 
 49\. In this Usage the Grand and the Violent Styles are known [to predominate]. The application of these [means] paucity of song, and excessive movement and extraordinary Gaits and steps.
 
@@ -183,10 +183,10 @@ Now [it is said] in this connexion (lit. there) that the Southern [countries] fa
 
 53\. But in view of the special assembly, place, occasion and expression of meaning these rules may be combined (lit. be made into one).
 
-34\. Experts should produce their plays in Styles which have been prescribed before for the Local Usages in different countries[^24].
+34\. Experts should produce their plays in Styles which have been prescribed before for the Local Usages in different countries[^mg24].
 
 
-[^24]:  B.G. add one couplet which in translation is “In musical plays (gānakādi) these rules should be simplified. One should produce them (lit. practice those acts) in disregard of the multiplicity of Local Usages.” But this seems to be spurious.
+[^mg24]:  B.G. add one couplet which in translation is “In musical plays (gānakādi) these rules should be simplified. One should produce them (lit. practice those acts) in disregard of the multiplicity of Local Usages.” But this seems to be spurious.
 
 ## *Two general types of play*
 
@@ -210,10 +210,10 @@ Now [it is said] in this connexion (lit. there) that the Southern [countries] fa
 
 ## *Realistic Practice*
 
-62-63.[^25] If a play depends on natural behaviour [in its characters] and is simple and not artificial, and has in its [plot] profession and activities of the people and has [simple acting and] no playful flourish of limbs and depends on men and women of different types, it is called Realistic (*lokadharmī*)[^26].
+62-63.[^mg25] If a play depends on natural behaviour [in its characters] and is simple and not artificial, and has in its [plot] profession and activities of the people and has [simple acting and] no playful flourish of limbs and depends on men and women of different types, it is called Realistic (*lokadharmī*)[^mg26].
 
 
-[^26]:  See note 1 to IX. 1-3.
+[^mg26]:  See note 1 to IX. 1-3.
 
 
 [^25]:  For a discussion on Dharmis see V. Raghavan, Nāṭya Dharmī and Loka Dharmī (Idealism and Realism of Bharata’s Stage), Journal of Oriental Researches. Madras, Vol. VII. pp. 359-375.
