--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/16.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/16.md
@@ -4,43 +4,43 @@ title = "16 Metrical Patterns (chandas) Rathoddhatā Svagata Śālinī Toṭaka 
 +++
 ## *Tanu-madhyā*
 
-1\. Tanu-madhyā is a variety [of metres] of the Gāyatrī class. [In each of its feet] the first two and the last two syllables are heavy[^1]. Example:
+1\. Tanu-madhyā is a variety [of metres] of the Gāyatrī class. [In each of its feet] the first two and the last two syllables are heavy[^mg1]. Example:
 
 
-[^1]:  The definition of this metre is also its example, though an independent example also follows. Such is the case with many other metres defined in the NŚ.
+[^mg1]:  The definition of this metre is also its example, though an independent example also follows. Such is the case with many other metres defined in the NŚ.
 
 2\. santyakta-vibhūṣā bhraṣṭāñjana-netrā \|  
 hastārpitagaṇḍā kiṃ tvaṃ tanu-madhyā \|\|
 
-*Tr*. O fair lady (lit. slim-waisted one), why[^2] have you cast off your ornaments; why are your eyes without collyrium and why are you resting the cheek on the palm of your hand?
+*Tr*. O fair lady (lit. slim-waisted one), why[^mg2] have you cast off your ornaments; why are your eyes without collyrium and why are you resting the cheek on the palm of your hand?
 
 
-[^2]:  Kiṃ tvaṃ—why (are) you...? Cp. Kiṃ akāraṇam eva darśanaṃ rataye na dīyate, Kumār. IV. 7.
+[^mg2]:  Kiṃ tvaṃ—why (are) you...? Cp. Kiṃ akāraṇam eva darśanaṃ rataye na dīyate, Kumār. IV. 7.
 
 ## *Makaraka-śīrṣā*
 
-3\. [Of the same class is] Makaraka-śīrṣā which has [in each of its feet] the first four syllables light and the last two heavy.[^3] Example:
+3\. [Of the same class is] Makaraka-śīrṣā which has [in each of its feet] the first four syllables light and the last two heavy.[^mg3] Example:
 
 
-[^3]:  This is called Śaśivadanā by Pr. P., Vr. R. and Śṛ. B.
+[^mg3]:  This is called Śaśivadanā by Pr. P., Vr. R. and Śṛ. B.
 
 4\. svayam upayāntaṃ bhajasi na kāntam \|  
 bhayakari kiṃ tvaṃ makaraka-śīrṣā \|\|
 
-*Tr*. You are not greeting the beloved one who has come for you of his own accord. O terrible one, why[^4] are you so dull-headed.[^5]
+*Tr*. You are not greeting the beloved one who has come for you of his own accord. O terrible one, why[^mg4] are you so dull-headed.[^mg5]
 
 
 
-[^5]:  Makarakaśīrṣā—having a head (i.e. brain) like that of a makara. The allusion is perhaps to the foolish makara in the Vānara-makara-kathā in the Pāñcatantra, IV., which really believed that the monkey had left its heart behind in the tree on the river-bank. Hence I translate the word as “dullheaded one.”
+[^mg5]:  Makarakaśīrṣā—having a head (i.e. brain) like that of a makara. The allusion is perhaps to the foolish makara in the Vānara-makara-kathā in the Pāñcatantra, IV., which really believed that the monkey had left its heart behind in the tree on the river-bank. Hence I translate the word as “dullheaded one.”
 
-[^4]:  See above 1 note 1.
+[^mg4]:  See above 1 note 1.
 
 ## *Mālinī*
 
-5\. [The metre with] the feet of six syllables of which the second one is light [and the rest heavy] is called Mālinī[^6]. Example:
+5\. [The metre with] the feet of six syllables of which the second one is light [and the rest heavy] is called Mālinī[^mg6]. Example:
 
 
-[^6]:  This is quite different from the metre Mālinī defined by Piṅgala and his followers. The NS. calls this second Mālinī (with 15 syllables in each pāda) Nāndīmukhī. See below 73-74.
+[^mg6]:  This is quite different from the metre Mālinī defined by Piṅgala and his followers. The NS. calls this second Mālinī (with 15 syllables in each pāda) Nāndīmukhī. See below 73-74.
 
 6\. snāna-gandha-sragbhir vastra-bhūṣāyogaiḥ \|  
 vyaktam evaiṣāṃ tvaṃ mālinī prakhyātā \|\|
@@ -76,25 +76,25 @@ eṣā bhramati mattā kānte bhramara-mālā \|\|
 
 ## *Siṃha-līla*
 
-13\. [The metre with] the feet of eight syllables of which the first, the third, the fifth, the seventh, the last and [the eigth] are heavy [and the rest light] is called Siṃha-līla.[^7] Ex.
+13\. [The metre with] the feet of eight syllables of which the first, the third, the fifth, the seventh, the last and [the eigth] are heavy [and the rest light] is called Siṃha-līla.[^mg7] Ex.
 
 
-[^7]:  C. gives the name as Siṃhalekha.
+[^mg7]:  C. gives the name as Siṃhalekha.
 
 14\. yat tvayā hy-aneka-bhāvaiś ceṣṭitaṃ rahaḥ sugātri \|  
 tan-mano mama praviṣtaṃ vṛttam atra siṃha-līlam \|\|
 
-Tr. That you have planned the love’s embrace in various ways, O fair one, has entered into my mind as a lion’s sport.[^8]
+Tr. That you have planned the love’s embrace in various ways, O fair one, has entered into my mind as a lion’s sport.[^mg8]
 
 ## *Matta-ceṣṭita*
 
 
-[^8]:  The translation follows Ag.
+[^mg8]:  The translation follows Ag.
 
-13\. [The metre with] the feet of eight syllables of which the second, the fourth, the sixth and the eighth are heavy [and the rest light] is called Matta-ceṣṭita.[^9] Example:
+13\. [The metre with] the feet of eight syllables of which the second, the fourth, the sixth and the eighth are heavy [and the rest light] is called Matta-ceṣṭita.[^mg9] Example:
 
 
-[^9]:  This metre is named as Pramāṇikā in Pr. P.
+[^mg9]:  This metre is named as Pramāṇikā in Pr. P.
 
 16\. sadā vighūrṇitekṣaṇaṃ vilambitākulālakam \|  
 asaṃsthitaiḥ padaiḥ priyā karoti matta-ceṣṭiram \|\|
@@ -103,10 +103,10 @@ asaṃsthitaiḥ padaiḥ priyā karoti matta-ceṣṭiram \|\|
 
 ## *Vīdyul-lekhā*
 
-17\. [The metre with] the feet of eight syllables of which all are heavy, is called Vidyul-lekhā.[^10] Example:
+17\. [The metre with] the feet of eight syllables of which all are heavy, is called Vidyul-lekhā.[^mg10] Example:
 
 
-[^10]:  B. gives the name as Vidyun-mālā. This is the name in Piṅgala and Śr. B.
+[^mg10]:  B. gives the name as Vidyun-mālā. This is the name in Piṅgala and Śr. B.
 
 sāmbho-bhārair ānardadbhiḥ śyāmāmbhodair vyāpte vyomnī \|  
 ādityāṃśu-spardhiny-cṣā dikṣu bhrāntā vidyul-lekhā \|\|
@@ -115,25 +115,25 @@ sāmbho-bhārair ānardadbhiḥ śyāmāmbhodair vyāpte vyomnī \|
 
 ## *Citta-vilāsita*
 
-19\. [The metre with] the feet of eight syllables of which the fifth, the seventh and the last are heavy [and the rest light] is called Citta-vilāsita.[^11] Example:
+19\. [The metre with] the feet of eight syllables of which the fifth, the seventh and the last are heavy [and the rest light] is called Citta-vilāsita.[^mg11] Example:
 
 
-[^11]:  C. omits this metre.
+[^mg11]:  C. omits this metre.
 
 20\. smita-vaśa-viprakāśair daśana-padair amībhiḥ \|  
 varatanu pūrṇa-candraṃ tava mukham āvṛṇoti \|\|
 
-*Tr*. O fair lady (lit. fair-limbed one),[^12] your face with the teeth revealed on account of the smile, outshines (lit. covers) the full moon.
+*Tr*. O fair lady (lit. fair-limbed one),[^mg12] your face with the teeth revealed on account of the smile, outshines (lit. covers) the full moon.
 
 
-[^12]:  This mode of addressing a beloved woman is at least as old as the time of Patañjali who quotes the fragment of a poem as follows: varatanu saṃpravadanti kukkuṭāḥ (Ref. Apte’s Guide to Skt. § 319).
+[^mg12]:  This mode of addressing a beloved woman is at least as old as the time of Patañjali who quotes the fragment of a poem as follows: varatanu saṃpravadanti kukkuṭāḥ (Ref. Apte’s Guide to Skt. § 319).
 
 ## *Madhukarī*
 
-21\. [The metre which has] the feet of nine syllables of which the last three are heavy [and the rest light] is called Madhukarī.[^13] Example:
+21\. [The metre which has] the feet of nine syllables of which the last three are heavy [and the rest light] is called Madhukarī.[^mg13] Example:
 
 
-[^13]:  This metre is called Bhujagaśiśubhṛtā (°yutā, °vṛtā) by; Piṅgala and his followers.
+[^mg13]:  This metre is called Bhujagaśiśubhṛtā (°yutā, °vṛtā) by; Piṅgala and his followers.
 
 22\. kusumitam abhipaśyantī vividha-tarugaṇaiś-channam \|  
 vanam anila-gandhāḍhyaṃ bhramati madhukarī hṛṣṭā \|\|
@@ -142,53 +142,53 @@ vanam anila-gandhāḍhyaṃ bhramati madhukarī hṛṣṭā \|\|
 
 ## *Kuvalaya-mālā*
 
-23\. [The metre which has] the feet of ten syllables of which the first and the last three are heavy [and the rest light] is called Kuvalaya-mālā.[^14] Example:
+23\. [The metre which has] the feet of ten syllables of which the first and the last three are heavy [and the rest light] is called Kuvalaya-mālā.[^mg14] Example:
 
 
-[^14]:  This is called Paṇava by Piṅgala and his followers.
+[^mg14]:  This is called Paṇava by Piṅgala and his followers.
 
 24\. asmiṃs te bhramara-nibhe kānte nānā-ratna-racita-bhūṣāḍhye \|  
-śobham āvahati śubhā mūrdhni protphullā kuvalaya[^15]-māleyam \|\|
+śobham āvahati śubhā mūrdhni protphullā kuvalaya[^mg15]-māleyam \|\|
 
 
-[^15]:  Kuvalaya is a blue aquatic flower of the lotus class.
+[^mg15]:  Kuvalaya is a blue aquatic flower of the lotus class.
 
 *Tr*. O dear one, this shining garland of full-blown Kuvalaya flowers fastened on the lovely bee-like hairs of your head, richly decorated with various jewels, brings forth a special glamour.
 
 ## *Mayūra-sāriṇī*
 
-25\. [The metre which has] the feet of ten syllables of which the second, the fourth, the sixth and the eighth are light [and the rest heavy] is called Mayūra-sāriṇī.[^16] Example:
+25\. [The metre which has] the feet of ten syllables of which the second, the fourth, the sixth and the eighth are light [and the rest heavy] is called Mayūra-sāriṇī.[^mg16] Example:
 
 
-[^16]:  Piṅgala gives the name as Mayūrasā° and so does Vr. R.
+[^mg16]:  Piṅgala gives the name as Mayūrasā° and so does Vr. R.
 
 26\. naiva te’sti saṃgamo mānuṣair nāsti kāmabhoga-cihṇam anyat \|
 
 garbhiṇīva dṛśyase hy-anārye kiṃ mayūra-sāriṇī tvam evam \|\|
 
-*Tr*. O ignoble one, you have no union with men, neither have you any sign of love’s enjoyment. Still you look like one who is *enceinte*. You indeed behave like a pea-hen.[^17]
+*Tr*. O ignoble one, you have no union with men, neither have you any sign of love’s enjoyment. Still you look like one who is *enceinte*. You indeed behave like a pea-hen.[^mg17]
 
 ## *Dodhaka*
 
 
-[^17]:  This relates the belief that the pea-fowls’ sexual union takes place in complete seclusion.
+[^mg17]:  This relates the belief that the pea-fowls’ sexual union takes place in complete seclusion.
 
 27\. [The metre with] the feet of eleven syllables of which the first, the fourth, the seventh the tenth and the last are heavy [and the rest light] is called Dodhaka. Example:
 
 28\. praskhalatāgrapada-pravicāraṃ matta-vighūrṇita-gātra-vilāsam \|  
 paśya vilāsini kuñjaram etaṃ dodhaka-vṛttam ayaṃ prakaroti \|\|
 
-*Tr*. O merry lady, look at this elephant which with its faltering steps of the front legs, and with the body playfully moved about [as if in] intoxication, is imitating the manner of a *dodhaka*.[^18]
+*Tr*. O merry lady, look at this elephant which with its faltering steps of the front legs, and with the body playfully moved about [as if in] intoxication, is imitating the manner of a *dodhaka*.[^mg18]
 
 ## *Moṭaka*
 
 
-[^18]:  We are not sure of the meaning of the word dodhaka. Ag. writes dodhakena gīyamānaṃ vṛttam dodhaka-vṛttam.
+[^mg18]:  We are not sure of the meaning of the word dodhaka. Ag. writes dodhakena gīyamānaṃ vṛttam dodhaka-vṛttam.
 
-29\. [The metre with] the feet of eleven syllables of which the first two, fifth, the eighth, and the last are heavy [and the rest light] is called Moṭaka[^19]. Example:
+29\. [The metre with] the feet of eleven syllables of which the first two, fifth, the eighth, and the last are heavy [and the rest light] is called Moṭaka[^mg19]. Example:
 
 
-[^19]:  This is named as Moṭanaka by Gaṅgādāsa in Ch. M.
+[^mg19]:  This is named as Moṭanaka by Gaṅgādāsa in Ch. M.
 
 30\. eṣo’mbuda-nisvana-tulya-ravaḥ kṣībaḥ skhalamāna-vilamba-gatiḥ \|  
 śrutvā ghana-garjitam adri-taṭe vṛkṣān prati moṭayati dviradaḥ \|\|
@@ -211,24 +211,24 @@ sarvāsv-avasthāsu ca kāma-tantre yogyāsi kiṃ vā bahunendravajrā \|\|
 34\. priye śriyā varṇa-viśeṣaṇena smitena kāntyā sukumāra-bhāvāt \|  
 amī guṇā rūpa-guṇānurūpā bhavanti te kiṃ tvam upendra-vajrā \|\|
 
-*Tr*. O beloved one, due to your beauty, the special colours [of your dress], smile, grace and delicate bearing, these qualities of yours have matched the qualities of the [beautiful] form. Are you the thunder-bolt of Upendra (Viṣṇu)?[^20]
+*Tr*. O beloved one, due to your beauty, the special colours [of your dress], smile, grace and delicate bearing, these qualities of yours have matched the qualities of the [beautiful] form. Are you the thunder-bolt of Upendra (Viṣṇu)?[^mg20]
 
 # *Rathoddhatā*
 
 
-[^20]:  Cf. Upendra-vajraṃ ta indra-dhanuṣā apamitam etc. (Ag.).
+[^mg20]:  Cf. Upendra-vajraṃ ta indra-dhanuṣā apamitam etc. (Ag.).
 
 33\. [The metre with] the feet of eleven syllables of which the first, the third, the seventh, the ninth and the last are heavy [and the rest light] is called Rathoddhatā. Example:
 
 36\. kiṃ tvayā subhaṭa [dhūrya] varjitaṃ nātmano na suhṛdāṃ priyaṃ kṛtam \|  
 yat palāyana-parāyaṇasya te yāti dhūlir adhunā rathoddhatā \|\|
 
-*Tr*. O good soldier, having left the van you have done neither any good to yourself nor to your friends, for while running away [from the battle field] the dust [on your road] rises now [as if] scattered by chariots.[^21]
+*Tr*. O good soldier, having left the van you have done neither any good to yourself nor to your friends, for while running away [from the battle field] the dust [on your road] rises now [as if] scattered by chariots.[^mg21]
 
 # *Svagata*
 
 
-[^21]:  B. gives an additional example of this metre (B. XV. 48).
+[^mg21]:  B. gives an additional example of this metre (B. XV. 48).
 
 37\. [The metre with] the feet of eleven syllables of which the first, the third, the seventh and the tenth and the last are heavy [and the rest light] is called Svāgatā. Example:
 
@@ -257,10 +257,10 @@ Tr. Why is this crooked and Insufferable conduct full of villainy, and unambiguo
 
 # *Kumuda-nibhā*
 
-43\. [The metre with] the feet of twelve syllables of which the first four, the eighth and the tenth are light [and the rest heavy] is called Kumuda-nibhā[^22]. Example:
+43\. [The metre with] the feet of twelve syllables of which the first four, the eighth and the tenth are light [and the rest heavy] is called Kumuda-nibhā[^mg22]. Example:
 
 
-[^22]:  B. gives another metre of this name with a different scheme and an example of this (B.XV. 56-58).
+[^mg22]:  B. gives another metre of this name with a different scheme and an example of this (B.XV. 56-58).
 
 44\. kumuda-nibhā tvaṃ kāma-bāṇa-viddhā kim asi natabhrūḥ śīta-vāta-dagdhā \|  
 mṛdu-nalinīvāpāṇḍu-vaktra-śobhā katham api jātā agrataḥ sakhīnām \|\|
@@ -296,25 +296,25 @@ tathā ca paśyāmy-aham adya sā dhruvaṃ kṣaṇena vaṃśastha-gatiṃ kar
 
 ## *Hariṇa-plutā*
 
-51\. [The metre with] feet of twelve syllables of which the fourth, the seventh, the tenth and the last are heavy [and the rest light] is called Hariṇa-plutā[^23]. Example:
+51\. [The metre with] feet of twelve syllables of which the fourth, the seventh, the tenth and the last are heavy [and the rest light] is called Hariṇa-plutā[^mg23]. Example:
 
 
-[^23]:  This is called Druta-vilambita by Piṅgala and his followers.
+[^mg23]:  This is called Druta-vilambita by Piṅgala and his followers.
 
 52\. paruṣa-vākya-kaśābhihatā tvayā bhaya-vilokana-pārśva-nirīkṣaṇā \|  
 varatanuḥ pratata-pluta-sarpaṇair anukaroti gatair hariṇa-plutam \|\|
 
-*Tr*. Smitten by the whip of your harsh words, the fair lady (lit. fair-limbed one)[^24], looking with terrified eyes to her sides and running away continuously with quick steps, is imitating by her movements a deer’s gallop.
+*Tr*. Smitten by the whip of your harsh words, the fair lady (lit. fair-limbed one)[^mg24], looking with terrified eyes to her sides and running away continuously with quick steps, is imitating by her movements a deer’s gallop.
 
 
-[^24]:  See above 20 note 1.
+[^mg24]:  See above 20 note 1.
 
 ## *Kāmadattā*
 
-53\. [A metre with] the feet of twelve syllables of which the seventh, the ninth, the eleventh and the last are heavy [and the rest light] is called Kāmadattā[^25]. Example:
+53\. [A metre with] the feet of twelve syllables of which the seventh, the ninth, the eleventh and the last are heavy [and the rest light] is called Kāmadattā[^mg25]. Example:
 
 
-[^25]:  C. calls this Kāma-mattā,
+[^mg25]:  C. calls this Kāma-mattā,
 
 54\. karaja-pada-vibhūṣita yathā tvaṃ sudati daśana-vikṣatādharā ca \|  
 gatir api caraṇāvalagna-mandā tvam asi mṛga-samākṣi kāmadattā \|\|
