--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/17.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/17.md
@@ -4,20 +4,20 @@ title = "17 Diction of a Play (lakṣaṇa)"
 +++
 ## *Excellent points of a dramatic composition (lakṣaṇa*)
 
-1-5. The thirty-six excellent points (*laksaṇa*)[^1] of [a good] dramatic composition (*kāvya*[^2]) are as follows: Ornateness (*bhūṣaṇa*), Compactness (*akṣara-saṃghāta*), Brilliance (*śobhā*), Parallelism (*udāharaṇa*), Causation (*hetu*), Hesitation (*saṃśaya*) Favourable Precedent (*dṛṣṭānta*), Discovery (*prāpti*), Fancy (*abhiprāya*), Unfavourable Precedent (*nidarśana*), Additional Explanation (*nirukta*), Persuasion, (*siddhi*), Distinction (*viśeṣaṇa*) Accusation of Virtue (*guṇātipāta*), Excellence (*guṇātiśaya*), Inference from Similitude (*tulya-tarka*), Multiplex Predication (*padoccaya*), Apt Description (*diṣṭa*), Pointed Utterance (*upadiṣṭa*), Deliberation (*vicāra*), Inversion (*viparyaya*), Slip of Tongue (*bhraṃśa*), Mediation (*anunaya*), Series of Offers (*mālā*), Clever Manner (*dākṣiṇya*), Censure (*garhaṇa*), Presumption (*arthāpatti*), Celebrity (*prasiddhi*), Interrogation (*pṛcchā*), Identity (*sārūpya*), Indirect Expression of one’s Desire (*manoratha*), Wit (*leśa*), Concealment (*saṃkṣobha*), Enumeration of Merits (*guṇa-kīrtana*), Semi-uttered Expression (*anukta-siddhi*) and Compliment (*priyavacana* = *priyokti*).
+1-5. The thirty-six excellent points (*laksaṇa*)[^mg1] of [a good] dramatic composition (*kāvya*[^mg2]) are as follows: Ornateness (*bhūṣaṇa*), Compactness (*akṣara-saṃghāta*), Brilliance (*śobhā*), Parallelism (*udāharaṇa*), Causation (*hetu*), Hesitation (*saṃśaya*) Favourable Precedent (*dṛṣṭānta*), Discovery (*prāpti*), Fancy (*abhiprāya*), Unfavourable Precedent (*nidarśana*), Additional Explanation (*nirukta*), Persuasion, (*siddhi*), Distinction (*viśeṣaṇa*) Accusation of Virtue (*guṇātipāta*), Excellence (*guṇātiśaya*), Inference from Similitude (*tulya-tarka*), Multiplex Predication (*padoccaya*), Apt Description (*diṣṭa*), Pointed Utterance (*upadiṣṭa*), Deliberation (*vicāra*), Inversion (*viparyaya*), Slip of Tongue (*bhraṃśa*), Mediation (*anunaya*), Series of Offers (*mālā*), Clever Manner (*dākṣiṇya*), Censure (*garhaṇa*), Presumption (*arthāpatti*), Celebrity (*prasiddhi*), Interrogation (*pṛcchā*), Identity (*sārūpya*), Indirect Expression of one’s Desire (*manoratha*), Wit (*leśa*), Concealment (*saṃkṣobha*), Enumeration of Merits (*guṇa-kīrtana*), Semi-uttered Expression (*anukta-siddhi*) and Compliment (*priyavacana* = *priyokti*).
 
 
-[^2]:  Kāvya in this connexion means the dṛśya-kāvya or dramatic composition.
+[^mg2]:  Kāvya in this connexion means the dṛśya-kāvya or dramatic composition.
 
 
-[^1]:  About the significance of the term lakṣaṇa, the commentators of the NŚ, are not at all unanimous. Ag. mentions no less than ten different views on the subject. Evidently some of these are far-fetched and off the mark. It seems that lakṣaṇa in this connexion is comparable to the same word occurring in the compound word mahāpuruṣa-lakṣaṇa (characteristic marks of a superman). According to one view this lakṣaṇa differs from the alaṃkāra (ornament) and the guṇa (qualities) of a person as figures of speech (alaṃkāra) and excellences (guṇa) of a composition differ from its characteristic marks (lakṣaṇa). The composition in this connexion is evidently a dramatic one though some of the commentators think otherwise. For a discussion on the position of lakṣaṇas in the history of the Alaṃkāra literature see S. K. De, Skt. Poetics, II. pp. 4-5; see also Ramakrishna Kavi, (B.II.pp. 348-349) and V. Raghavan’s paper on Lakṣaṇas in the Journal of Oriental Research, Vol. VI. pp. 70, 71, 81, 82. Mss. of the NŚ. fall into two distinct recensions as regards the text treating the thirty-six lakṣaṇas. According R. Kavi (loc. cit.) one recension followed by older commentators, and late writers like Viśvanātha, and Śiṅgabhūpāla, uses ślokas for defining lakṣaṇas. We have adopted this. The second recension (our 42ka-42ṣa) which seems to be later, has been followed by commentators like Kīrtidhara, Abhinavagupta and late writers like Dhanañjaya and others. This greatly varies from the first with which it has not more than seventeen names (of lakṣaṇas) in common, and among these, definitions of seven only are similar in both the recensions. (XVII, 6-8, 11, 17, 34, 37.),
+[^mg1]:  About the significance of the term lakṣaṇa, the commentators of the NŚ, are not at all unanimous. Ag. mentions no less than ten different views on the subject. Evidently some of these are far-fetched and off the mark. It seems that lakṣaṇa in this connexion is comparable to the same word occurring in the compound word mahāpuruṣa-lakṣaṇa (characteristic marks of a superman). According to one view this lakṣaṇa differs from the alaṃkāra (ornament) and the guṇa (qualities) of a person as figures of speech (alaṃkāra) and excellences (guṇa) of a composition differ from its characteristic marks (lakṣaṇa). The composition in this connexion is evidently a dramatic one though some of the commentators think otherwise. For a discussion on the position of lakṣaṇas in the history of the Alaṃkāra literature see S. K. De, Skt. Poetics, II. pp. 4-5; see also Ramakrishna Kavi, (B.II.pp. 348-349) and V. Raghavan’s paper on Lakṣaṇas in the Journal of Oriental Research, Vol. VI. pp. 70, 71, 81, 82. Mss. of the NŚ. fall into two distinct recensions as regards the text treating the thirty-six lakṣaṇas. According R. Kavi (loc. cit.) one recension followed by older commentators, and late writers like Viśvanātha, and Śiṅgabhūpāla, uses ślokas for defining lakṣaṇas. We have adopted this. The second recension (our 42ka-42ṣa) which seems to be later, has been followed by commentators like Kīrtidhara, Abhinavagupta and late writers like Dhanañjaya and others. This greatly varies from the first with which it has not more than seventeen names (of lakṣaṇas) in common, and among these, definitions of seven only are similar in both the recensions. (XVII, 6-8, 11, 17, 34, 37.),
 
 ### *Ornateness*
 
-6.[^3]To provide a composition with many figures of speech (*alaṃkāra*), and Guṇas placed like ornaments, is called Ornateness (*bhūṣaṇa*, lit. ornament).
+6.[^mg3]To provide a composition with many figures of speech (*alaṃkāra*), and Guṇas placed like ornaments, is called Ornateness (*bhūṣaṇa*, lit. ornament).
 
 
-[^3]:  A close study of Ag’s. commentary on passages dealing with lakṣaṇas is liable to give one an impression that the exact meaning of some of the terms at least relating to this subject, has been to some extent lost, and various explanations have been partly based on guess. But in the absence of anything better we are to depend on them though very cautiously. Definitions of various lakṣaṇas are mostly not at all clear without examples which have been very liberally given by Ag. To avoid prolixity we refrain from quoting them here. Interested persons may see them in the Baroda ed. of the NŚ. (Vol. II. pp. 294ff.). As any old commentary to these (NŚ.) passages dealing with lakṣaṇas, has not come down to us, we used in this connexion the one prepared by M. Ramakrishna Kavi. See B. II. pp. 348ff. (Referred to as Kavi).
+[^mg3]:  A close study of Ag’s. commentary on passages dealing with lakṣaṇas is liable to give one an impression that the exact meaning of some of the terms at least relating to this subject, has been to some extent lost, and various explanations have been partly based on guess. But in the absence of anything better we are to depend on them though very cautiously. Definitions of various lakṣaṇas are mostly not at all clear without examples which have been very liberally given by Ag. To avoid prolixity we refrain from quoting them here. Interested persons may see them in the Baroda ed. of the NŚ. (Vol. II. pp. 294ff.). As any old commentary to these (NŚ.) passages dealing with lakṣaṇas, has not come down to us, we used in this connexion the one prepared by M. Ramakrishna Kavi. See B. II. pp. 348ff. (Referred to as Kavi).
 
 ### *Compactness*
 
@@ -25,119 +25,119 @@ title = "17 Diction of a Play (lakṣaṇa)"
 
 ### *Brilliance*
 
-8.[^4] Where for the purpose of giving distinction to a case of *double entendre (śleṣa*), a less-known meaning is called forth along with the well-known meanings, it is called Brilliance (*śobhā*, lit. beauty).
+8.[^mg4] Where for the purpose of giving distinction to a case of *double entendre (śleṣa*), a less-known meaning is called forth along with the well-known meanings, it is called Brilliance (*śobhā*, lit. beauty).
 
 
-[^4]:  Ag. reads this with a slight difference, cf. SD. 437.
+[^mg4]:  Ag. reads this with a slight difference, cf. SD. 437.
 
 ### *Parallelism*
 
-9\. When by a sentence expressing a similar situation a suggestion is made by clever people to accomplish some objects, it is called Prarallelism (*udāharaṇa*, lit. example).[^5]
+9\. When by a sentence expressing a similar situation a suggestion is made by clever people to accomplish some objects, it is called Prarallelism (*udāharaṇa*, lit. example).[^mg5]
 
 ### *Causation*
 
 
-[^5]:  Cf. SD. 438. Ag’s text in trans. is as follows: When from the occurrence (lit, sight) of a single word good many unmentioned ones can be inferred (lit. accomplished) it is called Sample (udāharaṇa), B. XVI. 11.
+[^mg5]:  Cf. SD. 438. Ag’s text in trans. is as follows: When from the occurrence (lit, sight) of a single word good many unmentioned ones can be inferred (lit. accomplished) it is called Sample (udāharaṇa), B. XVI. 11.
 
-10\. When a brief and pleasing sentence by the force of its [tactful] use achieves the desired object, it is called Causation (*hetu*)[^6].
+10\. When a brief and pleasing sentence by the force of its [tactful] use achieves the desired object, it is called Causation (*hetu*)[^mg6].
 
 
-[^6]:  Cf. SD. 439. Ag. reads this definition as follows: “vahṛnāṃ bhāṣamānānāṃ tvekasyārthavinirṇayam | siddhopamānavacanaṃ heturityabhisaṃjñitam” (B.XVI. 14). Its meaning is not clear, Ag’s explanation does not seem to be convincing.
+[^mg6]:  Cf. SD. 439. Ag. reads this definition as follows: “vahṛnāṃ bhāṣamānānāṃ tvekasyārthavinirṇayam | siddhopamānavacanaṃ heturityabhisaṃjñitam” (B.XVI. 14). Its meaning is not clear, Ag’s explanation does not seem to be convincing.
 
 ### *Hesitation*
 
-11\. When due to many considerations a sentence is brought to an end without fully communicating the essential theme [in view], it is called Hesitation (*saṃśaya*, lit. doubt).[^7]
+11\. When due to many considerations a sentence is brought to an end without fully communicating the essential theme [in view], it is called Hesitation (*saṃśaya*, lit. doubt).[^mg7]
 
 ### *Favourable Precedent*
 
 
-[^7]:  Cf. SD. 440.
+[^mg7]:  Cf. SD. 440.
 
-12\. That which supporting the case in hand[^8] is an expression of its reason and is pleasing to all people, is a Precedent Favourable to the speaker (*dṛṣṭānta*, lit. example),
+12\. That which supporting the case in hand[^mg8] is an expression of its reason and is pleasing to all people, is a Precedent Favourable to the speaker (*dṛṣṭānta*, lit. example),
 
 
-[^8]:  Cf. SD. 341. Ag’s text (B. XVI. 25) in trans. is as follows: That a learned person discovers similarity [of anything] with something perceived by him earlier, is called Illustration (dṛṣṭānta). Cf. the figure of speech of this name in SD. 697.
+[^mg8]:  Cf. SD. 341. Ag’s text (B. XVI. 25) in trans. is as follows: That a learned person discovers similarity [of anything] with something perceived by him earlier, is called Illustration (dṛṣṭānta). Cf. the figure of speech of this name in SD. 697.
 
 ### *Discovery*
 
-13\. When on seeing some indications, the existence of something is assumed, it becomes [an instance of] Discovery (*prāpti*, lit. attainment)[^9] which is included among the marks of a [good] drama.
+13\. When on seeing some indications, the existence of something is assumed, it becomes [an instance of] Discovery (*prāpti*, lit. attainment)[^mg9] which is included among the marks of a [good] drama.
 
 
-[^9]:  Cf. SD. 446, Ag. similar (B.XVI.32).
+[^mg9]:  Cf. SD. 446, Ag. similar (B.XVI.32).
 
 ### *Fancy*
 
-14\. When an idea interesting to people [but] hitherto non-existent, is conceived on the basis of similarity [of two objects], it is [an instance of] Fancy (*abhiprāya*, lit. belief)[^10]
+14\. When an idea interesting to people [but] hitherto non-existent, is conceived on the basis of similarity [of two objects], it is [an instance of] Fancy (*abhiprāya*, lit. belief)[^mg10]
 
 ### *Unfavourable Precedent*
 
 
-[^10]:  SD, 445, Ag, reads this as a variant of yukti (B. XVI. 36) which in translation is as follows: The meaning which is made up only of many mutually compatible objects combining with one another, is called Combination (yukti). Cf. SD. 501.
+[^mg10]:  SD, 445, Ag, reads this as a variant of yukti (B. XVI. 36) which in translation is as follows: The meaning which is made up only of many mutually compatible objects combining with one another, is called Combination (yukti). Cf. SD. 501.
 
-15\. When well-known instances are mentioned for rejecting the contrary view, it is [an instance of] Unfavourable Precedent (*nidarśana*, lit. example)[^11]
+15\. When well-known instances are mentioned for rejecting the contrary view, it is [an instance of] Unfavourable Precedent (*nidarśana*, lit. example)[^mg11]
 
 ### *Convincing Explanation*
 
 
-[^11]:  See SD, 444. Ag. reads this as a variant āśīḥ (B. XVI. 28). The meaning of this def. is not clear. Ag. offers no explanation of this, but gives an example which it is very difficult to fit in with the definition. Cf. SD. 471.
+[^mg11]:  See SD, 444. Ag. reads this as a variant āśīḥ (B. XVI. 28). The meaning of this def. is not clear. Ag. offers no explanation of this, but gives an example which it is very difficult to fit in with the definition. Cf. SD. 471.
 
-16\. Words that ate spoken in support some unobjectionable statement made before, constitute Additional Explanation (*nirukta*, lit. etymology)[^12]
+16\. Words that ate spoken in support some unobjectionable statement made before, constitute Additional Explanation (*nirukta*, lit. etymology)[^mg12]
 
 ### *Persuasion*
 
 
-[^12]:  Cf. SD. 453. Ag.’s text (B. XVI. 12) in trans. is as follows: Explanation (nirukta) is two kinds: factual and non-factual, [Of these] the factual [explanation] is that which is well-known (lit, accomplished before), and the non-factual is that which has not been so (lit, not accomplished).
+[^mg12]:  Cf. SD. 453. Ag.’s text (B. XVI. 12) in trans. is as follows: Explanation (nirukta) is two kinds: factual and non-factual, [Of these] the factual [explanation] is that which is well-known (lit, accomplished before), and the non-factual is that which has not been so (lit, not accomplished).
 
-17\. When name of many relevant[^13] persons are mentioned with a view to accomplish the object aimed at, it is [an instance of] Persuasion (*siddhi*, lit. success).
+17\. When name of many relevant[^mg13] persons are mentioned with a view to accomplish the object aimed at, it is [an instance of] Persuasion (*siddhi*, lit. success).
 
 
-[^13]:  Cf. SD. 454. Ag. (B. XVI. 17) reads this with a slight variation.
+[^mg13]:  Cf. SD. 454. Ag. (B. XVI. 17) reads this with a slight variation.
 
 ### *Distinction*
 
-18\. When after mentioning many well-known great objects something is said to distinguish a thing from them, it is [an instance of] Distinction (*viśeṣaṇa*)[^14].
+18\. When after mentioning many well-known great objects something is said to distinguish a thing from them, it is [an instance of] Distinction (*viśeṣaṇa*)[^mg14].
 
 
-[^14]:  Cf. SD. 452, Ag. (B. XVI. 31) reads this as a variant of kṣamā which in translation is as follows: When one being hurt by harsh and provoking words utterred by a wicked person in the presence of good people, remains without anger, it is [an instance of] Forgiveness (kṣamā),
+[^mg14]:  Cf. SD. 452, Ag. (B. XVI. 31) reads this as a variant of kṣamā which in translation is as follows: When one being hurt by harsh and provoking words utterred by a wicked person in the presence of good people, remains without anger, it is [an instance of] Forgiveness (kṣamā),
 
 ### *Accusation of Virtues*
 
-19\. When virtues are mentioned with sweet words of harsh import, which carry a contrary implication, it is [an instance of] Accusation of Virtues (*guṇātīpāta*, lit. opposition of virtue)[^15].
+19\. When virtues are mentioned with sweet words of harsh import, which carry a contrary implication, it is [an instance of] Accusation of Virtues (*guṇātīpāta*, lit. opposition of virtue)[^mg15].
 
 
-[^15]:  Cf. SD. 450. Ag. reads this as a variant of guṇānuvāda (B. XVI. 13a) which is translation is as follows: Eulogy (guṇānuvāda) relates to inferior subjects compared with superior ones.
+[^mg15]:  Cf. SD. 450. Ag. reads this as a variant of guṇānuvāda (B. XVI. 13a) which is translation is as follows: Eulogy (guṇānuvāda) relates to inferior subjects compared with superior ones.
 
 ### *Excellence*
 
-20\. When after enumerating the qualities available in common men, one mentions some special qualities, it is [an instance of] Excellence (*atiśaya*)[^16].
+20\. When after enumerating the qualities available in common men, one mentions some special qualities, it is [an instance of] Excellence (*atiśaya*)[^mg16].
 
 
-[^16]:  Cf. SD. 451 Ag.’s reading (B. XV. 13b) in translation is as follows: When anything compares favourably with the best thing [to which it can be compared] it is [an instance of] Excellence (atiśaya).
+[^mg16]:  Cf. SD. 451 Ag.’s reading (B. XV. 13b) in translation is as follows: When anything compares favourably with the best thing [to which it can be compared] it is [an instance of] Excellence (atiśaya).
 
 ### *Inference from Similitude*
 
-21\. When an object not believable, is inferred from a metaphor or a simile applied in a similar sense, it is [an instance of] Inference from Similitude (*tulya-tarka*, lit. reasoning from the comparables)[^17].
+21\. When an object not believable, is inferred from a metaphor or a simile applied in a similar sense, it is [an instance of] Inference from Similitude (*tulya-tarka*, lit. reasoning from the comparables)[^mg17].
 
 
-[^17]:  Cf. SD. 442. Ag. reads this is as a variant of the definition of ākranda (B.XVI. 19) which in translation is as follows: To say something very pointedly through suggesting one’s own idea by means of likening it to others’ actions, is called Exhortation (ākranda). Cf. SD. 472.
+[^mg17]:  Cf. SD. 442. Ag. reads this is as a variant of the definition of ākranda (B.XVI. 19) which in translation is as follows: To say something very pointedly through suggesting one’s own idea by means of likening it to others’ actions, is called Exhortation (ākranda). Cf. SD. 472.
 
 ### *Multiplex Predication*
 
-22\. When a number of words are used along with a number of other words to form [different] groups for the same purpose, it becomes [an instance of] Multiplex Predication (*padoccaya*, lit. collection of words)[^18].
+22\. When a number of words are used along with a number of other words to form [different] groups for the same purpose, it becomes [an instance of] Multiplex Predication (*padoccaya*, lit. collection of words)[^mg18].
 
 
-[^18]:  Cf. SD. 443 Ag.’s reading (B. XVI. 18) in trans. is as follows: When anything is described as possessing different aspects by means of many words of similar import, it is [an instance of] Multiplex Predication (padoccaya) which puts together many objects.
+[^mg18]:  Cf. SD. 443 Ag.’s reading (B. XVI. 18) in trans. is as follows: When anything is described as possessing different aspects by means of many words of similar import, it is [an instance of] Multiplex Predication (padoccaya) which puts together many objects.
 
 ### *Description*
 
-23\. When any object or incident directly seen or not, is described in harmony with locality, time or from related to it, it becomes [an instance of] Apt Description (*diṣṭa* lit. described)[^19].
+23\. When any object or incident directly seen or not, is described in harmony with locality, time or from related to it, it becomes [an instance of] Apt Description (*diṣṭa* lit. described)[^mg19].
 
 
-[^19]:  BC. dṛṣṭa for diṣṭa, Cf. SD. 448. Ag. reads this as a variant of sārūpya (B. XVI, 15) which is different from XVI. 35
+[^mg19]:  BC. dṛṣṭa for diṣṭa, Cf. SD. 448. Ag. reads this as a variant of sārūpya (B. XVI, 15) which is different from XVI. 35
 
 ### *Pointed Utterance*
 
-24\. When one says something with a happy end on the basis of Śāstras and thereby pleases the learned, it is a Pointed Utterance (*upadiṣṭa*, lit. utterance)[^20]
+24\. When one says something with a happy end on the basis of Śāstras and thereby pleases the learned, it is a Pointed Utterance (*upadiṣṭa*, lit. utterance)[^mg20]
 
 ### *Deliberation*
 
