--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/18.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/18.md
@@ -4,89 +4,89 @@ title = "18 Rules on the use of Languages (bhāṣā)"
 +++
 ## *Prakritic Recitation*
 
-1.[^1] Thus I have spoken in brief[^2] of the Sanskritic Recitation. Now I shall speak of the characteristics of the Prakritic Recitation.
+1.[^mg1] Thus I have spoken in brief[^mg2] of the Sanskritic Recitation. Now I shall speak of the characteristics of the Prakritic Recitation.
 
 
-[^2]:  samāsataḥ (C. dvijottamāḥ).
+[^mg2]:  samāsataḥ (C. dvijottamāḥ).
 
 
-[^1]:  For an English translation (with the text and notes) of XVIII, 1-24, see M. Ghosh, “Date of the Bharata-Nāṭyaśāstra,” JDL, Vol. XXV. (1933). For a French translation (together with the romanised text) of this chapter see L. Nitti-Dolci, Les Grammairiens Prakrits, 1938, pp. 64-76.
+[^mg1]:  For an English translation (with the text and notes) of XVIII, 1-24, see M. Ghosh, “Date of the Bharata-Nāṭyaśāstra,” JDL, Vol. XXV. (1933). For a French translation (together with the romanised text) of this chapter see L. Nitti-Dolci, Les Grammairiens Prakrits, 1938, pp. 64-76.
 
-2\. The former (lit. this) [when] changed and devoid of the quality of polish, is called the Prakritic Recitation, and it has as its chief feature changes due to different conditions.[^3]
+2\. The former (lit. this) [when] changed and devoid of the quality of polish, is called the Prakritic Recitation, and it has as its chief feature changes due to different conditions.[^mg3]
 
 ## *Three kinds of Prakrit Recitation*
 
 
-[^3]:  Cf. Nitti-Dolci, p. 70.
+[^mg3]:  Cf. Nitti-Dolci, p. 70.
 
-3\. In connexion with the dramatic representation, it (the Prakrit recitation) is of three[^4] kinds, viz, that with the same words [as in Sanskrit] (*samāna-śabda*), that with corrupt (*vibhraṣṭa*) words and that with words of indigenous origin (*deśī*).
-
-
-[^4]:  Later Prakrit Grammarians called the above three classes of words tatsama, tadbhava and deśī respectively.
-
-4\. A sentence containing words like *kamala*, *amala*, *reṇu*, *taraṅga*, *lola*, *salila* and the like are used in the Prakrit composition [in the same manner] as in Sanskrit.[^5]
-
-5.[^6] Sounds which change their combined form or vowels, or sustain loss and that often in the middle of a word are corrupt (*vibhraṣṭa*).
+3\. In connexion with the dramatic representation, it (the Prakrit recitation) is of three[^mg4] kinds, viz, that with the same words [as in Sanskrit] (*samāna-śabda*), that with corrupt (*vibhraṣṭa*) words and that with words of indigenous origin (*deśī*).
 
 
-[^6]:  Cf. Nitti-Dolci, p. 70.
+[^mg4]:  Later Prakrit Grammarians called the above three classes of words tatsama, tadbhava and deśī respectively.
+
+4\. A sentence containing words like *kamala*, *amala*, *reṇu*, *taraṅga*, *lola*, *salila* and the like are used in the Prakrit composition [in the same manner] as in Sanskrit.[^mg5]
+
+5.[^mg6] Sounds which change their combined form or vowels, or sustain loss and that often in the middle of a word are corrupt (*vibhraṣṭa*).
 
 
-[^5]:  B. reads one additional hemistich (4a) before this. Cf. Nitti-Dolci, p. 20.
+[^mg6]:  Cf. Nitti-Dolci, p. 70.
+
+
+[^mg5]:  B. reads one additional hemistich (4a) before this. Cf. Nitti-Dolci, p. 20.
 
 ## *Vowels and simple consonants*
 
-6\. Sounds following *e* and *o* (*i.e*., *ai* and *au*) and the Anusvāra [in the alphabet] do not occur in Prakrit. And such is the case with sounds between *va* and *sa* (*i.e*., *śa* and *ṣa*) and the final sounds in the *ka*, *ca* and *ta* groups (*i.e*., *ṅa*, *ña*, *na*).[^7]
+6\. Sounds following *e* and *o* (*i.e*., *ai* and *au*) and the Anusvāra [in the alphabet] do not occur in Prakrit. And such is the case with sounds between *va* and *sa* (*i.e*., *śa* and *ṣa*) and the final sounds in the *ka*, *ca* and *ta* groups (*i.e*., *ṅa*, *ña*, *na*).[^mg7]
 
-7.[^8] *Ka*, *ga*, *ta*, *da*, *ya*, and *va* are dropped [in Prakrit] and the meaning is carried by the [remaining] vowels, and *kha*, *gha*, *tha*, *dha* and *bha* become *ha* without giving up the meaning of the word.
-
-
-[^8]:  Nitti-Dolci and B. reads padra for draha. See the chāyā in B, and Ag., and also PSM. for the Prakrit words. Cf. Nitti-Dolci, p. 71.
+7.[^mg8] *Ka*, *ga*, *ta*, *da*, *ya*, and *va* are dropped [in Prakrit] and the meaning is carried by the [remaining] vowels, and *kha*, *gha*, *tha*, *dha* and *bha* become *ha* without giving up the meaning of the word.
 
 
-[^7]:  This together with three following couplets are written not in Sanskrit but in Prakrit. Hence they should be taken as an interpolation. The first of these occurs as a quotation (without the author’s name) in a late work on metrics edited by M.H.D. Velankar (Annals of the Bhandarkar Inst. XIV. 1932-33, pp. 1-38, citation of Nitti-Dolci, p. 71).
-
-8\. In Prakrit *ra* does neither precede nor follow [a Consonantal sound] except in cases of *bhadra*, *vodra*, *hrada*, *candra* and the like.[^9]
-
-9\. *Kha*, *gha*, *tha*, *dha* and *bha* always become *ha* in words such as *mukha*, *megha*, *kathā* and *vadhu prabhūta*.[^10] And as for *ka*, *ga*, *ta*, *da*, *ya*[^11] and *va*, the vowel[^12] following them always represents them.
+[^mg8]:  Nitti-Dolci and B. reads padra for draha. See the chāyā in B, and Ag., and also PSM. for the Prakrit words. Cf. Nitti-Dolci, p. 71.
 
 
-[^12]:  The word saro (= svaraḥ) here means “vowel” and not “sound”. Cf. Nitti-Dolci p. 71.
+[^mg7]:  This together with three following couplets are written not in Sanskrit but in Prakrit. Hence they should be taken as an interpolation. The first of these occurs as a quotation (without the author’s name) in a late work on metrics edited by M.H.D. Velankar (Annals of the Bhandarkar Inst. XIV. 1932-33, pp. 1-38, citation of Nitti-Dolci, p. 71).
+
+8\. In Prakrit *ra* does neither precede nor follow [a Consonantal sound] except in cases of *bhadra*, *vodra*, *hrada*, *candra* and the like.[^mg9]
+
+9\. *Kha*, *gha*, *tha*, *dha* and *bha* always become *ha* in words such as *mukha*, *megha*, *kathā* and *vadhu prabhūta*.[^mg10] And as for *ka*, *ga*, *ta*, *da*, *ya*[^mg11] and *va*, the vowel[^mg12] following them always represents them.
 
 
-[^11]:  The non-aspirate consonants mentioned here are to be understood as devoid of the inherent vowel ‘a’.
+[^mg12]:  The word saro (= svaraḥ) here means “vowel” and not “sound”. Cf. Nitti-Dolci p. 71.
 
 
-[^10]:  Evidently the hard aspirates in case of other words did not change. Ag’s, example of such words are kheṭa, parigha, atha. This speaks of the high antiquity of the Prakrit of the NŚ, though not of these rules written in Pkt.
+[^mg11]:  The non-aspirate consonants mentioned here are to be understood as devoid of the inherent vowel ‘a’.
 
 
-[^9]:  See the chāyā in B., and Ag. and also PSM. for the Prakrit words. Cf. Nitti-Dolci, p. 71.
-
-10\. *Ṣa* it should be known, always become *cha* in words such as *ṣaṭpada*.[^13] The final syllable of *kila* should be *ra* and the word *khalu* should become *khu*.
+[^mg10]:  Evidently the hard aspirates in case of other words did not change. Ag’s, example of such words are kheṭa, parigha, atha. This speaks of the high antiquity of the Prakrit of the NŚ, though not of these rules written in Pkt.
 
 
-[^13]:  Ag. is silent about this ṣaṭpadādi gaṇa.
+[^mg9]:  See the chāyā in B., and Ag. and also PSM. for the Prakrit words. Cf. Nitti-Dolci, p. 71.
+
+10\. *Ṣa* it should be known, always become *cha* in words such as *ṣaṭpada*.[^mg13] The final syllable of *kila* should be *ra* and the word *khalu* should become *khu*.
+
+
+[^mg13]:  Ag. is silent about this ṣaṭpadādi gaṇa.
 
 11\. *Ṭa* becomes *ḍa* in words such as *bhaṭa*, *kuṭi*, and *taṭa*, and *śa* and *ṣa* always become *sa*, *e.g. viṣa* (*visa*) and *saṃkā* (*śaṅkā*).
 
-12\. In words such as *itara* and the like, *ta* standing not in the beginning of a word becomes an indistinctly pronounced *da*.[^14] *Ḍa* in words such as *vaḍavā* and *taḍāga* becomes *la*.
+12\. In words such as *itara* and the like, *ta* standing not in the beginning of a word becomes an indistinctly pronounced *da*.[^mg14] *Ḍa* in words such as *vaḍavā* and *taḍāga* becomes *la*.
 
 
-[^14]:  This indistinctly pronounced da is perhaps a spirantised da. Ag. thinks that it is somewhat like a la.
+[^mg14]:  This indistinctly pronounced da is perhaps a spirantised da. Ag. thinks that it is somewhat like a la.
 
 13\. *Dha* in words such as *vadha* and *mādhū* (*madhu*?) become *dha*, and *na* becomes *ṇa* everywhere in pronunciation.
 
 14\. *Pa* [in it] changing into *va*, *āpāna* becomes *āvāṇa*. And except in case of words like *yathā* and *tathā*, *tha* becomes *dha*.
 
-15\. One is to know *paruṣa* as *pharusa*, for *fa* becomes *pha* [in it], and *mṛga* will be changed to *mao* while *mṛta* will also be *mao*.[^15]
+15\. One is to know *paruṣa* as *pharusa*, for *fa* becomes *pha* [in it], and *mṛga* will be changed to *mao* while *mṛta* will also be *mao*.[^mg15]
 
-16\. *Au* employed in words like *auṣadha* etc. will change to *o*, and *ca* in words such as *pracaya, acira* and *acala* etc. will change into *ya*.[^16]
+16\. *Au* employed in words like *auṣadha* etc. will change to *o*, and *ca* in words such as *pracaya, acira* and *acala* etc. will change into *ya*.[^mg16]
 
 
 
-[^16]:  This ya-śruti for ca did not probably at once lead to its graphic elimination.
+[^mg16]:  This ya-śruti for ca did not probably at once lead to its graphic elimination.
 
-[^15]:  The word maa (mayo) from mṛta as well as mṛga had its spirantised da reduced to ya-śruti which however was not shown in writing during the early days of this phonetic change (See IHQ. VIII. 1933, suppl. p. 14-15).
+[^mg15]:  The word maa (mayo) from mṛta as well as mṛga had its spirantised da reduced to ya-śruti which however was not shown in writing during the early days of this phonetic change (See IHQ. VIII. 1933, suppl. p. 14-15).
 
 17\. Thus [change] the sounds in Prakrit when they are not mutually connected (*i.e*. they are simple). Now I shall describe the change of conjunct sounds.
 
@@ -94,62 +94,62 @@ title = "18 Rules on the use of Languages (bhāṣā)"
 
 18\. *Śca*, *psa*, *tsa* and *thya* change into (*c)cba*, *bhya*, *hya* and *dhya* into (*j)jha*, *ṣṭa* into *ṭṭha*, *sta* into *ttha*, *sma* into *mha*, *kṣṇa* and *ṣṇa* into *ṇha*, and *kṣa* into (*k)kha*.
 
-19\. *Āścarya* will be *acchariya* and *niścaya nicchaya*, *utsāha ucchāha* and *pathya*, *paccha*.[^17]
+19\. *Āścarya* will be *acchariya* and *niścaya nicchaya*, *utsāha ucchāha* and *pathya*, *paccha*.[^mg17]
 
 20\. *Tubhyam* becomes *tujjhaṃ*, *mahyam majjhaṃ*, *vindhya viṃjha*, *daṣṭa daṭṭha* and *hasta hattha*.
 
 
-[^17]:  B. reads one additional hemistich between 19a and 19b.
+[^mg17]:  B. reads one additional hemistich between 19a and 19b.
 
 21\. *Grīṣma* becomes *gimha*, *ślakṣna saṇha*, *uṣṇa uṇha*; *jakṣa jakkha*, and *paryaṅkā pallaṃka*.
 
 22\. There is metathesis in the group *hma* occurring in words such as *brahman* etc., and in *bṛhaspati* [the group *spa* ] becomes *pha*, *yajña* becomes *jaṇṇa*, *bhīṣma bhimha*.
 
-23\. *Ka* and similar other letters (sound) while on the top of another letter (sound) will have to be disjointed in their pronunciation.[^18]
+23\. *Ka* and similar other letters (sound) while on the top of another letter (sound) will have to be disjointed in their pronunciation.[^mg18]
 
-24.[^19] Thus are to be learnt the pronunciations of Prakrit and Sanskrit. I shall discuss hereafter the classification of regional languages (*deśa-bhāsa*).
-
-
-[^19]:  Cf. Nitti-Dolci. p. 73-
+24.[^mg19] Thus are to be learnt the pronunciations of Prakrit and Sanskrit. I shall discuss hereafter the classification of regional languages (*deśa-bhāsa*).
 
 
-[^18]:  This probably relates to svarabhakti (anaptyxis). Kilesa (kleśa), radana (ratna) and duvāra (dvāra) may be examples of this.
+[^mg19]:  Cf. Nitti-Dolci. p. 73-
+
+
+[^mg18]:  This probably relates to svarabhakti (anaptyxis). Kilesa (kleśa), radana (ratna) and duvāra (dvāra) may be examples of this.
 
 25\. The [languages] to be used in drama are of four types in which Recitation should be either of the refined (*saṃskṛta*) or of the vulgar (*prākṛta*) kind.
 
 ## *Four types of language*
 
-26\. The Super-human Language (*atibhāṣā*), the Noble Language (*ārya-bhāṣā*)[^20] the Common Language (*jāti-bhāṣā*) and the Language of Other Animals (*yonyantarī bhāṣā*)[^21] are the [four] languages occurring in plays.
+26\. The Super-human Language (*atibhāṣā*), the Noble Language (*ārya-bhāṣā*)[^mg20] the Common Language (*jāti-bhāṣā*) and the Language of Other Animals (*yonyantarī bhāṣā*)[^mg21] are the [four] languages occurring in plays.
 
 
-[^21]:  C. reads jātyantarī for yonyantarī.
+[^mg21]:  C. reads jātyantarī for yonyantarī.
 
 
-[^20]:  Some commentators think that ārya-bhāṣā means a language in which Vedic words preponderate (Ag.).
+[^mg20]:  Some commentators think that ārya-bhāṣā means a language in which Vedic words preponderate (Ag.).
 
 ### *The Superhuman and the Noble Languages*
 
-27\. The Super-human Language is for the gods, and the Noble language for the kings.[^22] These have the quality of refinement (*saṃṣkāra*) and are current oyer the seven great divisions[^23] (*dvīpa*) of the world.
+27\. The Super-human Language is for the gods, and the Noble language for the kings.[^mg22] These have the quality of refinement (*saṃṣkāra*) and are current oyer the seven great divisions[^mg23] (*dvīpa*) of the world.
 
 
-[^23]:  This may be said to show that Sanskrit was used all over the civilized world at the time of the NŚ.
+[^mg23]:  This may be said to show that Sanskrit was used all over the civilized world at the time of the NŚ.
 
 
-[^22]:  The atibhāṣā and āryabhāṣā are possibly the dialects of the pure Indo-Aryan speech. It should be noted that “saṃskṛta” (Sanskrit) as the name of a language is absent here. Bhoja takes ati -, ārya- and jāti - bhāṣas respectively as śrauta (Vedic), ārṣa (Purāṇic) and laukika (literary) speeches. See Śr. Pr. ed, V. Raghavan pp, 191ff.
+[^mg22]:  The atibhāṣā and āryabhāṣā are possibly the dialects of the pure Indo-Aryan speech. It should be noted that “saṃskṛta” (Sanskrit) as the name of a language is absent here. Bhoja takes ati -, ārya- and jāti - bhāṣas respectively as śrauta (Vedic), ārṣa (Purāṇic) and laukika (literary) speeches. See Śr. Pr. ed, V. Raghavan pp, 191ff.
 
 ### *The Common Language*
 
-28\. The Common Language prescribed for use [on the stage] has various forms. It contains [many] words of Barbarian (*mleccha*) origin and is spoken in Bhārata-varṣa [only].[^24]
+28\. The Common Language prescribed for use [on the stage] has various forms. It contains [many] words of Barbarian (*mleccha*) origin and is spoken in Bhārata-varṣa [only].[^mg24]
 
 ### *The Animal Language*
 
 
-[^24]:  The common speech or the speech of the commoners is distinguished here from that of the priests and the nobility by describing it as containing words of Barbarian (mleccha) origin. These words seem to have been none other than vocables of the Dravidian and the Austric languages. They entered into Indo-Aryan quite early in its history. See S. K, Chatterji, Origin and Development of the Bengali Language, Calcutta, 1926. pp. 42, 178.
+[^mg24]:  The common speech or the speech of the commoners is distinguished here from that of the priests and the nobility by describing it as containing words of Barbarian (mleccha) origin. These words seem to have been none other than vocables of the Dravidian and the Austric languages. They entered into Indo-Aryan quite early in its history. See S. K, Chatterji, Origin and Development of the Bengali Language, Calcutta, 1926. pp. 42, 178.
 
-29\. The Language of Other Animals[^25] have their origin in animals domestic or wild, and in birds of various species, and it follows the Conventional Practice.
+29\. The Language of Other Animals[^mg25] have their origin in animals domestic or wild, and in birds of various species, and it follows the Conventional Practice.
 
 
-[^25]:  Neither the NŚ. nor any extant drama gives us any specimen of the conventional language of lower animals, which is to be used in the stage.
+[^mg25]:  Neither the NŚ. nor any extant drama gives us any specimen of the conventional language of lower animals, which is to be used in the stage.
 
 ## *Two kinds of Recitation*
 
@@ -161,31 +161,31 @@ title = "18 Rules on the use of Languages (bhāṣā)"
 
 ### *Occasion for Prakrit Recitation*
 
-32\. Heroes of all these classes are to use Prakrit when the occasion demands that.[^26]
+32\. Heroes of all these classes are to use Prakrit when the occasion demands that.[^mg26]
 
-33\. In case of even a superior person intoxicated with the kingship (or wealth) or overwhelmed with poverty no Sanskrit should be used.[^27]
-
-
-
-[^27]:  No extant drama seems to furnish any illustration of this rule. B. reads one additional hemistich before this.
-
-[^26]:  As Arjuna disguised as Bṛhannalā.
-
-34\. To persons in disguise,[^28] Jain monks,[^29] ascetics,[^30] religious mendicants[^31] and jugglers should be assigned the Prakrit Recitation.
+33\. In case of even a superior person intoxicated with the kingship (or wealth) or overwhelmed with poverty no Sanskrit should be used.[^mg27]
 
 
-[^31]:  bhikṣu.—religious mendicant in general. It should not be restricted to Buddhists alone. The alternative name of the Brahma-sūtra is the Bhikṣu-sūtra.
+
+[^mg27]:  No extant drama seems to furnish any illustration of this rule. B. reads one additional hemistich before this.
+
+[^mg26]:  As Arjuna disguised as Bṛhannalā.
+
+34\. To persons in disguise,[^mg28] Jain monks,[^mg29] ascetics,[^mg30] religious mendicants[^mg31] and jugglers should be assigned the Prakrit Recitation.
 
 
-[^30]:  tapasvin.—It appears that the author of the NŚ. meant by this term ascetics in general. Though we find Brahmin ascetics in ancient literature, the institution of asceticism was most probably of non-Aryan origin. This seems to be the justification of assigning Prakritic Recitation to all the ascetics irrespective of their sectarian affiliation.
+[^mg31]:  bhikṣu.—religious mendicant in general. It should not be restricted to Buddhists alone. The alternative name of the Brahma-sūtra is the Bhikṣu-sūtra.
 
 
-[^29]:  Śramaṇa (Prakrit samaṇa). The word is to be taken to mean here a Jain monk. See Jadi vattbam avaṇemi samaṇao homi, Avi. (V.) ascribed to Bhāsa; śramana was sometimes used also in connexion with the Buddhists. See below 36.
+[^mg30]:  tapasvin.—It appears that the author of the NŚ. meant by this term ascetics in general. Though we find Brahmin ascetics in ancient literature, the institution of asceticism was most probably of non-Aryan origin. This seems to be the justification of assigning Prakritic Recitation to all the ascetics irrespective of their sectarian affiliation.
 
 
-[^28]:  vyājaliṅgapraviṣṭānām = persons in disguise of different kinds of professional and religious mendicants etc. See Kauṭilya’s Arthaśāstra. An example of this is Indra in the guise of a Brahmin speaking Prakrit in Karṇa, ascribed to Bhāsa. Nitti-Dolci takes this expression as an adjective of śramaṇāṇāṃ etc. But it need not be construed like this. This part of the rule seems to relate to Skt.-speaking characters assuming disguise. Virādhagupta (Mudrā. II.) assuming the guise of a snake-charmer, is an example of such characters. And so are Yaugandharāyaṇa and Rumaṇvān in the Pratijñā, (III) ascribed to Bhāsa.
+[^mg29]:  Śramaṇa (Prakrit samaṇa). The word is to be taken to mean here a Jain monk. See Jadi vattbam avaṇemi samaṇao homi, Avi. (V.) ascribed to Bhāsa; śramana was sometimes used also in connexion with the Buddhists. See below 36.
 
-35.[^32] Similarly Prakrit should be assigned to children, persons possessed of spirits of lower order, women in feminine character[^33] persons of low birth, lunatics and phallus-worshippers.[^34]
+
+[^mg28]:  vyājaliṅgapraviṣṭānām = persons in disguise of different kinds of professional and religious mendicants etc. See Kauṭilya’s Arthaśāstra. An example of this is Indra in the guise of a Brahmin speaking Prakrit in Karṇa, ascribed to Bhāsa. Nitti-Dolci takes this expression as an adjective of śramaṇāṇāṃ etc. But it need not be construed like this. This part of the rule seems to relate to Skt.-speaking characters assuming disguise. Virādhagupta (Mudrā. II.) assuming the guise of a snake-charmer, is an example of such characters. And so are Yaugandharāyaṇa and Rumaṇvān in the Pratijñā, (III) ascribed to Bhāsa.
+
+35.[^mg32] Similarly Prakrit should be assigned to children, persons possessed of spirits of lower order, women in feminine character[^33] persons of low birth, lunatics and phallus-worshippers.[^34]
 
 
 
