--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/19.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/19.md
@@ -4,27 +4,27 @@ title = "19 Modes of Address (nāman) and Intonation (kāku)"
 +++
 ## *Different modes of address*
 
-1-2. These are, O the best of Brahmins, the rules on the use of languages [in a drama]. Now listen about the rules of popular modes of address[^1] or the manner in which persons of equal, superior or inferior status in a play are to be addressed by those of the superior, the medium or the inferior class.[^2]
+1-2. These are, O the best of Brahmins, the rules on the use of languages [in a drama]. Now listen about the rules of popular modes of address[^mg1] or the manner in which persons of equal, superior or inferior status in a play are to be addressed by those of the superior, the medium or the inferior class.[^mg2]
 
 
 
-[^2]:  Rules given hereafter do not cover all the numerous and different cases occurring in the exant dramatic literature in Sanskrit and Prakrit.
+[^mg2]:  Rules given hereafter do not cover all the numerous and different cases occurring in the exant dramatic literature in Sanskrit and Prakrit.
 
-[^1]:  This manner of addressing different persons includes referring to them before their ownselves or before others, e.g., in Śak. (I), Duṣyanta is referred to by his charioteer as āyuṣmān, āyuṣman paśya paśya).
+[^mg1]:  This manner of addressing different persons includes referring to them before their ownselves or before others, e.g., in Śak. (I), Duṣyanta is referred to by his charioteer as āyuṣmān, āyuṣman paśya paśya).
 
 ## *Modes of addressing males: addressing great sages*
 
-3\. As the great sages are adorable (lit. god) even to the gods they are to be addressed as “holy one” (*bhagavan*)[^3] and their wives are also to be similarly addressed.[^4]
+3\. As the great sages are adorable (lit. god) even to the gods they are to be addressed as “holy one” (*bhagavan*)[^mg3] and their wives are also to be similarly addressed.[^mg4]
 
 
 
-[^4]:  No ex. of this seems to be available in any extant drama.
+[^mg4]:  No ex. of this seems to be available in any extant drama.
 
-[^3]:  Ex. Kāśyapa (Kaṇva) addressed by his disciple (Śak. IV.) Mārīca by Duṣyanta (ibid. VII.) and Rāvaṇa in ascetic’s disguise by Rāma (Pratimā. V).
+[^mg3]:  Ex. Kāśyapa (Kaṇva) addressed by his disciple (Śak. IV.) Mārīca by Duṣyanta (ibid. VII.) and Rāvaṇa in ascetic’s disguise by Rāma (Pratimā. V).
 
 ### *Addressing gods, sectarian teachers and learned men*
 
-4\. Gods,[^5] persons wearing sectarian teacher’s dress[^6], and persons observing varied vows[^7] are to be addressed as “holy one” (*bhagavan*)[^8] by men as well as women.
+4\. Gods,[^mg5] persons wearing sectarian teacher’s dress[^mg6], and persons observing varied vows[^mg7] are to be addressed as “holy one” (*bhagavan*)[^mg8] by men as well as women.
 
 
 [^8]:  Ex. Brahmin (Keśavadāsa) in Madhyama. addressed by Bhīma.
