--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/20.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/20.md
@@ -4,25 +4,25 @@ title = "20 Ten Kinds of Play (daśarūpa)"
 +++
 ## *Introduction*
 
-1\. I shall now describe the division of plays into ten classes[^1] with their names, functions and modes of production.
+1\. I shall now describe the division of plays into ten classes[^mg1] with their names, functions and modes of production.
 
 
-[^1]:  Early writers on the subject like Kohala mentioned additional types of play such as, Saṭṭaka, Toṭaka and Rāsaka (Ag.). Bhoja ignores Toṭaka and recognizes only twelve kinds of play including the Nāṭikā mentioned in the NŚ. See V. Raghavan, Śr. Pr. p. 27.
+[^mg1]:  Early writers on the subject like Kohala mentioned additional types of play such as, Saṭṭaka, Toṭaka and Rāsaka (Ag.). Bhoja ignores Toṭaka and recognizes only twelve kinds of play including the Nāṭikā mentioned in the NŚ. See V. Raghavan, Śr. Pr. p. 27.
 
-2-3. For defining them the plays are to be known as Nāṭaka,[^2] Prakaraṇa, Aṅka[^3] (Utsṛṣṭikāṅka), Vyāyoga, Bhāṇa, Samavakāra, Vīthi, Prahasana, Ḍima, and Īhāmṛga which is the tenth [in order]. I shall describe their characteristics in detail.
-
-
-[^3]:  To distinguish it from aṅka (an Act) it is also called Utsṛṣṭikāṅka.
+2-3. For defining them the plays are to be known as Nāṭaka,[^mg2] Prakaraṇa, Aṅka[^mg3] (Utsṛṣṭikāṅka), Vyāyoga, Bhāṇa, Samavakāra, Vīthi, Prahasana, Ḍima, and Īhāmṛga which is the tenth [in order]. I shall describe their characteristics in detail.
 
 
-[^2]:  This word is often loosely used as a synonym of rūpa or rūpaka.
-
-4\. Styles (*vṛtti*)[^4] are traditionally known as the constituent elements of all dramatic works (lit. poems). With respect to their production, the ten kinds of play are considered to have proceeded from these.
+[^mg3]:  To distinguish it from aṅka (an Act) it is also called Utsṛṣṭikāṅka.
 
 
-[^4]:  See XXII.
+[^mg2]:  This word is often loosely used as a synonym of rūpa or rūpaka.
 
-5\. Just as the [musical] notes (*svara*) constitute scales (*grāma*)[^5] due to the Śrutis[^6] together with their Jātis[^7], so the [Varieties] of plays (lit. poetical works) come into existence due to Varieties of Styles.
+4\. Styles (*vṛtti*)[^mg4] are traditionally known as the constituent elements of all dramatic works (lit. poems). With respect to their production, the ten kinds of play are considered to have proceeded from these.
+
+
+[^mg4]:  See XXII.
+
+5\. Just as the [musical] notes (*svara*) constitute scales (*grāma*)[^mg5] due to the Śrutis[^6] together with their Jātis[^7], so the [Varieties] of plays (lit. poetical works) come into existence due to Varieties of Styles.
 
 
 [^7]:  ibid.
