--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/21.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/21.md
@@ -4,32 +4,32 @@ title = "21 Limbs of Segments (sandhi)"
 +++
 ## *Five Segments (sandhi), of the Plot (*itivṛtta*)*
 
-1\. The Plot (*itivṛtta*)[^1] has been called the body of the drama (lit. poem). It is known to be divided into five Segments (*sandhi*)[^2].
+1\. The Plot (*itivṛtta*)[^mg1] has been called the body of the drama (lit. poem). It is known to be divided into five Segments (*sandhi*)[^mg2].
 
 
-[^2]:  See DR. I, 22-23. Cf. SD, 330 and etc. See also NL. 216-217.
+[^mg2]:  See DR. I, 22-23. Cf. SD, 330 and etc. See also NL. 216-217.
 
 
-[^1]:  Also called vastu. Cf. DR, 1. II, SD. 294-295.
+[^mg1]:  Also called vastu. Cf. DR, 1. II, SD. 294-295.
 
 ## *Two kinds of the Plot*
 
-2\. The Plot is of two kinds: Principal (*ādhikārika*) and subsidiary (*prāsaṅgika*).[^3]
+2\. The Plot is of two kinds: Principal (*ādhikārika*) and subsidiary (*prāsaṅgika*).[^mg3]
 
 ### *Definition of the two*
 
 
-[^3]:  See DR.I. ii, SD. 295 and NL. 218-219.
+[^mg3]:  See DR.I. ii, SD. 295 and NL. 218-219.
 
-3\. An [assemblage of] acts which are fabricated with a view to [lit. by reason of] the attainment of [some particular] result, is to be known as the Principal Plot. [Acts] other than these constitute a Subsidiary Plot.[^4][^5]
+3\. An [assemblage of] acts which are fabricated with a view to [lit. by reason of] the attainment of [some particular] result, is to be known as the Principal Plot. [Acts] other than these constitute a Subsidiary Plot.[^mg4][^mg5]
 
 
 
-[^5]:  See above note 1.
+[^mg5]:  See above note 1.
 
-[^4]:  Cf. DR I. 12-13, SD. 296-297; NL. 223-224.
+[^mg4]:  Cf. DR I. 12-13, SD. 296-297; NL. 223-224.
 
-4-5. The attainment of the object and its exaltation which the ingenuity of the playwright (lit. poet) plans by means of the associated characters (lit. Heroes) acting in a regular manner (lit. reasorting to rules), constitute the Principal Plot on account of an attainment of the result. And any incident (lit. anything) mentioned for helping any other [incident] in it, is called the Subsidiary Plot.[^6][^7]
+4-5. The attainment of the object and its exaltation which the ingenuity of the playwright (lit. poet) plans by means of the associated characters (lit. Heroes) acting in a regular manner (lit. reasorting to rules), constitute the Principal Plot on account of an attainment of the result. And any incident (lit. anything) mentioned for helping any other [incident] in it, is called the Subsidiary Plot.[^mg6][^7]
 
 
 
