--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/22.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/22.md
@@ -4,44 +4,44 @@ title = "22 Styles (vṛtti)"
 +++
 ## *Origin of Styles*
 
-1\. I shall now narrate fully (lit. from the beginning) the [story of the] rise of Styles (*vṛtti*) and [in relation to them] the origin and the formation of dramas.[^1]
+1\. I shall now narrate fully (lit. from the beginning) the [story of the] rise of Styles (*vṛtti*) and [in relation to them] the origin and the formation of dramas.[^mg1]
 
-2-3. When Lord Acyuta (Viṣṇu) after reducting the universe into a single [vast] ocean and compressing the creation [into a seed] by his supernatural power, was lying on the couch of a snake, the two Asuras, Madhu and Kaiṭabha maddened with the pride of their strength, challenged the god at once for battle.[^2]
+2-3. When Lord Acyuta (Viṣṇu) after reducting the universe into a single [vast] ocean and compressing the creation [into a seed] by his supernatural power, was lying on the couch of a snake, the two Asuras, Madhu and Kaiṭabha maddened with the pride of their strength, challenged the god at once for battle.[^mg2]
 
 
 
-[^2]:  The story of Nārāyaṇa’s reducing the three worlds into ‘a single ocean, occurs in the Rām. VII. 72; Kūrma P. XIII. See JK. under Viṣṇu (8) and Nārāyaṇa (8).
+[^mg2]:  The story of Nārāyaṇa’s reducing the three worlds into ‘a single ocean, occurs in the Rām. VII. 72; Kūrma P. XIII. See JK. under Viṣṇu (8) and Nārāyaṇa (8).
 
-[^1]:  Sāgaranandin explains the vṛtti differently. See NL, 1044ff.
+[^mg1]:  Sāgaranandin explains the vṛtti differently. See NL, 1044ff.
 
-4-5. These two, after making gestures of challenge, (lit. rubbing their arms) fought the imperishable lord Viṣṇu (*bhūta-bhāvana*, lit. the creator of beings) with their fists and legs (lit. knees), and while doing so the two parties also abused each other with harsh words, and shook, as it were, the ocean with their reviling speech.[^3]
+4-5. These two, after making gestures of challenge, (lit. rubbing their arms) fought the imperishable lord Viṣṇu (*bhūta-bhāvana*, lit. the creator of beings) with their fists and legs (lit. knees), and while doing so the two parties also abused each other with harsh words, and shook, as it were, the ocean with their reviling speech.[^mg3]
 
 ### *Origin of the Verbal Style*
 
 
-[^3]:  Madhu and Kaiṭabha charged Nārāyaṇa with the theft of the Vedas. Rām. VII. 72. See JK. under Kaiṭabha.
+[^mg3]:  Madhu and Kaiṭabha charged Nārāyaṇa with the theft of the Vedas. Rām. VII. 72. See JK. under Kaiṭabha.
 
 6-7. Hearing the various [abusive] words of these two who were threatening [Viṣṇu], Druhiṇa (Brahmā) was slightly perturbed in mind and said, “Is it the *bhāratī vṛtti* that starts with these words [for the fighters] and goes on increasing gradually? Kill the two [at once].”
 
-8-10. Hearing these words of Pitāmaha (Brahmā), Madhusūdana (Viṣṇu) said, “Yes, I have made this *bhāratī vṛtti* for the purpose of doing my work. It will be the *bhāratī vṛtti* of the speaker, in which words will preponderate. I shall kill these two Asuras today.” So saying Hari (Viṣṇu) with his pure and perfect gestures,[^4] and Aṅgahāras[^5] severely fought the two Daityas who were experts in the method of battle.
+8-10. Hearing these words of Pitāmaha (Brahmā), Madhusūdana (Viṣṇu) said, “Yes, I have made this *bhāratī vṛtti* for the purpose of doing my work. It will be the *bhāratī vṛtti* of the speaker, in which words will preponderate. I shall kill these two Asuras today.” So saying Hari (Viṣṇu) with his pure and perfect gestures,[^mg4] and Aṅgahāras[^mg5] severely fought the two Daityas who were experts in the method of battle.
 
 
-[^5]:  See IV. 19-27, 170ff.
+[^mg5]:  See IV. 19-27, 170ff.
 
 
-[^4]:  aṅgaiḥ here means āṅgikaiḥ and aṅgahāraiḥ.
+[^mg4]:  aṅgaiḥ here means āṅgikaiḥ and aṅgahāraiḥ.
 
-11\. At that time Hari’s pacing with the Sthānakas[^6] on the ground created a great *bhāra* (burden) on the earth (*bhūmi*); the *bhāratī vṛtti* (Verbal Style) was built on that (*bhāra*).[^7]
+11\. At that time Hari’s pacing with the Sthānakas[^mg6] on the ground created a great *bhāra* (burden) on the earth (*bhūmi*); the *bhāratī vṛtti* (Verbal Style) was built on that (*bhāra*).[^mg7]
 
 
 
-[^7]:  This is a clear instance of folk-etymology and does not really explain the origin of this Style. It possibly came from the Bharata tribe; see I. 41 f.n.
+[^mg7]:  This is a clear instance of folk-etymology and does not really explain the origin of this Style. It possibly came from the Bharata tribe; see I. 41 f.n.
 
-[^6]:  See XI. 49ff.
+[^mg6]:  See XI. 49ff.
 
 ### *Origin of the Grand Style*
 
-12\. And at that [very] time, by the rebounding of the bow named Śārṅga which was intensely brilliant, steady, and by an excess of unperturbed *sattva* (strength), the *sāttvatī vṛtti* (Grand Style) was made.[^8]
+12\. And at that [very] time, by the rebounding of the bow named Śārṅga which was intensely brilliant, steady, and by an excess of unperturbed *sattva* (strength), the *sāttvatī vṛtti* (Grand Style) was made.[^mg8]
 
 ### *Origin of the Graceful Style*
 
