--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/23.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/23.md
@@ -8,10 +8,10 @@ title = "23 Costumes and Make-up (nepathya)"
 
 2\. The Extraneous Representation (*āhāryābhinaya*) deals with the rules of the Costumes and Make-up (*nepathya*). Anyone who wishes for the success of a dramatic production should pay attention to these.
 
-3\. Different types[^1] of the *dramatis personae* indicated first by their Costumes and Make-up, accomplish the representation without much effort, by means of Gestures and the like.
+3\. Different types[^mg1] of the *dramatis personae* indicated first by their Costumes and Make-up, accomplish the representation without much effort, by means of Gestures and the like.
 
 
-[^1]:  Nānāvastha—nānābhūtā yā śokādyā nānābhūtaśrayāś ca (Ag. p. 429).
+[^mg1]:  Nānāvastha—nānābhūtā yā śokādyā nānābhūtaśrayāś ca (Ag. p. 429).
 
 ## *Four kinds of Costumes and Make-up*
 
@@ -21,23 +21,23 @@ title = "23 Costumes and Make-up (nepathya)"
 
 5\. [Of these] the model work is of three kinds and of various forms. They are: the Joined Object (*sandhima*), the Indicating Object (*vyājima*) and Moving Object (*ceṣṭima*).
 
-6\. The model work which is made up or mat, cloth, skin and the like, is called the Joined Object (*sandhima*)[^2].
+6\. The model work which is made up or mat, cloth, skin and the like, is called the Joined Object (*sandhima*)[^mg2].
 
 
-[^2]:  Sandhimaḥ—sandhānatayā nirvṛttaḥ (Ag, p. 429).
+[^mg2]:  Sandhimaḥ—sandhānatayā nirvṛttaḥ (Ag, p. 429).
 
-7\. That which is made by means of a mechanical device (*yantra*) is called an Indicating Object (*vyājima*)[^3] and that which can be made to move, is called a Moving Object (*ceṣṭima*).[^4]
-
-
-
-[^4]:  Ag. (p. 430) reads this as veṣṭimaḥ and explains its as follows: upari jatu-sikthakādinā veṣṭanena nirvṛtto veṣṭimaḥ.
-
-[^3]:  Vyājimaḥ—vyājād sūtrasyākarṣākādirūpaḥ kṣepas tena nirvṛtto vyājimaḥ (Ag. p, 430).
-
-8\. Hills, carriages, lofty palaces, shields, armours, banner-staffs and elephants[^5] which are constructed for use in a dramatic performance are called model works.
+7\. That which is made by means of a mechanical device (*yantra*) is called an Indicating Object (*vyājima*)[^mg3] and that which can be made to move, is called a Moving Object (*ceṣṭima*).[^mg4]
 
 
-[^5]:  Emend nagāḥ into nāgāḥ. See XXIII 190-192 below.
+
+[^mg4]:  Ag. (p. 430) reads this as veṣṭimaḥ and explains its as follows: upari jatu-sikthakādinā veṣṭanena nirvṛtto veṣṭimaḥ.
+
+[^mg3]:  Vyājimaḥ—vyājād sūtrasyākarṣākādirūpaḥ kṣepas tena nirvṛtto vyājimaḥ (Ag. p, 430).
+
+8\. Hills, carriages, lofty palaces, shields, armours, banner-staffs and elephants[^mg5] which are constructed for use in a dramatic performance are called model works.
+
+
+[^mg5]:  Emend nagāḥ into nāgāḥ. See XXIII 190-192 below.
 
 ## *Decorations*
 
@@ -57,7 +57,7 @@ title = "23 Costumes and Make-up (nepathya)"
 
 ### *Tied-up ornaments*
 
-And those to be tied-up (*bandhanīya*) are to be represented by the girdles (*śroṇī-sūtra*) and the Aṅgada (arm-band).[^6]
+And those to be tied-up (*bandhanīya*) are to be represented by the girdles (*śroṇī-sūtra*) and the Aṅgada (arm-band).[^mg6]
 
 ### *Worn ornaments*
 
