--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/24.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/24.md
@@ -4,29 +4,29 @@ title = "24 Harmonious Representation (sāmānyābhinaya)"
 +++
 ## *Importance of Sattva*
 
-1\. The Harmonious Representation (*sāmānyābhinaya*)[^1] is known to depend on Words and Gestures. [Among these] one should take special care about the Sattva[^2], for the dramatic production has this as its basis.
+1\. The Harmonious Representation (*sāmānyābhinaya*)[^mg1] is known to depend on Words and Gestures. [Among these] one should take special care about the Sattva[^mg2], for the dramatic production has this as its basis.
 
 
-[^2]:  See VI. 22 note.
+[^mg2]:  See VI. 22 note.
 
 
-[^1]:  Ag, seems to have no very convincing explanation as to why sāmānyābhinaya was so called. He discusses it from different points of view (pp. 436-430). From the contexts of this chapter as well as the def. given here in 72 below, it appears that the expression means harmonious use of the four kinds of abhinaya (VI. 23), and as such it should be distinguished from the citrābhinaya (XXVI.) which applies only to the special representation of various objects and ideas.
+[^mg1]:  Ag, seems to have no very convincing explanation as to why sāmānyābhinaya was so called. He discusses it from different points of view (pp. 436-430). From the contexts of this chapter as well as the def. given here in 72 below, it appears that the expression means harmonious use of the four kinds of abhinaya (VI. 23), and as such it should be distinguished from the citrābhinaya (XXVI.) which applies only to the special representation of various objects and ideas.
 
 2\. The Histrionic Representation with an exuberant Sattva is superior, the one with the level Sattva is middling, and that with no [exercise of] Sattva is inferior.
 
 ## *Definition of Sattva*
 
-3.[^3] Sattva is something invisible; but it gives support to Psychological States and Sentiments by means of horripilation, tears and similar other sighs displayed in proper places and in harmony with the Sentiments [to be produced].
+3.[^mg3] Sattva is something invisible; but it gives support to Psychological States and Sentiments by means of horripilation, tears and similar other sighs displayed in proper places and in harmony with the Sentiments [to be produced].
 
 
-[^3]:  See VI. 22 note.
+[^mg3]:  See VI. 22 note.
 
 ## *Feminine graces in a drama*
 
-4-5. Dramatic experts know the young women’s Graces (*alaṃkāra*, lit. ornament) to be the support of Sentiments in a drama,[^4] and these consist of changes in respect of their faces and other limbs. Of these, firstly the change of limbs (*aṅgaja*)[^5] is of three kinds next the natural (*sahaja*)[^6] change of ten kinds, and involuntary (*a-yatnaja*)[^7] change, of seven kinds.
+4-5. Dramatic experts know the young women’s Graces (*alaṃkāra*, lit. ornament) to be the support of Sentiments in a drama,[^mg4] and these consist of changes in respect of their faces and other limbs. Of these, firstly the change of limbs (*aṅgaja*)[^mg5] is of three kinds next the natural (*sahaja*)[^mg6] change of ten kinds, and involuntary (*a-yatnaja*)[^mg7] change, of seven kinds.
 
 
-[^7]:  See DR. II. 31; ND. p. 203.
+[^mg7]:  See DR. II. 31; ND. p. 203.
 
 
 [^6]:  See DR. II. 32-33a; ND. p. 203.
