--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/26.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/26.md
@@ -2,30 +2,30 @@
 title = "26 aried Representation (citrābhinaya)"
 
 +++
-1\. The speciality in the representation through Gestures and the like, which occurs from time to time, but has not been mentioned [before] when stated in diverse ways, is known as the Varied Representation (*citrābhinaya*).[^1]
+1\. The speciality in the representation through Gestures and the like, which occurs from time to time, but has not been mentioned [before] when stated in diverse ways, is known as the Varied Representation (*citrābhinaya*).[^mg1]
 
 ## *Day, night and seasons etc*.
 
 
-[^1]:  Their collective use as under 5-20 below. Ag. makes a scholastic discussion on the justification of the term citrābhinaya. But this does not appear to be convincing.
+[^mg1]:  Their collective use as under 5-20 below. Ag. makes a scholastic discussion on the justification of the term citrābhinaya. But this does not appear to be convincing.
 
-2-4. To indicate morning and evening, day and night seasons, clouds, forest-region, wide expanse of water, directions, planets, stars and anything that is somewhat fixed, one is to make the following gestures: two hands raised with Patākā[^2] and Svastika[^3] gestures, Udvāhita head[^4] looking upwards with various eyes [fitting each occasion].
-
-
-[^4]:  See VIII. 27
+2-4. To indicate morning and evening, day and night seasons, clouds, forest-region, wide expanse of water, directions, planets, stars and anything that is somewhat fixed, one is to make the following gestures: two hands raised with Patākā[^mg2] and Svastika[^mg3] gestures, Udvāhita head[^mg4] looking upwards with various eyes [fitting each occasion].
 
 
-[^3]:  See IX. 134
+[^mg4]:  See VIII. 27
 
 
-[^2]:  See IX. 17-26
+[^mg3]:  See IX. 134
+
+
+[^mg2]:  See IX. 17-26
 
 ## *Objects on the ground*
 
-5\. With the same[^5] gestures of the hands and of the head together with the eyes looking downwards, one is to indicate [objects] resting on the ground.
+5\. With the same[^mg5] gestures of the hands and of the head together with the eyes looking downwards, one is to indicate [objects] resting on the ground.
 
 
-[^5]:  As described above.
+[^mg5]:  As described above.
 
 ## *Moonlight, happiness and air etc*.
 
@@ -49,17 +49,17 @@ title = "26 aried Representation (citrābhinaya)"
 
 ## *Deep and exalted feeling*
 
-11\. To indicate these in connexion with deep and exalted feelings one is to have the Sauṣṭhava[^6] of the limbs and a display of pride and conceit.
+11\. To indicate these in connexion with deep and exalted feelings one is to have the Sauṣṭhava[^mg6] of the limbs and a display of pride and conceit.
 
 
-[^6]:  See IX. 88-91.
+[^mg6]:  See IX. 88-91.
 
 ## *Necklace and flowers etc*.
 
-12\. To indicate a necklace and a flower garland one is to hold the two Arāla hands[^7] in the place where the sacred thread is held and then to separate them from the Svastika[^8] position.
+12\. To indicate a necklace and a flower garland one is to hold the two Arāla hands[^mg7] in the place where the sacred thread is held and then to separate them from the Svastika[^mg8] position.
 
 
-[^8]:  See IX. 134.
+[^mg8]:  See IX. 134.
 
 
 [^7]:  See IX. 46-52.
