--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/27.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/27.md
@@ -2,17 +2,17 @@
 title = "27 Success in Dramatic Production (siddhi)"
 
 +++
-1\. I shall now describe the features of the two kinds of Success (*siddhi*) relating to drama. For the production of a drama is wholly meant for (lit. based on) attaining Success in it.[^1]
+1\. I shall now describe the features of the two kinds of Success (*siddhi*) relating to drama. For the production of a drama is wholly meant for (lit. based on) attaining Success in it.[^mg1]
 
 ## *Two kinds of Success*
 
 
-[^1]:  This chapter discusses the appreciation of theatrical production by spectators who include persons of various types possessing different psychological and cultural traits.
+[^mg1]:  This chapter discusses the appreciation of theatrical production by spectators who include persons of various types possessing different psychological and cultural traits.
 
-2\. Success [in the dramatic production] which arises from Words, Sattva and Gestures[^2] is of two kinds: divine (*daivikī*), and human (*mānuṣī*), and relates to various Psychological States and Sentiments.
+2\. Success [in the dramatic production] which arises from Words, Sattva and Gestures[^mg2] is of two kinds: divine (*daivikī*), and human (*mānuṣī*), and relates to various Psychological States and Sentiments.
 
 
-[^2]:  vāk-sattvāṅga. These three constitute the Basic Representation. See XXIV.
+[^mg2]:  vāk-sattvāṅga. These three constitute the Basic Representation. See XXIV.
 
 ### *Human Success*
 
@@ -20,7 +20,7 @@ title = "27 Success in Dramatic Production (siddhi)"
 
 ### *Vocal Success*
 
-4\. Slight Smile (*smita*),[^3] Smile (*ardhahāsa*)[^4] and Excessive Laughter (*atihāsa*),[^5] ‘excellent’ (*sādhu*), ‘how wonderful’ (*aho*), ‘how pathetic’ (*kaṣṭam*), and tumultuous applause (*pravṛddhanāda*, lit. swelling uproar) are the signs of the Success expressed vocally (*vāṅmayī*).
+4\. Slight Smile (*smita*),[^mg3] Smile (*ardhahāsa*)[^mg4] and Excessive Laughter (*atihāsa*),[^5] ‘excellent’ (*sādhu*), ‘how wonderful’ (*aho*), ‘how pathetic’ (*kaṣṭam*), and tumultuous applause (*pravṛddhanāda*, lit. swelling uproar) are the signs of the Success expressed vocally (*vāṅmayī*).
 
 
 [^5]:  See note I above.
