--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/28.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/28.md
@@ -6,10 +6,10 @@ title = "28 On the Instrumental Music (ātodya)"
 
 I shall now explain the formal aspects (lit. rule) of the instrumental music (*ātodya*). They are as follows:
 
-1\. Regular musical instruments[^1] are of four kinds, such as ‘stringed’ (*tata*),[^2] ‘covered’ (*avanaddha*),[^3] ‘solid’ (*ghana*)[^4] and ‘hollow’ (*suṣira*).
+1\. Regular musical instruments[^mg1] are of four kinds, such as ‘stringed’ (*tata*),[^mg2] ‘covered’ (*avanaddha*),[^mg3] ‘solid’ (*ghana*)[^mg4] and ‘hollow’ (*suṣira*).
 
 
-[^4]:  “murtikāṭhinena dhanaṃ”, Ag.
+[^mg4]:  “murtikāṭhinena dhanaṃ”, Ag.
 
 
 [^3]:  “cārmabaddhanād avanaddham”, Ag.
