--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/29.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/29.md
@@ -4,45 +4,45 @@ title = "29 On Stringed Instruments (tata)"
 +++
 ## *Application of Jātis to Sentiments*
 
-1\. The Ṣaḍjodīcyavatī and the Ṣaḍjamadhyā should be applied in the Erotic and the Comic Sentiments respectively because Madhyama and Pañcama[^1] are amplified in them.[^2]
+1\. The Ṣaḍjodīcyavatī and the Ṣaḍjamadhyā should be applied in the Erotic and the Comic Sentiments respectively because Madhyama and Pañcama[^mg1] are amplified in them.[^mg2]
 
 
 
-[^2]:  As songs included in the performance of a play, were to serve its principal purpose which was the evocation of Sentiments, the author discusses here how Jātis can be applied for this purpose. The seven notes which have already been assigned to different Sentiments (XIX. 31-40), played an important part in this connexion. All these ultimately led to the formation of the Rāgas of the later Indian Music, in which the particular melody-types were meant not only to create a Sentiment appropriate to a situation in a play, but also to act on the hearers’ emotion in such a way that they might experience in imagination the particular situations described in isolated songs as well.
+[^mg2]:  As songs included in the performance of a play, were to serve its principal purpose which was the evocation of Sentiments, the author discusses here how Jātis can be applied for this purpose. The seven notes which have already been assigned to different Sentiments (XIX. 31-40), played an important part in this connexion. All these ultimately led to the formation of the Rāgas of the later Indian Music, in which the particular melody-types were meant not only to create a Sentiment appropriate to a situation in a play, but also to act on the hearers’ emotion in such a way that they might experience in imagination the particular situations described in isolated songs as well.
 
-[^1]:  The notes marked-out for amplification are the Aṃśa notes of the Jātis (See 15 below). In the present case, Madhyama only is the Aṃśa note of the Ṣaḍjodīcyavatī (°cyavā), and while both Madhyama and Pañcama are such notes to the Ṣaḍjamadhyā. See XXVIII, 84, 91.
+[^mg1]:  The notes marked-out for amplification are the Aṃśa notes of the Jātis (See 15 below). In the present case, Madhyama only is the Aṃśa note of the Ṣaḍjodīcyavatī (°cyavā), and while both Madhyama and Pañcama are such notes to the Ṣaḍjamadhyā. See XXVIII, 84, 91.
 
-2\. The Ṣāḍjī and the Ārṣabhī should be applied in the Heroic, the Furious and the Marvellous Sentiments after making [respectively] Ṣaḍja and Ṛṣabha their Graha note[^3].
-
-
-[^3]:  Ṣaḍja and Ṛṣabha are respectively included into the Graha notes of the Ṣaḍjī and Ārṣabhī Jātis. See XXVIII. 88, 89, 92.
-
-3\. The Naiṣādī with (lit. (in) Niṣāda as its Arnśa note, and the Ṣaḍjakaiśikī with (lit. in) Gāndhāra (as its Aṃśa note] should be the Jāti sung (lit. made) by expert singers[^4] in the Pathetic Sentiment..
+2\. The Ṣāḍjī and the Ārṣabhī should be applied in the Heroic, the Furious and the Marvellous Sentiments after making [respectively] Ṣaḍja and Ṛṣabha their Graha note[^mg3].
 
 
-[^4]:  Niṣāda and Gāndhāra are respectively included into the Aṃśa notes of the Naiṣādī and the Ṣaḍjakaiśikī Jātis. See XXVIII. 83-84.
+[^mg3]:  Ṣaḍja and Ṛṣabha are respectively included into the Graha notes of the Ṣaḍjī and Ārṣabhī Jātis. See XXVIII. 88, 89, 92.
 
-4\. The Dhaivatī[^5] with (lit. in) Dhaivata as its Aṃśa note [is to be applied] in the Odious and the Terrible [Sentiments]. [Besides this] the Dhaivatī is applicable in the Pathetic Sentiment[^6], and [similarly] the Ṣaḍjamadhyā is to be applied in connection with madness.
-
-
-[^6]:  As Gāndhāra and Niṣāda are not Aṃśa notes in the Dhaivatī, it is not clear how this Jāti can be applied in the Pathetic Sentiment. Cf. XIX. 38-40.
+3\. The Naiṣādī with (lit. (in) Niṣāda as its Arnśa note, and the Ṣaḍjakaiśikī with (lit. in) Gāndhāra (as its Aṃśa note] should be the Jāti sung (lit. made) by expert singers[^mg4] in the Pathetic Sentiment..
 
 
-[^5]:  Dhaivata is included into the Aṃśa notes of the Dhaivati Jāti. See XXVIII. 81.
+[^mg4]:  Niṣāda and Gāndhāra are respectively included into the Aṃśa notes of the Naiṣādī and the Ṣaḍjakaiśikī Jātis. See XXVIII. 83-84.
+
+4\. The Dhaivatī[^mg5] with (lit. in) Dhaivata as its Aṃśa note [is to be applied] in the Odious and the Terrible [Sentiments]. [Besides this] the Dhaivatī is applicable in the Pathetic Sentiment[^mg6], and [similarly] the Ṣaḍjamadhyā is to be applied in connection with madness.
+
+
+[^mg6]:  As Gāndhāra and Niṣāda are not Aṃśa notes in the Dhaivatī, it is not clear how this Jāti can be applied in the Pathetic Sentiment. Cf. XIX. 38-40.
+
+
+[^mg5]:  Dhaivata is included into the Aṃśa notes of the Dhaivati Jāti. See XXVIII. 81.
 
 5\. The Jātis should be made in the application of Dhruvās by the producers, after [very carefully] considering the Sentiments, the action and the States [in a play].
 
 6\. These are the Jātis of the Ṣaḍja Grāma known to the wise. I shall now speak of the Jātis of the Madhyama Grāma.
 
-7\. The Gāndhārī and the Raktagāndharī, when they have Gāndhāra[^7] and Niṣāda as their Aṃśa notes, should be applied in the Pathetic Sentiment.
+7\. The Gāndhārī and the Raktagāndharī, when they have Gāndhāra[^mg7] and Niṣāda as their Aṃśa notes, should be applied in the Pathetic Sentiment.
 
 
-[^7]:  Ga and ni are included into the Aṃśa notes of both the Gāndhāri and Raktagāndhārī Jātis. See XXVIII. 89-90.
+[^mg7]:  Ga and ni are included into the Aṃśa notes of both the Gāndhāri and Raktagāndhārī Jātis. See XXVIII. 89-90.
 
-8-9. In the Erotic and the Comic Sentiments, the Madhyama, the Pañcamī, the Nandayantī, the Gāndhārī, the Pañcamī and the Madhyamodīcyavā Jātis with Madhyama[^8] and Pañcama amplified, should he applied.
+8-9. In the Erotic and the Comic Sentiments, the Madhyama, the Pañcamī, the Nandayantī, the Gāndhārī, the Pañcamī and the Madhyamodīcyavā Jātis with Madhyama[^mg8] and Pañcama amplified, should he applied.
 
 
-[^8]:  Ma and pa are included into the Aṃśa notes of the Madhyama Pañcamī, Gāndharapancamī and Madhyamodīcyavā Jāti. See XXVIII. 80.
+[^mg8]:  Ma and pa are included into the Aṃśa notes of the Madhyama Pañcamī, Gāndharapancamī and Madhyamodīcyavā Jāti. See XXVIII. 80.
 
 9-10. In the Heroic, the Furious and the Marvellous Sentiments, the Karmāravī, the Āndhrī and the Gāndhārodīcyavā, with Ṣaḍja and Ṛṣabha as their Aṃśa notes, should be applied. And in the Odious and the Furious Sentiments the Kaiśikī with Dhaivata as their Aṃśa note, should be applied.
 
@@ -56,7 +56,7 @@ title = "29 On Stringed Instruments (tata)"
 
 16\. These Jātis relating to the dramatic performance, should be known by the wise. Now, listen about the notes prescribed in the instrumental music.
 
-16ka-kha. The notes Madhyama and Pañcama are to be produced in the Comic and the Erotic Sentiments, Ṣaḍja and Ṛṣabha in the Heroic, the Furious and the Marvellous Sentiments, Gāndhāra and Niṣāda in the Pathetic Sentiment, and Dhaivata is to be produced in the Odious and the Terrible Sentiments. I shall speak after this on the characteristics of the Varṇas[^9] and the Alaṃkāras[^10].
+16ka-kha. The notes Madhyama and Pañcama are to be produced in the Comic and the Erotic Sentiments, Ṣaḍja and Ṛṣabha in the Heroic, the Furious and the Marvellous Sentiments, Gāndhāra and Niṣāda in the Pathetic Sentiment, and Dhaivata is to be produced in the Odious and the Terrible Sentiments. I shall speak after this on the characteristics of the Varṇas[^mg9] and the Alaṃkāras[^10].
 
 
 [^10]:  See below note 1 on 23-28.
