--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/30.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/30.md
@@ -2,57 +2,57 @@
 title = "30 On Hollow Instruments (suṣira)"
 
 +++
-1\. The hollow (*suṣira*) musical instruments, as the wise should know them, are made of bamboo[^1]. The rules regarding their notes (*svara*) and the Grāma are the same as that of the Vīṇā.
+1\. The hollow (*suṣira*) musical instruments, as the wise should know them, are made of bamboo[^mg1]. The rules regarding their notes (*svara*) and the Grāma are the same as that of the Vīṇā.
 
 
-[^1]:  As the first Indian flute was made from vaṃśa or bamboo, it was called Vaṃśa. Śd. mentions also horns besides flutes made of wood (khadira and sandal), ivory and different metals (iron, kāṃsya, silver, and gold), which came into use in later times (see SR. VI. 424ff). The conchshell (śaṅkha) is also another hollow (suṣira) instrument, but it is scarcely used as a musical appliance.
+[^mg1]:  As the first Indian flute was made from vaṃśa or bamboo, it was called Vaṃśa. Śd. mentions also horns besides flutes made of wood (khadira and sandal), ivory and different metals (iron, kāṃsya, silver, and gold), which came into use in later times (see SR. VI. 424ff). The conchshell (śaṅkha) is also another hollow (suṣira) instrument, but it is scarcely used as a musical appliance.
 
-2\. The notes of a flute are known to have two, three and four [Śrutis], and they are either ‘shaken’ (*kampita*), ‘half-open’ (*ardha-mukta*) and ‘fully open’ (*vyakta-mukta*).[^2]
+2\. The notes of a flute are known to have two, three and four [Śrutis], and they are either ‘shaken’ (*kampita*), ‘half-open’ (*ardha-mukta*) and ‘fully open’ (*vyakta-mukta*).[^mg2]
 
-3\. As, above that[^3], a note of the Vīṇā is changed into another, so in the case of the flute also it does likewise.
-
-
-[^3]:  Here tatropari (lit. there above) means ‘if śrutis are further increased’.
+3\. As, above that[^mg3], a note of the Vīṇā is changed into another, so in the case of the flute also it does likewise.
 
 
-[^2]:  These indicate the ways of producing the notes. See 5ff. below. Sd. however, mentions five such ways as kampita, valita, mukta, arihamukta and nipīḍita (SR. VI. 457ff).
-
-4\. The number of Śrutis in notes [produced in a flute], will be two, three or four, and by prolonging the blow the remaining notes[^4] may also be produced.
+[^mg3]:  Here tatropari (lit. there above) means ‘if śrutis are further increased’.
 
 
-[^4]:  These are the Sādhāraṇa and the Kākalī notes. See 9-10 below.
+[^mg2]:  These indicate the ways of producing the notes. See 5ff. below. Sd. however, mentions five such ways as kampita, valita, mukta, arihamukta and nipīḍita (SR. VI. 457ff).
+
+4\. The number of Śrutis in notes [produced in a flute], will be two, three or four, and by prolonging the blow the remaining notes[^mg4] may also be produced.
+
+
+[^mg4]:  These are the Sādhāraṇa and the Kākalī notes. See 9-10 below.
 
 5\. Notes have characteristics determined by the Śrutis numbering four, three or two produced by the application of fingers while playing the flute. Listen about that.
 
-6-7. The note produced from a [flute-]hole thoroughly free from a finger, consists of four Śrutis, and that from a hole on which a shaking finger is placed, consists of three Śrutis, and a note consisting of two Śrutis, is produced from a hole which is partly (lit. half) free from a finger.[^5]
+6-7. The note produced from a [flute-]hole thoroughly free from a finger, consists of four Śrutis, and that from a hole on which a shaking finger is placed, consists of three Śrutis, and a note consisting of two Śrutis, is produced from a hole which is partly (lit. half) free from a finger.[^mg5]
 
-7-9. All these are the notes in the Madhyama Grāma.[^6] Notes of the Ṣaḍja Grāma will be as follows: Ṣaḍja, Madhyama and Pañcama will arise from a hole fully open, Dhaivata and Ṛṣabha from a hole covered by a shaking finger, and from a hole partly (lit. half) free from a finger, will arise Gāndhāra and Niṣāda.[^7]
-
-
-
-[^7]:  To show the connexion of different fingers of the two hands with the production of seven notes, Ag. (p. 563) quotes the following:
-
-[^6]:  Though the Ṣaḍja Grāma has been mentioned first in XXVIII (25-26), it has been given here the second place. The significance of this, is not clear.
+7-9. All these are the notes in the Madhyama Grāma.[^mg6] Notes of the Ṣaḍja Grāma will be as follows: Ṣaḍja, Madhyama and Pañcama will arise from a hole fully open, Dhaivata and Ṛṣabha from a hole covered by a shaking finger, and from a hole partly (lit. half) free from a finger, will arise Gāndhāra and Niṣāda.[^mg7]
 
 
-[^5]:  Śd. gives more elaborate directions in this regard (SR. VI. 447-448).
 
-9-10. Niṣāda and Gāndhāra [respectively] coming in juxtaposition with Ṣaḍja and Madhyama and modifying themselves in characteristic Śrutis, will give rise to the Overlapping (*svara-sādhāraṇa*) and the Kākalī notes.[^8]
+[^mg7]:  To show the connexion of different fingers of the two hands with the production of seven notes, Ag. (p. 563) quotes the following:
+
+[^mg6]:  Though the Ṣaḍja Grāma has been mentioned first in XXVIII (25-26), it has been given here the second place. The significance of this, is not clear.
+
+
+[^mg5]:  Śd. gives more elaborate directions in this regard (SR. VI. 447-448).
+
+9-10. Niṣāda and Gāndhāra [respectively] coming in juxtaposition with Ṣaḍja and Madhyama and modifying themselves in characteristic Śrutis, will give rise to the Overlapping (*svara-sādhāraṇa*) and the Kākalī notes.[^mg8]
 
 11\. The notes of the flute should be perfected (lit. accomplished) with the help of the Vīṇā and of the human throat.
 
 
-[^8]:  Śd. gives more detailed directions about the production of notes (SR. VI. 449-453). Mr. Fox Strangways gives a number of flute scales collected from different parts of India (MH. p. 102). These possibly include some valuable materials for the study of ancient Indian musical scales and intervals, for the flute has been one of the most primitive instruments of Indian music.
+[^mg8]:  Śd. gives more detailed directions about the production of notes (SR. VI. 449-453). Mr. Fox Strangways gives a number of flute scales collected from different parts of India (MH. p. 102). These possibly include some valuable materials for the study of ancient Indian musical scales and intervals, for the flute has been one of the most primitive instruments of Indian music.
 
-The very notes which the singer will attain, should be sung in accompaniment of a flute. A unision of the human throat (lit. the body), the Vīṇā and the flute, is [specially] praised.[^9]
+The very notes which the singer will attain, should be sung in accompaniment of a flute. A unision of the human throat (lit. the body), the Vīṇā and the flute, is [specially] praised.[^mg9]
 
-12\. The music of the flute, which is steady, not very loud and furnished with the Varṇas and the Alaṃkāras, and follows rules,[^10] is sweet and soothing.
-
-
-[^10]:  The rules mentioned here possibly relate to the manner in which the flute should be played on different occasions in a play. The following quotation from Mataṅga by Ag. (p. 567) probably gives such rules.
+12\. The music of the flute, which is steady, not very loud and furnished with the Varṇas and the Alaṃkāras, and follows rules,[^mg10] is sweet and soothing.
 
 
-[^9]:  See SR. VI. 651.
+[^mg10]:  The rules mentioned here possibly relate to the manner in which the flute should be played on different occasions in a play. The following quotation from Mataṅga by Ag. (p. 567) probably gives such rules.
+
+
+[^mg9]:  See SR. VI. 651.
 
 13\. These should be known regarding [musical] notes by persons playing flutes. I shall next speak of the solid musical instruments.
 
