--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/31.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/31.md
@@ -2,18 +2,18 @@
 title = "31 On the Time-measure (tāla)"
 
 +++
-1\. The [instrument named] Tāla[^1] is of the ‘solid’ class (*ghana*), and it relates to a division into Kalās (*kalāpāta*)[^2] and to an observation of the tempo (*laya*).[^3] Those who apply Tālas in a musical performance, should know Kalās to be the measure of time (*tāla*.)
+1\. The [instrument named] Tāla[^mg1] is of the ‘solid’ class (*ghana*), and it relates to a division into Kalās (*kalāpāta*)[^mg2] and to an observation of the tempo (*laya*).[^mg3] Those who apply Tālas in a musical performance, should know Kalās to be the measure of time (*tāla*.)
 
 
-[^3]:  See below 4 and 486.
+[^mg3]:  See below 4 and 486.
 
 
-[^2]:  By following Śd. (SR. V. 5-6) one will probably see in this compound two words kalā and pāta. But such a view will be misleading.
+[^mg2]:  By following Śd. (SR. V. 5-6) one will probably see in this compound two words kalā and pāta. But such a view will be misleading.
 
 
-[^1]:  This word comes from tala (the palm of the hand), and primarily refers to the beating of time by the clapping of hands, e.g. tālaiḥ śiñjāvalaya-subhagaiḥ nartito kāntayā me (Megh. 79). But generally it is used in the sense of ‘time-measure.’ Śd.’s explanation of this word (SR. VI. 2) seems to be fanciful. The word is also used as a variety of audible Tāla which is of four kinds. See below 32.
+[^mg1]:  This word comes from tala (the palm of the hand), and primarily refers to the beating of time by the clapping of hands, e.g. tālaiḥ śiñjāvalaya-subhagaiḥ nartito kāntayā me (Megh. 79). But generally it is used in the sense of ‘time-measure.’ Śd.’s explanation of this word (SR. VI. 2) seems to be fanciful. The word is also used as a variety of audible Tāla which is of four kinds. See below 32.
 
-2\. The popular Kalā,[^4] [together with] the Kāṣṭhā[^5] and Nimeṣa[^6], which has been accepted (lit. remembered) by the wise, is not the Kalā in [observing] the Tāla. The Kalā arising from the Tāla is different.
+2\. The popular Kalā,[^mg4] [together with] the Kāṣṭhā[^mg5] and Nimeṣa[^mg6], which has been accepted (lit. remembered) by the wise, is not the Kalā in [observing] the Tāla. The Kalā arising from the Tāla is different.
 
 
 [^6]:  Kśīrasvāmin defines Nimeṣa as the time required for a twinkling of eyelids (nimeṣo’kṣispanda-kālaḥ) and see also SM. II. 3. 53.
