--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/32.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/32.md
@@ -2,24 +2,24 @@
 title = "32 The Dhruvā Songs"
 
 +++
-1\. Listen [now] from me about those types [of songs] which have been called Dhruvās by Brāhmaṇas such as Nārada[^1] and others.
+1\. Listen [now] from me about those types [of songs] which have been called Dhruvās by Brāhmaṇas such as Nārada[^mg1] and others.
 
 
-[^1]:  An old authority on music.
+[^mg1]:  An old authority on music.
 
-2\. The Ṛk[^2], Pāṇikā[^3] and Gāthā[^4], and the Seven [traditional] Types [of songs][^5] which have seven different measures, are called Dhruvās.
-
-
-[^5]:  See XXXL. 220ff,
+2\. The Ṛk[^mg2], Pāṇikā[^mg3] and Gāthā[^mg4], and the Seven [traditional] Types [of songs][^mg5] which have seven different measures, are called Dhruvās.
 
 
-[^4]:  The Sāman chants. See MH (Ch. X).
+[^mg5]:  See XXXL. 220ff,
 
 
-[^3]:  This term is otherwise unknown.
+[^mg4]:  The Sāman chants. See MH (Ch. X).
 
 
-[^2]:  The recitation of Ṛk stanzas.
+[^mg3]:  This term is otherwise unknown.
+
+
+[^mg2]:  The recitation of Ṛk stanzas.
 
 3\. O Brāhmaṇas, I shall discuss those [songs] in different metres which being created from those types, attain the status of Dhruvās.
 
