--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/33.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/33.md
@@ -2,21 +2,21 @@
 title = "33 On Covered Instruments (avanaddha)"
 
 +++
-1-2. I have spoken briefly about the stringed instruments. I shall now speak of the class of covered musical instruments, their characteristics and functions as well as of playing drums named Mṛdaṅga,[^1] Paṇava[^2] and Dardura.[^3]
+1-2. I have spoken briefly about the stringed instruments. I shall now speak of the class of covered musical instruments, their characteristics and functions as well as of playing drums named Mṛdaṅga,[^mg1] Paṇava[^mg2] and Dardura.[^mg3]
 
 
 
-[^3]:  This is also called ‘Dardara’. Possibly this is the right form of the name. One side of its wooden frame is covered with hide; it looks like a large gong. See also note 6 on XXVIII 4-5.
+[^mg3]:  This is also called ‘Dardara’. Possibly this is the right form of the name. One side of its wooden frame is covered with hide; it looks like a large gong. See also note 6 on XXVIII 4-5.
 
-[^2]:  A drum or tabor made probably of wood. See the note 6 on XXVIII. 4-5.
-
-
-[^1]:  A kind of earthen drum still in use in Bengal among the singers of Vaiṣṇava kīrtana.
-
-3\. Svāti and Nārada[^4] have [respectively] spoken about the Gāndharva, and the playing of musical instruments together with their quality of amplitude, and their characteristics and functions.
+[^mg2]:  A drum or tabor made probably of wood. See the note 6 on XXVIII. 4-5.
 
 
-[^4]:  See above XXXII. 525. It does not mention Svāti.
+[^mg1]:  A kind of earthen drum still in use in Bengal among the singers of Vaiṣṇava kīrtana.
+
+3\. Svāti and Nārada[^mg4] have [respectively] spoken about the Gāndharva, and the playing of musical instruments together with their quality of amplitude, and their characteristics and functions.
+
+
+[^mg4]:  See above XXXII. 525. It does not mention Svāti.
 
 ## *Origin of drums*
 
