--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/34.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/34.md
@@ -10,33 +10,33 @@ title = "34 Types of Characters (prakṛti)"
 
 ### *A Superior Male Character*
 
-3-4. [A man] who has controlled his senses, is wise, skilled[^1] in various arts and crafts (*śilpa*), honest, expert in enjoyment,[^2] brings consolation to the poor, is versed in different Śāstras, grave, liberal, patient and munificent, is to be known as a ‘superior’ (*uttama*) [male][^3] character.
+3-4. [A man] who has controlled his senses, is wise, skilled[^mg1] in various arts and crafts (*śilpa*), honest, expert in enjoyment,[^mg2] brings consolation to the poor, is versed in different Śāstras, grave, liberal, patient and munificent, is to be known as a ‘superior’ (*uttama*) [male][^mg3] character.
 
 
-[^3]:  As female characters have been treated of below, this and the two following passages relate to male characters.
+[^mg3]:  As female characters have been treated of below, this and the two following passages relate to male characters.
 
 
-[^2]:  The text here is corrupt, The reading bhogadakṣā is suggested on the assumption that a superior male character controlling his senses should not invariably be an ascetic, and he should be disposed to enjoy life legitimately.
+[^mg2]:  The text here is corrupt, The reading bhogadakṣā is suggested on the assumption that a superior male character controlling his senses should not invariably be an ascetic, and he should be disposed to enjoy life legitimately.
 
 
-[^1]:  See note 1 on 4-5 below.
+[^mg1]:  See note 1 on 4-5 below.
 
 ### *A Middling Male Character*
 
-4-5. [A man] who is an expert in the manners of people, proficient[^4] in arts and crafts as well as in Śāstras, has wisdom, sweetness [of manners], is to be known as a ‘middling’ (*madhyama*) [male] character.
+4-5. [A man] who is an expert in the manners of people, proficient[^mg4] in arts and crafts as well as in Śāstras, has wisdom, sweetness [of manners], is to be known as a ‘middling’ (*madhyama*) [male] character.
 
 
-[^4]:  If should be noticed that a superior male character should be skilled in various arts and crafts, while a middling male character should be proficient in these. The purpose of this distinction seems to be significant. A superior character should have knowledge of arts and crafts as an accomplishment, while the middling character should be capable of making a professional use of these for earning a livelihood. Saṃvāhaka (Mṛcch. II) who is a middling character, seems to support this view. About his practising massage, he says: Madam, I learnt it as an art. It has now become my profession (ajjae kaleti sikkhidā, ājīviā dāṇim saṃvuttā).
+[^mg4]:  If should be noticed that a superior male character should be skilled in various arts and crafts, while a middling male character should be proficient in these. The purpose of this distinction seems to be significant. A superior character should have knowledge of arts and crafts as an accomplishment, while the middling character should be capable of making a professional use of these for earning a livelihood. Saṃvāhaka (Mṛcch. II) who is a middling character, seems to support this view. About his practising massage, he says: Madam, I learnt it as an art. It has now become my profession (ajjae kaleti sikkhidā, ājīviā dāṇim saṃvuttā).
 
 ### *Inferior Male Characters*
 
-6-9. [Men] who are harsh in words, ill-mannered, low-spirited, criminally disposed,[^5] irascible and violent, can kill friends, can kill anyone by torturing,[^6] are prone to engage himself in useless things, speak very little, are mean, haughty in words, ungrateful, indolent, expert in insulting honoured persons, covetous of women, fond of quarrel, treacherous, doers of evil deeds, stealers of others’ properties, are to be known as ‘inferior’ (*adhama*) [male] characters. These are the three classes of male character according to their nature.
+6-9. [Men] who are harsh in words, ill-mannered, low-spirited, criminally disposed,[^mg5] irascible and violent, can kill friends, can kill anyone by torturing,[^mg6] are prone to engage himself in useless things, speak very little, are mean, haughty in words, ungrateful, indolent, expert in insulting honoured persons, covetous of women, fond of quarrel, treacherous, doers of evil deeds, stealers of others’ properties, are to be known as ‘inferior’ (*adhama*) [male] characters. These are the three classes of male character according to their nature.
 
 
-[^6]:  Citraghātaka.
+[^mg6]:  Citraghātaka.
 
 
-[^5]:  Śalyabuddhika.
+[^mg5]:  Śalyabuddhika.
 
 ### *A Superior Female Character*
 
@@ -52,10 +52,10 @@ title = "34 Types of Characters (prakṛti)"
 
 ## *A Character of Mixed Nature*
 
-14-16. Maid servants and the like are characters of mixed nature. A hermaphrodite is also a mixed character, but of the inferior kind. O the best of Brahmins, the Śakāra[^7] and the Viṭa[^8] and others [like them] in a drama, are also to be known as characters of mixed nature.
+14-16. Maid servants and the like are characters of mixed nature. A hermaphrodite is also a mixed character, but of the inferior kind. O the best of Brahmins, the Śakāra[^mg7] and the Viṭa[^mg8] and others [like them] in a drama, are also to be known as characters of mixed nature.
 
 
-[^8]:  See XXXV. 77.
+[^mg8]:  See XXXV. 77.
 
 
 [^7]:  See XXXV. 78
