--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/35.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/35.md
@@ -30,19 +30,19 @@ title = "35 Distribution of Roles (bhūmikā)"
 
 ## *The Role of the Kañcukīyas and the Śrotriyas*
 
-14\. Persons who have brown eyes, long nose, and who are short or tall, should be employed in the role of Kañcukīyas and Śrotriyas.[^1]
+14\. Persons who have brown eyes, long nose, and who are short or tall, should be employed in the role of Kañcukīyas and Śrotriyas.[^mg1]
 
 ## *The Role of Minor Characters*
 
 
-[^1]:  The racial type indicated by this description probably shows that the K. and Ś. were of the Aryan descent.
+[^mg1]:  The racial type indicated by this description probably shows that the K. and Ś. were of the Aryan descent.
 
 15\. In other cases too, similar dramatic convention has been prescribed; roles should be assigned after considering the actors’ age and physical condition.
 
-16-17. [For example], persons[^2] who are slow-moving, very dwarfish, hunch-backed, uncouth, odd-faced and fat, who have expressionless (lit. motionless) eyes, one eye blind, small chin and low nose, ugly raiments, evil nature, deformed body and who have marks of a slave, should be employed in the role of slaves.
+16-17. [For example], persons[^mg2] who are slow-moving, very dwarfish, hunch-backed, uncouth, odd-faced and fat, who have expressionless (lit. motionless) eyes, one eye blind, small chin and low nose, ugly raiments, evil nature, deformed body and who have marks of a slave, should be employed in the role of slaves.
 
 
-[^2]:  From the general description given in this passage and the marks mentioned in particular, it appears that slaves were of non-Aryan descent. And Kauṭilya seems to support this view by saying that āryasya na dāsa-bhāvaḥ (an Aryan should not be enslaved). From this description it also appears that the slaves were at one time branded with marks.
+[^mg2]:  From the general description given in this passage and the marks mentioned in particular, it appears that slaves were of non-Aryan descent. And Kauṭilya seems to support this view by saying that āryasya na dāsa-bhāvaḥ (an Aryan should not be enslaved). From this description it also appears that the slaves were at one time branded with marks.
 
 ## *The Role of Fatigued Persons*
 
@@ -62,12 +62,12 @@ A fat person should be employed to represent a person without any disease.
 
 ## *The Role of a Character with Extra and Special Limbs*
 
-22-24. In case of characters which have many arms, many heads, and uncouth faces and faces of animals, including beasts of prey, asses, camels, horses and the like, the Director (lit. the master) should according to his direction have the masks (lit. them) made with clay, wood, lac and leather. [^3]
+22-24. In case of characters which have many arms, many heads, and uncouth faces and faces of animals, including beasts of prey, asses, camels, horses and the like, the Director (lit. the master) should according to his direction have the masks (lit. them) made with clay, wood, lac and leather. [^mg3]
 
 ## *The Entry of a Character*
 
 
-[^3]:  Details regarding this are given in XXIII.
+[^mg3]:  Details regarding this are given in XXIII.
 
 24\. One should not enter the stage in his own natural appearance. His own body should be covered with paints and decorations.
 
@@ -77,10 +77,10 @@ A fat person should be employed to represent a person without any disease.
 
 ## *The Method of Proper Impersonation*
 
-26-27. Just as a man who renounces his own nature together with his body and assumes another’s nature by entering into his body[^4] so the wise actor thinking within himself that ‘I am he’ should represent the States of another person by speech, gait, gesture and other movements.
+26-27. Just as a man who renounces his own nature together with his body and assumes another’s nature by entering into his body[^mg4] so the wise actor thinking within himself that ‘I am he’ should represent the States of another person by speech, gait, gesture and other movements.
 
 
-[^4]:  This is said on the assumption that a Yogin possessing miraculous powers could, according to his will, leave his own body and enter that of another when the latter was just dead. Śaṅkarācārya is said to have practised this kind of miracle.
+[^mg4]:  This is said on the assumption that a Yogin possessing miraculous powers could, according to his will, leave his own body and enter that of another when the latter was just dead. Śaṅkarācārya is said to have practised this kind of miracle.
 
 ## *Three Kinds of Impersonation*
 
@@ -96,7 +96,7 @@ A fat person should be employed to represent a person without any disease.
 
 ## *The Imitative Impersonation*
 
-31-32. When a man assumes a woman’s character,[^5] the impersonation is called imitative (*rūpānusāriṇī*) by the best actors. A woman also may assume if she likes, a man’s role in actual practice. But an old and a young man should not try [to imitate] each other’s manners.[^6]
+31-32. When a man assumes a woman’s character,[^mg5] the impersonation is called imitative (*rūpānusāriṇī*) by the best actors. A woman also may assume if she likes, a man’s role in actual practice. But an old and a young man should not try [to imitate] each other’s manners.[^mg6]
 
 
 
