--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/00/intro/1/06.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/00/intro/1/06.md
@@ -4,48 +4,48 @@ title = "06 Part 6 - The Nāṭyaśāstra: The Text and its Commentators"
 +++
 ## 1. Its Author
 
-The Nāṭyaśāstra is commonly attributed to Bharata Muni.[^1] But Bharata cannot be taken as its author, for in the Nāṭyaśāstra itself his mythical character is very obvious, and the majority of the Purāṇas are silent about the so called author of the Nāṭyaśāstra[^2], and there is not a single legend about him in any of the extant Purāṇas or the Rāmāyaṇa and the Mahābhārata. The word *Bharata* which originally meant ‘an actor’ seems to have given rise to an eponymous author of the *Bharataśāstra* or the *Naṭaśāstra* (the manual of actors).
+The Nāṭyaśāstra is commonly attributed to Bharata Muni.[^mg1] But Bharata cannot be taken as its author, for in the Nāṭyaśāstra itself his mythical character is very obvious, and the majority of the Purāṇas are silent about the so called author of the Nāṭyaśāstra[^mg2], and there is not a single legend about him in any of the extant Purāṇas or the Rāmāyaṇa and the Mahābhārata. The word *Bharata* which originally meant ‘an actor’ seems to have given rise to an eponymous author of the *Bharataśāstra* or the *Naṭaśāstra* (the manual of actors).
 
 
-[^2]:  See NSI 2-5 note 2.
+[^mg2]:  See NSI 2-5 note 2.
 
 
-[^1]:  See IHQ. Vol. Vi. 1930. pp. 72 ff, Annals of BORI, Vol. XV, 1934, p. 90fn.
+[^mg1]:  See IHQ. Vol. Vi. 1930. pp. 72 ff, Annals of BORI, Vol. XV, 1934, p. 90fn.
 
 
 
 ## 2. Its Two Recensions
 
-Whoever might be the author of the Nāṭyaśāstra it is certain that the work itself possesses undoubted signs of great antiquity, and one of these is that its text is available in two distinct recensions. In having two partly divergent recensions the Nāṭyaśāstra can well be compared with works like the Nirukta, the Bṛhaddevatā and the Śakuntalā. The editors of these works have differently settled the claims of their shorter and longer recensions. At first sight the tendency would be to accept the shorter recension, as representing the original better, because elaboration would seem in most cases to come later. But opinion is divided in this matter: Pischel regarded the longer recension as being nearer the orginal[^3], Macodonell has also given his verdict in favour of the longer recesion[^4] but he has not ventured to reject the shorter recension entirely as being late, and Lakshman Sarup has definitely suggested that the shorter recension is the earlier one.[^5] All these go to show that the problem of the relation between two recensions of any ancient work is not so simple as to be solved off-hand. So in this case also we should not settle the issue with the idea that the longer recension owes its bulk to interpolations.
+Whoever might be the author of the Nāṭyaśāstra it is certain that the work itself possesses undoubted signs of great antiquity, and one of these is that its text is available in two distinct recensions. In having two partly divergent recensions the Nāṭyaśāstra can well be compared with works like the Nirukta, the Bṛhaddevatā and the Śakuntalā. The editors of these works have differently settled the claims of their shorter and longer recensions. At first sight the tendency would be to accept the shorter recension, as representing the original better, because elaboration would seem in most cases to come later. But opinion is divided in this matter: Pischel regarded the longer recension as being nearer the orginal[^mg3], Macodonell has also given his verdict in favour of the longer recesion[^mg4] but he has not ventured to reject the shorter recension entirely as being late, and Lakshman Sarup has definitely suggested that the shorter recension is the earlier one.[^mg5] All these go to show that the problem of the relation between two recensions of any ancient work is not so simple as to be solved off-hand. So in this case also we should not settle the issue with the idea that the longer recension owes its bulk to interpolations.
 
 
-[^5]:  Introduction to the Nighaṇṭu and Nirukta, p. 39.
+[^mg5]:  Introduction to the Nighaṇṭu and Nirukta, p. 39.
 
 
-[^4]:  The Bṛhaddevatā, HOS. Vol. I. p. XVIII-XIX.
+[^mg4]:  The Bṛhaddevatā, HOS. Vol. I. p. XVIII-XIX.
 
 
-[^3]:  Kalidasa’s Śakuntalā, HOS. p. XI.
+[^mg3]:  Kalidasa’s Śakuntalā, HOS. p. XI.
 
-The text-history of the Nāṭyaśāstra shows that already in the tenth century the work was available in two recensions. Dhanañjaya the author of the Daśarūpa quotes from the shorter recension while Bhoja, who closely follows him, quoted from the longer one.[^6] Abhinava in his commentry of the Nāṭyaśāstra, however, used the shorter recension as the basis of his work.[^7] It is likely that the longtime which passed since then has witnessed at least minor changes, intentional as well as unintentional, in the text of both the roconsions. Hence the problem becomes still more difficult. But a careful examination of the rival recensions may give us some clue to their relative authenticity. Ramakrishna Kavi who has examined no less then forty Mss of the text, is of opinion that the longer recension (which he calls B.) seems to be ancient, although it contains some interpolation (pointed at by him) going back to a time prior to Abhinava.[^8] Mr. Kavi, however, does not try to explain the origin of the shorter recension which he calls A. This view regarding the relative authenticity of the longer recension seems to possess justification. Reasons supporting it are to be found in the tests differentiating the two recensions, which are as follows:
-
-
-[^8]:  See above note 6.
+The text-history of the Nāṭyaśāstra shows that already in the tenth century the work was available in two recensions. Dhanañjaya the author of the Daśarūpa quotes from the shorter recension while Bhoja, who closely follows him, quoted from the longer one.[^mg6] Abhinava in his commentry of the Nāṭyaśāstra, however, used the shorter recension as the basis of his work.[^mg7] It is likely that the longtime which passed since then has witnessed at least minor changes, intentional as well as unintentional, in the text of both the roconsions. Hence the problem becomes still more difficult. But a careful examination of the rival recensions may give us some clue to their relative authenticity. Ramakrishna Kavi who has examined no less then forty Mss of the text, is of opinion that the longer recension (which he calls B.) seems to be ancient, although it contains some interpolation (pointed at by him) going back to a time prior to Abhinava.[^mg8] Mr. Kavi, however, does not try to explain the origin of the shorter recension which he calls A. This view regarding the relative authenticity of the longer recension seems to possess justification. Reasons supporting it are to be found in the tests differentiating the two recensions, which are as follows:
 
 
-[^7]:  See above note 6.
+[^mg8]:  See above note 6.
 
 
-[^6]:  Preface to Baroda ed. of NŚ. Vol. I. p. 8.
+[^mg7]:  See above note 6.
+
+
+[^mg6]:  Preface to Baroda ed. of NŚ. Vol. I. p. 8.
 
 \(i\) Chapters XIV and XV of the shorter recension dealing with prosody introduce the later terminology of Piṅgala (ra, ja, sa, na, and bha *gaṇas* etc.) while the longer recension uses terms like *laghu* and *guru* in defining the scheme of metres.
 
-\(ii\) The shorter recension in its chapter XV gives definitions of metres in Upajāti. while the corresponding chapter (XVI) of the longer recension gives them in Anuṣṭup metre and in a different order. Considering the fact that the bulk of the Nāṭyaśāstra is written in this (Anuṣṭup) metre the longer recension in this case seems to run closer to the original work.[^9]
+\(ii\) The shorter recension in its chapter XV gives definitions of metres in Upajāti. while the corresponding chapter (XVI) of the longer recension gives them in Anuṣṭup metre and in a different order. Considering the fact that the bulk of the Nāṭyaśāstra is written in this (Anuṣṭup) metre the longer recension in this case seems to run closer to the original work.[^mg9]
 
 Though Ramakrishna Kavi, has overlooked it, there is yet another point which may bo said to differentiate the two recensions. The chapter dealing with the Nāṭyaguṇas and Alaṃkāras have nearly forty ślokas differently worded in the two recensions. These ślokas in the longer recension (ch. XVII) are written in the usual simple language of the Nāṭyaśāstra while (ch. XVI) in the shorter recension (the ślokas) betray a later polish. The opening stanzas of the chaptar (XVI) in the shorter recension are in Upajāti metre while in the longer recension (ch. XVII) they are in the śloka metre. This points to the earlier origin of the latter for the bulk of the Nāṭyaśāstra as has been pointed out before is composed in the same metre. Now the shorter recension which appears to be of later origin, does not seem to be totally devoid of worth. It appears that this has in certain cases preserved what once existed but are now missing in the longer recension. The cases in which the shorter recension gives in a different language the corresponding passages of the longer recension may be explained by assuming that the passages in question were probably written from memory of the original in the prototype of the recension.
 
 
-[^9]:  See above note 6.
+[^mg9]:  See above note 6.
 
 
 
@@ -59,10 +59,10 @@ The alleged indications may be summed up as follows:
 
 \(ii\) The mention of Kohala as the future writer on certain topics in the Nāṭyaśāstra (XXXVI. 63). (iii) Bhavabhūti’s reference to Bharata Muni, the socalled author of the Śāstra, as the Tauryatrika-sūtrakāra.
 
-\(iv\) The mention of the *sūtra*, the *bhāṣya* and the *kārikā* as its constituent parts in the Nāṭyaśāstra itself along with the the existence of prose passages in it. As for the first alleged indication Dr. S. K. De has tried to connect the colophon of the Nāṭyaśāstra (*samāptaś cāyam Nandi-Bharata-saṃgīta-pustakam*) with the chapter on music only.[^10] He opines that the *Nandi-Bharata* of the colophon indicates that the chapters on music ( XXVIII-XXXIII) are Bharata’s original teaching on the subject as modified by the doctrine of Nandī. If we could accept the view it would have been easy to believe in the composite authorship of the Nāṭyaśāstra. But this does not seem to be possible for the following considerations:
+\(iv\) The mention of the *sūtra*, the *bhāṣya* and the *kārikā* as its constituent parts in the Nāṭyaśāstra itself along with the the existence of prose passages in it. As for the first alleged indication Dr. S. K. De has tried to connect the colophon of the Nāṭyaśāstra (*samāptaś cāyam Nandi-Bharata-saṃgīta-pustakam*) with the chapter on music only.[^mg10] He opines that the *Nandi-Bharata* of the colophon indicates that the chapters on music ( XXVIII-XXXIII) are Bharata’s original teaching on the subject as modified by the doctrine of Nandī. If we could accept the view it would have been easy to believe in the composite authorship of the Nāṭyaśāstra. But this does not seem to be possible for the following considerations:
 
 
-[^10]:  Skt. Poetics, Vol 1. p. 24.
+[^mg10]:  Skt. Poetics, Vol 1. p. 24.
 
 \(a\) The colophon in question stands at the end of two Mss. copied from the same original and are missing in all the rest of the available Mss.
 
@@ -78,7 +78,7 @@ The most important of all the alleged indications of the plural authorship of th
 
 ## 4. It Scope and Importance
 
-It has already been shown what a great variety of topics the Nāṭyaśāstra discusses in connection with its principal theme, the dramatic art. In sharp contrast with almost all the later writers on the subject its author treats of dramaturgy as well as histrionics. In justification of this twofold aspect of this work Abhinava says that “it is for the guidance of the producers as well as playwrights”[^11]. As the drama in any form is primarily and essentially a spectacle, laws of its production should be considered indispensable for the playwrights. It is a well-known fact that many good literary dramas often get rejected by the theatrical directors because of their construction being found unsuitable for successful and profitable representation in the stage. The author of the Nāṭyaśāstra was evidently conscious about this vital connection between the literary and technical aspects of a drama, and treated of both very elaborately. It is a very unique text dealing with every possible aspect of the dramatic theory and practice. It is no wonder therefore that the Nāṭyaśāstra was often quoted or referred to in later treatises on gestures, poetics, music, prosody and even on grammar, besides being often laid under contribution by commentators of diffirent Sanskrit and Prakrit plays. And all the later writers on dramaturgy too depended greatly if not excusively on this work, and most of them expressly mentioned their debt to the Muni Bharata, the supposed author of the Nāṭyaśāstra.
+It has already been shown what a great variety of topics the Nāṭyaśāstra discusses in connection with its principal theme, the dramatic art. In sharp contrast with almost all the later writers on the subject its author treats of dramaturgy as well as histrionics. In justification of this twofold aspect of this work Abhinava says that “it is for the guidance of the producers as well as playwrights”[^mg11]. As the drama in any form is primarily and essentially a spectacle, laws of its production should be considered indispensable for the playwrights. It is a well-known fact that many good literary dramas often get rejected by the theatrical directors because of their construction being found unsuitable for successful and profitable representation in the stage. The author of the Nāṭyaśāstra was evidently conscious about this vital connection between the literary and technical aspects of a drama, and treated of both very elaborately. It is a very unique text dealing with every possible aspect of the dramatic theory and practice. It is no wonder therefore that the Nāṭyaśāstra was often quoted or referred to in later treatises on gestures, poetics, music, prosody and even on grammar, besides being often laid under contribution by commentators of diffirent Sanskrit and Prakrit plays. And all the later writers on dramaturgy too depended greatly if not excusively on this work, and most of them expressly mentioned their debt to the Muni Bharata, the supposed author of the Nāṭyaśāstra.
 
 
 [^11]:  Ag. I p. 7.
