--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/25.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/25.md
@@ -4,66 +4,66 @@ title = "25 Dealings with Courtezans (veśyā)"
 +++
 ## *The definition of an Expert Gallant*
 
-1\. One excelling (*viśeṣayet*)[^1] in all the arts (*kalā*)[^2] is called a Vaiśeṣika (specialist) or one is also called Vaiśika because of his dealings with the courtezans (*veśyopacāra*)[^3].
+1\. One excelling (*viśeṣayet*)[^mg1] in all the arts (*kalā*)[^mg2] is called a Vaiśeṣika (specialist) or one is also called Vaiśika because of his dealings with the courtezans (*veśyopacāra*)[^mg3].
 
 
-[^3]:  This etymology is sensible. For veśa (residence of courtezans) is connected with veśyā (woman who is available for all the members of the tribe or the settlement).
+[^mg3]:  This etymology is sensible. For veśa (residence of courtezans) is connected with veśyā (woman who is available for all the members of the tribe or the settlement).
 
 
-[^2]:  These are generally considered to be sixty-four in number. See Vātsyāyana. KS. I. 3. 34. But the Jains have their number as seventy-two (See Amulya Chandra Sen, “Social Life in Jain Literature,” Calcutta, 1933. pp. 12-15).
+[^mg2]:  These are generally considered to be sixty-four in number. See Vātsyāyana. KS. I. 3. 34. But the Jains have their number as seventy-two (See Amulya Chandra Sen, “Social Life in Jain Literature,” Calcutta, 1933. pp. 12-15).
 
 
-[^1]:  See BhP. p. 106, 1-10.
+[^mg1]:  See BhP. p. 106, 1-10.
 
-2\. A man who has learnt all the arts (*kalā*)[^4] and is an adept in all the crafts (*śilpa*)[^5] and can [besides] captivate the heart of women, is called a Vaiśika (Expert Gallant)[^6].
-
-
-[^6]:  Another name for vaiśika (Expert Gallant) seems to be viṭa. See KS. 1.4. 16; SD. 80 and also XXXV. 74.
+2\. A man who has learnt all the arts (*kalā*)[^mg4] and is an adept in all the crafts (*śilpa*)[^mg5] and can [besides] captivate the heart of women, is called a Vaiśika (Expert Gallant)[^mg6].
 
 
-[^5]:  The word kalā is usually synonymous with śilpa. For the most of the sixty-four items included by Vātsyāyana (l.c.) are nothing but crafts. But when the two words are used together in a sentence, śilpa may be taken in the sense of ‘craft’ only.
+[^mg6]:  Another name for vaiśika (Expert Gallant) seems to be viṭa. See KS. 1.4. 16; SD. 80 and also XXXV. 74.
 
 
-[^4]:  This etymology is sensible. For veśa (residence of courtezans) is connected with veśyā (woman who is available for all the members of the tribe or the settlement).
+[^mg5]:  The word kalā is usually synonymous with śilpa. For the most of the sixty-four items included by Vātsyāyana (l.c.) are nothing but crafts. But when the two words are used together in a sentence, śilpa may be taken in the sense of ‘craft’ only.
+
+
+[^mg4]:  This etymology is sensible. For veśa (residence of courtezans) is connected with veśyā (woman who is available for all the members of the tribe or the settlement).
 
 ## *Qualjties of an Expert Gallant*
 
 3\. His thirty-three [characteristic] qualities are briefly of three classes: physical, extraneous (*āhārya*) and psychological (*sahaja*, lit. natural).
 
-4-7.[^7] One who is well-versed in the Śāstras, skilled in arts, crafts, well-formed, pleasant-looking, powerful, possessing self-command, desirable age, dress and pedigree, is friendly (*surabhi*), sweet-tempered munificent, patient, free from bragging, fearless, accustomed to use sweet words, clever, elegant, clean [in his habits], expert in the practice of love, honest, able to act suitably to time and place, speaker of no pityful words, accustomed to speak smilingly eloquent careful, sweet-tongued, greedless as a partner, full of faith, firm in resolve, not rash, making confidence to accessible (*gamyā*) women and has a sense of self-respect, is called an Expert Gallant.
+4-7.[^mg7] One who is well-versed in the Śāstras, skilled in arts, crafts, well-formed, pleasant-looking, powerful, possessing self-command, desirable age, dress and pedigree, is friendly (*surabhi*), sweet-tempered munificent, patient, free from bragging, fearless, accustomed to use sweet words, clever, elegant, clean [in his habits], expert in the practice of love, honest, able to act suitably to time and place, speaker of no pityful words, accustomed to speak smilingly eloquent careful, sweet-tongued, greedless as a partner, full of faith, firm in resolve, not rash, making confidence to accessible (*gamyā*) women and has a sense of self-respect, is called an Expert Gallant.
 
 
-[^7]:  See BhP. p, 106, 1.2-9.
+[^mg7]:  See BhP. p, 106, 1.2-9.
 
 8\. [According to another authority] his six [special] qualities are: that he should be devoted [in his love affairs], clean [in his habits], self-possessed, honest, dignified, have a [suitable] age and able to talk on varied topics (*citrābhidhāyī*).
 
 ## *A female Messenger*
 
-9-10. A wise woman, female story-teller, a female ascetic or a woman of the stage[^8], an intelligent woman, a female neighbour, a female friend, a maid-servant, an unmarried girl, a crafts-woman[^9], a foster-mother, a nun[^10] or a female fortune-teller [can be employed as female] a Messenger[^11].
+9-10. A wise woman, female story-teller, a female ascetic or a woman of the stage[^mg8], an intelligent woman, a female neighbour, a female friend, a maid-servant, an unmarried girl, a crafts-woman[^mg9], a foster-mother, a nun[^mg10] or a female fortune-teller [can be employed as female] a Messenger[^mg11].
 
 
-[^11]:  Cf. KS. V. 4. 23.
+[^mg11]:  Cf. KS. V. 4. 23.
 
 
-[^10]:  A nun of the heretical sects like the Buddhists. See note 4 below.
+[^mg10]:  A nun of the heretical sects like the Buddhists. See note 4 below.
 
 
-[^9]:  Cf. DR. II. 29; SD. 157 separate the words kāru and śilpin.
+[^mg9]:  Cf. DR. II. 29; SD. 157 separate the words kāru and śilpin.
 
 
-[^8]:  Ag. explains raṅgopajīv?tnī as rajakastrī.
+[^mg8]:  Ag. explains raṅgopajīv?tnī as rajakastrī.
 
 ## *Qualities of the Messenger*
 
-11\. A wise person should never engage as a Messenger any person (lit. male or female) who is foolish, beautiful, wealthy or diseased[^12].
+11\. A wise person should never engage as a Messenger any person (lit. male or female) who is foolish, beautiful, wealthy or diseased[^mg12].
 
 
-[^12]:  Cf. BhP. p.94 (1.9-10).
+[^mg12]:  Cf. BhP. p.94 (1.9-10).
 
-12\. Any woman should be engaged as a Messenger when she knows the art of encouraging [the beloved], is sweet in her words, honest, able to act suitably to the occasion, charming in her behaviour and is able to keep secrets[^13].
+12\. Any woman should be engaged as a Messenger when she knows the art of encouraging [the beloved], is sweet in her words, honest, able to act suitably to the occasion, charming in her behaviour and is able to keep secrets[^mg13].
 
 
-[^13]:  Cf. KS. I. 5. 28; SD. 158.
+[^mg13]:  Cf. KS. I. 5. 28; SD. 158.
 
 13\. She should encourage [the beloved one] by mentioning the various causes and should communicate the exact words [of the latter] and describe his condition[^14].
 
