--- a/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/36.md
+++ b/laxaNam/granthaH/nATyashAstram/manamohanAnuvAdaH/36.md
@@ -4,10 +4,10 @@ title = "36 Descent of Drama on the Earth"
 +++
 ## *Sages question.*
 
-1-6. Being pleased with this, the sages such as Ātreya,[^1] Vasiṣṭha, Pulastya, Pulaha, Kratu, Aṅgiras, Gautama, Agastya, Manu, the wise Āyus, Viśvāmitra, Sthūlaśiras, Saṃvarta, Pratimardana, Uśanas, Bṛhaspati, Vatsa, Cyavana, Kāśyapa, Dhruvā, Durvāsas, Jamadagni, Mārkaṇḍeya, Gālava, Bharadvāja, Raibhya, the venerable Vālmiki, Sthūlākṣa, Saṅkulākṣa, Kaṇva, Medhātithi, Kuśa, Nārada, Parvata, Suśarman, the two Ekadhanvins, Niṣṭhyūti, Bhavana, Dhaumya, Śatānanda, Kṛtavraṇa, Jāmadagnya Rāma, Jamadagni and Vāmana again spoke out of curiosity to the omniscient Bharata these words:
+1-6. Being pleased with this, the sages such as Ātreya,[^mg1] Vasiṣṭha, Pulastya, Pulaha, Kratu, Aṅgiras, Gautama, Agastya, Manu, the wise Āyus, Viśvāmitra, Sthūlaśiras, Saṃvarta, Pratimardana, Uśanas, Bṛhaspati, Vatsa, Cyavana, Kāśyapa, Dhruvā, Durvāsas, Jamadagni, Mārkaṇḍeya, Gālava, Bharadvāja, Raibhya, the venerable Vālmiki, Sthūlākṣa, Saṅkulākṣa, Kaṇva, Medhātithi, Kuśa, Nārada, Parvata, Suśarman, the two Ekadhanvins, Niṣṭhyūti, Bhavana, Dhaumya, Śatānanda, Kṛtavraṇa, Jāmadagnya Rāma, Jamadagni and Vāmana again spoke out of curiosity to the omniscient Bharata these words:
 
 
-[^1]:  The shorter recension of the NŚ. omits these names. See I.2
+[^mg1]:  The shorter recension of the NŚ. omits these names. See I.2
 
 7\. “The ancient Nāṭyaveda which you have spoken, has been properly comprehended by us listening to it attentively.
 
@@ -15,15 +15,15 @@ title = "36 Descent of Drama on the Earth"
 
 9-10. We shall enquire from you [more] about drama for our enlightenment and not out of any distrust, rivalry or jealousy. We did not speak earlier (lit. then) [about this], for there should not be any interruption. So, speak to us exhaustively about the mystery of drama.
 
-11\. You have [already] said that exploits of men[^2] constitute drama, hence you should speak definitely about what has been kept hidden from people.
+11\. You have [already] said that exploits of men[^mg2] constitute drama, hence you should speak definitely about what has been kept hidden from people.
 
 
-[^2]:  See I. 111-112.
+[^mg2]:  See I. 111-112.
 
-12-14. O the best Brahmin (lit. the bull of the twice-born), tell us about the character of the god who appears in the Preliminaries (*pūrvaraṅga*). Why is the sound [of musical instruments] applied there? What purpose does it serve when applied? What god is pleased with this, and what does he do on being pleased? Why does the Director being himself clean, perform ablution again on the stage?[^3] How, O sir, the drama has come (lit. dropped) down to the earth from heaven? Why have your descendants come to be known as Śūdras?”
+12-14. O the best Brahmin (lit. the bull of the twice-born), tell us about the character of the god who appears in the Preliminaries (*pūrvaraṅga*). Why is the sound [of musical instruments] applied there? What purpose does it serve when applied? What god is pleased with this, and what does he do on being pleased? Why does the Director being himself clean, perform ablution again on the stage?[^mg3] How, O sir, the drama has come (lit. dropped) down to the earth from heaven? Why have your descendants come to be known as Śūdras?”
 
 
-[^3]:  See V. 80-83. (17)
+[^mg3]:  See V. 80-83. (17)
 
 15\. The sage Bharata on hearing these words of the wise men, spoke again to them for explaining the matter which was confidential.
 
@@ -31,21 +31,21 @@ title = "36 Descent of Drama on the Earth"
 
 16\. ‘I shall explain to you, O Brahmins, what you persons with excellent vow, enquire regarding the rules of the Preliminaries. Listen properly about it.
 
-17\. The Preliminaries have been described in continuation of whatever I have said [earlier] about the destruction obstacles.[^4]
+17\. The Preliminaries have been described in continuation of whatever I have said [earlier] about the destruction obstacles.[^mg4]
 
 18-22. Just as the body is covered [with an armour] for warding off missiles, so sins of all kinds are avoided with Homa. After I have thus warded off the sins and destroyed the obstacles by worshipping gods with Japa, Homa, words of adoration and blessing, and songs about their [benevolent] deeds and attitudes, and with the playing of all instruments, and sound of songs, they (*i.e*. gods) being pleased with the singing of their praise, said, ‘We are exceedingly delighted with the performance of yours; as it *nandati* [pleases] the people, after pleasing the gods and the Asuras, this performance will be called Nāndī (Benediction).
 
 
-[^4]:  See V. 70ff.
+[^mg4]:  See V. 70ff.
 
 23\. When auspicious words uttered with proper intonation in accompaniment of songs and playing of instruments resound a region, all evils will disappear, and prosperity will ensue there.
 
 24\. In so much space as is filled with sound of musical instruments there will be there no Rākṣasas or leaders of Vighnas (*vighna-vināyaka*).
 
-25-26. On hearing the sound of Nāndī, and recitatives, songs and playing of instruments during marriages of all kinds,[^5] and sacrifices performed for the prosperity of kings, ferocious spirits will make themselves scarce. And this (*i.e*. the sound of the Nāndī) will be equal to the exposition Vedic Mantras.
+25-26. On hearing the sound of Nāndī, and recitatives, songs and playing of instruments during marriages of all kinds,[^mg5] and sacrifices performed for the prosperity of kings, ferocious spirits will make themselves scarce. And this (*i.e*. the sound of the Nāndī) will be equal to the exposition Vedic Mantras.
 
 
-[^5]:  Āvāhe ca vivāhe ca. Āvāha is the marriage which takes place in bridegroom’s place and vivāha takes place in the bride’s place.
+[^mg5]:  Āvāhe ca vivāhe ca. Āvāha is the marriage which takes place in bridegroom’s place and vivāha takes place in the bride’s place.
 
 27\. I have heard from the god of gods (Indra) and afterwards from Śaṃkara (Śiva) that music vocal as well as instrumental, is in fact a thousand times superior to bath [in holy waters] and to Japa.
 
@@ -55,15 +55,15 @@ title = "36 Descent of Drama on the Earth"
 
 ## *Ablution of the Director on the Stage*
 
-30\. As the head becomes fatigued by bowing on the stage, the rule permits the Director to bathe it with water.[^6]
+30\. As the head becomes fatigued by bowing on the stage, the rule permits the Director to bathe it with water.[^mg6]
 
-31\. After the ablution the Director should worship the Jarjara with Mantras. All this has been said in connection of the Preliminaries.[^7] This is the reason for the ablution.
-
-
-[^7]:  See V. 118-119.
+31\. After the ablution the Director should worship the Jarjara with Mantras. All this has been said in connection of the Preliminaries.[^mg7] This is the reason for the ablution.
 
 
-[^6]:  See the note on 12-14.
+[^mg7]:  See V. 118-119.
+
+
+[^mg6]:  See the note on 12-14.
 
 32\. I shall now tell you in detail how drama came (lit. dropped down) to the earth from Heaven, for I am unable to withhold anything from you.
 
@@ -81,12 +81,12 @@ title = "36 Descent of Drama on the Earth"
 
 40\. You will become mere Śūdras and attain their functions, and those to be born in your line, will be impure.
 
-41\. And your posterity will be dancers who will worship others along with their wives and children (*i.e*. they will all be Sūdras).[^8]
+41\. And your posterity will be dancers who will worship others along with their wives and children (*i.e*. they will all be Sūdras).[^mg8]
 
 42\. Gods on hearing of the origin of curse on my sons became anxious and approached the sages.
 
 
-[^8]:  In modern states, Directors of theatres would be dragged to law-courts for a similar offence.
+[^mg8]:  In modern states, Directors of theatres would be dragged to law-courts for a similar offence.
 
 ## *Gods intercede in favour of Bharata’s Sons*
 
@@ -104,12 +104,12 @@ title = "36 Descent of Drama on the Earth"
 
 49\. Remember (lit. know) that this dramatic art has been described by Brahman [himself]. So teach it to your disciples and others through its practice.
 
-50\. Do not destroy this drama which has been devised with great difficulty, and which depends on great things, brings merit and has its origin in the Vedas, their Aṅgas and Upāṅgas.[^9]
+50\. Do not destroy this drama which has been devised with great difficulty, and which depends on great things, brings merit and has its origin in the Vedas, their Aṅgas and Upāṅgas.[^mg9]
 
 51\. After holding the performance of a drama according to [rules] which I have heard from Apsarasas, you are to undergo a purificatory ceremony (*prāyaścitta*).
 
 
-[^9]:  In spite of this passage, it is difficult to believe that drama of India was of Vedic origin. On this see the translator’s Contributions to the History of Hindu Drama, Calcutta, 1957, pp. 3-4.
+[^mg9]:  In spite of this passage, it is difficult to believe that drama of India was of Vedic origin. On this see the translator’s Contributions to the History of Hindu Drama, Calcutta, 1957, pp. 3-4.
 
 ## *Nahuṣa invites divine Artistes to the Earth.*
 
@@ -135,10 +135,10 @@ title = "36 Descent of Drama on the Earth"
 
 60\. In the house of my grand father (Pururavas), this drama together with his work has been described by Urvaśī to the members of the harem.
 
-61\. But when the members of the harem were distressed on the death of the king who became insane[^10] due to her disappearance, this [dramatic art] was lost.
+61\. But when the members of the harem were distressed on the death of the king who became insane[^mg10] due to her disappearance, this [dramatic art] was lost.
 
 
-[^10]:  The fourth act of Kālidāsa’s Vikram. deals with this theme in a masterly fashion.
+[^mg10]:  The fourth act of Kālidāsa’s Vikram. deals with this theme in a masterly fashion.
 
 62\. I wish this again to be openly produced on the earth during sacrifices to be done on different days of the moon, so that a happy and auspicious situation may arise.
 
@@ -146,17 +146,17 @@ title = "36 Descent of Drama on the Earth"
 
 ## *Bharata grants this request and sends his sons to the earth.*
 
-64-67. ‘Let this be so’ said, I in reply to the king Nahuṣa, and called my sons, and spoke to them as well as to gods the conciliatory words [as follows:] ‘This king Nahuṣa begs us with joined palms that you may go down for your own good to the earth to produce drama there. Drama being produced there, I shall make an end of your curse and you will no longer be despised by Brahmins and kings. So go down to the earth to produce drama there, [for] I shall not be able to disregard the words of this earthly king.’[^11]
+64-67. ‘Let this be so’ said, I in reply to the king Nahuṣa, and called my sons, and spoke to them as well as to gods the conciliatory words [as follows:] ‘This king Nahuṣa begs us with joined palms that you may go down for your own good to the earth to produce drama there. Drama being produced there, I shall make an end of your curse and you will no longer be despised by Brahmins and kings. So go down to the earth to produce drama there, [for] I shall not be able to disregard the words of this earthly king.’[^mg11]
 
 ## *Kohala is the Successor of Bharata.*
 
 
-[^11]:  The implication of this mythical account is beautiful. It seeks to impress on us the idea that dramatic performance flourished in heaven, and it is a gift of gods.
+[^mg11]:  The implication of this mythical account is beautiful. It seeks to impress on us the idea that dramatic performance flourished in heaven, and it is a gift of gods.
 
-68-69. For us all and for the magnanimous Nahuṣa, the Self-born One (Brahman) has said that success in drama would depend on his authoritative instruction (*āptopadeśa*). The rest will be related by Kohala in his supplementary treatise (*uttara-tantra*)[^12] which also will treat [of more rules on] the application [of dramatic art], the Memorial verses (*kārikā*) and the etymologies (*nirukta*).
+68-69. For us all and for the magnanimous Nahuṣa, the Self-born One (Brahman) has said that success in drama would depend on his authoritative instruction (*āptopadeśa*). The rest will be related by Kohala in his supplementary treatise (*uttara-tantra*)[^mg12] which also will treat [of more rules on] the application [of dramatic art], the Memorial verses (*kārikā*) and the etymologies (*nirukta*).
 
 
-[^12]:  In ancient Indian medical works we meet with uttara-sthānas which are evidently later additions. See Saṃhitās ascribed to Kaśyapa and Suśruta. Kohala’s work has reached us in a very damaged ms. not yet published.
+[^mg12]:  In ancient Indian medical works we meet with uttara-sthānas which are evidently later additions. See Saṃhitās ascribed to Kaśyapa and Suśruta. Kohala’s work has reached us in a very damaged ms. not yet published.
 
 70\. For the purpose of diversion, this Śāstra has been established by me in heaven with the help of Apsarasas and the sage Svāti and Nārada.”
 
@@ -172,10 +172,10 @@ title = "36 Descent of Drama on the Earth"
 
 ## *Kohala and his associates*
 
-75-76. Kohala[^13] and others together with Vātsya[^14], Śāṇḍilya,[^15] and Dhūrtila[^16] (Dattila) stayed in this earth for some time as mortals, and put into practice this Śāstra which augments the intellect of men, deals with the deeds of the three worlds and is a specimen of all other Śāstras.
+75-76. Kohala[^mg13] and others together with Vātsya[^mg14], Śāṇḍilya,[^mg15] and Dhūrtila[^mg16] (Dattila) stayed in this earth for some time as mortals, and put into practice this Śāstra which augments the intellect of men, deals with the deeds of the three worlds and is a specimen of all other Śāstras.
 
 
-[^16]:  ibid.
+[^mg16]:  ibid.
 
 
 [^15]:  ibid.
